chore: latest crowdin fetch

--- a/_locales/af/messages.json
+++ b/_locales/af/messages.json
@@ -8,6 +8,7 @@
   "accountIdErrorInvalid": "Hierdie Rekening-ID is ongeldig. Gaan dit asseblief na en probeer weer.",
   "accountIdOrOnsEnter": "Voer Rekening-ID of ONS in",
   "accountIdOrOnsInvite": "Nooi Rekening ID of ONS",
+  "accountIdShare": "Hey, ek gebruik {app_name} om met volledige privaatheid en sekuriteit te gesels. Kom sluit aan by my! My Rekening ID is<br/><br/>{account_id}<br/><br/>Laai dit af by {session_download_url}",
   "accountIdYours": "Jou Rekening ID",
   "accountIdYoursDescription": "Hierdie is jou Rekening-ID. Ander gebruikers kan dit skandeer om 'n gesprek met jou te begin.",
   "actualSize": "Werklike Grootte",
@@ -146,6 +147,7 @@
   "callsVoiceAndVideo": "Stem- en video-oproepe",
   "callsVoiceAndVideoBeta": "Stem- en video-oproepe (Beta)",
   "callsVoiceAndVideoModalDescription": "Jou IP is sigbaar vir jou oproepmaat en 'n Oxen Foundation-bediener terwyl beta-oproepe gebruik word.",
+  "callsVoiceAndVideoToggleDescription": "Aktiveer stem- en videoklank aanroep na en van ander gebruikers.",
   "callsYouCalled": "Jy het {name} gebel",
   "callsYouMissedCallPermissions": "Jy het 'n oproep gemis van <b>{name}</b> omdat jy nie <b>Stem- en Video-oproepe</b> in Privaatheid-instellings aangeskakel het nie.",
   "cameraErrorNotFound": "Geen kamera gevind nie",
@@ -177,6 +179,7 @@
   "clearMessagesNoteToSelfDescription": "Is jy seker jy wil alle boodskappe van Nota Aan Jouself van jou toestel verwyder?",
   "close": "Maak Toe",
   "closeWindow": "Maak Venster Toe",
+  "commitHashDesktop": "Commit Hash: {hash}",
   "communityEnterUrl": "Voer Gemeenskap URL in",
   "communityEnterUrlErrorInvalid": "Ongeldige URL",
   "communityEnterUrlErrorInvalidDescription": "Gaan die Gemeenskap URL na en probeer weer.",
@@ -185,7 +188,6 @@
   "communityInvitation": "Gemeenskap Uitnodiging",
   "communityJoin": "Sluit aan by Gemeenskap",
   "communityJoinDescription": "Is jy seker jy wil {community_name} aansluit?",
-  "communityJoinError": "Kon nie by {community_name} aansluit nie",
   "communityJoinOfficial": "Of sluit aan by een van hierdie...",
   "communityJoined": "Aangesluit by Gemeenskap",
   "communityJoinedAlready": "Jy is reeds 'n lid van hierdie Gemeenskap.",
@@ -211,6 +213,7 @@
   "conversationsAddedToHome": "Bygevoeg by tuisskerm",
   "conversationsAudioMessages": "Oudioboodskappe",
   "conversationsAutoplayAudioMessage": "Speel Oudio Boodskappe Outomaties",
+  "conversationsAutoplayAudioMessageDescription": "Speel gevolglik gestuurde oudio-boodskappe outomaties af",
   "conversationsBlockedContacts": "Geblokkeerde Kontakte",
   "conversationsCommunities": "Gemeenskappe",
   "conversationsDelete": "Skrap Gesprek",
@@ -278,6 +281,7 @@
   "disappearingMessagesDeleteType": "Skrap Tipe",
   "disappearingMessagesDescription": "Hierdie instelling is van toepassing op almal in hierdie gesprek.",
   "disappearingMessagesDescription1": "Hierdie instelling is van toepassing op boodskappe wat jy in hierdie gesprek stuur.",
+  "disappearingMessagesDescriptionGroup": "Hierdie instelling is van toepassing op almal in hierdie gesprek.<br/>Slegs groepadministrateurs kan hierdie instelling verander.",
   "disappearingMessagesDisappear": "Verdwyn Na {disappearing_messages_type} - {time}",
   "disappearingMessagesDisappearAfterRead": "Verdwyn Na Lees",
   "disappearingMessagesDisappearAfterReadDescription": "Boodskappe verwyder na hulle gelees is.",
@@ -361,15 +365,20 @@
   "groupInviteSending": "Uitnodiging word gestuur",
   "groupInviteSent": "Nooi gestuur",
   "groupInviteSuccessful": "Groepuitnodiging suksesvol",
-  "groupInviteVersion": "Gebruikers moet weergawe {version} of hoër hê om uitnodigings te ontvang",
   "groupInviteYou": "<b>Jy</b> is genooi om by die groep aan te sluit.",
   "groupLeave": "Verlaat Groep",
+  "groupLeaveDescriptionAdmin": "Is jy seker jy wil <b>{group_name}</b> verlaat?<br/><br/>Dit sal alle lede verwyder en alle groepinhoud skrap.",
   "groupLeaveErrorFailed": "Kon nie {group_name} verlaat nie",
   "groupLegacyBanner": "Groepe is opgegradeer, skep 'n nuwe groep om op te gradeer. Ou groep funksionaliteit sal vanaf {date} agteruitgaan.",
   "groupMemberLeft": "<b>{name}</b> het die groep verlaat,",
   "groupMemberLeftMultiple": "<b>{name}</b> en <b>{count} ander</b> het die groep verlaat.",
   "groupMemberLeftTwo": "<b>{name}</b> en <b>{other_name}</b> het die groep verlaat.",
   "groupMemberNew": "<b>{name}</b> het by die groep aangesluit.",
+  "groupMemberNewHistory": "<b>{name}</b> is genooi om by die groep aan te sluit. Kletsgeskiedenis is gedeel.",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> en <b>{count} ander</b> is genooi om by die groep aan te sluit. Kletsgeskiedenis is gedeel.",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> en <b>{other_name}</b> is genooi om by die groep aan te sluit. Kletsgeskiedenis is gedeel.",
+  "groupMemberNewYouHistoryMultiple": "<b>Jy</b> en <b>{count} ander</b> is genooi om by die groep aan te sluit. Kletsgeskiedenis is gedeel.",
+  "groupMemberNewYouHistoryTwo": "<b>Jy</b> en <b>{name}</b> is genooi om by die groep aan te sluit. Kletsgeskiedenis is gedeel.",
   "groupMemberYouLeft": "<b>You</b> het die groep verlaat",
   "groupMembers": "Groep Lede",
   "groupMembersNone": "Daar is geen ander lede in hierdie groep nie.",
@@ -403,6 +412,7 @@
   "helpSupport": "Ondersteuning",
   "helpWedLoveYourFeedback": "Ons sal graag jou terugvoer wil hê",
   "hide": "Versteek",
+  "hideMenuBarDescription": "Wissel lêerstelsel werkbalk sigbaarheid",
   "hideOthers": "Versteek Andere",
   "image": "Beelde",
   "incognitoKeyboard": "Incognito Sleutelbord",
@@ -470,6 +480,7 @@
   "messageRequestYouHaveAccepted": "Jy het die boodskapaansoek aanvaar van <b>{name}.</b>",
   "messageRequestsAcceptDescription": "As jy 'n boodskap aan hierdie gebruiker stuur, sal jy outomaties hul boodskapversoek aanvaar en jou Rekening ID onthul.",
   "messageRequestsAccepted": "Jou boodskapaansoek is aanvaar.",
+  "messageRequestsClearAllExplanation": "Is jy seker jy wil alle boodskap versoeke en groepuitnodigings verwyder?",
   "messageRequestsCommunities": "Gemeenskap Boodskap Versoeke",
   "messageRequestsCommunitiesDescription": "Laat boodskapversoeke van Gemeenskapsgesprekke toe.",
   "messageRequestsDelete": "Is jy seker jy wil hierdie boodskapversoek skrap?",
@@ -484,6 +495,8 @@
   "messageVoice": "Stemboodskap",
   "messageVoiceErrorShort": "Hou in om 'n stemboodskap op te neem",
   "messageVoiceSlideToCancel": "Skuif om te kanselleer",
+  "messageVoiceSnippet": "{emoji} Stemboodskap",
+  "messageVoiceSnippetGroup": "{author}: {emoji} Stemboodskap",
   "messages": "Boodskappe",
   "minimize": "Minimeer",
   "next": "Volgende",
@@ -570,17 +583,23 @@
   "passwordSet": "Stel Wagwoord",
   "passwordSetDescription": "Jou wagwoord is gestel. Hou dit asseblief veilig.",
   "paste": "Plak",
+  "permissionMusicAudioDenied": "{app_name} benodig musiek en oudio toegang om lêers, musiek en oudio te stuur, maar dit is permanent geweier. Tik Instellings -> Toestemmings, en skakel \"Musiek en oudio\" aan.",
   "permissionsAppleMusic": "{app_name} moet Apple Music gebruik om media-aanhegsels te speel.",
   "permissionsAutoUpdate": "Auto Opdateer",
   "permissionsAutoUpdateDescription": "Kyk outomaties vir opdaterings by opstart",
+  "permissionsCameraDenied": "{app_name} benodig kamera toegang om foto's en video's te neem, maar dit is permanent geweier. Tik Instellings -> Toestemmings, en skakel \"Kamera\" aan.",
   "permissionsFaceId": "Die skermsluitfunksie op {app_name} gebruik Face ID.",
   "permissionsKeepInSystemTray": "Hou in sisteemtray",
   "permissionsKeepInSystemTrayDescription": "{app_name} loop aan in die agtergrond wanneer jy die venster sluit",
   "permissionsLibrary": "{app_name} het foto biblioteek toegang nodig om voort te gaan. Jy kan toegang in die iOS instellings aanskakel.",
   "permissionsMicrophone": "Mikrofoon",
+  "permissionsMicrophoneAccessRequired": "{app_name} het mikrofoontoegang nodig om oproepe te maak en oudioboodskappe te stuur, maar dit is permanent geweier. Tik op Instellings -> Permissions, en skakel \"Microphone\" aan.",
   "permissionsMicrophoneAccessRequiredDesktop": "Jy kan mikrofoon toegang aktiveer in {app_name} se privaatheidsinstellings",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} het mikrofoon toegang nodig om oproepe te maak en oudioboodskappe op te neem.",
+  "permissionsMusicAudio": "{app_name} het musiek en oudiotoegang nodig om lêers, musiek en klank te stuur.",
   "permissionsRequired": "Toestemming benodig",
+  "permissionsStorageDenied": "{app_name} benodig foto-biblioteek toegang sodat jy foto's en video's kan stuur, maar dit is permanent geweier. Tik Instellings -> Toestemmings, en skakel \"Foto's en video's\" aan.",
+  "permissionsStorageDeniedLegacy": "{app_name} benodig stoor toegang sodat jy aanhegsels kan stuur en stoor. Tik Instellings -> Toestemmings, en skakel \"Stoor\" aan.",
   "permissionsStorageSave": "{app_name} het berging toegang nodig om aanhegsels en media te stoor.",
   "permissionsStorageSaveDenied": "{app_name} het berging toegang nodig om foto's en video's te stoor, maar dit is permanent geweier. Gaan asseblief na die toepassing se instellings, kies \"Permissions\", en skakel \"Storage\" aan.",
   "permissionsStorageSend": "{app_name} het berging toegang nodig om foto's en video's te stuur.",
@@ -613,6 +632,7 @@
   "recoveryPasswordBannerTitle": "Stoor jou herstel wagwoord",
   "recoveryPasswordDescription": "Gebruik jou herstelwagwoord om jou rekening op nuwe toestelle te laai.<br/><br/>Jou rekening kan nie herstel word sonder jou herstelwagwoord nie. Maak seker jy stoor dit iewers veilig en moenie dit met enigiemand deel nie.",
   "recoveryPasswordEnter": "Voer jou herstel wagwoord in",
+  "recoveryPasswordErrorLoad": "‘n Fout het voorgekom tydens die laai van jou herstel wagwoord.<br/><br/>Exporteer asseblief jou logboeke, en laai dan die lêer op deur Session se Hulptoonbank om te help om hierdie probleem op te los.",
   "recoveryPasswordErrorMessageGeneric": "Gaan jou herstel wagwoord na en probeer weer.",
   "recoveryPasswordErrorMessageIncorrect": "Sommige van die woorde in jou herstel wagwoord is verkeerd. Kontroleer en probeer weer.",
   "recoveryPasswordErrorMessageShort": "Die Herwinningswagwoord wat jy ingevoer het, is nie lank genoeg nie. Gaan dit asseblief na en probeer weer.",
@@ -646,6 +666,7 @@
   "searchContacts": "Soek Kontakte",
   "searchConversation": "Soek Gesprek",
   "searchEnter": "Voer jou soektog in.",
+  "searchMatches": "{count, plural, one [{found_count} van # pas aan] other [{found_count} van # passings]}",
   "searchMatchesNone": "Geen resultate gevind nie.",
   "searchMatchesNoneSpecific": "Geen resultate gevind vir {query}",
   "searchMembers": "Soek Lede",
