--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -8,6 +8,7 @@
   "accountIdErrorInvalid": "معرف الحساب هذا غير صالح. يرجى التحقق والمحاولة مرة أخرى.",
   "accountIdOrOnsEnter": "أدخل معرف الحساب أو ONS",
   "accountIdOrOnsInvite": "دعوة باستخدام معرف الحساب أو ONS",
+  "accountIdShare": "Hey, I've been using {app_name} to chat with complete privacy and security. Come join me! My Account ID is<br/><br/>{account_id}<br/><br/>Download it at {session_download_url}",
   "accountIdYours": "معرف حسابك",
   "accountIdYoursDescription": "هذا معرف الحساب الخاص بك. يمكن للمستخدمين الآخرين مسحه ضوئيا لبدء محادثة معك.",
   "actualSize": "الحجم الحقيقي",
@@ -29,7 +30,11 @@
   "adminRemoveAsAdmin": "إزالة كمشرف",
   "adminRemoveCommunityNone": "لا يوجد مسؤولين في هذا المجتمع.",
   "adminRemoveFailed": "فشل في إزالة {name} كمدير.",
+  "adminRemoveFailedMultiple": "فشل في إزالة <b>{name}</b> و<b>{count} آخرين</b> كمسؤول.",
+  "adminRemoveFailedOther": "فشل في إزالة <b>{name}</b> و<b>{other_name}</b> كمسؤول.",
   "adminRemovedUser": "<b>{name}</b> تم إزالته كمشرف.",
+  "adminRemovedUserMultiple": "تمت إزالة <b>{name}</b> و<b>{count} آخرين</b> من منصبهم كمسؤولين.",
+  "adminRemovedUserOther": "تمت إزالة <b>{name}</b> و<b>{other_name}</b> من منصبي المسؤول.",
   "adminSendingPromotion": "إرسال ترقية المشرف",
   "adminSettings": "اعدادات المسؤول",
   "adminTwoPromotedToAdmin": "<b>{name}</b> و <b>{other_name}</b> تم ترقيتهم إلى مشرف.",
@@ -66,6 +71,7 @@
   "attachmentsDownload": "نَزِل المرفق",
   "attachmentsDuration": "المدة:",
   "attachmentsErrorLoad": "خطأ في إرفاق الملف",
+  "attachmentsErrorMediaSelection": "فشل في تحديد المرفق",
   "attachmentsErrorNoApp": "لم يتم العثور على أي تطبيق لاختيار الوسائط.",
   "attachmentsErrorNotSupported": "نوع الملف هذا غير مدعوم.",
   "attachmentsErrorNumber": "لا يمكن إرسال أكثر من 32 ملف صورة وفيديو دفعة واحدة.",
@@ -142,6 +148,7 @@
   "callsPermissionsRequiredDescription": "يمكنك تفعيل صَلاحِيَة \"المكالمات الصوتية والمرئية\" في إعدادات الخصوصية.",
   "callsReconnecting": "جار إعادة الاتصال…",
   "callsRinging": "يرن حاليا...",
+  "callsSessionCall": "{app_name} Call",
   "callsSettings": "المكالمات (نسخة تجريبية)",
   "callsVoiceAndVideo": "المكالمات الصوتية و المرئية",
   "callsVoiceAndVideoBeta": "المكالمات الصوتية والمرئية (تجريبي)",
@@ -155,6 +162,7 @@
   "cameraGrantAccessDescription": "{app_name} يحتاج إذن الوصول إلى الكاميرا لالتقاط الصور ومقاطع الفيديو، أو لمسح رموز الاستجابة السريعة.",
   "cameraGrantAccessQr": "{app_name} يحتاج إذن الوصول إلى الكاميرا لمسح رموز الاستجابة السريعة",
   "cancel": "إلغاء",
+  "changePasswordFail": "فشل في تغيير كلمة المرور",
   "clear": "مسح",
   "clearAll": "امسح الكل",
   "clearDataAll": "اِمسح جميع البيانات",
@@ -176,6 +184,9 @@
   "clearMessagesNoteToSelfDescription": "هل أنت متيقِّن من أنك تريد حذف كافة رسائل ملاحظة لنفسي من جهازك؟",
   "close": "اغلق",
   "closeWindow": "أغلق النافذة",
+  "commitHashDesktop": "إيداع التجزئة: {hash}",
+  "communityBanDeleteDescription": "سيؤدي هذا إلى حظر المستخدم المحدد من هذه المجتمع وحذف جميع رسائلهم. هل أنت متأكد أنك تريد المتابعة؟",
+  "communityBanDescription": "سيؤدي هذا إلى حظر المستخدم المحدد من هذه المجتمع. هل أنت متأكد أنك تريد المتابعة؟",
   "communityEnterUrl": "أدخل رابط المجتمع",
   "communityEnterUrlErrorInvalid": "عنوان URL غير صحيح",
   "communityEnterUrlErrorInvalidDescription": "الرجاء التحقق من رابط المجتمع وحاول مرة أخرى.",
@@ -184,7 +195,7 @@
   "communityInvitation": "دعوة المجتمع",
   "communityJoin": "انضم إلى المجتمع",
   "communityJoinDescription": "هل أنت متأكد من أنك تريد الانضمام إلى {community_name}؟",
-  "communityJoinError": "فشل الانضمام إلى {community_name}",
+  "communityJoinError": "فشل في الانضمام إلى المجتمع",
   "communityJoinOfficial": "أو انضم إلى واحدة من...",
   "communityJoined": "انضم إلى المجتمع",
   "communityJoinedAlready": "أنت متصل بالفعل بهذا المجتمع.",
@@ -204,12 +215,12 @@
   "contentDescriptionChooseConversationType": "اختر إجراءً لبدء المحادثة",
   "contentDescriptionMediaMessage": "رسالة وسائط",
   "contentDescriptionMessageComposition": "تكوين الرسالة",
-  "contentDescriptionQuoteThumbnail": "لم يتم حذف البيانات بواسطة {count} Service Node. معرفات عقدة الخدمة: {service_node_id}.",
   "contentDescriptionStartConversation": "إنشاء محادثة مع جهة اتصال جديدة",
   "conversationsAddToHome": "أضِف إلى الشاشة الرئيسية",
   "conversationsAddedToHome": "تمت الإضافة للشاشة الرئيسية",
   "conversationsAudioMessages": "رسائل صوتية",
   "conversationsAutoplayAudioMessage": "التشغيل التلقائي للرسائل الصوتية",
+  "conversationsAutoplayAudioMessageDescription": "التشغيل المتتابع للرسائل الصوتية المرسلة",
   "conversationsBlockedContacts": "جهات الاتصال المحظورة",
   "conversationsCommunities": "مجتمعات",
   "conversationsDelete": "حذف المحادثة",
@@ -254,6 +265,9 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "قديم",
   "deleteAfterLegacyDisappearingMessagesOriginal": "النسخة الأصلية من الرسائل المختفية.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> قام بتعيين مؤقت الرسائل المختفية إلى <b>{time}</b>",
+  "deleteAfterLegacyGroupsGroupCreation": "يرجى الانتظار أثناء إنشاء المجموعة...",
+  "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "فشل في تحديث المجموعة",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "ليس لديك صلاحيات حذف رسائل الاخرين",
   "deleteMessageConfirm": "هل أنت متأكد من أنك تريد حذف هذه الرسالة؟",
   "deleteMessageDeletedGlobally": "تم حذف هذه الرسالة",
   "deleteMessageDeletedLocally": "تم حذف هذه الرسالة على هذا الجهاز",
@@ -262,7 +276,6 @@
   "deleteMessageDeviceOnly": "حذف على هذا الجهاز فقط",
   "deleteMessageDevicesAll": "حذف على جميع أجهزتي",
   "deleteMessageEveryone": "حذف للجميع",
-  "deleteMessageFailed": "{count, plural, zero [و # آخر قد تفاعل {emoji} مع هذه الرسالة.] one [و # آخر قد تفاعل {emoji} مع هذه الرسالة.] two [و # آخر قد تفاعل {emoji} مع هذه الرسالة.] few [و # آخر قد تفاعل {emoji} مع هذه الرسالة.] many [و # آخر قد تفاعل {emoji} مع هذه الرسالة.] other [فشل في حذف الرسائل]}",
   "deleteMessagesConfirm": "هل أنت متأكد من أنك تريد حذف هذه الرسائل؟",
   "deleteMessagesDescriptionDevice": "هل أنت متيقِّن من أنك تريد مسح هذه الرسائل من هذا الجهاز فقط؟",
   "deleteMessagesDescriptionEveryone": "هل أنت متيقِّن من أنك تريد مسح هذه الرسائل لدى الجميع؟",
@@ -277,11 +290,14 @@
   "disappearingMessagesDeleteType": "نوع الحذف",
   "disappearingMessagesDescription": "هذا الإعداد ينطبق على الجميع في هذه المحادثة.",
   "disappearingMessagesDescription1": "هذا الإعداد ينطبق على الرسائل التي ترسلها في هذه المحادثة.",
+  "disappearingMessagesDescriptionGroup": "ينطبق هذا الإعداد على الجميع في هذه المحادثة.<br/>يمكن لمسؤولي المجموعة فقط تغيير هذا الإعداد.",
   "disappearingMessagesDisappear": "الاختفاء بعد {disappearing_messages_type} - {time}",
   "disappearingMessagesDisappearAfterRead": "الاختفاء بعد القراءة",
   "disappearingMessagesDisappearAfterReadDescription": "الرسائل تحذف بعد قرائتها.",
+  "disappearingMessagesDisappearAfterReadState": "الاختفاء بعد القراءة - {time}",
   "disappearingMessagesDisappearAfterSend": "الاختفاء بعد الإرسال",
   "disappearingMessagesDisappearAfterSendDescription": "الرسائل تحذف بعد إرسالها.",
+  "disappearingMessagesDisappearAfterSendState": "الاختفاء بعد الإرسال - {time}",
   "disappearingMessagesFollowSetting": "اتبع الإعداد",
   "disappearingMessagesFollowSettingOff": "لن تختفي الرسائل التي ترسلها بعد الآن. هل أنت متأكد من أنك تريد إيقاف تشغيل الرسائل المختفية؟",
   "disappearingMessagesFollowSettingOn": "تعيين رسائلك لتختفي <b>{time} </b> بعد أن تكون <b>{disappearing_messages_type} </b>؟",
@@ -293,6 +309,7 @@
   "disappearingMessagesTimer": "المؤقت",
   "disappearingMessagesTurnedOff": "<b>{name}</b> قام بإيقاف الرسائل المختفية. لن تختفي الرسائل التي يرسلها بعد الآن. ",
   "disappearingMessagesTurnedOffYou": "<b>أنت</b> أوقفت <b>الرسائل المختفية</b>. لم تعد الرسائل التي ترسلها تختفي.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>قمت</b> بإيقاف <b>تشغيل</b> الرسائل المختفية.",
   "disappearingMessagesTypeRead": "القراءة",
   "disappearingMessagesTypeSent": "أُرسلت",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> قام بتحديث إعدادات الرسائل المختفية.",
@@ -359,15 +376,23 @@
   "groupInviteSending": "إرسال دعوة",
   "groupInviteSent": "تم إرسال الدعوة",
   "groupInviteSuccessful": "الدعوة إلى المجموعة ناجحة",
-  "groupInviteVersion": "يجب أن تكون النسخة {version} أو أعلى لاستقبال الدعوات",
   "groupInviteYou": "<b>أنت</b> تمت دعوتك للانضمام إلى المجموعة.",
+  "groupInviteYouAndMoreNew": "<b>أنت</b> و<b>{count} آخرين</b> انضموا للمجموعة.",
+  "groupInviteYouAndOtherNew": "<b>أنت</b> و<b>{other_name}</b> انضموا للمجموعة.",
   "groupLeave": "مغادرة المجموعة",
+  "groupLeaveDescription": "هل أنت متأكد من أنك تريد مغادرة {group_name}؟",
+  "groupLeaveDescriptionAdmin": "هل أنت متأكد من أنك تريد مغادرة <b>{group_name}</b>?<br/><br/>سيؤدي ذلك إلى إزالة جميع الأعضاء وحذف كافة محتويات المجموعة.",
   "groupLeaveErrorFailed": "فشل في مغادرة {group_name}",
   "groupLegacyBanner": "تمت ترقية المجموعات، أنشئ مجموعة جديدة للترقية. سوف تتدهور صلاحية عمل المجموعة القديمة بدءًا من {date}.",
   "groupMemberLeft": "<b>{name}</b> غادر المجموعة.",
   "groupMemberLeftMultiple": "<b>{name}</b> و <b>{count} آخرين</b> غادروا المجموعة.",
   "groupMemberLeftTwo": "<b>{name}</b> و <b>{other_name}</b> غادروا المجموعة.",
   "groupMemberNew": "<b>{name}</b> انضم إلى المجموعة.",
+  "groupMemberNewHistory": "<b>{name}</b> تمت دعوته للانضمام إلى المجموعة. تمت مشاركة سجل الدردشة.",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> و<b>{count} آخرين</b> تمت دعوتهم للانضمام إلى المجموعة. تمت مشاركة سجل الدردشة.",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> و<b>{other_name}</b> تمت دعوتهم للانضمام إلى المجموعة. تمت مشاركة سجل الدردشة.",
+  "groupMemberNewMultiple": "<b>{name}</b> و <b>{count} اخرين</b> تمت دعوتهم للانضمام إلى المجموعة.",
+  "groupMemberNewTwo": "<b>{name}</b> و <b>{other_name}</b> تم دعوتهم للانضمام إلى المجموعة.",
   "groupMemberYouLeft": "<b>أنت</b> غادرت المجموعة.",
   "groupMembers": "أعضاء المجموعة",
   "groupMembersNone": "لا يوجد اعضاء اخرين في هذه المجموعة.",
@@ -380,6 +405,8 @@
   "groupNoMessages": "ليس لديك رسائل من <b>{group_name}</b>. أرسل رسالة لبدء المحادثة!",
   "groupOnlyAdmin": "أنت الأدمن الوحيد في </b>{group_name}</b>.<br/><br/> لا يمكن تغيير أعضاء المجموعة والإعدادات بدون أدمن.",
   "groupPromotedYou": "<b>أنت</b> تم ترقيتك إلى مشرف.",
+  "groupPromotedYouMultiple": "<b>أنت</b> و <b>{count} آخرين</b> تمت ترقيتهم إلى مشرف.",
+  "groupPromotedYouTwo": "<b>أنت</b> و <b>{name}</b> تم ترقيتهم إلى مشرف.",
   "groupRemoveDescription": "هل تود إزالة <b>{name}</b> من <b>{group_name}</b>؟",
   "groupRemoveDescriptionMultiple": "هل تود إزالة <b>{name}</b> و<b>{count} آخرين</b> من <b>{group_name}</b>؟",
   "groupRemoveDescriptionTwo": "هل تود إزالة <b>{name}</b> و<b>{other_name}</b> من <b>{group_name}</b>؟",
@@ -401,6 +428,7 @@
   "helpSupport": "الدعم",
   "helpWedLoveYourFeedback": "نتطلع لقراءة أراءك",
   "hide": "إخفاء",
+  "hideMenuBarDescription": "Toggle system menu bar visibility",
   "hideOthers": "إخفاء الآخرين",
   "image": "صورة",
   "incognitoKeyboard": "لوحة المفاتيح في وضع التستّر",
@@ -413,7 +441,10 @@
   "leave": "مغادرة",
   "leaving": "جاري المغادرة...",
   "legacyGroupMemberNewMultiple": "<b>{name} < /b> و <b>{count} آخرين</b> انضموا للمجموعة.",
+  "legacyGroupMemberNewYouMultiple": "<b>أنت</b> و<b>{count} آخرين</b> انضموا للمجموعة.",
+  "legacyGroupMemberNewYouOther": "<b>أنت</b> و <b>{other_name}</b> انضممتما إلى المجموعة.",
   "legacyGroupMemberTwoNew": "<b>{name}</b> و <b>{other_name}</b> انضموا للمجموعة.",
+  "legacyGroupMemberYouNew": "<b>أنت</b> انضممت إلى المجموعة.",
   "linkPreviews": "معاينات الرابط",
   "linkPreviewsDescription": "إظهار معاينات الروابط لعناوين URL المدعومة.",
   "linkPreviewsEnable": "تفعيل معاينة الروابط",
@@ -467,6 +498,7 @@
   "messageRequestYouHaveAccepted": "لقد وافقتَ على طلب الرسالة من <b>{name}.</b>",
   "messageRequestsAcceptDescription": "إرسال رسالة إلى هذا المستخدم سوف يقبل تلقائيًا طلب الرسالة الخاص به ويكشف عن معرف حسابك.",
   "messageRequestsAccepted": "تم قبول طلب الرسائل الخاص بك.",
+  "messageRequestsClearAllExplanation": "هل أنت متأكد من أنك تريد مسح كافة طلبات الرسائل ودعوات المجموعات؟",
   "messageRequestsCommunities": "طلبات رسائل المجتمع",
   "messageRequestsCommunitiesDescription": "السماح بطلبات الرسائل من محادثات المجتمع.",
   "messageRequestsDelete": "هل أنت متأكد من أنك تريد حذف طلب الرسالة هذا؟",
@@ -505,6 +537,8 @@
   "notificationsFastModeDescription": "ستتم إعلامك بالرسائل الجديدة بشكل موثوق وفوري باستخدام خوادم إشعارات جوجل.",
   "notificationsFastModeDescriptionIos": "سوف يتم إعلامك برسائل جديدة بشكل موثوق وفوري باستخدام خوادم إشعارات Apple.",
   "notificationsGoToDevice": "اذهب إلى إعدادات تنبيهات الجهاز",
+  "notificationsHeaderAllMessages": "التنبيهات - الكل",
+  "notificationsHeaderMentionsOnly": "التنبيهات - الإشعارات فقط",
   "notificationsIosGroup": "{name} إلى {conversation_name}",
   "notificationsIosRestart": "ربما تلقيت رسائل أثناء إعادة تشغيل {device} الخاص بك.",
   "notificationsLedColor": "لون ضوء التنبيه LED",
@@ -526,6 +560,7 @@
   "notificationsVibrate": "الاهتزاز",
   "off": "مغلق",
   "okay": "نعم",
+  "on": "يعمل",
   "onboardingAccountCreate": "إنشاء حساب",
   "onboardingAccountCreated": "تم إنشاء الحساب",
   "onboardingAccountExists": "لدي حساب",
@@ -567,17 +602,23 @@
   "passwordSet": "تعيين كلمة المرور",
   "passwordSetDescription": "تم تعيين كلمة المرور الخاصة بك. احفظها في مامن من فضلك.",
   "paste": "لصق",
+  "permissionMusicAudioDenied": "{app_name} يحتاج إلى الوصول إلى الموسيقى والصوت من أجل إرسال الملفات والموسيقى والصوت، ولكن تم رفض هذا الأذن بشكل دائم. انقر على الإعدادات -> الأذونات، وقم بتشغيل \"الموسيقى والصوت\".",
   "permissionsAppleMusic": "{app_name} يحتاج استخدام Apple Music لتشغيل مرفقات الوسائط.",
   "permissionsAutoUpdate": "تحديث تلقائي",
   "permissionsAutoUpdateDescription": "التحقق تلقائيًا من التحديثات عند بدء التشغيل",
+  "permissionsCameraDenied": "{app_name} يحتاج إذن الوصول إلى الكاميرا لالتقاط الصور ومقاطع الفيديو، ولكن تم رفضه نهائيًا. انقر على الإعدادات -> الأذونات، وقم بتفعيل \"الكاميرا\".",
   "permissionsFaceId": "ميزة قفل الشاشة على {app_name} تستخدم Face ID.",
   "permissionsKeepInSystemTray": "إبقاء في قالب النظام",
   "permissionsKeepInSystemTrayDescription": "{app_name} يستمر في العمل في الخلفية عندما تقوم بإغلاق النافذة",
   "permissionsLibrary": "{app_name} يحتاج إذن الوصول إلى مكتبة الصور لمواصلة العمل. يمكنك تفعيل الوصول من خلال إعدادات iOS.",
   "permissionsMicrophone": "ميكروفون",
+  "permissionsMicrophoneAccessRequired": "{app_name} يحتاج إذن الوصول إلى الميكروفون لإجراء المكالمات وإرسال الرسائل الصوتية، ولكن تم رفضه نهائيًا. انقر على الإعدادات -> الأذونات، وقم بتفعيل \"الميكروفون\".",
   "permissionsMicrophoneAccessRequiredDesktop": "يمكنك تفعيل الوصول للميكروفون في إعدادات الخصوصية في {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} يحتاج إذن الوصول إلى الميكروفون لإجراء المكالمات وتسجيل الرسائل الصوتية.",
+  "permissionsMusicAudio": "يحتاج {app_name} إلى الوصول إلى الموسيقى والصوت من أجل إرسال الملفات والموسيقى والصوت.",
   "permissionsRequired": "منح إحدى الأذونات مطلوب",
+  "permissionsStorageDenied": "{app_name} يحتاج إذن الوصول إلى مكتبة الصور لإرسال الصور ومقاطع الفيديو، ولكن تم رفضه نهائيًا. انقر على الإعدادات -> الأذونات، وقم بتفعيل \"الصور ومقاطع الفيديو\".",
+  "permissionsStorageDeniedLegacy": "{app_name} يحتاج إذن الوصول إلى التخزين لإرسال وحفظ المرفقات. انقر على الإعدادات -> الأذونات، وقم بتفعيل \"التخزين\".",
   "permissionsStorageSave": "{app_name} يحتاج إذن الوصول إلى التخزين لحفظ المرفقات والوسائط.",
   "permissionsStorageSaveDenied": "{app_name} يحتاج إذن الوصول إلى التخزين لحفظ الصور ومقاطع الفيديو، ولكن تم رفضه نهائيًا. يرجى الانتقال إلى إعدادات التطبيق، واختيار \"الأذونات\"، وتفعيل \"التخزين\".",
   "permissionsStorageSend": "{app_name} يحتاج إذن الوصول إلى التخزين لإرسال الصور ومقاطع الفيديو.",
@@ -610,6 +651,7 @@
   "recoveryPasswordBannerTitle": "احفظ كلمة مرور الاسترداد الخاصة بك",
   "recoveryPasswordDescription": "استخدم كلمة المرور لاستعادة التحميل على أجهزة جديدة.<br/><br/> لا يمكن استعادة الحساب بدون كلمة المرور. تأكد من تخزينها في مكان آمن وسري - ولا تشاركها مع أي أحد.",
   "recoveryPasswordEnter": "أدخل كلمة مرور الاسترجاع",
+  "recoveryPasswordErrorLoad": "حدث خطأ عند محاولة تحميل كلمة المرور الاحتياطية الخاصة بك.<br/><br/>يرجى تصدير السجلات الخاصة بك، ثم تحميل الملف عبر مكتب مساعدة Session للمساعدة في حل هذه المشكلة.",
   "recoveryPasswordErrorMessageGeneric": "الرجاء التحقق من كلمة المرور الخاصة بالاسترداد وحاول مرة أخرى.",
   "recoveryPasswordErrorMessageIncorrect": "بعض الكلمات في كلمة الاسترداد الخاصة بك غير صحيحة. تحقق وحاول مرة أخرى.",
   "recoveryPasswordErrorMessageShort": "كلمة استرداد الحساب التي أدخلتها غير كافية. يرجى التحقق والمحاولة مرة أخرى.",
@@ -624,6 +666,7 @@
   "recoveryPasswordWarningSendDescription": "هذه هي عبارة الاسترداد الخاصة بك. إذا قمت بإرساله إلى شخص ما ، فسيكون لديه حق الوصول الكامل إلى حسابك.",
   "redo": "إعادة",
   "remove": "إزالة",
+  "removePasswordFail": "فشل في إزالة كلمة المرور",
   "reply": "رد",
   "resend": "إعادة الإرسال",
   "resolving": "جاري تحميل معلومات الدولة...",
@@ -673,17 +716,20 @@
   "showLess": "عرض أقل",
   "stickers": "الملصقات",
   "supportGoTo": "اِذهب اِلى صفحة الدعم",
+  "systemInformationDesktop": "System Information: {information}",
   "theContinue": "التالي",
   "theDefault": "افتراضي",
   "theError": "خطأ",
   "tryAgain": "حاول مرة أخرى",
   "typingIndicators": "مؤشرات الكتابة",
+  "typingIndicatorsDescription": "شاهد وشارك مؤشرات الكتابة.",
   "undo": "تراجع",
   "unknown": "غير معروف",
   "updateApp": "تحديثات التطبيق",
   "updateDownloaded": "تم تثبيت التحديث، اضغط لإعادة التشغيل",
   "updateDownloading": "جارٍ تنزيل التحديث: {percent_loader}%",
   "updateError": "لا يمكن التحديث",
+  "updateErrorDescription": "{app_name} فشل في التحديث. يرجى الانتقال إلى {session_download_url} وتثبيت الإصدار الجديد يدويًا، ثم قم بالاتصال بمركز المساعدة لإعلامنا بالمشكلة.",
   "updateNewVersion": "إصدار جديد من {app_name} متاح، انقر للتحديث.",
   "updateNewVersionDescription": "إصدار جديد من {app_name} متاح.",
   "updateReleaseNotes": "اِذهب الى ملاحظات الاِصدار",
@@ -693,6 +739,7 @@
   "urlCopy": "انسخ الرابط",
   "urlOpen": "افتح الرابط",
   "urlOpenBrowser": "سيتم فتح هذا في متصفحك.",
+  "urlOpenDescription": "هل أنت متأكد من أنك تريد فتح هذا الرابط في متصفحك؟<br/><br/><b>{url}</b>",
   "useFastMode": "استخدم الوضع السريع",
   "video": "فيديو",
   "videoErrorPlay": "غير قادر على تشغيل الفيديو.",
