--- a/_locales/bal/messages.json
+++ b/_locales/bal/messages.json
@@ -177,6 +177,8 @@
   "clearMessagesNoteToSelfDescription": "کیا آپ یقیناً نوٹ سیلف کے تمام پیغامات کو آپ کی ڈیوائس سے صاف کرنا چاہتے ہیں؟",
   "close": "بند کرو",
   "closeWindow": "وینڈو بند کرو",
+  "communityBanDeleteDescription": "یہ صارف اس کمیونیٹی سے ہٹا دیا جائے گا اور ان کے تمام پیغامات حذف کر دیے جائیں گے۔ کیا آپ واقعی جاری رکھنا چاہتے ہیں؟",
+  "communityBanDescription": "یہ صارف اس کمیونیٹی سے ہٹا دیا جائے گا۔ کیا آپ واقعی جاری رکھنا چاہتے ہیں؟",
   "communityEnterUrl": "کمیونٹی URL درج بکنا",
   "communityEnterUrlErrorInvalid": "غلط URL",
   "communityEnterUrlErrorInvalidDescription": "براہء مہربانی کمیونٹی URL چیک کنیں و دوبارہ کوشش کنیں.",
@@ -185,7 +187,6 @@
   "communityInvitation": "Community Invitation",
   "communityJoin": "Community میں شامل ہوئیں",
   "communityJoinDescription": "دم کی لحاظ انت کہ ایی {community_name} میں شامل بی؟",
-  "communityJoinError": "{community_name} میں شامل ہونے میں ناکامی",
   "communityJoinOfficial": "یہاں ھَنی اھد يېں...",
   "communityJoined": "Community میں شامل",
   "communityJoinedAlready": "کمنینت تراچ بیتے",
@@ -211,6 +212,7 @@
   "conversationsAddedToHome": "موبایل گندِ ایریں شود",
   "conversationsAudioMessages": "آڈیو پیامات",
   "conversationsAutoplayAudioMessage": "آڈیو پیغامات خودکار پلے",
+  "conversationsAutoplayAudioMessageDescription": "مسلسل بھیجے گئے آڈیو پیغامات خودکار طور پر چلائیں",
   "conversationsBlockedContacts": "مسدود رابطے",
   "conversationsCommunities": "Communities",
   "conversationsDelete": "بات چیت حذف کریں",
@@ -278,6 +280,7 @@
   "disappearingMessagesDeleteType": "حذف کریں قسم",
   "disappearingMessagesDescription": "یہ ترتیب ہر کسی کو اس گفتگو میں لاغ میں ماںتاح.",
   "disappearingMessagesDescription1": "یہ ترتیب اس پیغام طرف کرے گا جسے آپ اس گفتگو میں بھیجتے ہیں.",
+  "disappearingMessagesDescriptionGroup": "یہ سیٹنگ اس مکالمے کے تمام صارفین پر لاگو ہے۔<br/>صرف گروپ ایڈمنس ہی اس سیٹنگ کو تبدیل کر سکتے ہیں۔",
   "disappearingMessagesDisappear": "{disappearing_messages_type} - {time} کے بعد غائب ہو جائے گا",
   "disappearingMessagesDisappearAfterRead": "پڑھنے کے بعد غائب ہوجائے گا",
   "disappearingMessagesDisappearAfterReadDescription": "Messages delete after they have been read.",
@@ -361,9 +364,9 @@
   "groupInviteSending": "بھیج رہا ہے دعوت",
   "groupInviteSent": "دعوت بھیجی",
   "groupInviteSuccessful": "گروپ دعوت کامیاب",
-  "groupInviteVersion": "دعوتیں وصول کرنے کیلئے صارفین کے پاس ورژن {version} یا زیادہ ہونا ضروری ہے",
   "groupInviteYou": "<b>Šumār</b> group šumār zant.",
   "groupLeave": "گروپ چھوڑ دیں",
+  "groupLeaveDescription": "دم کی لحاظ انت کہ ایی {group_name} اخلیقی؟",
   "groupLeaveErrorFailed": "{group_name} کو چھوڑنے میں ناکامی",
   "groupLegacyBanner": "گروپاںءَ آپگریڈ بوءِ گا اِنّی ایک نوک گروپ ٺاہگ۔ پُرانا گروپءِ کجيعت  {date} ہد کجے.",
   "groupMemberLeft": "<b>{name}</b> jāmš.",
@@ -385,6 +388,7 @@
   "groupRemoveDescription": "تراچ بیت پاسکن <b>{name}</b> <b>{group_name}</b>؟",
   "groupRemoveDescriptionMultiple": "ترا چہ بیتھہ <b>{name}</b> و <b>{count} اسمیں</b> <b>{group_name}</b>؟",
   "groupRemoveDescriptionTwo": "تراچ بیتھہ <b>{name}</b> و <b>{other_name}</b> <b>{group_name}</b>؟",
+  "groupRemoveUserOnly": "{count, plural, one [صرف برجی مستخدم] other [صرف برجی مستخدماں]}",
   "groupRemoved": "<b>{name}</b> gōra z group.",
   "groupRemovedMultiple": "<b>{name}</b> a <b>{count} drīg</b> gōra z group.",
   "groupRemovedTwo": "<b>{name}</b> a <b>{other_name}</b> gōra z group.",
@@ -470,6 +474,7 @@
   "messageRequestYouHaveAccepted": "ما گپ درخواست قبول کردی <b>{name}</b> سے.",
   "messageRequestsAcceptDescription": "بھیجنے سے یہ اکائونٹ کو منظوم کر دے گا.",
   "messageRequestsAccepted": "ما گپ درخواست قبول کردی گپ درخواست قبول کرتی گئی ہے.",
+  "messageRequestsClearAllExplanation": "شما ہداں یقینا کہ تمام پیغامات و کولھو گودی دعوتگاں کوارجہ ایھ؟",
   "messageRequestsCommunities": "Community Message Requests",
   "messageRequestsCommunitiesDescription": "کمیونٹی گفتگو سے پیغام کی درخواست کی اجازت دیں۔",
   "messageRequestsDelete": "دم کی لحاظ انت کہ ایی میسج ریکویسٹ ھذب بکنی؟",
@@ -570,9 +575,11 @@
   "passwordSet": "رمز مقرر کـــــــن",
   "passwordSetDescription": "ما گپ درخواست قبول کردی بیک پاسکوڈ برنکی. براہپس محفوظے کہ.",
   "paste": "چسپاء",
+  "permissionMusicAudioDenied": "{app_name} کی موسیقی اور آڈیو تک رسائی ضروری ہے تاکہ آپ فائلیں، موسیقی اور آڈیو بھیج سکیں، لیکن اسے مستقل طور پر ممنوع کر دیا گیا ہے۔ سیٹنگز ٹیپ کریں -> اجازتیں، اور \"موسیقی اور آڈیو\" کو آن کریں۔",
   "permissionsAppleMusic": "{app_name} xیس پاتبسینہ ایپل موزیک لو پہ اجرأ ہٰن اختیارات استعمالے",
   "permissionsAutoUpdate": "خودکار اپڈیٹ",
   "permissionsAutoUpdateDescription": "اسٹارٹ اپ پر خود کار طریقے سے اپڈیٹس چیک کریں",
+  "permissionsCameraDenied": "{app_name} کماٹ پاتبسینہ مجبورے تصورات و ویڈیوشیں، چو گو مکمبرنس ورزیہ.<br/>لہ تکط افلاکیت کو کنراں،ٹی امن وضیجتے او پرتحمایل دےیے.",
   "permissionsFaceId": "{app_name} رو پیلناکردگ لاگو کردانت پاس ID.",
   "permissionsKeepInSystemTray": "سسٹم ٹرے میں رکھیں",
   "permissionsKeepInSystemTrayDescription": "{app_name} ھنوک پد پسینی چشماں بند بو تک پس زمینه أٹھے چا",
@@ -581,6 +588,7 @@
   "permissionsMicrophoneAccessRequiredDesktop": "شما گوں {app_name} ونجن سیٹنگاں سکرا کنگ دلپیٹریں بوک یارکنت۔",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} مایکروفون پاتبسینہ حاصل نودہ کلمات پیغامشین زانت",
   "permissionsRequired": "اجازت درکار",
+  "permissionsStorageDenied": "{app_name} کماٹ پاتبسینہ محفوظ ثبت، چہ جو مکمبے افعیلت بیزی. لہ کہتت کو قٔائیں وضیجت تیبسینہ پایمر دےیے.",
   "permissionsStorageSave": "{app_name} ذخیرہ پاتبسینہ محفوظ عریض او ذرہے",
   "permissionsStorageSaveDenied": "{app_name} ذخیرہ پاتبسینہ محفوظ ثبت، چہ جو مکمبے افعیلت بیزی. لہ کہتت کو قٔائیں وضیجت تیبسینہ پایمر دےیے",
   "permissionsStorageSend": "{app_name} ذخیرہ پاتبسینہ بھیجنے تصویریں دکنیں",
