--- a/_locales/be/messages.json
+++ b/_locales/be/messages.json
@@ -30,6 +30,7 @@
   "adminRemoveCommunityNone": "У гэтай Community няма Admins.",
   "adminRemoveFailed": "Не атрымалася выдаліць {name} як Адміна.",
   "adminRemovedUser": "<b>{name}</b> быў выдалены як Адміністратар.",
+  "adminRemovedUserMultiple": "<b>{name}</b> і яшчэ <b>{count} іншых</b> былі паніжаны на пасадзе адміністратара.",
   "adminSendingPromotion": "Адпраўка прасоўвання адміністратара",
   "adminSettings": "Налады адміністратара",
   "adminTwoPromotedToAdmin": "<b>{name}</b> і <b>{other_name}</b> былі павышаны да адміністратараў.",
@@ -66,6 +67,7 @@
   "attachmentsDownload": "Спампаваць укладанне",
   "attachmentsDuration": "Працягласць:",
   "attachmentsErrorLoad": "Памылка прымацавання файла",
+  "attachmentsErrorMediaSelection": "Не ўдалося выбраць далучэнне",
   "attachmentsErrorNoApp": "Немагчыма знайсці праграму для выбару мультымедыя.",
   "attachmentsErrorNotSupported": "Гэты тып файла не падтрымліваецца.",
   "attachmentsErrorNumber": "Немагчыма адправіць больш за 32 выявы і відэафайлы адначасова.",
@@ -155,6 +157,7 @@
   "cameraGrantAccessDescription": "{app_name} патрэбен дазвол на камеру, каб рабіць фота ці відэа альбо сканаваць QR-коды.",
   "cameraGrantAccessQr": "{app_name} патрэбен дазвол на камеру для сканавання QR-кодаў",
   "cancel": "Скасаваць",
+  "changePasswordFail": "Не ўдалося змяніць пароль",
   "clear": "Ачысьціць",
   "clearAll": "Ачысціць усё",
   "clearDataAll": "Сцерці ўсе даныя",
@@ -185,7 +188,6 @@
   "communityInvitation": "Запрашэнне ў суполку",
   "communityJoin": "Далучайцеся да супольнасці",
   "communityJoinDescription": "Вы ўпэўненыя, што жадаеце далучыцца да {community_name}?",
-  "communityJoinError": "Не атрымалася далучыцца да {community_name}",
   "communityJoinOfficial": "Або далучыцеся да аднаго з гэтых...",
   "communityJoined": "Далучыўся да супольнасці",
   "communityJoinedAlready": "Вы ўжо з'яўляецеся ўдзельнікам гэтай community.",
@@ -211,6 +213,7 @@
   "conversationsAddedToHome": "Дадана на галоўны экран",
   "conversationsAudioMessages": "Аўдыяпаведамленні",
   "conversationsAutoplayAudioMessage": "Аўтапрайграванне аўдыёпаведамленняў",
+  "conversationsAutoplayAudioMessageDescription": "Аўтапрайграванне паслядоўных аўдыёпаведамленняў",
   "conversationsBlockedContacts": "Блакіраваныя кантакты",
   "conversationsCommunities": "Супольнасці",
   "conversationsDelete": "Выдаліць размову",
@@ -255,6 +258,9 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Ранейшыя",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Першапачатковы варыянт рэалізацыі знікнення паведамленняў.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> паставіў таймер знікнення паведамлення на <b>{time}</b>",
+  "deleteAfterLegacyGroupsGroupCreation": "Калі ласка, пачакайце, пакуль група ствараецца...",
+  "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Не ўдалося абнавіць групу",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "У вас няма дазволу выдаляць чужыя паведамленні",
   "deleteMessageConfirm": "Вы ўпэўненыя, што жадаеце выдаліць гэтае паведамленне?",
   "deleteMessageDeletedGlobally": "Гэта паведамленне было выдалена",
   "deleteMessageDeletedLocally": "Гэта паведамленне было выдалена на гэтай прыладзе",
@@ -361,15 +367,24 @@
   "groupInviteSending": "Адпраўка запрашэння",
   "groupInviteSent": "Запрашэнне адпраўлена",
   "groupInviteSuccessful": "Запрашэнне ў групу паспяхова",
-  "groupInviteVersion": "Карыстальнікі павінны мець версію {version} або вышэй, каб атрымліваць запрашэнні",
   "groupInviteYou": "<b>Вас</b> запрасілі далучыцца да групы.",
+  "groupInviteYouAndMoreNew": "<b>Вы</b> і яшчэ <b>{count} іншых</b> былі запрошаны далучыцца да групы.",
+  "groupInviteYouAndOtherNew": "<b>Вы</b> і <b>{other_name}</b> былі запрошаныя далучыцца да групы.",
   "groupLeave": "Пакінуць групу",
+  "groupLeaveDescription": "Вы ўпэўнены, што жадаеце выйсці з <b>{group_name}</b>?",
   "groupLeaveErrorFailed": "Не атрымалася пакінуць {group_name}",
   "groupLegacyBanner": "Групы былі абноўлены, стварыце новую групу для абнаўлення. Функцыянальнасць старой групы будзе пагоршана з {date}.",
   "groupMemberLeft": "<b>{name}</b> пакінуў групу.",
   "groupMemberLeftMultiple": "<b>{name}</b> і <b>{count} іншых</b> пакінулі групу.",
   "groupMemberLeftTwo": "<b>{name}</b> і <b>{other_name}</b> пакінулі групу.",
   "groupMemberNew": "<b>{name}</b> далучыўся да групы.",
+  "groupMemberNewHistory": "<b>{name}</b> быў(-ла) запрошаны(-а) далучыцца да групы. Гісторыя чатаў была абагулена.",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> і <b>{count} іншых</b> былі запрошаны далучыцца да групы. Гісторыя чатаў была абагулена.",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> і <b>{other_name}</b> былі запрошаны далучыцца да групы. Гісторыя чатаў была абагулена.",
+  "groupMemberNewMultiple": "<b>{name}</b> і <b>{count} іншых</b> былі запрошаны далучыцца да групы.",
+  "groupMemberNewTwo": "<b>{name}</b> і <b>{other_name}</b> былі запрошаны далучыцца да групы.",
+  "groupMemberNewYouHistoryMultiple": "<b>Вы</b> і яшчэ <b>{count} іншых</b> былі запрошаны далучыцца да групы. Гісторыя чатаў была абагулена.",
+  "groupMemberNewYouHistoryTwo": "<b>Вы</b> і <b>{name}</b> былі запрошаны далучыцца да групы. Гісторыя чатаў была абагулена.",
   "groupMemberYouLeft": "<b>Вы</b> пакінулі групу.",
   "groupMembers": "Удзельнікі групы",
   "groupMembersNone": "У гэтай групе больш няма ўдзельнікаў.",
@@ -382,6 +397,8 @@
   "groupNoMessages": "У вас няма паведамленняў ад <b>{group_name}</b>. Адпраўце паведамленне, каб пачаць размову!",
   "groupOnlyAdmin": "Вы з'яўляецеся адзіным адміністратарам у <b>{group_name}</b>.<br/><br/>Удзельнікі групы і наладкі не могуць быць змененыя без адміністратара.",
   "groupPromotedYou": "<b>Вас</b> павысілі да адміністратара.",
+  "groupPromotedYouMultiple": "<b>Вы</b> і <b>{count} іншых</b> былі павышаны да адміністратараў.",
+  "groupPromotedYouTwo": "<b>Вы</b> і <b>{name}</b> былі павышаны да адміністратараў.",
   "groupRemoveDescription": "Вы жадаеце выдаліць <b>{name}</b> з <b>{group_name}</b>?",
   "groupRemoveDescriptionMultiple": "Вы жадаеце выдаліць <b>{name}</b> і <b>{count} іншых</b> з <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Вы жадаеце выдаліць <b>{name}</b> і <b>{other_name}</b> з <b>{group_name}</b>?",
@@ -389,6 +406,8 @@
   "groupRemovedMultiple": "<b>{name}</b> і <b>{count} іншых</b> былі выдалены з групы.",
   "groupRemovedTwo": "<b>{name}</b> і <b>{other_name}</b> былі выдалены з групы.",
   "groupRemovedYou": "Вас выдалілі з <b>{group_name}</b>.",
+  "groupRemovedYouMultiple": "<b>Вы</b> і <b>{count} іншых</b> былі выдалены з групы.",
+  "groupRemovedYouTwo": "<b>Вы</b> і <b>{other_name}</b> былі выдалены з групы.",
   "groupSetDisplayPicture": "Усталюйце выяву для групы",
   "groupUnknown": "Невядомая Група",
   "groupUpdated": "Група абноўлена",
@@ -415,7 +434,10 @@
   "leave": "Пакінуць",
   "leaving": "Пакідаем...",
   "legacyGroupMemberNewMultiple": "<b>{name} </b> і <b>{count} іншых</b> далучыліся да групы.",
+  "legacyGroupMemberNewYouMultiple": "<b>Вы</b> і яшчэ <b>{count} іншых</b> былі запрошаны далучыцца да групы.",
+  "legacyGroupMemberNewYouOther": "<b>Вы</b> і <b>{other_name}</b> далучыліся да групы.",
   "legacyGroupMemberTwoNew": "<b>{name}</b> і <b>{other_name}</b> далучыліся да групы.",
+  "legacyGroupMemberYouNew": "<b>Вы</b> далучыліся да групы.",
   "linkPreviews": "Папярэдні прагляд спасылак",
   "linkPreviewsDescription": "Паказваць прагляды спасылак для падтрымліваемых URL.",
   "linkPreviewsEnable": "Уключыць перадпрагляды спасылак",
@@ -529,6 +551,7 @@
   "notificationsVibrate": "Вібрацыя",
   "off": "Выкл.",
   "okay": "ОК",
+  "on": "Укл.",
   "onboardingAccountCreate": "Стварыць уліковы запіс",
   "onboardingAccountCreated": "Уліковы запіс створаны",
   "onboardingAccountExists": "У мяне ёсць уліковы запіс",
@@ -613,6 +636,7 @@
   "recoveryPasswordBannerTitle": "Захавайце свой Recovery password",
   "recoveryPasswordDescription": "Выкарыстоўвайце свой пароль для аднаўлення, каб загрузіць свой уліковы запіс на новых прыладах.<br /><br />Ваш уліковы запіс не можа быць адноўлены без вашага пароля для аднаўлення. Захоўвайце яго ў бяспечным і надзейным месцы — і не дзяліце з нікога.",
   "recoveryPasswordEnter": "Увядзіце recovery password",
+  "recoveryPasswordErrorLoad": "Пры спробе загрузіць пароль аднаўлення адбылася памылка.<br/><br/>Калі ласка, экспартуйце свае часопісы, а затым загрузіце файл у службу падтрымкі Session, каб вырашыць гэтую праблему.",
   "recoveryPasswordErrorMessageGeneric": "Калі ласка, праверце ваш пароль для аднаўлення і паспрабуйце зноў.",
   "recoveryPasswordErrorMessageIncorrect": "Некаторыя з слоў у вашым Recovery password няправільныя. Калі ласка, праверце і паспрабуйце яшчэ раз.",
   "recoveryPasswordErrorMessageShort": "The Recovery Password you entered is not long enough. Please check and try again.",
@@ -627,6 +651,7 @@
   "recoveryPasswordWarningSendDescription": "This is your recovery password. If you send it to someone they'll have full access to your account.",
   "redo": "Паўтарыць",
   "remove": "Выдаліць",
+  "removePasswordFail": "Не ўдалося выдаліць пароль",
   "reply": "Адказаць",
   "resend": "Адправіць паўторна",
   "resolving": "Загрузка інфармацыі аб краіне...",
