--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -8,6 +8,7 @@
   "accountIdErrorInvalid": "Aquest ID de compte no és vàlid. Comproveu-ho i torneu-ho a provar.",
   "accountIdOrOnsEnter": "Introdueix Account ID o ONS",
   "accountIdOrOnsInvite": "Convida identificació de compte o ONS",
+  "accountIdShare": "Ei, he estat utilitzant {app_name} per a xatejar amb seguretat i privacitat completes. Uneix-t'hi! L'identificador del meu compte és <br/><br/>{account_id}<br/><br/>Descarregueu-vos a {session_download_url}",
   "accountIdYours": "El vostre Identificador de Compte",
   "accountIdYoursDescription": "Aquest és el vostre ID de compte. Els altres usuaris el poden escanejar per a encetar una conversa amb vós.",
   "actualSize": "Mida actual",
@@ -142,6 +143,7 @@
   "callsPermissionsRequiredDescription": "Podeu habilitar el permís de 'Telefonades de veu i vídeo' a la configuració de Privadesa.",
   "callsReconnecting": "S'està tornant a connectar…",
   "callsRinging": "Està sonant...",
+  "callsSessionCall": "Trucada {app_name}",
   "callsSettings": "Telefonades (Beta)",
   "callsVoiceAndVideo": "Telefonades de veu i de vídeo",
   "callsVoiceAndVideoBeta": "Telefonades de veu i de vídeo (Beta)",
@@ -185,7 +187,6 @@
   "communityInvitation": "Invitació a la comunitat",
   "communityJoin": "Uneix-te a una comunitat",
   "communityJoinDescription": "Esteu segur que voleu unir-vos a {community_name}?",
-  "communityJoinError": "Ha fallat intentar unir-se a {community_name}",
   "communityJoinOfficial": "O uneix-te a alguns d'aquests...",
   "communityJoined": "S'ha unit a comunitat",
   "communityJoinedAlready": "Ja sou membre d'aquesta comunitat.",
@@ -211,6 +212,7 @@
   "conversationsAddedToHome": "S'ha afegit a la pantalla d'inici.",
   "conversationsAudioMessages": "Missatges d'àudio",
   "conversationsAutoplayAudioMessage": "Reproducció automàtica de missatges d'àudio",
+  "conversationsAutoplayAudioMessageDescription": "Reproduïu automàticament missatges d'àudio consecutius",
   "conversationsBlockedContacts": "Contactes blocats",
   "conversationsCommunities": "Comunitats",
   "conversationsDelete": "Esborra la conversa",
@@ -255,7 +257,9 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Herència",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Versió original dels missatges efímers.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> ha establert el temporitzador dels missatges efímers a <b>{time}</b>",
+  "deleteMessage": "{count, plural, one [Suprimeix el missatge] other [Suprimeix els missatges]}",
   "deleteMessageConfirm": "Esteu segur que voleu suprimir aquest missatge?",
+  "deleteMessageDeleted": "{count, plural, one [Missatge suprimit] other [Missatges suprimits]}",
   "deleteMessageDeletedGlobally": "Aquest missatge s'ha suprimit",
   "deleteMessageDeletedLocally": "Aquest missatge s'ha suprimit en aquest dispositiu",
   "deleteMessageDescriptionDevice": "Esteu segur que voleu suprimir aquest missatge només d'aquest dispositiu?",
@@ -361,9 +365,9 @@
   "groupInviteSending": "Enviant invitació",
   "groupInviteSent": "Invitació enviada",
   "groupInviteSuccessful": "Invitació al grup amb èxit",
-  "groupInviteVersion": "Els usuaris han de tenir la versió {version} o superior per a rebre invitacions",
   "groupInviteYou": "<b>Tu</b> has estat convidat a unir-te al grup.",
   "groupLeave": "Marxar del grup",
+  "groupLeaveDescription": "Esteu segur que voleu abandonar {group_name}?",
   "groupLeaveErrorFailed": "Ha fallat intentar deixar {group_name}",
   "groupLegacyBanner": "Els grups han estat millorats, crea un nou grup per a actualitzar-lo. La funcionalitat dels grups antics es degradarà des del {date}.",
   "groupMemberLeft": "<b>{name}</b> ha abandonat el grup.",
@@ -385,6 +389,8 @@
   "groupRemoveDescription": "Voleu eliminar <b>{name}</b> de <b>{group_name}</b>?",
   "groupRemoveDescriptionMultiple": "Voleu eliminar <b>{name}</b> i <b>{count} altres</b> de <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Voleu eliminar <b>{name}</b> i <b>{other_name}</b> de <b>{group_name}</b>?",
+  "groupRemoveMessages": "{count, plural, one [Suprimeix l'usuari i els seus missatges] other [Suprimeix els usuaris i els seus missatges]}",
+  "groupRemoveUserOnly": "{count, plural, one [Suprimeix usuari ] other [Suprimeix usuaris]}",
   "groupRemoved": "<b>{name}</b> s'ha suprimit del grup.",
   "groupRemovedMultiple": "<b>{name}</b> i <b>{count} altres</b> han estat eliminats del grup.",
   "groupRemovedTwo": "<b>{name}</b> i <b>{other_name}</b> han estat eliminats del grup.",
@@ -444,6 +450,7 @@
   "membersActive": "{count, plural, one [# membre actiu] other [# membres actius]}",
   "membersAddAccountIdOrOns": "Afegir Account ID o ONS",
   "membersInvite": "Convida contactes",
+  "membersInviteSend": "{count, plural, one [Envia la invitació] other [Envia les invitacions]}",
   "membersInviteShareDescription": "Voleu compartir l'historial de missatges del grup amb <b>{name}</b>?",
   "membersInviteShareDescriptionMultiple": "Voleu compartir l'historial de missatges del grup amb <b>{name}</b> i <b>{count} altres</b>?",
   "membersInviteShareDescriptionTwo": "Voleu compartir l'historial de missatges del grup amb <b>{name}</b> i <b>{other_name}</b>?",
@@ -459,6 +466,7 @@
   "messageInfo": "Informació del Missatge",
   "messageMarkRead": "Marcar com a llegit",
   "messageMarkUnread": "Marcar com a no llegit",
+  "messageNew": "{count, plural, one [Nou missatge] other [Nous missatges]}",
   "messageNewDescriptionDesktop": "Comença una conversa nova introduint la ID del compte o el ONS del teu amic.",
   "messageNewDescriptionMobile": "Comença una conversa nova introduint la ID del compte, el ONS o escanejant el seu codi QR.",
   "messageNewYouveGot": "{count, plural, one [Tens un missatge nou.] other [Tens # missatges nous.]}",
@@ -532,6 +540,7 @@
   "onboardingAccountCreate": "Crea un compte",
   "onboardingAccountCreated": "Compte creat",
   "onboardingAccountExists": "Tinc un compte",
+  "onboardingBackAccountCreation": "No podeu anar més enrere. Per a cancel·lar la creació del compte, {app_name} necessita tancar-se.",
   "onboardingBubbleNoPhoneNumber": "No necessiteu ni tan sols un número de telèfon per registrar-vos.",
   "onboardingBubblePrivacyInYourPocket": "Privadesa a la teva butxaca.",
   "onboardingBubbleSessionIsEngineered": "{app_name} està dissenyat per protegir la vostra privacitat.",
@@ -646,6 +655,7 @@
   "searchContacts": "Cerca contactes",
   "searchConversation": "Cerca la conversa",
   "searchEnter": "Introduïu la vostra cerca.",
+  "searchMatches": "{count, plural, one [{found_count} de # coincidència] other [{found_count} de # coincidències]}",
   "searchMatchesNone": "No s'han trobat resultats.",
   "searchMatchesNoneSpecific": "No hi ha cap resultat per a \"{query}\".",
   "searchMembers": "Cerca membres",
@@ -669,6 +679,7 @@
   "set": "Definir",
   "settingsRestartDescription": "Heu de reiniciar {app_name} per aplicar la vostra nova configuració.",
   "share": "Compartir",
+  "shareAccountIdDescription": "Convideu el vostre amic a xatejar a {app_name} compartint el vostre ID de compte amb ell.",
   "shareAccountIdDescriptionCopied": "Compartiu amb els vostres amics allà on acostumeu a parlar-hi; després, traslladeu la conversa aquí.",
   "shareExtensionDatabaseError": "Hi ha un problema en obrir la base de dades. Siusplau, reinicieu l'aplicació i torneu-ho a provar.",
   "show": "Mostra",
@@ -687,6 +698,7 @@
   "updateDownloaded": "S'ha instal·lat una actualització, feu clic per reiniciar.",
   "updateDownloading": "S'està baixant l'actualització: {percent_loader}%",
   "updateError": "No es pot actualitzar",
+  "updateErrorDescription": "Ha fallat l'actualització de {app_name}. Aneu a {session_download_url} i instal·leu la nova versió manualment, llavors contacteu amb el nostre Centre de Suport per a informar sobre aquest problema.",
   "updateNewVersion": "Hi ha disponible una nova versió de {app_name}. Toqueu per actualitzar-lo",
   "updateNewVersionDescription": "Hi ha disponible una nova versió de {app_name}",
   "updateReleaseNotes": "Vés a les notes de versió",
