--- a/_locales/cy/messages.json
+++ b/_locales/cy/messages.json
@@ -92,8 +92,10 @@
   "attachmentsNotification": "{emoji} Atodiad",
   "attachmentsResolution": "Cydraniad:",
   "attachmentsSaveError": "Methu cadw ffeil.",
+  "attachmentsSendTo": "Anfon i {name}",
   "attachmentsTapToDownload": "Tapio i lawrlwytho {file_type}",
   "attachmentsThisMonth": "Mis yma",
+  "attachmentsThisWeek": "Wythnos hon",
   "attachmentsWarning": "Gall rhaglenni eraill ar eich dyfais gael mynediad at atodiadau rydych chi'n eu cadw.",
   "audio": "Sain",
   "audioNoInput": "Dim mewnbwn sain wedi'i ganfod",
@@ -153,6 +155,7 @@
   "cameraGrantAccessDescription": "Mae angen mynediad i'r camera ar {app_name} i dynnu lluniau a fideos, neu i sganio côd QR.",
   "cameraGrantAccessQr": "Mae angen mynediad i'r camera ar {app_name} i sganio côd QR",
   "cancel": "Diddymu",
+  "changePasswordFail": "Methwyd newid cyfrinair",
   "clear": "Clir",
   "clearAll": "Clirio Popeth",
   "clearDataAll": "Clirio'r holl ddata",
@@ -183,7 +186,6 @@
   "communityInvitation": "Gwahoddiad Cymunedol",
   "communityJoin": "Ymuno â'r Gymuned",
   "communityJoinDescription": "Ydych chi'n siŵr eich bod am ymuno â {community_name}?",
-  "communityJoinError": "Methu ymuno â {community_name}",
   "communityJoinOfficial": "Neu ymunwch ag un o'r rhain...",
   "communityJoined": "Ymuno â'r Gymuned",
   "communityJoinedAlready": "Rydych eisoes yn aelod o'r gymuned hon.",
@@ -209,6 +211,7 @@
   "conversationsAddedToHome": "Ychwanegwyd at y sgrin gartref",
   "conversationsAudioMessages": "Negeseuon Sain",
   "conversationsAutoplayAudioMessage": "Autochwarae Negeseuon Sain",
+  "conversationsAutoplayAudioMessageDescription": "Autochwarae negeseuon sain a anfonwyd yn olynol",
   "conversationsBlockedContacts": "Cysylltiadau wedi'u rhwystro",
   "conversationsCommunities": "Cymunedau",
   "conversationsDelete": "Dileu Sgwrs",
@@ -253,6 +256,7 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Etifeddiaeth",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Fersiwn wreiddiol o negeseuon diflannu.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "Gosododd <b>{name}</b> amserydd y neges diflannu i <b>{time}</b>",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Nid oes gennych ganiatâd i ddileu negeseuon pobl eraill",
   "deleteMessageConfirm": "Ydych chi'n siŵr eich bod am ddileu'r neges hon?",
   "deleteMessageDeletedGlobally": "Dilewyd y neges hon",
   "deleteMessageDeletedLocally": "Dilewyd y neges hon ar y ddyfais hon",
@@ -261,7 +265,6 @@
   "deleteMessageDeviceOnly": "Dileu ar y ddyfais hon yn unig",
   "deleteMessageDevicesAll": "Dileu ar fy holl ddyfeisiau",
   "deleteMessageEveryone": "Dileu i bawb",
-  "deleteMessageFailed": "{count, plural, zero [Ac mae # eraill wedi ymateb gyda {emoji} i'r neges hon.] one [Methu dileu neges] two [Methu dileu negeseuon] few [Ddim wedi dileu data gan # Service Node. ID y Service Node: {service_node_id}.] many [Ddim wedi dileu data gan # Service Nodes. IDau’r Service Node: {service_node_id}.] other [Bawdlun o ddelwedd o neges wedi'i dyfynnu]}",
   "deleteMessagesConfirm": "Ydych chi'n siŵr eich bod am ddileu'r neges(au) hyn?",
   "deleteMessagesDescriptionDevice": "Ydych chi'n siŵr eich bod am ddileu'r negeseuon hyn o'r ddyfais hon yn unig?",
   "deleteMessagesDescriptionEveryone": "Ydych chi'n siŵr eich bod am ddileu'r negeseuon hyn i bawb?",
@@ -276,11 +279,14 @@
   "disappearingMessagesDeleteType": "Dileu Math",
   "disappearingMessagesDescription": "Mae'r gosodiad hwn yn berthnasol i bawb yn y sgwrs hon.",
   "disappearingMessagesDescription1": "Mae'r gosodiad hwn yn berthnasol i negeseuon a anfonwch yn y sgwrs hon.",
+  "disappearingMessagesDescriptionGroup": "Mae'r gosodiad hwn yn berthnasol i bawb yn y sgwrs hon.<br/>Dim ond gweinyddwyr grŵp all newid y gosodiad hwn.",
   "disappearingMessagesDisappear": "Ymestyn Ar Ôl {disappearing_messages_type} - {time}",
   "disappearingMessagesDisappearAfterRead": "Ymestyn Ar Ôl Darllen",
   "disappearingMessagesDisappearAfterReadDescription": "Mae neges yn cael ei dileu ar ôl iddyn nhw fod wedi'u darllen.",
+  "disappearingMessagesDisappearAfterReadState": "Ymestyn Ar Ôl Darllen - {time}",
   "disappearingMessagesDisappearAfterSend": "Ymestyn Ar Ôl Anfon",
   "disappearingMessagesDisappearAfterSendDescription": "Mae neges yn cael ei dileu ar ôl iddyn nhw fod wedi'u anfon.",
+  "disappearingMessagesDisappearAfterSendState": "Ymestyn Ar Ôl Anfon - {time}",
   "disappearingMessagesFollowSetting": "Dilyniadu Gosodiad",
   "disappearingMessagesFollowSettingOff": "Ni fydd negeseuon rydych chi'n eu hanfon yn diflannu mwyach. Ydych chi'n siŵr eich bod am ddiffodd <b>neges diflannu?</b>",
   "disappearingMessagesFollowSettingOn": "Gosod eich negeseuon i ddiflannu <b>{time} <\\/b> ar ôl iddynt gael eu <b>{disappearing_messages_type} <\\/b>?",
@@ -292,6 +298,7 @@
   "disappearingMessagesTimer": "Amserydd",
   "disappearingMessagesTurnedOff": "<b>{name} y</b> wedi troi neges diflannu i ffwrdd. Ni fydd negeseuon maent yn anfon yn diflannu mwyach.",
   "disappearingMessagesTurnedOffYou": "Rydych wedi troi <b>i ffwrdd</b> negeseuon sy'n diflannu. Ni fydd negeseuon rydych yn anfon yn diflannu mwyach.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Chi</b> wedi troi <b>oddi</b> negeseuon diflannu.",
   "disappearingMessagesTypeRead": "darllen",
   "disappearingMessagesTypeSent": "anfonwyd",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> diweddarwyd gosodiadau negeseuon diflanedig.",
@@ -358,15 +365,19 @@
   "groupInviteSending": "Anfon gwahoddiad",
   "groupInviteSent": "Anfonwyd gwahoddiad",
   "groupInviteSuccessful": "Gwahoddiad grŵp llwyddiannus",
-  "groupInviteVersion": "Rhaid i'r defnyddwyr fod â fersiwn {version} neu uwch i dderbyn gwahoddiadau",
   "groupInviteYou": "Gwahoddwyd <b>chi</b> i ymuno â'r grŵp.",
+  "groupInviteYouAndMoreNew": "<b>Chi</b> a <b>{count} eraill</b> ymunodd â'r grŵp.",
+  "groupInviteYouAndOtherNew": "<b>Chi</b> a <b>{other_name}</b> ymunodd â'r grŵp.",
   "groupLeave": "Gadael y grŵp",
+  "groupLeaveDescription": "Ydych chi'n siŵr eich bod am adael {group_name}?",
   "groupLeaveErrorFailed": "Methu gadael {group_name}",
   "groupLegacyBanner": "Mae grwpiau wedi'u huwchraddio, creu grŵp newydd i uwchraddio. Bydd swyddogaeth hen grŵp yn dirywio o {date}.",
   "groupMemberLeft": "<b>{name} y</b> gadawodd y grŵp.",
   "groupMemberLeftMultiple": "<b>{name} y</b> a <b>{count} eraill</b> gadawodd y grŵp.",
   "groupMemberLeftTwo": "<b>{name} y</b> a <b>{other_name}</b> gadawodd y grŵp.",
   "groupMemberNew": "<b>{name} y</b> ymunodd â'r grŵp.",
+  "groupMemberNewMultiple": "<b>{name}</b> a <b>{count} eraill</b> wedi cael gwahoddiad i ymuno â'r grŵp.",
+  "groupMemberNewTwo": "<b>{name}</b> a <b>{other_name}</b> wedi cael eu gwahodd i ymuno â'r grŵp.",
   "groupMemberYouLeft": "<b>Rydych chi</b> wedi gadael y grŵp.",
   "groupMembers": "Aelodau'r grŵp",
   "groupMembersNone": "Nid oes aelodau eraill yn y grŵp hwn.",
@@ -412,6 +423,7 @@
   "leave": "Gadael",
   "leaving": "Gadael...",
   "legacyGroupMemberNewMultiple": "<b>{name} y</b> a <b>{count} eraill</b> ymunodd â'r grŵp.",
+  "legacyGroupMemberNewYouMultiple": "<b>Chi</b> a <b>{count} eraill</b> ymunodd â'r grŵp.",
   "legacyGroupMemberTwoNew": "<b>{name} y</b> a <b>{other_name}</b> ymunodd â'r grŵp.",
   "linkPreviews": "Rhagolwg Dolen",
   "linkPreviewsDescription": "Dangos rhagolwg dolenni ar gyfer URLau a gefnogir.",
@@ -502,6 +514,8 @@
   "notificationsFastModeDescription": "Byddwch yn cael hysbysu am negeseuon newydd yn ddibynadwy ac yn syth gan ddefnyddio Gwasanaethau Hysbysiad Google.",
   "notificationsFastModeDescriptionIos": "Byddwch yn cael hysbysu am negeseuon newydd yn ddibynadwy ac yn syth gan ddefnyddio Gwasanaethau Hysbysiad Apple.",
   "notificationsGoToDevice": "Ewch i osodiadau hysbysiadau'r ddyfais",
+  "notificationsHeaderAllMessages": "Hysbysiadau - Pob Un",
+  "notificationsHeaderMentionsOnly": "Hysbysiadau - Dim ond Cyfeiriadau",
   "notificationsIosGroup": "{name} i {conversation_name}",
   "notificationsIosRestart": "Efallai eich bod wedi derbyn negeseuon tra'r oedd eich {device} yn ailgychwyn.",
   "notificationsLedColor": "Lliw'r LED",
@@ -523,6 +537,7 @@
   "notificationsVibrate": "Dirgrynu",
   "off": "I ffwrdd",
   "okay": "Iawn",
+  "on": "Ymlaen",
   "onboardingAccountCreate": "Creu cyfrif",
   "onboardingAccountCreated": "Crëwyd cyfrif",
   "onboardingAccountExists": "Mae gen i gyfrif",
@@ -564,9 +579,11 @@
   "passwordSet": "Gosod Cyfrinair",
   "passwordSetDescription": "Mae eich cyfrinair wedi'i osod. Cadwch ef yn ddiogel.",
   "paste": "Gludo",
+  "permissionMusicAudioDenied": "{app_name} angen mynediad at gerddoriaeth ac sain er mwyn anfon ffeiliau, cerddoriaeth a sain, ond mae wedi'i wrthod yn barhaol. Tapiwch Gosodiadau -> Trwyddedau, a throi \"Cerddoriaeth a sain\" ymlaen.",
   "permissionsAppleMusic": "Mae angen i {app_name} ddefnyddio Apple Music i chwarae atodiadau cyfryngau.",
   "permissionsAutoUpdate": "Diweddariad Auto",
   "permissionsAutoUpdateDescription": "Gwiriwch yn awtomatig am ddiweddariadau wrth gychwyn",
+  "permissionsCameraDenied": "Mae angen mynediad i'r camera ar {app_name} i dynnu lluniau a fideos, ond fe'i gwrthodwyd yn barhaol. Tapiwch Gosodiadau -> Caniatadau, a throi \"Camera\" ymlaen.",
   "permissionsFaceId": "Mae'r nodwedd cloi sgrin ar {app_name} yn defnyddio ID Wyneb.",
   "permissionsKeepInSystemTray": "Cadw yn y Derbynnydd System",
   "permissionsKeepInSystemTrayDescription": "{app_name} yn parhau i redeg yn y cefndir pan fyddwch yn cau'r ffenestr",
@@ -574,6 +591,7 @@
   "permissionsMicrophone": "Meicroffon",
   "permissionsMicrophoneAccessRequiredDesktop": "Gallwch alluogi mynediad meicroffon yn osodiadau preifatrwydd {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "Mae {app_name} angen mynediad i'r meicroffon i wneud galwadau a recordio negeseuon sain.",
+  "permissionsMusicAudio": "Mae ar {app_name} angen mynediad i gerddoriaeth ac sain er mwyn anfon ffeiliau, cerddoriaeth ac sain.",
   "permissionsRequired": "Angen caniatâd",
   "permissionsStorageSave": "Mae {app_name} angen mynediad i storio i gadw atodiadau a chyfryngau.",
   "permissionsStorageSaveDenied": "Mae {app_name} angen caniatâd Storio i gadw lluniau a fideos, ond mae wedi'i wrthod yn barhaol. Ewch i ddewislen gosodiadau'r ap, dewis \"Caniatâd\", a galluogi \"Storio\".",
