--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -144,7 +144,7 @@
   "callsIncomingUnknown": "Incoming call",
   "callsMissed": "Missed Call",
   "callsMissedCallFrom": "Missed call from {name}",
-  "callsNotificationsRequired": "Voice and Video Calls require notifications to be enabled in your device system settings. ",
+  "callsNotificationsRequired": "Voice and Video Calls require notifications to be enabled in your device system settings.",
   "callsPermissionsRequired": "Call Permissions Required",
   "callsPermissionsRequiredDescription": "You can enable the \"Voice and Video Calls\" permission in Privacy Settings.",
   "callsReconnecting": "Reconnecting…",
@@ -419,7 +419,7 @@
   "groupNameEnter": "Enter a group name",
   "groupNameEnterPlease": "Please enter a group name.",
   "groupNameEnterShorter": "Please enter a shorter group name.",
-  "groupNameNew": "Group name is now {group_name}. ",
+  "groupNameNew": "Group name is now {group_name}.",
   "groupNameUpdated": "Group name updated.",
   "groupNoMessages": "You have no messages from <b>{group_name}</b>. Send a message to start the conversation!",
   "groupOnlyAdmin": "You are the only admin in <b>{group_name}</b>.<br/><br/>Group members and settings cannot be changed without an admin.",
@@ -654,7 +654,7 @@
   "permissionsMicrophoneAccessRequiredIos": "{app_name} needs microphone access to make calls and record audio messages.",
   "permissionsMicrophoneDescription": "Allow access to microphone.",
   "permissionsMusicAudio": "{app_name} needs music and audio access in order to send files, music and audio.",
-  "permissionsRequired": "Permission required",
+  "permissionsRequired": "Permission Required",
   "permissionsStorageDenied": "{app_name} needs photo library access so you can send photos and videos, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Photos and videos\" on.",
   "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings -> Permissions, and turn \"Storage\" on.",
   "permissionsStorageSave": "{app_name} needs storage access to save attachments and media.",
@@ -773,7 +773,7 @@
   "updateError": "Cannot Update",
   "updateErrorDescription": "{app_name} failed to update. Please go to {session_download_url} and install the new version manually, then contact our Help Center to let us know about this problem.",
   "updateNewVersion": "A new version of {app_name} is available, tap to update",
-  "updateNewVersionDescription": "A new version of {app_name} is available. ",
+  "updateNewVersionDescription": "A new version of {app_name} is available.",
   "updateReleaseNotes": "Go to Release Notes",
   "updateSession": "{app_name} Update",
   "updateVersion": "Version {version}",
