--- a/_locales/et/messages.json
+++ b/_locales/et/messages.json
@@ -8,6 +8,7 @@
   "accountIdErrorInvalid": "See kontotuvastusnumber on vale. Palun kontrollige ja proovige uuesti.",
   "accountIdOrOnsEnter": "Sisesta Account ID või ONS",
   "accountIdOrOnsInvite": "Kutsu Account ID või ONS",
+  "accountIdShare": "Hei, olen kasutanud {app_name} privaatsuseteks ja turvalisteks vestlusteks. Liitu minuga! Minu Konto ID on<br/><br/>{account_id}<br/><br/>Lae alla siit {session_download_url}",
   "accountIdYours": "Teie konto ID",
   "accountIdYoursDescription": "See on teie kontotuvastusnumber. Teised kasutajad saavad seda skaneerida, et alustada teiega vestlust.",
   "actualSize": "Tegelik suurus",
@@ -29,7 +30,10 @@
   "adminRemoveAsAdmin": "Eemalda administraatorina",
   "adminRemoveCommunityNone": "Selles kogukonnas pole administraatoreid.",
   "adminRemoveFailed": "Ebaõnnestus eemaldada {name} administraatoriks.",
+  "adminRemoveFailedMultiple": "Ebaõnnestus {name} ja {count} teise eemaldamine Administraatori kohalt.",
   "adminRemovedUser": "<b>{name}</b> eemaldati administraatorina.",
+  "adminRemovedUserMultiple": "<b>{name}</b> ja <b>{count} teist</b> eemaldati Administraatori kohalt.",
+  "adminRemovedUserOther": "<b>{name}</b> ja <b>{other_name}</b> eemaldati Administraatori kohalt.",
   "adminSendingPromotion": "Administraatori edutamine",
   "adminSettings": "Admini seaded",
   "adminTwoPromotedToAdmin": "<b>{name}</b> ja <b>{other_name}</b> määrati adminiks.",
@@ -66,6 +70,7 @@
   "attachmentsDownload": "Laadi manus alla",
   "attachmentsDuration": "Kestus:",
   "attachmentsErrorLoad": "Tõrge faili manustamisel",
+  "attachmentsErrorMediaSelection": "Manuse valimine ebaõnnestus",
   "attachmentsErrorNoApp": "Ei leia rakendust meediumi valimiseks.",
   "attachmentsErrorNotSupported": "Seda failitüüpi ei toetata.",
   "attachmentsErrorNumber": "Ei saa saata rohkem kui 32 pildi- ja videofaili korraga.",
@@ -142,6 +147,7 @@
   "callsPermissionsRequiredDescription": "\"Hääl- ja videokõnede\" loa saate anda privaatsussätetes.",
   "callsReconnecting": "Taasühendamine…",
   "callsRinging": "Heliseb...",
+  "callsSessionCall": "{app_name} Kõne",
   "callsSettings": "Kõned (beta)",
   "callsVoiceAndVideo": "Hääl- ja videokõned",
   "callsVoiceAndVideoBeta": "Hääl- ja videokõned (Beta)",
@@ -155,6 +161,7 @@
   "cameraGrantAccessDescription": "{app_name} vajab fotode ja videote salvestamiseks või QR-koodide skannimiseks kaamera juurdepääsu.",
   "cameraGrantAccessQr": "{app_name} vajab QR-koodide skannimiseks kaamera juurdepääsu",
   "cancel": "Tühista",
+  "changePasswordFail": "Salasõna muutmine ebaõnnestus",
   "clear": "Tühjenda",
   "clearAll": "Tühjenda kõik",
   "clearDataAll": "Kustuta kõik andmed",
@@ -177,6 +184,7 @@
   "clearMessagesNoteToSelfDescription": "Kas olete kindel, et soovite kõik Märkus endale sõnumid oma seadmest eemaldada?",
   "close": "Sulge",
   "closeWindow": "Sulge aken",
+  "commitHashDesktop": "Commit'i räsi: {hash}",
   "communityEnterUrl": "Sisesta kogukonna URL",
   "communityEnterUrlErrorInvalid": "Sobimatu URL",
   "communityEnterUrlErrorInvalidDescription": "Palun kontrollige Community URL-i ja proovige uuesti.",
@@ -185,7 +193,6 @@
   "communityInvitation": "Kogukonna kutse",
   "communityJoin": "Liitu Kogukonnaga",
   "communityJoinDescription": "Kas soovite liituda kogukonnaga {community_name}?",
-  "communityJoinError": "Kogukonnaga liitumine ebaõnnestus {community_name}",
   "communityJoinOfficial": "Või liituge ühega neist...",
   "communityJoined": "Liitunud Kogukonnaga",
   "communityJoinedAlready": "Olete juba selle kogukonna liige.",
@@ -211,6 +218,7 @@
   "conversationsAddedToHome": "Avakuvale lisatud",
   "conversationsAudioMessages": "Helisõnumid",
   "conversationsAutoplayAudioMessage": "Helisõnumite autom. esitamine",
+  "conversationsAutoplayAudioMessageDescription": "Järjestikuste helisõnumite autom. esitamine",
   "conversationsBlockedContacts": "Blokeeritud kontaktid",
   "conversationsCommunities": "Kogukonnad",
   "conversationsDelete": "Kustuta vestlus",
@@ -255,7 +263,12 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Pärand",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Esialgne kaduvate sõnumite versioon.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> määras kaduvate sõnumite taimeri väärtusele <b>{time}</b>",
+  "deleteAfterLegacyGroupsGroupCreation": "Palun oota kuni grupp saab loodud...",
+  "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Grupi uuendamine ebaõnnestus",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Sul ei ole õiguseid teiste sõnumeid kustutada",
+  "deleteMessage": "{count, plural, one [Kustuta sõnum] other [Kustuta sõnumid]}",
   "deleteMessageConfirm": "Kas soovite selle sõnumi kustutada?",
+  "deleteMessageDeleted": "{count, plural, one [Sõnum kustutatud] other [Sõnumid kustutatud]}",
   "deleteMessageDeletedGlobally": "See sõnum on kustutatud",
   "deleteMessageDeletedLocally": "See sõnum on sellest seadmest kustutatud",
   "deleteMessageDescriptionDevice": "Kas soovite selle sõnumi ainult sellest seadmest kustutada?",
@@ -326,6 +339,8 @@
   "emojiReactsClearAll": "Kas soovite kõik {emoji} tühjendada?",
   "emojiReactsCoolDown": "Võtke hoogu maha! Olete saatnud liiga palju emotikonide reaktsioone. Proovi varsti uuesti",
   "emojiReactsCountOthers": "{count, plural, one [Ja # inimene on reageerinud {emoji} sellele sõnumile.] other [Ja # inimest on reageerinud {emoji} sellele sõnumile.]}",
+  "emojiReactsHoverYouNameDesktop": "Reageerisid {emoji_name}'ga",
+  "emojiReactsHoverYouNameTwoDesktop": "Sina ja {name} reageerisite {emoji_name}'ga",
   "emojiReactsNotification": "Reageeris sinu sõnumile {emoji}",
   "enable": "Luba",
   "errorConnection": "Palun kontrollige oma internetiühendust ja proovige uuesti.",
@@ -361,15 +376,24 @@
   "groupInviteSending": "Kutsekirja saatmine",
   "groupInviteSent": "Kutse saadetud",
   "groupInviteSuccessful": "Grupi kutse oli edukas",
-  "groupInviteVersion": "Kasutajatel peab olema versioon {version} või uuem, et saada kutseid",
   "groupInviteYou": "<b>Sind</b> kutsuti grupiga liituma.",
+  "groupInviteYouAndMoreNew": "<b>Sind</b> ja <b>{count} teist</b> kutsuti grupiga liituma.",
+  "groupInviteYouAndOtherNew": "<b>Sind</b> ja <b>{other_name}</b> kutsuti grupiga liituma.",
   "groupLeave": "Lahku grupist",
+  "groupLeaveDescription": "Kas soovite grupist või kogukonnast {group_name} lahkuda?",
   "groupLeaveErrorFailed": "Ebaõnnestus lahkuda grupist {group_name}",
   "groupLegacyBanner": "Grupid on uuendatud, loo uus grupp, et uuendada. Vana grupi funktsionaalsus hakkab alates {date} aeguma.",
   "groupMemberLeft": "<b>{name}</b> lahkus grupist.",
   "groupMemberLeftMultiple": "<b>{name}</b> ja <b>{count} teist</b> lahkusid grupist.",
   "groupMemberLeftTwo": "<b>{name}</b> ja <b>{other_name}</b> lahkusid grupist.",
   "groupMemberNew": "<b>{name}</b> liitus grupiga.",
+  "groupMemberNewHistory": "<b>{name}</b> kutsuti grupiga liituma. Vestluse ajalugu jagati nendega.",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> ja <b>{count} teist</b> kutsuti grupiga liituma. Vestluse ajalugu jagati nendega.",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> ja <b>{other_name}</b> kutsuti grupiga liituma. Vestluse ajalugu jagati nendega.",
+  "groupMemberNewMultiple": "<b>{name}</b> ja <b>{count} teist </b> kutsuti grupiga liituma.",
+  "groupMemberNewTwo": "<b>{name}</b> ja <b>{other_name}</b> kutsuti grupiga liituma.",
+  "groupMemberNewYouHistoryMultiple": "<b>Sind</b> ja <b>{count} teist</b> kutsuti grupiga liituma. Vestluse ajalugu jagati nendega.",
+  "groupMemberNewYouHistoryTwo": "<b>Sind</b> ja <b>{name}</b> kutsuti grupiga liituma. Vestluse ajalugu jagati nendega.",
   "groupMemberYouLeft": "<b>Sina</b> lahkusid grupist.",
   "groupMembers": "Grupi liikmed",
   "groupMembersNone": "Selles grupis pole teisi liikmeid.",
@@ -382,17 +406,24 @@
   "groupNoMessages": "Teil pole <b>{group_name}</b>'ilt sõnumeid. Vestluse alustamiseks saatke sõnum!",
   "groupOnlyAdmin": "Olete ainus administraator grupis <b>{group_name}</b>.<br/><br/>Grupi liikmeid ja sätteid ei saa muuta ilma administraatorita.",
   "groupPromotedYou": "<b>Sina</b> määrati adminiks.",
+  "groupPromotedYouMultiple": "<b>Sind</b> ja <b>{count} teist</b> määrati administraatoriks.",
+  "groupPromotedYouTwo": "<b>Sind</b> ja <b>{name}</b> määrati administraatoriks.",
   "groupRemoveDescription": "Kas soovite eemaldada <b>{name}</b> grupist <b>{group_name}</b>?",
   "groupRemoveDescriptionMultiple": "Kas soovite eemaldada <b>{name}</b> ja <b>{count} teised</b> grupist <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Kas soovite eemaldada <b>{name}</b> ja <b>{other_name}</b> grupist <b>{group_name}</b>?",
+  "groupRemoveMessages": "{count, plural, one [Eemalda kasutaja ja nende sõnumid] other [Eemalda kasutajad ja nende sõnumid]}",
+  "groupRemoveUserOnly": "{count, plural, one [Eemalda kasutaja ] other [Eemalda kasutajad]}",
   "groupRemoved": "<b>{name}</b> eemaldati grupist.",
   "groupRemovedMultiple": "<b>{name}</b> ja <b>{count} teist</b> eemaldati grupist.",
   "groupRemovedTwo": "<b>{name}</b> ja <b>{other_name}</b> eemaldati grupist.",
   "groupRemovedYou": "Teid eemaldati grupist <b>{group_name}</b>.",
+  "groupRemovedYouMultiple": "<b>Sina</b> ja <b>{count} teist</b> eemaldati grupist.",
+  "groupRemovedYouTwo": "<b>Sina</b> ja <b>{other_name}</b> eemaldati grupist.",
   "groupSetDisplayPicture": "Määra grupi kuvapilt",
   "groupUnknown": "Tundmatu grupp",
   "groupUpdated": "Grupp uuendatud",
   "helpFAQ": "KKK",
+  "helpHelpUsTranslateSession": "Aita meil tõlkida {app_name}",
   "helpReportABug": "Teata veast",
   "helpReportABugDescription": "Jaga mõnda teavet, et saaksime teie probleemi lahendada. Ekspordi oma logid ja lae fail üles {app_name}'i abikeskuse kaudu.",
   "helpReportABugExportLogs": "Ekspordi logid",
@@ -402,6 +433,7 @@
   "helpSupport": "Tugi",
   "helpWedLoveYourFeedback": "Oleme tänulikud tagasiside eest",
   "hide": "Peida",
+  "hideMenuBarDescription": "Vaheta süsteemi menüüriba nähtavust",
   "hideOthers": "Peida teised",
   "image": "Pilt",
   "incognitoKeyboard": "Inkognito klaviatuur",
@@ -413,13 +445,18 @@
   "learnMore": "Lisateave",
   "leave": "Lahku",
   "leaving": "Lahkumine...",
+  "legacyGroupMemberNew": "<b>{name}</b> liitus grupiga.",
   "legacyGroupMemberNewMultiple": "<b>{name} </b>ja <b>{count} teist</b> liitusid grupiga.",
+  "legacyGroupMemberNewYouMultiple": "<b>Sina</b> ja <b>{count} teist</b> liitusid grupiga.",
+  "legacyGroupMemberNewYouOther": "<b>Sina</b> ja <b>{other_name}</b> liitusid grupiga.",
   "legacyGroupMemberTwoNew": "<b>{name}</b> ja <b>{other_name}</b> said grupi liikmeks.",
+  "legacyGroupMemberYouNew": "<b>Sa</b> liitusid grupiga.",
   "linkPreviews": "Lingi eelvaated",
   "linkPreviewsDescription": "Näita linkide eelvaateid toetatud URL-ide puhul.",
   "linkPreviewsEnable": "Kas lubada lingi eelvaated",
   "linkPreviewsErrorLoad": "Linki eelvaate laadimine ebaõnnestus",
   "linkPreviewsErrorUnsecure": "Eelvaadet ei laaditud turvamata lingi jaoks",
+  "linkPreviewsFirstDescription": "Kuva eelvaated Linkidele, mida saadad ja vastu võtad. See võib olla kasulik, kuid {app_name} peab eelvaadete näitamiseks ühenduma lingitud veebisaitidega. Saate alati linkide eelvaated {app_name} seadetest välja lülitada.",
   "linkPreviewsSend": "Saada lingi eelvaated",
   "linkPreviewsSendModalDescription": "Lingieelvaadete saatmisel ei pruugi teil olla täielik metakaitse.",
   "linkPreviewsTurnedOff": "Lingi eelvaated on välja lülitatud",
@@ -442,6 +479,7 @@
   "membersActive": "{count, plural, one [# aktiivne liige] other [# aktiivset liiget]}",
   "membersAddAccountIdOrOns": "Lisa konto ID või ONS",
   "membersInvite": "Kutsu sõpru",
+  "membersInviteSend": "{count, plural, one [Saada kutse] other [Saada kutsed]}",
   "membersInviteShareDescription": "Kas soovite jagada grupisõnumite ajalugu koos <b>{name}</b>?",
   "membersInviteShareDescriptionMultiple": "Kas soovite jagada grupisõnumite ajalugu koos <b>{name}</b> ja <b>{count} teistega</b>?",
   "membersInviteShareDescriptionTwo": "Kas soovite jagada grupisõnumite ajalugu koos <b>{name}</b> ja <b>{other_name}</b>?",
@@ -457,6 +495,7 @@
   "messageInfo": "Sõnumi andmed",
   "messageMarkRead": "Märgi loetuks",
   "messageMarkUnread": "Märgi lugemata",
+  "messageNew": "{count, plural, one [Uus sõnum] other [Uued sõnumid]}",
   "messageNewDescriptionDesktop": "Alustage uut vestlust, sisestades oma sõbra Account ID või ONS.",
   "messageNewDescriptionMobile": "Alustage uut vestlust, sisestades oma sõbra Account ID, ONS või skannides nende QR-koodi.",
   "messageNewYouveGot": "{count, plural, one [Sul on uus sõnum.] other [Sul on # uut sõnumit.]}",
@@ -475,6 +514,7 @@
   "messageRequestsNonePending": "Ootel sõnumitaotlused puuduvad",
   "messageRequestsTurnedOff": "<b>{name}</b> on kogukonna vestluste sõnumitaotlused välja lülitanud, te ei saa neile sõnumit saata.",
   "messageSelect": "Vali sõnum",
+  "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "Saatmine nurjus",
   "messageStatusFailedToSync": "Sünkroonimine nurjus",
   "messageStatusSyncing": "Sünkroonimine",
@@ -527,12 +567,17 @@
   "notificationsVibrate": "Vibratsioon",
   "off": "Väljas",
   "okay": "Okei",
+  "on": "Sees",
   "onboardingAccountCreate": "Loo konto",
   "onboardingAccountCreated": "Konto loodud",
   "onboardingAccountExists": "Mul on konto",
+  "onboardingBackAccountCreation": "Te ei saa rohkem tagasi minna. Konto loomise tühistamiseks peab {app_name} sulguma.",
+  "onboardingBackLoadAccount": "Te ei saa rohkem tagasi minna. Konto laadimise peatamiseks peab {app_name} sulguma.",
+  "onboardingBubbleCreatingAnAccountIsEasy": "Konto loomine on kiire, tasuta ja anonüümne {emoji}",
   "onboardingBubbleNoPhoneNumber": "Registreerumiseks ei ole isegi vaja telefoninumbrit.",
   "onboardingBubblePrivacyInYourPocket": "Privaatsus teie taskus.",
   "onboardingBubbleSessionIsEngineered": "{app_name} on loodud teie privaatsuse kaitsmiseks.",
+  "onboardingBubbleWelcomeToSession": "Tere tulemast {app_name}'i {emoji}",
   "onboardingHitThePlusButton": "Vajuta plussnuppu, et alustada vestlust, luua grupp või liituda ametliku kogukonnaga!",
   "onboardingMessageNotificationExplanation": "{app_name} saab teid uutest sõnumitest teavitada kahel viisil.",
   "onboardingPrivacy": "Privaatsuseeskirjad",
@@ -611,6 +656,7 @@
   "recoveryPasswordBannerTitle": "Salvesta oma taastamisparool",
   "recoveryPasswordDescription": "Konto laadimiseks kasutage oma taastamissalasõna uutes seadmetes.<br/><br/>Teie kontot ei saa taastada ilma taastamissalasõnata. Veenduge, et see oleks turvaliselt salvestatud ja ärge jagage seda kellelegi.",
   "recoveryPasswordEnter": "Sisesta oma taastamise parool",
+  "recoveryPasswordErrorLoad": "Taastamise parooli avamisel ilmnes viga.<br/><br/>Palun ekspordi oma logifail ja laadi fail üles Session'i läbi Kasutajatoe, et sellele probleemile lahendus leida.",
   "recoveryPasswordErrorMessageGeneric": "Palun kontrollige oma taastamisparooli ja proovige uuesti.",
   "recoveryPasswordErrorMessageIncorrect": "Mõned teie taastamislause sõnad on valed. Palun kontrollige ja proovige uuesti.",
   "recoveryPasswordErrorMessageShort": "Sisestatud taastamislause ei ole piisavalt pikk. Palun kontrollige ja proovige uuesti.",
@@ -625,6 +671,7 @@
   "recoveryPasswordWarningSendDescription": "See on teie taastamislause. Kui saadate selle kellelegi, on tal täielik juurdepääs teie kontole.",
   "redo": "Tee uuesti",
   "remove": "Eemalda",
+  "removePasswordFail": "Salasõna eemaldamine ebaõnnestus",
   "reply": "Vasta",
   "resend": "Saada uuesti",
   "resolving": "Riigi teabe laadimine...",
@@ -644,6 +691,7 @@
   "searchContacts": "Otsi kontakte",
   "searchConversation": "Otsi vestlust",
   "searchEnter": "Palun sisestage oma otsing.",
+  "searchMatches": "{count, plural, one [{found_count}/# vastest] other [{found_count}/# vastetest]}",
   "searchMatchesNone": "Tulemused puuduvad.",
   "searchMatchesNoneSpecific": "Tulemusi ei leitud otsingule '{query}'",
   "searchMembers": "Otsi liikmeid",
@@ -667,6 +715,7 @@
   "set": "Määra",
   "settingsRestartDescription": "Uute seadete rakendamiseks peate taaskäivitama {app_name}.",
   "share": "Jaga",
+  "shareAccountIdDescription": "Kutsu oma sõber endaga vestlema {app_name} rakenduses jagades enda Account ID nendega.",
   "shareAccountIdDescriptionCopied": "Jaga oma sõpradega seal, kus te tavaliselt suhtlete — seejärel liikuge siia vestlema.",
   "shareExtensionDatabaseError": "Andmebaasi avamisel esines probleem. Palun taaskäivitage rakendus ja proovige uuesti.",
   "show": "Näita",
@@ -674,6 +723,7 @@
   "showLess": "Näita vähem",
   "stickers": "Kleepsud",
   "supportGoTo": "Mine kasutajatoelehele",
+  "systemInformationDesktop": "Süsteemi info: {information}",
   "theContinue": "Jätka",
   "theDefault": "Vaikimisi",
   "theError": "Tõrge",
@@ -685,6 +735,7 @@
   "updateDownloaded": "Värskendus installitud, klõpsa taaskäivitamiseks",
   "updateDownloading": "Allalaaditakse uuendust: {percent_loader}%",
   "updateError": "Ei saa uuendada",
+  "updateErrorDescription": "{app_name} uuendamine ebaõnnestus. Palune avage {session_download_url} ja installige uus versioon käsitsi, seejärel võtke ühendust meie Klienditoega, et sellest probleemist teatada.",
   "updateNewVersion": "Uus versioon {app_name} on saadaval, uuendamiseks puuduta",
   "updateNewVersionDescription": "Uus versioon {app_name} on saadaval. ",
   "updateReleaseNotes": "Mine väljalaskemärkmete juurde",
