--- a/_locales/eu/messages.json
+++ b/_locales/eu/messages.json
@@ -8,6 +8,7 @@
   "accountIdErrorInvalid": "Kontu ID hau baliogabea da. Mesedez, egiaztatu eta saiatu berriro.",
   "accountIdOrOnsEnter": "Sartu Kontu IDa edo ONS",
   "accountIdOrOnsInvite": "Kontu ID edo ONS gonbidatu",
+  "accountIdShare": "Kaixo, ni {app_name} erabiltzen ari naiz guztiz pribatutasuna eta segurtasuna dituen txat zerbitzua erabiliz. Zatoz nirekin! Nire Kontu IDa da<br/><br/>{account_id}<br/><br/>Deskargatu helbide honetan {session_download_url}",
   "accountIdYours": "Zure Kontuaren IDa",
   "accountIdYoursDescription": "Hau zure Kontu ID-a da. Beste erabiltzaileek eskaneatu dezakete zurekin erlazionatzeagatik.",
   "actualSize": "Tamaina Erreala",
@@ -29,7 +30,11 @@
   "adminRemoveAsAdmin": "Administratzaile bezala kendu",
   "adminRemoveCommunityNone": "Ez dago Adminik Komunitate honetan.",
   "adminRemoveFailed": "Ez da posible izan {name} Administrari bezala kentzea.",
+  "adminRemoveFailedMultiple": "<b>{name}</b> eta <b>{count} beste</b> Admin moduan kentzea huts egin du.",
+  "adminRemoveFailedOther": "<b>{name}</b> eta <b>{other_name}</b> Admin moduan kentzea huts egin du.",
   "adminRemovedUser": "<b>{name}</b> Admin izateko kendu dute.",
+  "adminRemovedUserMultiple": "<b>{name}</b> eta <b>{count} beste</b> Admin moduan kendu dituzte.",
+  "adminRemovedUserOther": "<b>{name}</b> eta <b>{other_name}</b> Admin moduan kendu dituzte.",
   "adminSendingPromotion": "Admin promozioa bidaltzen",
   "adminSettings": "Administratzailearen Ezarpenak",
   "adminTwoPromotedToAdmin": "<b>{name}</b> eta <b>{other_name}</b> Admin izendatu dira.",
@@ -185,7 +190,6 @@
   "communityInvitation": "Komunitate gonbidapena",
   "communityJoin": "Komunitatean sartu",
   "communityJoinDescription": "Ziur zaude {community_name} batu nahi duzula?",
-  "communityJoinError": "Hutsa izan da {community_name}n Sartzen",
   "communityJoinOfficial": "Edo batu hauetara...",
   "communityJoined": "Komunitatean sartuta",
   "communityJoinedAlready": "Dagoeneko komunitate honetako kidea zara.",
@@ -211,6 +215,7 @@
   "conversationsAddedToHome": "Etxeko pantailara gehituta",
   "conversationsAudioMessages": "Audio Mezua",
   "conversationsAutoplayAudioMessage": "Autoplay Audio Messages",
+  "conversationsAutoplayAudioMessageDescription": "Autoplay consecutively sent audio messages",
   "conversationsBlockedContacts": "Blocked Contacts",
   "conversationsCommunities": "Komunitateak",
   "conversationsDelete": "Elkarrizketa Ezabatu",
@@ -293,6 +298,7 @@
   "disappearingMessagesSetYou": "<b>Zuk</b> mezuak desagerrarazi dituzu {time} igaro ondoren {disappearing_messages_type} izan direnean.",
   "disappearingMessagesTimer": "Erlojua",
   "disappearingMessagesTurnedOff": "<b>{name}</b> mezu desagerkorrak desaktibatu ditu. Berak bidalitako mezuak ez dira gehiago desagertuko.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b>k mezu desagerkorrak <b>desaktibatu</b> ditu.",
   "disappearingMessagesTurnedOffYou": "<b>Zuk</b> itzaltu dituzu <b>desagertzen diren mezuak</b>. Bidaltzen dituzun mezuak ez dira gehiago desagertuko.",
   "disappearingMessagesTypeRead": "irakurrita",
   "disappearingMessagesTypeSent": "bidalia",
@@ -326,6 +332,12 @@
   "emojiReactsClearAll": "Ziur zaude {emoji} guztiak ezabatu nahi dituzula?",
   "emojiReactsCoolDown": "Poliki ibili! Emoji erreakzio gehiegi bidali dituzu. Saiatu berriro laster",
   "emojiReactsCountOthers": "{count, plural, one [Eta # beste batek {emoji} erreakzioa bidali dio mezu honi.] other [Eta # beste batzuk {emoji} erreakzioa bidali diote mezu honi.]}",
+  "emojiReactsHoverNameDesktop": "{name}(e)k {emoji_name}(e)kin erreakzionatu du",
+  "emojiReactsHoverNameTwoDesktop": "{name} eta {other_name}k {emoji_name}(e)kin erreakzionatu dute",
+  "emojiReactsHoverTwoNameMultipleDesktop": "{name} eta <span>{count} bestek</span> {emoji_name}-rekin erreakzionatu dute",
+  "emojiReactsHoverYouNameDesktop": "Zuk {emoji_name}-rekin erreakzionatu duzu",
+  "emojiReactsHoverYouNameMultipleDesktop": "Zuk eta <span>{count} beste</span> {emoji_name}-rekin erreakzionatu duzue",
+  "emojiReactsHoverYouNameTwoDesktop": "Zuk eta {name} (e)k {emoji_name}rekin erreakzionatu duzue",
   "emojiReactsNotification": "Zure mezura {emoji} erreakzionatu du",
   "enable": "Gaitu",
   "errorConnection": "Mesedez, egiaztatu zure internet konexioa eta saiatu berriro.",
@@ -361,9 +373,9 @@
   "groupInviteSending": "Gonbidapena bidaltzen",
   "groupInviteSent": "Gonbidapena bidalita",
   "groupInviteSuccessful": "Talde gonbidapena arrakastatsua",
-  "groupInviteVersion": "Erabiltzaileek {version} bertsioa edo altuagoa behar dute gonbidapenak jasotzeko",
   "groupInviteYou": "<b>Zuk</b> taldera batzeko gonbidapena jaso zenuen.",
   "groupLeave": "Taldetik Irten",
+  "groupLeaveDescription": "Ziur zaude {group_name} utzi nahi duzula?",
   "groupLeaveErrorFailed": "Hutsa izan da {group_name} uzten",
   "groupLegacyBanner": "Taldeak eguneratu dira, sortu talde berria eguneratzeko. Talde zaharren funtzionalitatea {date}-tik aurrera degradatuko da.",
   "groupMemberLeft": "<b>{name}</b>(e)k taldea utzi du.",
@@ -487,6 +499,7 @@
   "messages": "Mezuak",
   "minimize": "Minimizatu",
   "next": "Hurrengoa",
+  "nicknameDescription": "Choose a nickname for <b>{name}</b>. This will appear to you in your one-to-one and group conversations.",
   "nicknameEnter": "Sartu ezizena",
   "nicknameRemove": "Goitizena kendu",
   "nicknameSet": "Ezizen bat ezarri",
@@ -532,6 +545,8 @@
   "onboardingAccountCreate": "Kontua sortu",
   "onboardingAccountCreated": "Kontua sortuta",
   "onboardingAccountExists": "Kontu bat daukat",
+  "onboardingBackAccountCreation": "Ezin duzu gehiago atzera egin. Zure kontuaren sorkuntza bertan behera uzteko, {app_name}-ek itxi behar du.",
+  "onboardingBackLoadAccount": "Ezin duzu gehiago atzera egin. Zure kontuaren kargatzea gelditzeko, {app_name}-ek itxi behar du.",
   "onboardingBubbleNoPhoneNumber": "Ez duzu telefono zenbakirik behar izena emateko.",
   "onboardingBubblePrivacyInYourPocket": "Pribatutasuna zure poltsikoan.",
   "onboardingBubbleSessionIsEngineered": "{app_name} zure pribatutasuna babesteko diseinatua dago.",
@@ -570,17 +585,23 @@
   "passwordSet": "Pasahitza ezarri",
   "passwordSetDescription": "Zure pasahitza ezarri da. Gorde seguru batean.",
   "paste": "Itsatsi",
+  "permissionMusicAudioDenied": "{app_name}(e)k musika eta audio sarbidea behar du fitxategiak, musika eta audioak bidaltzeko, baina behin betiko ukatu da. Ezarpenak ukitu -> Baimenak, eta aktibatu \"Musika eta audioak\".",
   "permissionsAppleMusic": "{app_name}(e)k Apple Music erabiltzea behar du hedabide eranskinak erreproduzitzeko.",
   "permissionsAutoUpdate": "Auto Update",
   "permissionsAutoUpdateDescription": "Automatically check for updates on startup",
+  "permissionsCameraDenied": "{app_name}(e)k kameraren sarbidea behar du argazkiak eta bideoak ateratzeko, baina behin betiko ukatu da. Ezarpenak ukitu -> Baimenak, eta aktibatu \"Kamera\".",
   "permissionsFaceId": "{app_name}-ko pantaila blokeatzearen funtzioak Face ID erabiltzen du.",
   "permissionsKeepInSystemTray": "Aplikazioa Sistemako Erretiluan Gorde",
   "permissionsKeepInSystemTrayDescription": "{app_name}(e)k lanean jarraitzen du atzealdean leihoa ixten duzunean",
   "permissionsLibrary": "{app_name}(e)k argazki liburutegira sartzeko baimena behar du jarraitzeko. Sarbidea aktiba dezakezu iOS-eko ezarpenetan.",
   "permissionsMicrophone": "Mikrofonoa",
+  "permissionsMicrophoneAccessRequired": "{app_name}(e)k mikrofonoaren sarbidea behar du deiak egiteko eta audio mezuak bidaltzeko, baina behin betiko ukatu da. Sakatu ezarpenak -> Baimenak, eta piztu \"Mikrofonoa\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Mikrofonoaren sarbidea gaitu dezakezu {app_name}-eko pribatutasun ezarpenetan",
   "permissionsMicrophoneAccessRequiredIos": "{app_name}(e)k mikrofonoaren sarbidea behar du deiak egiteko eta audio mezuak grabatzeko.",
+  "permissionsMusicAudio": "{app_name}(e)k musika eta audio sarbidea behar du fitxategiak, musika eta audioak bidaltzeko.",
   "permissionsRequired": "Baimena beharrezkoa",
+  "permissionsStorageDenied": "{app_name}(e)k argazki bilduma bisitatzeko sarbidea behar du argazkiak eta bideoak bidaltzeko, baina behin betiko ukatu da. Ezarpenak ukitu -> Baimenak, eta aktibatu \"Argazkiak eta bideoak\".",
+  "permissionsStorageDeniedLegacy": "{app_name}(e)k biltegiratze sarbidea behar du erantsitako fitxategiak bidaltzeko eta gordetzeko. Ezarpenak ukitu -> Baimenak, eta aktibatu \"Biltegiratzea\".",
   "permissionsStorageSave": "{app_name}(e)k biltegirako sarbidea behar du eranskinak eta hedabideak gordetzeko.",
   "permissionsStorageSaveDenied": "{app_name}(e)k biltegirako sarbidea behar du argazkiak eta bideoak gordetzeko, baina behin betiko ukatu da. Mesedez jarraitu aplikazioa ezarpenetara, aukeratu \"Permissions\", eta aktibatu \"Storage\".",
   "permissionsStorageSend": "{app_name}(e)k biltegirako sarbidea behar du argazkiak eta bideoak bidaltzeko.",
@@ -613,6 +634,7 @@
   "recoveryPasswordBannerTitle": "Gorde zure Recovery Password",
   "recoveryPasswordDescription": "Erabili zure berreskurapen pasahitza zure kontua kargatzeko gailu berrietan.<br/><br/>Zure kontua ezin da berreskuratu berreskurapen pasahitzik gabe. Ziurtatu leku seguru batean gordeta dagoela eta ez partekatu inorekin.",
   "recoveryPasswordEnter": "Sartu zure berreskuratze pasahitza",
+  "recoveryPasswordErrorLoad": "Errore bat gertatu da zure berreskuratze pasahitza kargatzean.<br/><br/>Mesedez esportatu zure erregistroak, eta igo fitxategia Session-en Laguntza Mahaiaren bidez arazo hau konpontzeko.",
   "recoveryPasswordErrorMessageGeneric": "Mesedez, egiaztatu zure berreskurapen pasahitza eta saiatu berriro.",
   "recoveryPasswordErrorMessageIncorrect": "Zure berreskurapen pasahitzean hitz batzuk okerrak dira. Mesedez, egiaztatu eta saiatu berriro.",
   "recoveryPasswordErrorMessageShort": "Sartu duzun Berreskuratze Pasahitza ez da nahikoa luzea. Mesedez, egiaztatu eta saiatu berriro.",
@@ -669,8 +691,10 @@
   "set": "Ezarri",
   "settingsRestartDescription": "{app_name} berrabiarazi behar duzu zure ezarpen berriak aplikatzeko.",
   "share": "Partekatu",
+  "shareAccountIdDescription": "Gonbida ezazu zure laguna zure Kontu IDa partekatuz {app_name}-en zurekin txateatzeko.",
   "shareAccountIdDescriptionCopied": "Partekatu zure lagunekin non normalean hitz egiten duzun — gero ekarri elkarrizketa hona.",
   "shareExtensionDatabaseError": "Hautaketa Datu-basea irekitzeko arazo bat dago. Mesedez, berrabiarazi aplikazioa eta saiatu berriro.",
+  "shareToSession": "{app_name}-ra Partekatu",
   "show": "Erakutsi",
   "showAll": "Denak erakutsi",
   "showLess": "Gutxiago erakutsi",
@@ -687,6 +711,7 @@
   "updateDownloaded": "Eguneraketa instalatuta, sakatu berrabiarazteko",
   "updateDownloading": "Eguneratzea deskargatzen: {percent_loader}%",
   "updateError": "Cannot Update",
+  "updateErrorDescription": "{app_name}(e)k huts egin du eguneratzean. Mesedez joan {session_download_url} helbidera eta eskuz instalatu bertsio berria, ondoren jar zaitez harremanetan gure Laguntza Zentroarekin arazo honen berri emateko.",
   "updateNewVersion": "{app_name}(e)n bertsio berri bat erabilgarri dago, sakatu eguneratzeko",
   "updateNewVersionDescription": "Bertsio berri bat erabilgarri dago {app_name}-erako.",
   "updateReleaseNotes": "Joan Azken Oharrak ikustera",
