--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -66,6 +66,7 @@
   "attachmentsDownload": "Lataa liite",
   "attachmentsDuration": "Kesto:",
   "attachmentsErrorLoad": "Virhe tiedostoa liitettäessä",
+  "attachmentsErrorMediaSelection": "Liitteen valinta epäonnistui",
   "attachmentsErrorNoApp": "Median valintaan ei löytynyt sovellusta.",
   "attachmentsErrorNotSupported": "Tiedostotyyppi ei ole tuettu.",
   "attachmentsErrorNumber": "Et voi lähettää yli 32 kuva- ja videotiedostoa kerralla.",
@@ -155,11 +156,13 @@
   "cameraGrantAccessDescription": "{app_name} tarvitsee kameran käyttöoikeuden kuvien ja videoiden ottamiseksi tai QR-koodien skannaamiseksi.",
   "cameraGrantAccessQr": "{app_name} tarvitsee kameran käyttöoikeuden skannatakseen QR- koodeja",
   "cancel": "Peruuta",
+  "changePasswordFail": "Salasanan vaihtaminen epäonnistui",
   "clear": "Tyhjennä",
   "clearAll": "Tyhjennä kaikki",
   "clearDataAll": "Tyhjennä kaikki tiedot",
   "clearDataAllDescription": "Tämä poistaa viestisi ja yhteystietosi pysyvästi. Haluatko poistaa tietosi vain tältä laitteelta vai myös verkosta?",
   "clearDataError": "Tietoja ei poistettu",
+  "clearDataErrorDescription": "{count, plural, one [Tietoja ei poistettu # Service Nodesta. Service Node ID: {service_node_id}.] other [Dataa ei poistettu # palvelusolmusta. Palvelusolmujen tunnukset: {service_node_id}.]}",
   "clearDataErrorDescriptionGeneric": "Tapahtui tuntematon virhe, ja tietojasi ei poistettu. Haluatko poistaa tiedot vain tältä laitteelta?",
   "clearDevice": "Tyhjennä laite",
   "clearDeviceAndNetwork": "Tyhjennä laite ja verkko",
@@ -184,7 +187,6 @@
   "communityInvitation": "Yhteisökutsu",
   "communityJoin": "Liity yhteisöön",
   "communityJoinDescription": "Haluatko varmasti liittyä yhteisöön {community_name}?",
-  "communityJoinError": "Liittyminen yhteisöön {community_name} epäonnistui",
   "communityJoinOfficial": "Tai liity johonkin näistä...",
   "communityJoined": "Liitytty yhteisöön",
   "communityJoinedAlready": "Olet jo jäsen tässä yhteisössä.",
@@ -210,6 +212,7 @@
   "conversationsAddedToHome": "Lisätty kotiruudulle",
   "conversationsAudioMessages": "Ääniviestit",
   "conversationsAutoplayAudioMessage": "Toista ääniviestit automaattisesti",
+  "conversationsAutoplayAudioMessageDescription": "Toista peräkkäisesti lähetetyt ääniviestit automaattisesti",
   "conversationsBlockedContacts": "Estetyt yhteystiedot",
   "conversationsCommunities": "Yhteisöt",
   "conversationsDelete": "Poista keskustelu",
@@ -235,6 +238,7 @@
   "copy": "Kopioi",
   "create": "Luo",
   "cut": "Leikkaa",
+  "databaseErrorGeneric": "Tapahtui tietokantavirhe.<br/><br/>Vie sovelluslokisi vianselvitystä varten. Jollei tämä onnistu, asenna {app_name} uudelleen ja palauta tilisi.<br/><br/>Varoitus: Tämän seurauksena kaikki kahta viikkoa vanhemmat viestit, liitteet ja tilitiedot menetetään.",
   "databaseErrorTimeout": "Huomasimme, että {app_name} käynnistyy hitaasti.<br/><br/>Voit jatkaa odottamista, viedä laitteesi lokit jaettavaksi vianmäärityksessä tai yrittää käynnistää Sessionin uudelleen.",
   "databaseErrorUpdate": "Sovellustietokanta ei ole yhteensopiva tämän {app_name} version kanssa. Asenna sovellus uudelleen ja palauta tilisi, jotta voit luoda uuden tietokannan ja jatkaa {app_name} käyttöä.<br/><br/>Varoitus: Tämä johtaa yli kaksi viikkoa vanhojen viestien ja liitteiden menetykseen.",
   "databaseOptimizing": "Optimoidaan tietokanta",
@@ -253,6 +257,9 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Vanha",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Katoavien viestien alkuperäinen versio.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> asetti viestien katoamisajan: <b>{time}</b>",
+  "deleteAfterLegacyGroupsGroupCreation": "Odota kunnes ryhmä on luotu...",
+  "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Ryhmän päivitys epäonnistui",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Sinulla ei ole oikeutta poistaa muiden viestejä",
   "deleteMessageConfirm": "Haluatko varmasti poistaa tämän viestin?",
   "deleteMessageDeletedGlobally": "Tämä viesti on poistettu",
   "deleteMessageDeletedLocally": "Tämä viesti on poistettu tästä laitteesta",
@@ -276,11 +283,14 @@
   "disappearingMessagesDeleteType": "Poista tyyppi",
   "disappearingMessagesDescription": "Asetus koskee kaikkia keskustelun jäseniä.",
   "disappearingMessagesDescription1": "Asetus koskee lähettämiäsi viestejä tässä keskustelussa.",
+  "disappearingMessagesDescriptionGroup": "Asetus koskee kaikkia keskustelun jäseniä.<br/>Vain ryhmän ylläpitäjät voivat muuttaa asetusta.",
   "disappearingMessagesDisappear": "Katoa, kun {disappearing_messages_type} - {time}",
   "disappearingMessagesDisappearAfterRead": "Katoa, kun luettu",
   "disappearingMessagesDisappearAfterReadDescription": "Viestit poistuvat, kun ne on luettu.",
+  "disappearingMessagesDisappearAfterReadState": "Katoa kun luettu - {time}",
   "disappearingMessagesDisappearAfterSend": "Katoa lähetyksen jälkeen",
   "disappearingMessagesDisappearAfterSendDescription": "Viestit poistuvat, kun ne on lähetetty.",
+  "disappearingMessagesDisappearAfterSendState": "Katoa kun lähetetty - {time}",
   "disappearingMessagesFollowSetting": "Seuraa asetusta",
   "disappearingMessagesFollowSettingOff": "Lähetetyt viestit eivät enää katoa. Haluatko varmasti poistaa katoavat viestit käytöstä?",
   "disappearingMessagesFollowSettingOn": "Aseta viestisi katoamaan kun on kulunut <b>{time}</b>, kun <b>{disappearing_messages_type}</b>?",
@@ -292,6 +302,7 @@
   "disappearingMessagesTimer": "Ajastin",
   "disappearingMessagesTurnedOff": "<b>{name}</b> on poistanut katoavat viestit käytöstä. Viestit eivät enää katoa.",
   "disappearingMessagesTurnedOffYou": "<b>Sinä</b> poistit <b>katoavat viestit</b>. Lähettämäsi viestit eivät enää katoa.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Sinä</b> poistit <b>katoavat viestit</b> käytöstä.",
   "disappearingMessagesTypeRead": "luettu",
   "disappearingMessagesTypeSent": "lähetetty",
   "disappearingMessagesUpdated": "<b>{admin_name} <> päivitti katoavien viestien asetukset.",
@@ -359,15 +370,24 @@
   "groupInviteSending": "Kutsua lähetetään",
   "groupInviteSent": "Kutsu on lähetetty",
   "groupInviteSuccessful": "Ryhmän kutsu onnistui",
-  "groupInviteVersion": "Käyttäjillä on oltava versio {version} tai uudempi vastaanottaakseen kutsuja",
   "groupInviteYou": "<b>Sinut</b> kutsuttiin liittymään ryhmään.",
+  "groupInviteYouAndMoreNew": "<b>Sinä</b> ja <b>{count} muuta</b> liittyi ryhmään.",
+  "groupInviteYouAndOtherNew": "<b>Sinä</b> ja <b>{other_name}</b> liittyi ryhmään.",
   "groupLeave": "Poistu ryhmästä",
+  "groupLeaveDescription": "Haluatko varmasti poistua yhteisöstä {group_name}?",
   "groupLeaveErrorFailed": "Poistuminen ryhmästä {group_name} epäonnistui",
   "groupLegacyBanner": "Ryhmäominaisuuksia päivitetty. Käytä muutoksia luomalla uusi ryhmä. Vanhat ominaisuudet poistuvat {date}.",
   "groupMemberLeft": "<b>{name}</b> poistui ryhmästä.",
   "groupMemberLeftMultiple": "<b>{name}</b> ja <b>{count} muuta</b> poistui ryhmästä.",
   "groupMemberLeftTwo": "<b>{name}</b> ja <b>{other_name}</b> poistui ryhmästä.",
   "groupMemberNew": "<b>{name}</b> liittyi ryhmään.",
+  "groupMemberNewHistory": "<b>{name}</b> kutsuttiin ryhmään. Keskusteluhistoria jaettiin.",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> ja <b>{count} muuta</b> kutsuttiin ryhmään. Keskusteluhistoria jaettiin.",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> ja <b>{other_name}</b> kutsuttiin ryhmään. Keskusteluhistoria jaettiin.",
+  "groupMemberNewMultiple": "<b>{name}</b> ja <b>{count} muuta</b> kutsuttiin ryhmään.",
+  "groupMemberNewTwo": "<b>{name}</b> ja <b>{other_name}</b> kutsuttiin ryhmään.",
+  "groupMemberNewYouHistoryMultiple": "<b>Sinä</b> ja <b>{count} muuta</b> kutsuttiin ryhmään. Keskusteluhistoria jaetaan.",
+  "groupMemberNewYouHistoryTwo": "<b>Sinä</b> ja <b>{name}</b> kutsuttiin ryhmään. Keskusteluhistoria jaetaan.",
   "groupMemberYouLeft": "<b>Sinä</b> poistuit ryhmästä.",
   "groupMembers": "Ryhmän jäsenet",
   "groupMembersNone": "Ryhmässä ei ole muita jäseniä.",
@@ -380,6 +400,8 @@
   "groupNoMessages": "Sinulla ei ole viestejä käyttäjältä <b>{group_name}</b>. Lähetä viesti aloittaaksesi keskustelun!",
   "groupOnlyAdmin": "Olet ainoa ylläpitäjä ryhmässä <b>{group_name}</b>.<br/><br/>Ryhmän jäseniä ja asetuksia ei voi muuttaa ilman ylläpitäjää.",
   "groupPromotedYou": "<b>Sinut</b> ylennettiin ylläpitäjäksi.",
+  "groupPromotedYouMultiple": "<b>Sinä</b> ja <b>{count} muuta</b> ylennettiin ylläpitäjiksi.",
+  "groupPromotedYouTwo": "<b>Sinä</b> ja <b>{name}</b> ylennettiin ylläpitäjiksi.",
   "groupRemoveDescription": "Haluatko poistaa <b>{name}</b> ryhmästä <b>{group_name}</b>?",
   "groupRemoveDescriptionMultiple": "Haluatko poistaa <b>{name}</b> ja <b>{count} muuta</b> ryhmästä <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Haluatko poistaa <b>{name}</b> ja <b>{other_name}</b> ryhmästä <b>{group_name}</b>?",
@@ -387,6 +409,8 @@
   "groupRemovedMultiple": "<b>{name}</b> ja <b>{count} muuta</b> poistettiin ryhmästä.",
   "groupRemovedTwo": "<b>{name}</b> ja <b>{other_name}</b> poistettiin ryhmästä.",
   "groupRemovedYou": "Sinut poistettiin ryhmästä <b>{group_name}.</b>",
+  "groupRemovedYouMultiple": "<b>Sinä</b> ja <b>{count} muuta</b> poistettiin ryhmästä.",
+  "groupRemovedYouTwo": "<b>Sinä</b> ja <b>{other_name}</b> poistettiin ryhmästä.",
   "groupSetDisplayPicture": "Aseta ryhmän näyttökuva",
   "groupUnknown": "Tuntematon ryhmä",
   "groupUpdated": "Ryhmä päivitetty",
@@ -397,6 +421,7 @@
   "helpReportABugExportLogs": "Vie lokitiedot",
   "helpReportABugExportLogsDescription": "Vie lokitiedot ja lähetä tiedosto {app_name}'s Help Desk -palvelusta.",
   "helpReportABugExportLogsSaveToDesktop": "Tallenna työpöydälle",
+  "helpReportABugExportLogsSaveToDesktopDescription": "Tallenna tämä tiedosto työpöydällesi ja jaa se sitten {app_name}in kehittäjille.",
   "helpSupport": "Tue",
   "helpWedLoveYourFeedback": "Haluaisimme kuulla mielipiteesi",
   "hide": "Piilota",
@@ -412,6 +437,7 @@
   "leave": "Poistu",
   "leaving": "Poistutaan...",
   "legacyGroupMemberNewMultiple": "<b>{name}</b> ja <b>{count} muuta</b> liittyi ryhmään.",
+  "legacyGroupMemberNewYouMultiple": "<b>Sinä</b> ja <b>{count} muuta</b> liittyi ryhmään.",
   "legacyGroupMemberTwoNew": "<b>{name}</b> ja <b>{other_name}</b> liittyi ryhmään.",
   "linkPreviews": "Linkkien esikatselut",
   "linkPreviewsDescription": "Näytä linkin esikatselut tuetuille URL-osoitteille.",
@@ -427,8 +453,11 @@
   "loadAccountProgressMessage": "Ladataan tiliäsi",
   "loading": "Ladataan...",
   "lockApp": "Lukitse sovellus",
+  "lockAppDescription": "Vaadi {app_name}in avaukseen sormenjälki, PIN, kuvio tai salasana.",
+  "lockAppDescriptionIos": "Vaadi {app_name}in avaukseen Touch ID, Face ID tai pääsykoodi.",
   "lockAppEnablePasscode": "Pääsykoodi on otettava iOS:n asetuksista käyttöön näytön lukituksen käyttämiseksi.",
   "lockAppLocked": "{app_name} on lukittu",
+  "lockAppQuickResponse": "Pikavastaus ei ole käytettävissä {app_name}in ollessa lukittu!",
   "lockAppStatus": "Lukituksen tila",
   "lockAppUnlock": "Avaa napauttamalla",
   "lockAppUnlocked": "{app_name} on avattu",
@@ -448,6 +477,7 @@
   "messageEmpty": "Viesti on tyhjä.",
   "messageErrorDelivery": "Viestin toimitus epäonnistui",
   "messageErrorLimit": "Viestin suurin sallittu pituus saavutettu",
+  "messageErrorOld": "Vastaanotettiin viesti, joka on salattu vanhalla {app_name}-versiolla, jota ei enää tueta. Pyydä lähettäjää päivittämään uusimpaan versioon ja lähettämään viesti sen jälkeen uudelleen.",
   "messageErrorOriginal": "Alkuperäistä viestiä ei löytynyt",
   "messageInfo": "Viestin tiedot",
   "messageMarkRead": "Merkitse luetuksi",
@@ -501,6 +531,8 @@
   "notificationsFastModeDescription": "Uusista viesteistä ilmoitetaan luotettavasti ja viiveettä Googlen ilmoituspalvelinten avulla.",
   "notificationsFastModeDescriptionIos": "Uusista viesteistä ilmoitetaan luotettavasti ja viiveettä Applen ilmoituspalvelinten avulla.",
   "notificationsGoToDevice": "Järjestelmän ilmoitusasetukset",
+  "notificationsHeaderAllMessages": "Ilmoitukset - Kaikki",
+  "notificationsHeaderMentionsOnly": "Ilmoitukset - Vain maininnat",
   "notificationsIosGroup": "{name} to {conversation_name}",
   "notificationsIosRestart": "Olet saattanut saada viesteja laitteesi {device} käynnistyessä uudelleen.",
   "notificationsLedColor": "LED:in väri",
@@ -522,6 +554,7 @@
   "notificationsVibrate": "Värinä",
   "off": "Pois",
   "okay": "Okay",
+  "on": "Käytössä",
   "onboardingAccountCreate": "Luo tili",
   "onboardingAccountCreated": "Tili luotu",
   "onboardingAccountExists": "Minulla on tili",
@@ -544,10 +577,12 @@
   "open": "Avaa",
   "other": "Muu",
   "passwordChange": "Vaihda salasana",
+  "passwordChangeDescription": "Vaihda {app_name}in avaukseen käytettävä salasana.",
   "passwordChangedDescription": "Salasanasi on vaihdettu. Pidä se turvassa.",
   "passwordConfirm": "Vahvista salasana",
   "passwordCreate": "Luo salasana",
   "passwordCurrentIncorrect": "Nykyinen salasanasi on virheellinen.",
+  "passwordDescription": "Vaadi {app_name}in avaukseen salasana.",
   "passwordEnter": "Syötä salasana",
   "passwordEnterNew": "Syötä uusi salasana",
   "passwordError": "Salasana voi sisältää vain kirjaimia, numeroita tai symboleja",
@@ -561,9 +596,11 @@
   "passwordSet": "Aseta salasana",
   "passwordSetDescription": "Salasanasi on asetettu. Pidä se turvassa.",
   "paste": "Liitä",
+  "permissionMusicAudioDenied": "{app_name} tarvitsee pääsyn musiikkiin ja ääniin, jotta se voi lähettää tiedostoja, musiikkia ja ääntä, mutta pääsy on pysyvästi estetty. Napauta Asetukset -> Luvat ja salli \"Musiikki ja äänet\".",
   "permissionsAppleMusic": "{app_name} tarvitsee käyttää Apple Musiikkia mediasisältöjen toistamiseen.",
   "permissionsAutoUpdate": "Automaattinen päivitys",
   "permissionsAutoUpdateDescription": "Tarkista päivitykset automaattisesti käynnistäessä",
+  "permissionsCameraDenied": "{app_name} tarvitsee kameran käyttöoikeuden kuvien ja videoiden ottamiseksi, mutta oikeus on evätty pysyvästi. Napauta Asetukset -> Käyttöoikeudet ja kytke \"Kamera\" päälle.",
   "permissionsFaceId": "Näytön lukitusominaisuus {app_name} käyttää Face ID:tä.",
   "permissionsKeepInSystemTray": "Säilytä tehtäväpalkin ilmoitusalueella",
   "permissionsKeepInSystemTrayDescription": "{app_name} pysyy käynnissä taustalla, kun suljet ikkunan",
@@ -571,6 +608,7 @@
   "permissionsMicrophone": "Mikrofoni",
   "permissionsMicrophoneAccessRequiredDesktop": "Voit antaa mikrofonin käyttöoikeuden {app_name}:n yksityisyysasetuksista",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} tarvitsee mikrofonin käyttöoikeuden puheluiden soittamiseen ja ääniviestien nauhoittamiseen.",
+  "permissionsMusicAudio": "{app_name} tarvitsee musiikki- ja äänioikeudet voidakseen lähettää tiedostoja, musiikkia ja ääntä.",
   "permissionsRequired": "Tarvitaan käyttöoikeus",
   "permissionsStorageSave": "{app_name} tarvitsee tallennustilan käyttöoikeuden liitteiden ja median tallentamiseksi.",
   "permissionsStorageSaveDenied": "{app_name} tarvitsee tallennustilan käyttöoikeuden kuvien ja videoiden tallentamiseksi, mutta käyttöoikeus on evätty pysyvästi. Jatka sovellusasetuksiin, valitse \"Käyttöoikeudet\" ja ota käyttöön \"Tallennustila\".",
@@ -604,6 +642,7 @@
   "recoveryPasswordBannerTitle": "Tallenna palautussalasanasi",
   "recoveryPasswordDescription": "Käytä palautussalasanaa ladataksesi tilisi uusiin laitteisiin.<br /><br />Tiliäsi ei voida palauttaa ilman palautussalasanaa. Varmista, että se on tallennettu turvallisesti ja älä jaa sitä kenellekään.",
   "recoveryPasswordEnter": "Syötä palautussalasana",
+  "recoveryPasswordErrorLoad": "Virhe palautelauseen latauksessa.<br/><br/>Ratkaistaksesi tämän ongelman, voit viedä lokitiedot ja lähettää sen Session Help Deskiin.",
   "recoveryPasswordErrorMessageGeneric": "Tarkista palautuslauseesi ja yritä uudelleen.",
   "recoveryPasswordErrorMessageIncorrect": "Jotkin palautuslausekkeesi sanat ovat virheelliset. Tarkista ja yritä uudelleen.",
   "recoveryPasswordErrorMessageShort": "Syöttämäsi palautusavain on liian lyhyt. Tarkista ja yritä uudelleen.",
@@ -618,6 +657,7 @@
   "recoveryPasswordWarningSendDescription": "Tämä on palautussalasanasi. Jos lähetät sen jollekulle, he saavat täyden pääsyn tilillesi.",
   "redo": "Tee uudelleen",
   "remove": "Poista",
+  "removePasswordFail": "Salasanan poisto epäonnistui",
   "reply": "Vastaa",
   "resend": "Lähetä uudelleen",
   "resolving": "Ladataan maatietoja...",
