--- a/_locales/fil/messages.json
+++ b/_locales/fil/messages.json
@@ -185,7 +185,6 @@
   "communityInvitation": "Pagimbita sa Komunidad",
   "communityJoin": "Sumali sa Community",
   "communityJoinDescription": "Sigurado ka bang nais mong sumali sa {community_name} ?",
-  "communityJoinError": "Nabigo sa pagsali sa {community_name}",
   "communityJoinOfficial": "O sumali sa isa sa mga ito...",
   "communityJoined": "Sumali sa Community",
   "communityJoinedAlready": "Isa ka nang miyembro ng grupong ito.",
@@ -211,6 +210,7 @@
   "conversationsAddedToHome": "Naidagdag sa home screen",
   "conversationsAudioMessages": "Audio Messages",
   "conversationsAutoplayAudioMessage": "I-autoplay ang Mga Mensaheng Audio",
+  "conversationsAutoplayAudioMessageDescription": "I-autoplay ang magkakasunod na mensaheng audio",
   "conversationsBlockedContacts": "Mga Naka-block na Contact",
   "conversationsCommunities": "Mga Komunidad",
   "conversationsDelete": "Burahin ang mga mensahe",
@@ -361,9 +361,9 @@
   "groupInviteSending": "Sending invite",
   "groupInviteSent": "Naipadala ang imbitasyon",
   "groupInviteSuccessful": "Matagumpay ang paanyaya ng grupo",
-  "groupInviteVersion": "Users must have version {version} or higher to receive invitations",
   "groupInviteYou": "Ikaw ay naimbitahan na sumali sa grupo.",
   "groupLeave": "Iwanan ang grupo",
+  "groupLeaveDescription": "Sigurado ka bang nais mong umalis sa {group_name} ?",
   "groupLeaveErrorFailed": "Nabigo sa pag-alis sa {group_name}",
   "groupLegacyBanner": "Na-upgrade na ang mga grupo, lumikha ng bagong grupo para maisagawa ang upgrade. Ang lumang functionality ng grupo ay bababa mula {date}.",
   "groupMemberLeft": "Umalis na si <b>{name} <\\/b> sa grupo.",
