--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -29,7 +29,11 @@
   "adminRemoveAsAdmin": "एडमिन के रूप में हटाएं",
   "adminRemoveCommunityNone": "इस Community में कोई Admins नहीं हैं।",
   "adminRemoveFailed": "{name} को एडमिन के रूप में हटाने में विफल।",
+  "adminRemoveFailedMultiple": "<b>{name}</b> और <b>{count} अन्य</b> को व्यवस्थापक पद से हटाने में विफल |",
+  "adminRemoveFailedOther": "<b>{name}</b> और <b>{other_name}</b> व्यवस्थापक पद  से हटाने में विफल |",
   "adminRemovedUser": "<b>{name}</b> को Admin से हटा दिया गया।",
+  "adminRemovedUserMultiple": "<b>{name}</b> और <b>{count} अन्य</b> को व्यवस्थापक पद से हटा दिया गया |",
+  "adminRemovedUserOther": "<b>{name}</b> and <b>{other_name}</b> को व्यवस्थापक पद से हटा दिया गया |",
   "adminSendingPromotion": "एडमिन प्रमोशन भेजा जा रहा है",
   "adminSettings": "एडमिन सेटिंग्स",
   "adminTwoPromotedToAdmin": "<b>{name}</b> और <b>{other_name}</b> को Admin बनाया गया।",
@@ -66,6 +70,7 @@
   "attachmentsDownload": "अनुलग्नक डाउनलोड करें",
   "attachmentsDuration": "अवधि:",
   "attachmentsErrorLoad": "फ़ाइल संलग्न करने में त्रुटि",
+  "attachmentsErrorMediaSelection": "अटैचमेंट का चयन करने में विफल",
   "attachmentsErrorNoApp": "मीडिया चुनने के लिए कोई ऐप्लिकेशन नहीं मिल रहा है.",
   "attachmentsErrorNotSupported": "इस प्रकार की फ़ाइल समर्थित नहीं है।",
   "attachmentsErrorNumber": "एक बार में 32 से अधिक छवि और वीडियो फाइलें भेजने में असमर्थ",
@@ -142,6 +147,7 @@
   "callsPermissionsRequiredDescription": "आप गोपनीयता सेटिंग्स में \"वॉइस और वीडियो कॉल्स\" अनुमति सक्षम कर सकते हैं।",
   "callsReconnecting": "पुन: कनेक्ट हो रहा है…",
   "callsRinging": "बज रहा है...",
+  "callsSessionCall": "{app_name} कॉल करें",
   "callsSettings": "कॉल्स (बेटा)",
   "callsVoiceAndVideo": "वॉइस और वीडियो कॉल",
   "callsVoiceAndVideoBeta": "वॉइस और वीडियो कॉल (बीटा)",
@@ -155,6 +161,7 @@
   "cameraGrantAccessDescription": "फ़ोटो और वीडियो लेने या क्यूआर कोड स्कैन करने के लिए {app_name} को कैमरा एक्सेस की आवश्यकता है।",
   "cameraGrantAccessQr": "क्यूआर कोड स्कैन करने के लिए {app_name} को कैमरा एक्सेस की आवश्यकता है",
   "cancel": "रद्द करें",
+  "changePasswordFail": "पासवर्ड बदलने में विफल रहा",
   "clear": "साफ़",
   "clearAll": "सभ साफ करें",
   "clearDataAll": "सभी डेटा हटाएं",
@@ -177,6 +184,8 @@
   "clearMessagesNoteToSelfDescription": "क्या आप वाकई अपने डिवाइस से सभी Note to Self संदेश साफ़ करना चाहते हैं?",
   "close": "बंद करे",
   "closeWindow": "विंडो बंद करें",
+  "communityBanDeleteDescription": "यह चयनित उपयोगकर्ता को इस समुदाय से प्रतिबंधित कर देगा और उनके सभी संदेश हटा देगा। क्या आप वाकई जारी रखना चाहते हैं?",
+  "communityBanDescription": "यह चयनित उपयोगकर्ता को इस समुदाय से प्रतिबंधित कर देगा । क्या आप वाकई जारी रखना चाहते हैं?",
   "communityEnterUrl": "Community URL दर्ज करें",
   "communityEnterUrlErrorInvalid": "अमान्य यूआरएल",
   "communityEnterUrlErrorInvalidDescription": "कृपया Community यूआरएल चेक करें और फिरसे प्रयास करें।",
@@ -185,7 +194,6 @@
   "communityInvitation": "सामुदायिक निमंत्रण",
   "communityJoin": "Community में शामिल हों",
   "communityJoinDescription": "क्या आप वाकई {community_name} में शामिल होना चाहते हैं?",
-  "communityJoinError": "{community_name} में शामिल होने में विफल",
   "communityJoinOfficial": "या इनमें से एक को जोड़ें...",
   "communityJoined": "Community में शामिल हो गए",
   "communityJoinedAlready": "आप पहले से ही इस समुदाय के सदस्य हैं।",
@@ -211,6 +219,7 @@
   "conversationsAddedToHome": "होम स्क्रीन में जोड़ा गया",
   "conversationsAudioMessages": "ऑडियो संदेश",
   "conversationsAutoplayAudioMessage": "ऑडियो संदेश ऑटोप्ले करें",
+  "conversationsAutoplayAudioMessageDescription": "अनुक्रमित ऑडियो संदेशों को ऑटोप्ले करें",
   "conversationsBlockedContacts": "ब्लॉक किये हुए कॉन्टेक्ट्स",
   "conversationsCommunities": "सामुदायिक",
   "conversationsDelete": "संभाषण हटाएँ",
@@ -255,7 +264,12 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "लिगेसी",
   "deleteAfterLegacyDisappearingMessagesOriginal": "गायब होने वाले संदेशों का मूल संस्करण।",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> ने गायब संदेश टाइमर को <b>{time}</b> पर सेट कर दिया",
+  "deleteAfterLegacyGroupsGroupCreation": "कृपया समूह बनने तक प्रतीक्षा करें ...",
+  "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "समूह अपडेट करने में विफल ",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "आपको दूसरों के संदेशों को हटाने की अनुमति नहीं है",
+  "deleteMessage": "{count, plural, one [संदेश मिटाएं] other [संदेश मिटाएं]}",
   "deleteMessageConfirm": "क्या आप वाकई इस संदेश को हटाना चाहते हैं?",
+  "deleteMessageDeleted": "{count, plural, one [संदेश मिटाया गया] other [संदेश मिटाये गए]}",
   "deleteMessageDeletedGlobally": "यह संदेश हटा दिया गया है",
   "deleteMessageDeletedLocally": "यह संदेश इस डिवाइस पर हटा दिया गया है",
   "deleteMessageDescriptionDevice": "क्या आप वाकई केवल इस डिवाइस से इस संदेश को हटाना चाहते हैं?",
@@ -278,11 +292,14 @@
   "disappearingMessagesDeleteType": "डिलीट प्रकार",
   "disappearingMessagesDescription": "यह सेटिंग इस बातचीत में सभी पर लागू होती है।",
   "disappearingMessagesDescription1": "यह सेटिंग इस बातचीत में आप द्वारा भेजे गए संदेशों पर लागू होती है।",
+  "disappearingMessagesDescriptionGroup": "इस सेटिंग का प्रभाव इस बातचीत में सभी पर पड़ेगा।<br/>केवल समूह एडमिन इसे बदल सकते हैं।",
   "disappearingMessagesDisappear": "{disappearing_messages_type} के बाद गायब हो जाएगा - {time}",
   "disappearingMessagesDisappearAfterRead": "पढ़ने के बाद गायब हो जाएगा",
   "disappearingMessagesDisappearAfterReadDescription": "संदेश पढ़ने के बाद हट जाते हैं।",
+  "disappearingMessagesDisappearAfterReadState": "पढ़ने के बाद गायब हो जाएगा - {time}",
   "disappearingMessagesDisappearAfterSend": "भेजने के बाद गायब हो जाएगा",
   "disappearingMessagesDisappearAfterSendDescription": "संदेश भेजे जाने के बाद हट जाते हैं।",
+  "disappearingMessagesDisappearAfterSendState": "भेजने के बाद गायब हो जाएगा - {time}",
   "disappearingMessagesFollowSetting": "अनुसरण सेटिंग",
   "disappearingMessagesFollowSettingOff": "आपके द्वारा भेजे गए संदेश अब गायब नहीं होंगे। क्या आप वाकई <b> बंद </ b> गायब संदेश बंद करना चाहते हैं?",
   "disappearingMessagesFollowSettingOn": "क्या आप अपने संदेशों को <b>{time}</b> के बाद गायब होने के लिए सेट करना चाहते हैं जब वे <b>{disappearing_messages_type}</b> हो?",
@@ -294,6 +311,7 @@
   "disappearingMessagesTimer": "Timer",
   "disappearingMessagesTurnedOff": "<b>{name}</b> ने गायब होने वाले संदेशों को बंद कर दिया है। जो संदेश वे भेजेंगे, वे अब और नहीं गायब होंगे।",
   "disappearingMessagesTurnedOffYou": "<b>आप</b> ने गायब संदेशों को <b>बंद</b> कर दिया है। जो संदेश आप भेजते हैं, वे अब और नहीं गायब होंगे।",
+  "disappearingMessagesTurnedOffYouGroup": "<b>आप</b> ने <b>गायब होने वाले संदेश</b> बंद कर दिए हैं।",
   "disappearingMessagesTypeRead": "पढ़ें",
   "disappearingMessagesTypeSent": "भेजा गया",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> ने गायब होने वाले संदेश सेटिंग्स को अपडेट किया है।",
@@ -326,6 +344,12 @@
   "emojiReactsClearAll": "क्या आप वाकई सभी {emoji} को साफ़ करना चाहते हैं?",
   "emojiReactsCoolDown": "धीरे करो! आपने बहुत सारे इमोजी प्रतिक्रियाएं भेजी हैं। कृपया कुछ देर बाद पुनः प्रयास करें",
   "emojiReactsCountOthers": "{count, plural, one [और # अन्य ने इस संदेश पर {emoji} प्रतिक्रिया दी है।] other [और # अन्य ने इस संदेश पर {emoji} प्रतिक्रिया दी है।]}",
+  "emojiReactsHoverNameDesktop": "{name} ने {emoji_name} के साथ प्रतिक्रिया व्यक्त की",
+  "emojiReactsHoverNameTwoDesktop": "{name} और {other_name} ने {emoji_name} के साथ प्रतिक्रिया व्यक्त की",
+  "emojiReactsHoverTwoNameMultipleDesktop": "{name} और <span>{count} अन्य </span> ने {emoji_name} के साथ प्रतिक्रिया व्यक्त की",
+  "emojiReactsHoverYouNameDesktop": "आपने {emoji_name} के साथ प्रतिक्रिया व्यक्त की ",
+  "emojiReactsHoverYouNameMultipleDesktop": "आपने और <span>{count} अन्य</span> ने {emoji_name} के साथ प्रतिक्रिया व्यक्त की",
+  "emojiReactsHoverYouNameTwoDesktop": "आपने और {name} ने {emoji_name} के साथ प्रतिक्रिया व्यक्त की ",
   "emojiReactsNotification": "आपके संदेश पर प्रतिक्रिया दी {emoji}",
   "enable": "सक्षम करें",
   "errorConnection": "कृपया अपनी इंटरनेट कनेक्शन और फिरसे प्रयास करें।",
@@ -361,15 +385,22 @@
   "groupInviteSending": "निमंत्रण भेजा जा रहा है",
   "groupInviteSent": "आमंत्रण भेजा गया",
   "groupInviteSuccessful": "समूह आमंत्रण सफल",
-  "groupInviteVersion": "उपयोगकर्ताओं को निमंत्रण प्राप्त करने के लिए वर्ज़न {version} या उच्चतर होना चाहिए",
   "groupInviteYou": "<b>आप</b> को समूह में शामिल होने के लिए आमंत्रित किया गया था।",
+  "groupInviteYouAndMoreNew": "<b>आप</b> और <b>{count} अन्य</b> समूह में शामिल हुए।",
+  "groupInviteYouAndOtherNew": "<b>आप</b> और <b>{other_name}</b> समूह में शामिल हुए।",
   "groupLeave": "ग्रुप को छोड़ें",
+  "groupLeaveDescription": "क्या आप वाकई {group_name} छोड़ना चाहते हैं?",
   "groupLeaveErrorFailed": "{group_name} छोड़ने में विफल",
   "groupLegacyBanner": "समूहों को अपग्रेड किया गया है, अपग्रेड करने के लिए एक नया समूह बनाएं। पुरानी समूह कार्यक्षमता {date} से कमजोर हो जाएगी।",
   "groupMemberLeft": "<b>{name}</b> ने समूह छोड़ दिया।",
   "groupMemberLeftMultiple": "<b>{name}</b> और <b>{count} अन्य</b> समूह से निकल गए।",
   "groupMemberLeftTwo": "<b>{name}</b> और <b>{other_name}</b> समूह से निकल गए।",
   "groupMemberNew": "<b>{name}</b> समूह में शामिल हो गए।",
+  "groupMemberNewHistory": "<b>{name}</b> को समूह में शामिल होने के लिए आमंत्रित किया गया। चैट इतिहास साझा किया गया।",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> और <b>{count} अन्य</b> को समूह में शामिल होने के लिए आमंत्रित किया गया। चैट इतिहास साझा किया गया।",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> और <b>{other_name}</b> को समूह में शामिल होने के लिए आमंत्रित किया गया। चैट इतिहास साझा किया गया।",
+  "groupMemberNewMultiple": "<b>{name}</b> और <b>{count} अन्य</b> को समूह में शामिल होने के लिए आमंत्रित किया गया।",
+  "groupMemberNewTwo": "<b>{name}</b> और <b>{other_name}</b> को समूह में शामिल होने के लिए आमंत्रित किया गया था।",
   "groupMemberYouLeft": "<b>आप</b> ने समूह छोड़ दिया।",
   "groupMembers": "समूह के सदस्य",
   "groupMembersNone": "इस समूह में कोई अन्य सदस्य नहीं है।",
@@ -382,9 +413,13 @@
   "groupNoMessages": "आपके पास <b>{group_name}</b> से कोई संदेश नहीं हैं। वार्तालाप शुरू करने के लिए एक संदेश भेजें!",
   "groupOnlyAdmin": "आप <b>{group_name}</b> में अकेले व्यवस्थापक हैं।<br/><br/>समूह सदस्य और सेटिंग्स बिना व्यवस्थापक के बदले नहीं जा सकते।",
   "groupPromotedYou": "<b>आप</b> को Admin बनाया गया।",
+  "groupPromotedYouMultiple": "<b>आप</b> और <b>{count} अन्य</b> को Admin बनाया गया।",
+  "groupPromotedYouTwo": "<b>आप</b> और <b>{name}</b> को Admin बनाया गया।",
   "groupRemoveDescription": "क्या आप <b>{name}</b> को <b>{group_name}</b> से निकालना चाहेंगे?",
   "groupRemoveDescriptionMultiple": "क्या आप <b>{name}</b> और <b>{count} अन्य</b> को <b>{group_name}</b> से निकालना चाहेंगे?",
   "groupRemoveDescriptionTwo": "क्या आप <b>{name}</b> और <b>{other_name}</b> को <b>{group_name}</b> से निकालना चाहेंगे?",
+  "groupRemoveMessages": "{count, plural, one [उपयोगकर्ता और उनके भेजे हुए संदेशो को हटाएं] other [उपयोगकर्ताओं और उनके भेजे हुए संदेशो को हटाएं]}",
+  "groupRemoveUserOnly": "{count, plural, one [उपयोगकर्ता को हटाएं ] other [उपयोगकर्ताओं को हटाएं]}",
   "groupRemoved": "<b>{name}</b> को समूह से हटा दिया गया।",
   "groupRemovedMultiple": "<b>{name}</b> और <b>{count} अन्य</b> समूह से हटा दिए गए।",
   "groupRemovedTwo": "<b>{name}</b> और <b>{other_name}</b> समूह से हटा दिए गए।",
@@ -414,8 +449,12 @@
   "learnMore": "अधिक जानें",
   "leave": "छोड़ें",
   "leaving": "छोड़ना...",
+  "legacyGroupMemberNew": "<b>{name}</b> समूह में शामिल हुए ",
   "legacyGroupMemberNewMultiple": "<b>{name} और <b>{count} अन्य</b> समूह में शामिल हुए।",
+  "legacyGroupMemberNewYouMultiple": "<b>आप</b> और <b>{count} अन्य</b> समूह में शामिल हुए।",
+  "legacyGroupMemberNewYouOther": "<b>आप</b> और <b>{other_name}</b> समूह में शामिल हुए",
   "legacyGroupMemberTwoNew": "<b>{name}</b> और <b>{other_name}</b> समूह में शामिल हुए।",
+  "legacyGroupMemberYouNew": "<b>आप</b> समूह में शामिल हुए",
   "linkPreviews": "लिंक पूर्वावलोकन",
   "linkPreviewsDescription": "समर्थित URL के लिए लिंक प्रीव्यू दिखाएं।",
   "linkPreviewsEnable": "लिंक पूर्वावलोकन सक्षम करें",
@@ -444,6 +483,7 @@
   "membersActive": "{count, plural, one [# सक्रिय सदस्य] other [# सक्रिय सदस्य]}",
   "membersAddAccountIdOrOns": "खाता आईडी या ONS जोड़ें",
   "membersInvite": "मित्रों को आमंत्रित करें",
+  "membersInviteSend": "{count, plural, one [आमंत्रण सेंड करें] other [आमंत्रण सेंड करें]}",
   "membersInviteShareDescription": "क्या आप <b>{name}</b> के साथ समूह संदेश इतिहास साझा करना चाहेंगे?",
   "membersInviteShareDescriptionMultiple": "क्या आप <b>{name}</b> और <b>{count} अन्य</b> के साथ समूह संदेश इतिहास साझा करना चाहेंगे?",
   "membersInviteShareDescriptionTwo": "क्या आप <b>{name}</b> और <b>{other_name}</b> के साथ समूह संदेश इतिहास साझा करना चाहेंगे?",
@@ -459,6 +499,7 @@
   "messageInfo": "संदेश जानकारी",
   "messageMarkRead": "पढ़ा हुआ चिह्नित करें",
   "messageMarkUnread": "अपठित चिह्नित करें",
+  "messageNew": "{count, plural, one [नया संदेश] other [नए संदेश]}",
   "messageNewDescriptionDesktop": "अपने मित्र के खाता आईडी या ओएनएस दर्ज करके नई वार्तालाप शुरू करें।",
   "messageNewDescriptionMobile": "अपने मित्र के खाता आईडी, ओएनएस या उनके QR कोड को स्कैन करके नई वार्तालाप शुरू करें।",
   "messageNewYouveGot": "{count, plural, one [आपको एक नया संदेश मिला है।] other [आपको # नए संदेश मिले हैं।]}",
@@ -484,6 +525,8 @@
   "messageVoice": "वॉइस संदेश",
   "messageVoiceErrorShort": "ध्वनि संदेश रिकॉर्ड करने के लिए दबाएं और रखें",
   "messageVoiceSlideToCancel": "रद्द करने के लिए स्लाइड करें",
+  "messageVoiceSnippet": "{emoji} स्वर संदेश",
+  "messageVoiceSnippetGroup": "{author}:{emoji} स्वर संदेश",
   "messages": "संदेश",
   "minimize": "छोटा करें",
   "next": "अगला",
@@ -508,6 +551,8 @@
   "notificationsFastModeDescription": "आपको नई सूचनाओं के बारे में Google के नोटीफिकेशन servers से तत्काल सूचित किया जाएगा।",
   "notificationsFastModeDescriptionIos": "आपको नई सूचनाओं के बारे में Apple के नोटीफिकेशन servers से तत्काल सूचित किया जाएगा।",
   "notificationsGoToDevice": "डिवाइस अधिसूचना सेटिंग्स पर जाएं",
+  "notificationsHeaderAllMessages": "सूचनाएं - सभी",
+  "notificationsHeaderMentionsOnly": "सूचनाएं - केवल उल्लेख",
   "notificationsIosGroup": "{name} ने {conversation_name} को",
   "notificationsIosRestart": "हो सकता है कि आपका {device} पुनरारंभ होने के दौरान आपको संदेश प्राप्त हुए हों।",
   "notificationsLedColor": "LED रंग",
@@ -529,12 +574,14 @@
   "notificationsVibrate": "कांपना",
   "off": "बंद",
   "okay": "ठीक है",
+  "on": "ऑन",
   "onboardingAccountCreate": "नया खाता बनाएं",
   "onboardingAccountCreated": "खाता आईडी कॉपी की गई",
   "onboardingAccountExists": "मेरा खाता है",
   "onboardingBubbleNoPhoneNumber": "आपको साइन अप करने के लिए फ़ोन नंबर की भी आवश्यकता नहीं है।",
   "onboardingBubblePrivacyInYourPocket": "आपकी जेब में गोपनीयता।",
   "onboardingBubbleSessionIsEngineered": "{app_name} आपकी गोपनीयता की रक्षा के लिए बनाया गया है।",
+  "onboardingBubbleWelcomeToSession": "{app_name}{emoji} में आपका स्वागत है",
   "onboardingHitThePlusButton": "चैट शुरू करने, ग्रुप बनाने या आधिकारिक Community में शामिल होने के लिए प्लस बटन दबाएं!",
   "onboardingMessageNotificationExplanation": "{app_name} आपको नए संदेशों के बारे में दो तरीकों से बता सकता है।",
   "onboardingPrivacy": "गोपनीयता नीति",
@@ -570,9 +617,11 @@
   "passwordSet": "पासवर्ड सेट करें",
   "passwordSetDescription": "आपका पासवर्ड सेट कर दिया गया है। कृपया इसे सुरक्षित रखें।",
   "paste": "पेस्ट करें",
+  "permissionMusicAudioDenied": "{app_name} को संगीत और ऑडियो एक्सेस की आवश्यकता है ताकि फ़ाइलें, संगीत और ऑडियो भेजी जा सकें, लेकिन इसे स्थायी रूप से अस्वीकार कर दिया गया है। सेटिंग्स पर टैप करें -> अनुमतियां, और \"संगीत और ऑडियो\" चालू करें।",
   "permissionsAppleMusic": "मीडिया संलग्नक बजाने के लिए {app_name} को Apple Music के उपयोग की आवश्यकता है।",
   "permissionsAutoUpdate": "स्वयमेव अद्यतन हो जाना",
   "permissionsAutoUpdateDescription": "स्टार्टअप पर स्वचालित रूप से अद्यतन जांचें",
+  "permissionsCameraDenied": "{app_name} को फ़ोटो और वीडियो लेने के लिए कैमरा अनुमति की आवश्यकता होती है, लेकिन इसे स्थायी रूप से मना कर दिया गया है। सेटिंग्स -> अनुमतियां पर टैप करें और \"कैमरा\" चालू करें।",
   "permissionsFaceId": "{app_name} पर स्क्रीन लॉक फीचर Face ID का उपयोग करता है।",
   "permissionsKeepInSystemTray": "सिस्टम ट्रे में रखें",
   "permissionsKeepInSystemTrayDescription": "{app_name} तब भी पृष्ठभूमि में चलता रहता है जब आप विंडो बंद करते हैं",
@@ -580,6 +629,7 @@
   "permissionsMicrophone": "माइक्रोफ़ोन",
   "permissionsMicrophoneAccessRequiredDesktop": "आप {app_name} की गोपनीयता सेटिंग्स में माइक्रोफ़ोन एक्सेस सक्षम कर सकते हैं",
   "permissionsMicrophoneAccessRequiredIos": "कॉल करने और ऑडियो संदेश रिकॉर्ड करने के लिए {app_name} को माइक्रोफोन एक्सेस की आवश्यकता है।",
+  "permissionsMusicAudio": "{app_name} को फ़ाइलें, संगीत और ऑडियो भेजने के लिए संगीत और ऑडियो एक्सेस की आवश्यकता है।",
   "permissionsRequired": "अनुमति की आवश्यकता",
   "permissionsStorageSave": "{app_name} को अनुलग्नक और मीडिया को सहेजने के लिए संग्रहण पहुंच चाहिए।",
   "permissionsStorageSaveDenied": "फ़ोटो और वीडियो सहेजने के लिए {app_name} को संग्रहण पहुंच चाहिए, लेकिन इसे स्थायी रूप से मना कर दिया गया है। कृपया ऐप सेटिंग्स पर जाकर, \"अनुमतियां\" चुनें और \"संग्रहण\" सक्षम करें।",
@@ -627,6 +677,7 @@
   "recoveryPasswordWarningSendDescription": "यह आपका पुनर्प्राप्ति वाक्यांश है। अगर आप इसे किसी को भेजते हैं तो उनके पास आपके खाते की पूरी पहुंच होगी।",
   "redo": "फिर से करें",
   "remove": "हटा दें",
+  "removePasswordFail": "पासवर्ड हटाने में विफल",
   "reply": "जवाब",
   "resend": "फिर से भेजें",
   "resolving": "देश की जानकारी लोड हो रही है...",
@@ -687,6 +738,7 @@
   "updateDownloaded": "अपडेट इंस्टॉल हो गया, पुनः प्रारंभ करने के लिए क्लिक करें",
   "updateDownloading": "अपडेट डाउनलोड हो रहा है: {percent_loader}%",
   "updateError": "अद्यतन नहीं हो रहा",
+  "updateErrorDescription": "{app_name} अपडेट होने में विफल. कृपया {session_download_url} पर जाएं और नए संस्करण को मैन्युअल रूप से इंस्टॉल करें, फिर इस समस्या के बारे में हमें बताने के लिए हमारे सहायता केंद्र से संपर्क करें |",
   "updateNewVersion": "{app_name} का एक नया संस्करण उपलब्ध है, अपडेट करने के लिए टैप करें",
   "updateNewVersionDescription": "{app_name} का एक नया संस्करण उपलब्ध है।",
   "updateReleaseNotes": "रिलीज़ नोट्स पे जाइए",
@@ -696,6 +748,7 @@
   "urlCopy": "यूआरएल कॉपी करें",
   "urlOpen": "यूआरएल खोलें",
   "urlOpenBrowser": "यह आपके ब्राउज़र में खुलेगा।",
+  "urlOpenDescription": "क्या आप वाकई इस यूआरएल को अपने ब्राउज़र में खोलना चाहते हैं?<br/><br/><b>{url}</b>",
   "useFastMode": "तीव्र मोड इस्तेमाल करे",
   "video": "वीडियो",
   "videoErrorPlay": "वीडियो चलाने में असमर्थ",
