--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -185,7 +185,6 @@
   "communityInvitation": "Meghívás közösségbe",
   "communityJoin": "Csatlakozás a közösséghez",
   "communityJoinDescription": "Biztos, hogy csatlakozni szeretnél a(z) {community_name} közösséghez?",
-  "communityJoinError": "Nem sikerült csatlakozni a {community_name} közösséghez",
   "communityJoinOfficial": "Vagy csatlakozz az egyikhez az alábbiakból...",
   "communityJoined": "Csatlakozott a közösséghez",
   "communityJoinedAlready": "Te már csatlakoztál ehhez a közösséghez.",
@@ -211,6 +210,7 @@
   "conversationsAddedToHome": "Hozzáadva a kezdőképernyőhöz",
   "conversationsAudioMessages": "Hangüzenetek",
   "conversationsAutoplayAudioMessage": "Hangüzenetek automatikus lejátszása",
+  "conversationsAutoplayAudioMessageDescription": "Egymást követő hangüzenetek automatikus lejátszása",
   "conversationsBlockedContacts": "Letiltott kapcsolatok",
   "conversationsCommunities": "Közösségek",
   "conversationsDelete": "Beszélgetés törlése",
@@ -326,6 +326,9 @@
   "emojiReactsClearAll": "Biztos vagy benne, hogy az összes {emoji}-t törölni akarod?",
   "emojiReactsCoolDown": "Lassíts! Túl sok hangulatjellel reagáltál. Próbáld újra később!",
   "emojiReactsCountOthers": "{count, plural, one [És további # személy reagált az üzenetre {emoji}.] other [És további # személy reagált az üzenetre: {emoji}.]}",
+  "emojiReactsHoverNameDesktop": "{name} ezzel reagált {emoji_name}",
+  "emojiReactsHoverNameTwoDesktop": "{name} és {other_name} ezzel reagáltak {emoji_name}",
+  "emojiReactsHoverTwoNameMultipleDesktop": "{name} és <span>{count} másik</span> reagált ezzel {emoji_name}",
   "emojiReactsNotification": "Reagált az üzenetedre {emoji}",
   "enable": "Engedélyez",
   "errorConnection": "Ellenőrizd az internetkapcsolatot, majd próbáld újra.",
@@ -361,9 +364,9 @@
   "groupInviteSending": "Meghívás küldése",
   "groupInviteSent": "Meghívás elküldve",
   "groupInviteSuccessful": "A meghívás sikeres volt.",
-  "groupInviteVersion": "A felhasználóknak {version} vagy újabb verzióval kell rendelkezniük, hogy meghívásokat kapjanak",
   "groupInviteYou": "<b>Te</b> meg lettél hívva a csoporthoz.",
   "groupLeave": "Csoport elhagyása",
+  "groupLeaveDescription": "Biztos, hogy el akarod hagyni a(z) {group_name} csoportot?",
   "groupLeaveErrorFailed": "Nem sikerült kilépni a {group_name} csoportból",
   "groupLegacyBanner": "A csoportok frissültek, hozzon létre egy új csoportot a frissítéshez. A régi csoport funkciói visszaesnek {date} dátumtól.",
   "groupMemberLeft": "<b>{name}</b> kilépett a csoportból.",
@@ -425,6 +428,7 @@
   "linkPreviewsSend": "Hivatkozás előnézet küldése",
   "linkPreviewsSendModalDescription": "A linkek előnézetének elküldésekor nem lesz teljes metaadat-védelme.",
   "linkPreviewsTurnedOff": "Hivatkozás előnézet letiltva",
+  "linkPreviewsTurnedOffDescription": "{app_name} kapcsolatba kell lépjen a hivatkozott webhelyekkel, hogy előnézeteket készíthessen az általad küldött és fogadott linkekről.<br/><br/>A {app_name} beállításaiban bekapcsolhatod.",
   "loadAccount": "Fiók betöltése",
   "loadAccountProgressMessage": "Fiók betöltése",
   "loading": "Betöltés...",
@@ -458,8 +462,10 @@
   "messageInfo": "Üzenet információ",
   "messageMarkRead": "Olvasottnak jelöl",
   "messageMarkUnread": "Megjelölés olvasatlanul",
+  "messageNew": "{count, plural, one [Új üzenetek] other [Új üzenetek]}",
   "messageNewDescriptionDesktop": "Új beszélgetés indítása valaki fiókazonosítójának megadásával.",
   "messageNewDescriptionMobile": "Új beszélgetés indítása úgy, hogy beírja barátja Fiókazonosítóját, ONS-t vagy beolvassa a QR kódját.",
+  "messageNewYouveGot": "{count, plural, one [Új üzeneted érkezett.] other [# új üzeneted érkezett.]}",
   "messageReplyingTo": "Válasz neki",
   "messageRequestGroupInvite": "<b>{name}</b> meghívott a <b>{group_name}</b> csatlakozására.",
   "messageRequestGroupInviteDescription": "Üzenet küldése ebbe a csoportba automatikusan elfogadja a csoportmeghívást.",
@@ -549,6 +555,7 @@
   "open": "Megnyitás",
   "other": "Egyéb",
   "passwordChange": "Jelszóváltoztatás",
+  "passwordChangeDescription": "{app_name} app jelszavának megváltoztatása.",
   "passwordChangedDescription": "A jelszó megváltozott. Tartsd biztonságos helyen!",
   "passwordConfirm": "Jelszó megerősítése",
   "passwordCreate": "Jelszó létrehozása",
@@ -684,6 +691,7 @@
   "updateDownloaded": "Frissítés telepítve, kattintson az újraindításhoz",
   "updateDownloading": "Frissítés letöltése: {percent_loader}%",
   "updateError": "A frissítés sikertelen",
+  "updateErrorDescription": "{app_name} frissítése sikertelen. Kérlek látogass el a {session_download_url} és telepítsd manuálisan az új verziót majd vegye fel a kapcsolatot az ügyfélszolgálatunkkal, hogy többet tudhassunk a problémáról.",
   "updateNewVersion": "A(z) {app_name} új verziója elérhető, koppints a frissítéshez",
   "updateNewVersionDescription": "A(z) {app_name} új verziója elérhető.",
   "updateReleaseNotes": "Release notes megnyitása",
@@ -693,6 +701,7 @@
   "urlCopy": "URL másolása",
   "urlOpen": "URL megnyitása",
   "urlOpenBrowser": "Ez a böngésződben fog megnyílni.",
+  "urlOpenDescription": "Biztos vagy abban, hogy megszeretnéd nyitni a böngésződben a következő linket?<br/><br/><b>{url}</b>",
   "useFastMode": "Gyors mód használata",
   "video": "Videó",
   "videoErrorPlay": "Nem lehet lejátszani a videót.",
