--- a/_locales/hy-AM/messages.json
+++ b/_locales/hy-AM/messages.json
@@ -8,6 +8,7 @@
   "accountIdErrorInvalid": "Այս հաշվեհամարի ID-ն սխալ է։ Խնդրում ենք ստուգեք և նորից փորձեք։",
   "accountIdOrOnsEnter": "Մուտքագրեք Account ID կամ ONS",
   "accountIdOrOnsInvite": "Հրավիրել Account ID կամ ONS",
+  "accountIdShare": "Բարև, ես օգտագործում եմ {app_name} անխափան գաղտնիության և անվտանգության համար: Միացեք ինձ! Իմ Account ID-ն է<br/><br/>{account_id}<br/><br/>Ներբեռնեք այն {session_download_url}-ում",
   "accountIdYours": "Ձեր հաշվի ID-ն",
   "accountIdYoursDescription": "Սա ձեր հաշվի ID-ն է։ Այլ օգտատերերը կարող են սկանավորել այն՝ ձեզ հետ խոսակցություն սկսելու համար։",
   "actualSize": "Իրական չափս",
@@ -29,7 +30,11 @@
   "adminRemoveAsAdmin": "Հեռացնել ադմինից",
   "adminRemoveCommunityNone": "Այս համայնքում ադմիններ չկան.",
   "adminRemoveFailed": "Չհաջողվեց հեռացնել {name}-ին որպես Admin։",
+  "adminRemoveFailedMultiple": "Չհաջողվեց հեռացնել <b>{name}</b>֊ին և <b>{count} ուրիշներ</b> որպես ադմին՝ Administrator:",
+  "adminRemoveFailedOther": "Չհաջողվեց հեռացնել <b>{name}</b>֊ին և <b>{other_name}</b>֊ին որպես ադմին՝ Administrator:",
   "adminRemovedUser": "<b>{name}֊ը</b> հեռացվել է ադմինից:",
+  "adminRemovedUserMultiple": "<b>{name}</b>֊ը և <b>{count} ուրիշներ</b> հեռացվել են որպես ադմին՝ Administrator:",
+  "adminRemovedUserOther": "<b>{name}</b>֊ը և <b>{other_name}</b>֊ը հեռացվել են որպես ադմին՝ Administrator:",
   "adminSendingPromotion": "Ուղարկվում է ադմինիստրատորի առաջխաղացումը",
   "adminSettings": "Admin Settings",
   "adminTwoPromotedToAdmin": "<b>{name}֊ը</b> և <b>{other_name}</b> բարձրացվել են որպես ադմին:",
@@ -146,6 +151,7 @@
   "callsVoiceAndVideo": "Ձայնային և տեսազանգեր",
   "callsVoiceAndVideoBeta": "Ձայնային և տեսազանգեր (Beta)",
   "callsVoiceAndVideoModalDescription": "Ձեր IP հասցեն տեսանելի է ձեր զանգի գործընկերոջը և մի 'Oxen Foundation' սերվերին ծիծլած օգտագործման ժամանակ։",
+  "callsVoiceAndVideoToggleDescription": "Միացնում է ձայնային և տեսազանգերը դեպի և այլ օգտվողների հետ:",
   "callsYouCalled": "Դուք զանգահարել եք {name}",
   "callsYouMissedCallPermissions": "Դուք բաց եք թողել զանգը <b>{name}</b>֊ից, քանի որ չեք միացել <b>ձայնային և տեսազանգեր</b> գաղտնիության կարգավորումներում։",
   "cameraErrorNotFound": "Տեսախցիկ չի գտնվել",
@@ -155,6 +161,7 @@
   "cameraGrantAccessDescription": "{app_name}-ը պետք է հասանելիություն տեսախցիկին՝ լուսանկարներ և տեսանյութեր անելու կամ QR կոդերը սկանավորելու համար։",
   "cameraGrantAccessQr": "{app_name}-ին պետք է հասանելիություն տեսախցիկին՝ QR կոդերը սկանավորելու համար",
   "cancel": "Չեղարկել",
+  "changePasswordFail": "Չհաջողվեց փոխել գաղտնաբառը",
   "clear": "Մաքրել",
   "clearAll": "Մաքրել բոլորը",
   "clearDataAll": "Մաքրել բոլոր տվյալները",
@@ -177,6 +184,9 @@
   "clearMessagesNoteToSelfDescription": "Իսկապե՞ս ուզում եք ջնջել ձեր ինքն իրեն հաղորդագրությունները ձեր սարքից:",
   "close": "Փակել",
   "closeWindow": "Փակել պատուհանը",
+  "commitHashDesktop": "Հանձնառության հեշը՝ {hash}",
+  "communityBanDeleteDescription": "Սա կարգելափակի ընտրված օգտատիրոջը այս համայնքից և կջնջի բոլոր նրանց հաղորդագրությունները: Հաստատո՞ւմ եք շարունակել:",
+  "communityBanDescription": "Սա կարգելափակի ընտրված օգտատիրոջը այս համայնքից: Հաստատո՞ւմ եք շարունակել:",
   "communityEnterUrl": "Մուտքագրեք Համայնքի URL-ը",
   "communityEnterUrlErrorInvalid": "Անվավեր URL",
   "communityEnterUrlErrorInvalidDescription": "Խնդրում ենք ստուգել Community հասցեն և փորձել նորից:",
@@ -185,7 +195,6 @@
   "communityInvitation": "Համայնքի հրավեր",
   "communityJoin": "Միանալ համայնքին",
   "communityJoinDescription": "Վստա՞հ եք, որ ուզում եք միանալ {community_name} համայնքին:",
-  "communityJoinError": "Չհաջողվեց միանալ {community_name} համայնքին",
   "communityJoinOfficial": "Կամ միացե՛ք սրանցից մեկին…",
   "communityJoined": "Միացել ենք համայնքին",
   "communityJoinedAlready": "Դուք արդեն այս համայնքի անդամ եք։",
@@ -211,6 +220,7 @@
   "conversationsAddedToHome": "Ավելացված է գլխավոր էկրանին",
   "conversationsAudioMessages": "Աուդիո հաղորդագրություններ",
   "conversationsAutoplayAudioMessage": "Աուդիո հաղորդագրությունների ավտոմատ նվագարկում",
+  "conversationsAutoplayAudioMessageDescription": "Ավտոմատ նվագարկել հաջորդական աուդիո հաղորդագրությունները",
   "conversationsBlockedContacts": "Արգելափակված կոնտակտներ",
   "conversationsCommunities": "Համայնքներ",
   "conversationsDelete": "Ջնջել զրույցը",
@@ -278,6 +288,7 @@
   "disappearingMessagesDeleteType": "Ջնջելու տեսակ",
   "disappearingMessagesDescription": "Այս կարգավորումը վերաբերում է այս խոսակցությանը բոլորին:",
   "disappearingMessagesDescription1": "Այս կարգավորումը վերաբերում է ձեր ուղարկած հաղորդագրություններին այս խոսակցությունում:",
+  "disappearingMessagesDescriptionGroup": "Այս կարգավորումը վերաբերող է բոլորին այս զրույցում:<br/>Միայն խմբի ադմիններն են կարող փոխել այս կարգավորումը:",
   "disappearingMessagesDisappear": "Անհետանալ {disappearing_messages_type} հետո - {time}",
   "disappearingMessagesDisappearAfterRead": "Անհետանալ կարդալուց հետո",
   "disappearingMessagesDisappearAfterReadDescription": "Հաղորդագրությունները ջնջվում են ընթերցվելուց հետո։",
@@ -326,6 +337,8 @@
   "emojiReactsClearAll": "Իսկապե՞ս ուզում եք ջնջել բոլոր {emoji}-ը:",
   "emojiReactsCoolDown": "Դանդաղեցրե՛ք։ Դուք չափազանց շատ էմոջիների արձագանքներ եք ուղարկել։ Շուտով նորից փորձեք:",
   "emojiReactsCountOthers": "{count, plural, one [Եվ # մեկն արձագանքել է {emoji} այս հաղորդագրությանը:] other [Եվ # արձագանքել են {emoji} այս հաղորդագրությանը:]}",
+  "emojiReactsHoverYouNameDesktop": "Դուք արձագանքել եք {emoji_name}-ով",
+  "emojiReactsHoverYouNameTwoDesktop": "Դուք և {name}-ը արձագանքել եք {emoji_name}-ով",
   "emojiReactsNotification": "Արձագանքել է ձեր հաղորդագրությանը {emoji}",
   "enable": "Միացնել",
   "errorConnection": "Խնդրում ենք ստուգել ձեր ինտերնետ կապը և փորձել նորից:",
@@ -361,9 +374,12 @@
   "groupInviteSending": "Ուղարկվում է հրավերը",
   "groupInviteSent": "Հրավիրումը ուղարկված է",
   "groupInviteSuccessful": "Խմբի հրավերը հաջողությամբ ուղարկված է",
-  "groupInviteVersion": "Օգտատերերը պետք է ունենան {version} կամ ավելի բարձր տարբերակ՝ հրավերներ ստանալու համար։",
+  "groupInviteVersion": "Օգտատերերը պետք է ունենան վերջին տարբերակը՝ հրավերներ ստանալու համար",
   "groupInviteYou": "<b>Դուք</b> հրավիրվել եք միանալու խմբին:",
+  "groupInviteYouAndOtherNew": "<b>Դուք</b> և <b>{other_name}</b> հրավիրվել եք միանալու խմբին:",
   "groupLeave": "Լքել խումբը",
+  "groupLeaveDescription": "Վստա՞հ եք, որ ուզում եք լքել {group_name} խումբը:",
+  "groupLeaveDescriptionAdmin": "Իսկապե՞ս ուզում եք լքել <b>{group_name}</b>-ը:<br/><br/>Սա կհեռացնի բոլոր անդամներին և կհեռացնի խմբի բոլոր բովանդակությունները:",
   "groupLeaveErrorFailed": "Չհաջողվեց լքել {group_name} խումբը",
   "groupLegacyBanner": "Խմբերն թարմացվել են, ստեղծեք նոր խումբ՝ թարմացնելու համար: Հին խմբի ֆունկցիոնալությունը վատթարանուլ է {date}-ից:",
   "groupMemberLeft": "<b>{name}֊ը</b> լքեց խումբը:",
@@ -382,9 +398,13 @@
   "groupNoMessages": "Դուք չունեք հաղորդագրություններ <b>{group_name}</b>֊ից։ Ուղարկեք հաղորդագրություն խոսակցությունը սկսելու համար։",
   "groupOnlyAdmin": "Դուք այս խմբի միակ ադմինն եք <b>{group_name}</b>։<br/><br/>Խմբի անդամներն ու կարգավորումները չեն կարող փոխվել առանց ադմին։",
   "groupPromotedYou": "<b>Դուք</b> բարձրացվել եք որպես ադմին:",
+  "groupPromotedYouMultiple": "<b>Դուք</b> և <b>{count} ուրիշներ</b> բարձրացվել են որպես ադմին:",
+  "groupPromotedYouTwo": "<b>Դուք</b> և <b>{name}</b> բարձրացվել են որպես ադմին:",
   "groupRemoveDescription": "Ցանկանո՞ւմ եք հեռացնել <b>{name}</b>-ին <b>{group_name}</b> խմբից։",
   "groupRemoveDescriptionMultiple": "Ցանկանո՞ւմ եք հեռացնել <b>{name}</b>-ին և <b>{count} այլ անձանց</b> <b>{group_name}</b>-ից։",
   "groupRemoveDescriptionTwo": "Ցանկանո՞ւմ եք հեռացնել <b>{name}</b>-ին և <b>{other_name}</b>-ին <b>{group_name}</b> խմբից։",
+  "groupRemoveMessages": "{count, plural, one [Հեռացնել օգտատիրոջը և նրանց հաղորդագրությունները] other [Հեռացնել օգտատերերին և նրանց հաղորդագրությունները]}",
+  "groupRemoveUserOnly": "{count, plural, one [Հեռացնել օգտատիրոջը ] other [Հեռացնել օգտատերերին]}",
   "groupRemoved": "<b>{name}</b> հեռացվել է խմբից:",
   "groupRemovedMultiple": "<b>{name}֊ը</b> և <b>{count} ուրիշներ</b> հեռացվել են խմբից:",
   "groupRemovedTwo": "<b>{name}֊ը</b> և <b>{other_name}֊ը</b> հեռացվել են խմբից:",
@@ -403,6 +423,7 @@
   "helpSupport": "Աջակցում",
   "helpWedLoveYourFeedback": "Մենք կցանկանայինք ձեր կարծիքը",
   "hide": "Թաքցնել",
+  "hideMenuBarDescription": "Միացնել համակարգի ընտրացանկի տեսանելիությունը",
   "hideOthers": "Թաքցնել մյուսները",
   "image": "Նկար",
   "incognitoKeyboard": "Չհիշել բառերը",
@@ -470,6 +491,7 @@
   "messageRequestYouHaveAccepted": "Դուք ընդունել եք հաղորդագրության հարցումը <b>{name}֊ից</b>։",
   "messageRequestsAcceptDescription": "Այս օգտատիրոջը հաղորդագրություն ուղարկելը ավտոմատ կերպով կընդունի նրա հաղորդագրության հարցումը և կբացահայտի ձեր Account ID-ն:",
   "messageRequestsAccepted": "Ձեր հաղորդագրության հարցումն ընդունվել է։",
+  "messageRequestsClearAllExplanation": "Իսկապե՞ս ուզում եք ջնջել բոլոր հաղորդագրությունների հարցումներն ու խմբի հրավերները:",
   "messageRequestsCommunities": "Համայնքի հաղորդագրության հարցումներ",
   "messageRequestsCommunitiesDescription": "Թույլատրել հաղորդագրության հարցումներ Community զրույցներից:",
   "messageRequestsDelete": "Վստա՞հ եք, որ ուզում եք ջնջել այս հաղորդագրության հարցումը:",
@@ -508,6 +530,7 @@
   "notificationsFastModeDescription": "Նոր հաղորդագրությունների մասին դուք անպայման և անմիջապես կտեղեկացվեք Google-ի ծանուցումների սերվերների միջոցով։",
   "notificationsFastModeDescriptionIos": "Դուք մշտապես և անմիջապես կտեղեկացվեք նոր հաղորդագրությունների մասին օգտագործելով Apple's ծանուցումների սերվերները։",
   "notificationsGoToDevice": "Գնացեք սարքի ծանուցման կարգավորումներ",
+  "notificationsHeaderMentionsOnly": "Ծանուցումներ - Միայն հիշատակումների համար",
   "notificationsIosGroup": "{name} {conversation_name}-ին",
   "notificationsIosRestart": "Դուք կարող եք ստանալ հաղորդագրություններ, երբ ձեր {device} վերագործարկվում էր։",
   "notificationsLedColor": "LED-ի գույն",
@@ -532,6 +555,9 @@
   "onboardingAccountCreate": "Գրանցվել",
   "onboardingAccountCreated": "Հաշիվը ստեղծված է",
   "onboardingAccountExists": "Ես հաշիվ ունեմ",
+  "onboardingBackAccountCreation": "Դուք չեք կարող հետ գնալ։ Ձեր հաշվի ստեղծումը չեղարկելու համար {app_name}-ը պետք է ավարտել։",
+  "onboardingBackLoadAccount": "Դուք չեք կարող հետ գնալ։ Ձեր հաշվի բեռնաթափումը դադարեցնելու համար {app_name}-ը պետք է ավարտել։",
+  "onboardingBubbleCreatingAnAccountIsEasy": "Հաշիվ ստեղծելը հապավոտ, անվճար և անանուն է {emoji}",
   "onboardingBubbleNoPhoneNumber": "Դուք նույնիսկ հեռախոսահամար չունեք գրանցվելու համար։",
   "onboardingBubblePrivacyInYourPocket": "Գաղտնիություն ձեր գրպանում:",
   "onboardingBubbleSessionIsEngineered": "{app_name}-ը մշակված է ձեր գաղտնիությունը պահպանելու համար.",
@@ -558,6 +584,7 @@
   "passwordCurrentIncorrect": "Ձեր ներկա գաղտնաբառը սխալ է։",
   "passwordDescription": "Պահանջվում է գաղտնաբառ՝ {app_name}-ը ապակողպելու համար:",
   "passwordEnter": "Մուտքագրել գաղտնաբառը",
+  "passwordEnterCurrent": "Մուտքագրեք Ձեր ներկա գաղտնաբառը.",
   "passwordEnterNew": "Խնդրում ենք մուտքագրել ձեր նոր գաղտնաբառը",
   "passwordError": "Գաղտնաբառը պետք է պարունակի միայն տառեր, թվեր և նշաններ",
   "passwordErrorLength": "Գաղտնաբառը պետք է լինի 6-ից 64 նիշ",
@@ -570,6 +597,7 @@
   "passwordSet": "Սահմանել գաղտնաբառը",
   "passwordSetDescription": "Ձեր գաղտնաբառը սահմանվել է։ Խնդրում ենք անվտանգ պահել։",
   "paste": "Տեղադրել",
+  "permissionMusicAudioDenied": "{app_name}-ը պահանջում է երաժշտության և աուդիո հասանելիությունը ֆայլեր, երաժշտություն և աուդիո ուղարկելու համար, սակայն թույլտվությունը մշտապես մերժված է: Սեղմեք Կարգավորումներ -> Թույլտվություններ և միացրեք \"Երաժշտություն և աուդիո\" կարգավորումը:",
   "permissionsAppleMusic": "{app_name}-ը պետք է օգտագործի Apple Music՝ մեդիա կցորդները նվագարկելու համար։",
   "permissionsAutoUpdate": "Ավտոմատ թարմացում",
   "permissionsAutoUpdateDescription": "Ինքնաբերաբար ստուգել թարմացումները գործարկման ժամանակ",
@@ -580,7 +608,9 @@
   "permissionsMicrophone": "Խոսափող",
   "permissionsMicrophoneAccessRequiredDesktop": "Դուք կարող եք միացնել միկրոֆոնի հասանելիությունը {app_name} գաղտնիության կարգավորումներով",
   "permissionsMicrophoneAccessRequiredIos": "{app_name}-ը պահանջում է խոսափողին հասանելիություն զանգեր կատարելու և ձայնային հաղորդագրություններ արձանագրելու համար։",
+  "permissionsMusicAudio": "{app_name}-ը պահանջում է երաժշտության և աուդիո հասանելիությունը ֆայլեր, երաժշտություն և աուդիո ուղարկելու համար:",
   "permissionsRequired": "Անհրաժեշտ է թույլտվություն",
+  "permissionsStorageDenied": "{app_name}-ը պահանջում է ֆոտո գրադարանի հասանելիությունը, որպեսզի կարողանաք ուղարկել նկարներ և տեսանյութեր, սակայն թույլտվությունը մշտապես մերժված է: Սեղմեք Կարգավորումներ -> Թույլտվություններ և միացրեք \"Նկարներ և տեսանյութեր\" կարգավորումը:",
   "permissionsStorageSave": "{app_name}-ը պահանջում է պահեստային հասանելիություն կցորդներն ու մեդիան պահպանելու համար։",
   "permissionsStorageSaveDenied": "{app_name}-ը պահանջում է պահպանման հասանելիություն՝ լուսանկարներ և տեսանյութեր պահելու համար, բայց այն ընդմիշտ մերժվել է: Խնդրում ենք շարունակել դեպի հավելվածի կարգավորումներ, ընտրել «Թույլտվություններ», և միացնել «Պահեստավորում»։",
   "permissionsStorageSend": "{app_name}-ը պահանջում է պահեստային հասանելիություն՝ լուսանկարներ և տեսանյութեր ուղարկելու համար։",
@@ -613,6 +643,7 @@
   "recoveryPasswordBannerTitle": "Պահպանեք ձեր վերականգնման բառը։",
   "recoveryPasswordDescription": "Օգտագործեք ձեր վերականգնման գաղտնաբառը ձեր հաշիվը նոր սարքերում ներբեռնելու համար.<br/><br/>Ձեր հաշիվը հնարավոր չէ վերականգնել առանց վերականգնման գաղտնաբառի: Համոզվեք, որ այն պահված է անվտանգ տեղում և չկիսեք այն ուրիշների հետ։",
   "recoveryPasswordEnter": "Մուտքագրեք ձեր վերականգնման թողարկում",
+  "recoveryPasswordErrorLoad": "Սխալ տեղի ունեցավ ձեր վերականգնման գաղտնաբառը բեռնելու ժամանակ:<br/><br/>Խնդրում ենք արտահանել ձեր հաղորդագրությունների գրառումները, ապա վերբեռնել ֆայլը Session-ի օժանդակ կենտրոնի միջոցով, որպեսզի օգնեք լուծելու այս խնդիրը:",
   "recoveryPasswordErrorMessageGeneric": "Խնդրում ենք ստուգել ձեր վերականգնման գաղտնաբառը և փորձել նորից:",
   "recoveryPasswordErrorMessageIncorrect": "Վերականգնման գաղտնաբառի որոշ բառեր սխալ են։ Խնդրում ենք ստուգեք և փորձեք նորից։",
   "recoveryPasswordErrorMessageShort": "Ձեր մուտքագրած վերականգնման գաղտնաբառը բավական երկար չէ։ Խնդրում ենք ստուգեք և նորից փորձեք։",
@@ -622,11 +653,13 @@
   "recoveryPasswordHidePermanentlyDescription1": "Առանց ձեր վերականգնման գաղտնաբառի, դուք չեք կարող բեռնել ձեր հաշիվը նոր սարքերի վրա։ <br/><br/>Մենք ուժեղաբար խորհուրդ ենք տալիս պահպանել ձեր վերականգնման գաղտնաբառը ապահով և անվտանգ վայրում՝ շարունակելուց առաջ։",
   "recoveryPasswordHidePermanentlyDescription2": "Վստա՞հ եք, որ ուզում եք մշտապես թաքցնել Ձեր վերականգնման գաղտնաբառը այս սարքի վրա: Սա անհնար է հետքը քայլել:",
   "recoveryPasswordHideRecoveryPassword": "Թաքցնել Recovery գաղտնաբառը",
+  "recoveryPasswordHideRecoveryPasswordDescription": "Ընդմիշտ թաքցնել վերականգնման գաղտնաբառը այս սարքում:",
   "recoveryPasswordRestoreDescription": "Մուտքագրեք ձեր վերականգնման գաղտնաբառը Ձեր հաշիվը բեռնելու համար։ Եթե չեք պահել այն, կարող եք գտնել ձեր հավելվածի պարամետրերում։",
   "recoveryPasswordView": "Դիտել Գաղտնաբառը",
   "recoveryPasswordWarningSendDescription": "Սա ձեր վերականգնման գաղտնաբառն է։ Եթե այն ուղարկեք ինչ-որ մեկին, նա կունենա ձեր հաշիվը լիարժեք մուտք գործելու հնարավորություն։",
   "redo": "Կրկնել",
   "remove": "Հեռացնել",
+  "removePasswordFail": "Չհաջողվեց հեռացնել գաղտնաբառը",
   "reply": "Պատասխանել",
   "resend": "Կրկին ուղարկել",
   "resolving": "Բեռնում է երկրի տվյալները...",
@@ -669,6 +702,7 @@
   "set": "Սահմանել",
   "settingsRestartDescription": "Ձեր նոր կարգավորումներն կիրառելու համար դուք պետք է վերագործարկեք {app_name}։",
   "share": "Կիսվել",
+  "shareAccountIdDescription": "Հրավիրե՛ք ձեր ընկերոջը զրուցելու ձեզ հետ {app_name}-ում՝ կիսվելով ձեր Account ID-ով.",
   "shareAccountIdDescriptionCopied": "Կիսվեք ձեր ընկերների հետ որտեղ սովորաբար խոսում եք նրանց հետ - ապա տեղափոխեք զրույցը այստեղ։",
   "shareExtensionDatabaseError": "Տվյալների բազան բացելու հետ խնդիր է առաջացել: Խնդրում ենք կրկին փորձեք:",
   "show": "Ցուցադրել",
@@ -696,6 +730,7 @@
   "urlCopy": "Պատճենել հղումը",
   "urlOpen": "Բացել URL",
   "urlOpenBrowser": "Սա կբացվի ձեր զննարկիչում:",
+  "urlOpenDescription": "Վստա՞հ եք, որ ցանկանում եք բացել այս URL-ը ձեր դիտարկիչում?<br/><br/><b>{url}</b>",
   "useFastMode": "Օգտագործել արագ ռեժիմը",
   "video": "Տեսանյութ",
   "videoErrorPlay": "Չհաջողվեց նվագարկել տեսանյութը։",
