--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -29,7 +29,11 @@
   "adminRemoveAsAdmin": "Hapus sebagai Admin",
   "adminRemoveCommunityNone": "Tidak ada Admin di Komunitas ini.",
   "adminRemoveFailed": "Gagal menghapus {name} sebagai Admin.",
+  "adminRemoveFailedMultiple": "Gagal menghapus <b>{name}</b> dan <b>{count} lainnya</b> sebagai Admin.",
+  "adminRemoveFailedOther": "Gagal menghapus <b>{name}</b> dan <b>{other_name}</b> sebagai Admin.",
   "adminRemovedUser": "<b>{name}</b> dihapus sebagai Admin.",
+  "adminRemovedUserMultiple": "<b>{name}</b> dan <b>{count} lainnya</b> telah dihapus sebagai Admin.",
+  "adminRemovedUserOther": "<b>{name}</b> dan <b>{other_name}</b> telah dihapus sebagai Admin.",
   "adminSendingPromotion": "Mengirim promosi admin",
   "adminSettings": "Pengaturan Admin",
   "adminTwoPromotedToAdmin": "<b>{name}</b> dan <b>{other_name}</b> dipromosikan menjadi Admin.",
@@ -66,6 +70,7 @@
   "attachmentsDownload": "Unduh Lampiran",
   "attachmentsDuration": "Durasi:",
   "attachmentsErrorLoad": "Kesalahan melampirkan file",
+  "attachmentsErrorMediaSelection": "Gagal memilih lampiran",
   "attachmentsErrorNoApp": "Tidak menemukan aplikasi untuk memilih media.",
   "attachmentsErrorNotSupported": "Jenis berkas ini tidak didukung.",
   "attachmentsErrorNumber": "Tidak dapat mengirim lebih dari 32 berkas gambar dan video sekaligus.",
@@ -90,6 +95,7 @@
   "attachmentsMoveAndScale": "Pindahkan dan Ubah Skala",
   "attachmentsNa": "N/A",
   "attachmentsNotification": "{emoji} Lampiran",
+  "attachmentsNotificationGroup": "{author}: {emoji} Lampiran",
   "attachmentsResolution": "Resolusi:",
   "attachmentsSaveError": "Tidak dapat menyimpan berkas.",
   "attachmentsSendTo": "Kirim ke {name}",
@@ -155,6 +161,7 @@
   "cameraGrantAccessDescription": "{app_name} membutuhkan akses kamera untuk mengambil foto dan video, atau memindai kode QR.",
   "cameraGrantAccessQr": "{app_name} membutuhkan akses kamera untuk memindai kode QR",
   "cancel": "Batal",
+  "changePasswordFail": "Gagal mengubah kata sandi",
   "clear": "Hapus",
   "clearAll": "Hapus Semua",
   "clearDataAll": "Hapus Semua Data",
@@ -177,6 +184,8 @@
   "clearMessagesNoteToSelfDescription": "Anda yakin ingin menghapus semua pesan Catatan Pribadi dari perangkat Anda?",
   "close": "Tutup",
   "closeWindow": "Tutup Jendela",
+  "communityBanDeleteDescription": "Tindakan ini akan memblokir pengguna yang dipilih dari Komunitas ini dan menghapus semua pesan mereka. Apakah Anda yakin ingin melanjutkan?",
+  "communityBanDescription": "Tindakan ini akan memblokir pengguna yang dipilih dari Komunitas ini. Apakah Anda yakin ingin melanjutkan?",
   "communityEnterUrl": "Masukkan Tautan Komunitas",
   "communityEnterUrlErrorInvalid": "URL tidak valid",
   "communityEnterUrlErrorInvalidDescription": "Harap periksa URL Komunitas dan coba lagi.",
@@ -185,7 +194,6 @@
   "communityInvitation": "Undangan Komunitas",
   "communityJoin": "Gabung dengan Komunitas",
   "communityJoinDescription": "Apakah Anda yakin ingin bergabung dengan {community_name}?",
-  "communityJoinError": "Gagal bergabung dengan {community_name}",
   "communityJoinOfficial": "Atau gabung salah satu dari ini...",
   "communityJoined": "Bergabung dengan Komunitas",
   "communityJoinedAlready": "Anda sudah menjadi anggota komunitas ini.",
@@ -211,6 +219,7 @@
   "conversationsAddedToHome": "Ditambahkan ke layar beranda",
   "conversationsAudioMessages": "Pesan Suara",
   "conversationsAutoplayAudioMessage": "Putar Otomatis Pesan Suara",
+  "conversationsAutoplayAudioMessageDescription": "Putar otomatis pesan suara secara berurutan",
   "conversationsBlockedContacts": "Kontak Diblokir",
   "conversationsCommunities": "Komunitas",
   "conversationsDelete": "Hapus Percakapan",
@@ -255,7 +264,12 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Legacy",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Versi asli dari pesan menghilang.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> mengatur pesan menghilang dalam <b>{time}</b>",
+  "deleteAfterLegacyGroupsGroupCreation": "Harap tunggu sementara grup sedang dibuat...",
+  "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Gagal Memperbarui Grup",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Anda tidak diizinkan untuk menghapus pesan orang lain",
+  "deleteMessage": "{count, plural, other [Hapus Pesan]}",
   "deleteMessageConfirm": "Apakah Anda yakin ingin menghapus pesan ini?",
+  "deleteMessageDeleted": "{count, plural, other [Pesan dihapus]}",
   "deleteMessageDeletedGlobally": "Pesan ini telah dihapus",
   "deleteMessageDeletedLocally": "Pesan ini dihapus pada perangkat ini",
   "deleteMessageDescriptionDevice": "Apakah Anda yakin ingin menghapus pesan ini hanya dari perangkat ini?",
@@ -326,6 +340,12 @@
   "emojiReactsClearAll": "Anda yakin ingin menghapus semua {emoji}?",
   "emojiReactsCoolDown": "Pelan - pelan! Anda telah mengirim terlalu banyak reaksi emoji. Coba lagi nanti",
   "emojiReactsCountOthers": "{count, plural, other [Dan # lainnya telah bereaksi {emoji} ke pesan ini.]}",
+  "emojiReactsHoverNameDesktop": "{name} memberi reaksi {emoji_name}",
+  "emojiReactsHoverNameTwoDesktop": "{name} dan {other_name} memberi reaksi {emoji_name}",
+  "emojiReactsHoverTwoNameMultipleDesktop": "{name} dan <span>{count} lainnya</span> memberi reaksi {emoji_name}",
+  "emojiReactsHoverYouNameDesktop": "Anda memberi reaksi {emoji_name}",
+  "emojiReactsHoverYouNameMultipleDesktop": "Anda dan <span>{count} lainnya</span> memberi reaksi {emoji_name}",
+  "emojiReactsHoverYouNameTwoDesktop": "Anda dan {name} memberi reaksi {emoji_name}",
   "emojiReactsNotification": "Bereaksi pada pesan Anda {emoji}",
   "enable": "Aktifkan",
   "errorConnection": "Silakan periksa koneksi internet Anda dan coba lagi.",
@@ -361,15 +381,24 @@
   "groupInviteSending": "Mengirim undangan",
   "groupInviteSent": "Undangan terkirim",
   "groupInviteSuccessful": "Undangan grup berhasil",
-  "groupInviteVersion": "Pengguna harus memiliki versi {version} atau lebih tinggi untuk menerima undangan",
   "groupInviteYou": "<b>Anda</b> diundang untuk bergabung dengan grup.",
+  "groupInviteYouAndMoreNew": "<b>Anda</b> dan <b>{count} lainnya</b> telah diundang untuk bergabung ke grup.",
+  "groupInviteYouAndOtherNew": "<b>Anda</b> dan <b>{other_name}</b> telah diundang untuk bergabung dengan grup.",
   "groupLeave": "Keluar grup",
+  "groupLeaveDescription": "Apakah Anda yakin ingin meninggalkan {group_name}?",
   "groupLeaveErrorFailed": "Gagal meninggalkan {group_name}",
   "groupLegacyBanner": "Grup telah ditingkatkan, buat grup baru untuk meningkatkan. Fungsi grup lama akan menurun mulai {date}.",
   "groupMemberLeft": "<b>{name}</b> keluar dari grup.",
   "groupMemberLeftMultiple": "<b>{name}</b> dan <b>{count} lainnya</b> keluar dari grup.",
   "groupMemberLeftTwo": "<b>{name}</b> dan <b>{other_name}</b> keluar dari grup.",
   "groupMemberNew": "<b>{name}</b> bergabung dengan grup.",
+  "groupMemberNewHistory": "<b>{name}</b> telah diundang untuk bergabung dengan grup. Riwayat obrolan dibagikan.",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> dan <b>{count} lainnya</b> telah diundang untuk bergabung dengan grup. Riwayat obrolan dibagikan.",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> dan <b>{other_name}</b> telah diundang untuk bergabung dengan grup. Riwayat obrolan dibagikan.",
+  "groupMemberNewMultiple": "<b>{name}</b> dan <b>{count} lainnya</b> telah diundang untuk bergabung dengan grup.",
+  "groupMemberNewTwo": "<b>{name}</b> dan <b>{other_name}</b> telah diundang untuk bergabung dengan grup.",
+  "groupMemberNewYouHistoryMultiple": "<b>Anda</b> dan <b>{count} lainnya</b> telah diundang untuk bergabung dengan grup. Riwayat obrolan dibagikan.",
+  "groupMemberNewYouHistoryTwo": "<b>Anda</b> dan <b>{name}</b> telah diundang untuk bergabung dengan grup. Riwayat obrolan dibagikan.",
   "groupMemberYouLeft": "<b>Anda</b> keluar dari grup.",
   "groupMembers": "Anggota grup",
   "groupMembersNone": "Tidak ada anggota lain di dalam grup ini.",
@@ -382,17 +411,24 @@
   "groupNoMessages": "Tidak ada pesan dari <b>{group_name}</b>. Kirim pesan untuk memulai percakapan!",
   "groupOnlyAdmin": "Anda adalah satu-satunya admin di <b>{group_name}</b>.<br/><br/>Anggota grup dan pengaturan tidak dapat diubah tanpa admin.",
   "groupPromotedYou": "<b>Anda</b> dipromosikan menjadi Admin.",
+  "groupPromotedYouMultiple": "<b>Anda</b> dan <b>{count} lainnya</b> dipromosikan menjadi Admin.",
+  "groupPromotedYouTwo": "<b>Anda</b> dan <b>{name}</b> dipromosikan menjadi Admin.",
   "groupRemoveDescription": "Apakah Anda ingin menghapus <b>{name}</b> dari <b>{group_name}</b>?",
   "groupRemoveDescriptionMultiple": "Apakah Anda ingin menghapus <b>{name}</b> dan <b>{count} lainnya</b> dari <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Apakah Anda ingin menghapus <b>{name}</b> dan <b>{other_name}</b> dari <b>{group_name}</b>?",
+  "groupRemoveMessages": "{count, plural, other [Hapus pengguna dan pesan mereka]}",
+  "groupRemoveUserOnly": "{count, plural, other [Hapus pengguna]}",
   "groupRemoved": "<b>{name}</b> telah dikeluarkan dari grup.",
   "groupRemovedMultiple": "<b>{name}</b> dan <b>{count} lainnya</b> dikeluarkan dari grup.",
   "groupRemovedTwo": "<b>{name}</b> dan <b>{other_name}</b> dikeluarkan dari grup.",
   "groupRemovedYou": "Anda dikeluarkan dari <b>{group_name}</b>.",
+  "groupRemovedYouMultiple": "<b>Anda</b> dan <b>{count} lainnya</b> telah dikeluarkan dari grup.",
+  "groupRemovedYouTwo": "<b>Anda</b> dan <b>{other_name}</b> telah dikeluarkan dari grup.",
   "groupSetDisplayPicture": "Atur Tampilan Gambar Grup",
   "groupUnknown": "Grup tidak dikenal",
   "groupUpdated": "Grup diperbarui",
   "helpFAQ": "FAQ",
+  "helpHelpUsTranslateSession": "Bantu kami menerjemahkan {app_name}",
   "helpReportABug": "Laporkan Bug",
   "helpReportABugDescription": "Bagikan beberapa rincian untuk membantu kami menyelesaikan masalah Anda. Ekspor log Anda, kemudian unggah berkas melalui Help Desk {app_name}.",
   "helpReportABugExportLogs": "Ekspor Log",
@@ -402,6 +438,7 @@
   "helpSupport": "Dukungan",
   "helpWedLoveYourFeedback": "Kami ingin masukan Anda",
   "hide": "Tutup",
+  "hideMenuBarDescription": "Alihkan visibilitas bilah menu sistem",
   "hideOthers": "Sembunyikan lainnya",
   "image": "Gambar",
   "incognitoKeyboard": "Papan Ketik Penyamaran",
@@ -413,8 +450,12 @@
   "learnMore": "Selengkapnya",
   "leave": "Tinggalkan",
   "leaving": "Meninggalkan...",
+  "legacyGroupMemberNew": "<b>{name}</b> bergabung dengan grup.",
   "legacyGroupMemberNewMultiple": "<b>{name}</b> dan <b>{count} lainnya</b> bergabung dengan grup.",
+  "legacyGroupMemberNewYouMultiple": "<b>Anda</b> dan <b>{count} lainnya</b> bergabung dengan grup.",
+  "legacyGroupMemberNewYouOther": "<b>Anda</b> dan <b>{other_name}</b> bergabung dengan grup.",
   "legacyGroupMemberTwoNew": "<b>{name}</b> dan <b>{other_name}</b> bergabung dengan grup.",
+  "legacyGroupMemberYouNew": "<b>Anda</b> bergabung dengan grup.",
   "linkPreviews": "Pratinjau Tautan",
   "linkPreviewsDescription": "Tampilkan pratinjau tautan untuk URL yang didukung.",
   "linkPreviewsEnable": "Aktifkan Pratinjau Tautan",
@@ -443,6 +484,7 @@
   "membersActive": "{count, plural, other [# anggota aktif]}",
   "membersAddAccountIdOrOns": "Tambah Account ID atau ONS",
   "membersInvite": "Undang Teman",
+  "membersInviteSend": "{count, plural, other [Kirim Undangan]}",
   "membersInviteShareDescription": "Apakah Anda ingin berbagi riwayat pesan grup dengan <b>{name}</b>?",
   "membersInviteShareDescriptionMultiple": "Apakah Anda ingin berbagi riwayat pesan grup dengan <b>{name}</b> dan <b>{count} lainnya</b>?",
   "membersInviteShareDescriptionTwo": "Apakah Anda ingin berbagi riwayat pesan grup dengan <b>{name}</b> dan <b>{other_name}</b>?",
@@ -458,6 +500,7 @@
   "messageInfo": "Informasi Pesan",
   "messageMarkRead": "Tandai dibaca",
   "messageMarkUnread": "Tandai belum dibaca",
+  "messageNew": "{count, plural, other [Pesan Baru]}",
   "messageNewDescriptionDesktop": "Mulai percakapan baru dengan memasukkan ID Akun teman Anda atau ONS.",
   "messageNewDescriptionMobile": "Mulai percakapan baru dengan memasukkan ID Akun teman Anda, ONS atau memindai kode QR mereka.",
   "messageNewYouveGot": "{count, plural, other [Anda menerima pesan baru #.]}",
@@ -476,6 +519,7 @@
   "messageRequestsNonePending": "Tidak ada permintaan pesan tertunda",
   "messageRequestsTurnedOff": "<b>{name}</b> menonaktifkan permintaan pesan dari Percakapan Komunitas, sehingga Anda tidak dapat mengirim mereka pesan.",
   "messageSelect": "Pilih Pesan",
+  "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "Gagal terkirim",
   "messageStatusFailedToSync": "Gagal menyinkronkan",
   "messageStatusSyncing": "Menyinkronkan",
@@ -483,6 +527,8 @@
   "messageVoice": "Pesan Suara",
   "messageVoiceErrorShort": "Tahan untuk merekam pesan suara",
   "messageVoiceSlideToCancel": "Geser untuk Batal",
+  "messageVoiceSnippet": "{emoji} Pesan Suara",
+  "messageVoiceSnippetGroup": "{author}: {emoji} Pesan Suara",
   "messages": "Pesan",
   "minimize": "Kecilkan",
   "next": "Selanjutnya",
@@ -531,10 +577,15 @@
   "onboardingAccountCreate": "Buat akun",
   "onboardingAccountCreated": "Akun telah dibuat",
   "onboardingAccountExists": "Saya punya akun",
+  "onboardingBackAccountCreation": "Anda tidak bisa kembali lebih jauh. Untuk membatalkan pembuatan akun Anda, {app_name} perlu keluar.",
+  "onboardingBackLoadAccount": "Anda tidak dapat kembali lebih jauh. Untuk menghentikan pemuatan akun Anda, {app_name} perlu keluar.",
+  "onboardingBubbleCreatingAnAccountIsEasy": "Membuat akun dengan cepat, gratis, dan anonim {emoji}",
   "onboardingBubbleNoPhoneNumber": "Anda bahkan tidak membutuhkan nomor telepon untuk mendaftar.",
   "onboardingBubblePrivacyInYourPocket": "Privasi di saku anda.",
   "onboardingBubbleSessionIsEngineered": "{app_name} dirancang untuk melindungi privasi Anda.",
+  "onboardingBubbleWelcomeToSession": "Selamat datang di {app_name} {emoji}",
   "onboardingHitThePlusButton": "Tekan tombol tambah untuk memulai obrolan, membuat grup, atau bergabung dengan komunitas resmi!",
+  "onboardingMessageNotificationExplanation": "Ada dua cara {app_name} dapat memberitahu Anda tentang pesan baru.",
   "onboardingPrivacy": "Kebijakan Privasi",
   "onboardingTos": "Terms of Service",
   "onboardingTosPrivacy": "Dengan menggunakan layanan ini, Anda menyetujui <b>Syarat Layanan</b> dan <b>Kebijakan Privasi</b> kami",
@@ -579,6 +630,7 @@
   "permissionsMicrophoneAccessRequiredDesktop": "Anda dapat mengaktifkan akses mikrofon di pengaturan privasi {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} membutuhkan akses mikrofon untuk melakukan panggilan dan merekam pesan audio.",
   "permissionsRequired": "Izin dibutuhkan",
+  "permissionsStorageDeniedLegacy": "{app_name} memerlukan akses penyimpanan agar Anda dapat mengirim dan menyimpan lampiran. Ketuk Setelan -> Izin, lalu aktifkan \"Penyimpanan\".",
   "permissionsStorageSave": "{app_name} membutuhkan akses penyimpanan untuk menyimpan lampiran dan media.",
   "permissionsStorageSaveDenied": "{app_name} membutuhkan akses penyimpanan untuk menyimpan foto dan video, tetapi telah ditolak secara permanen. Silakan lanjutkan ke pengaturan aplikasi, pilih \"Izin\", dan aktifkan \"Penyimpanan\".",
   "permissionsStorageSend": "{app_name} membutuhkan akses penyimpanan untuk mengirim foto dan video.",
@@ -625,6 +677,7 @@
   "recoveryPasswordWarningSendDescription": "Ini adalah kata sandi pemulihan Anda. Jika Anda mengirimkannya ke seseorang, mereka akan memiliki akses penuh ke akun Anda.",
   "redo": "mengulang",
   "remove": "Hapus",
+  "removePasswordFail": "Gagal menghapus kata sandi",
   "reply": "Balas",
   "resend": "Kirim ulang",
   "resolving": "Memuat informasi negara...",
@@ -667,6 +720,7 @@
   "set": "Atur",
   "settingsRestartDescription": "Anda harus memulai ulang {app_name} untuk menerapkan setelan baru.",
   "share": "Bagikan",
+  "shareAccountIdDescription": "Undang teman Anda untuk mengobrol dengan Anda di {app_name} dengan membagikan ID Akun Anda kepada mereka.",
   "shareAccountIdDescriptionCopied": "Bagikan dengan teman Anda di mana pun Anda biasa berbicara dengan mereka — lalu pindahkan percakapan ke sini.",
   "shareExtensionDatabaseError": "Terjadi masalah saat membuka database. Silakan mulai ulang aplikasi dan coba lagi.",
   "show": "Tampilkan",
@@ -674,6 +728,7 @@
   "showLess": "Tampilkan Sedikit",
   "stickers": "Stiker",
   "supportGoTo": "Cek halaman bantuan",
+  "systemInformationDesktop": "Informasi Sistem: {information}",
   "theContinue": "Lanjutkan",
   "theDefault": "Bawaan",
   "theError": "Kesalahan",
@@ -685,6 +740,7 @@
   "updateDownloaded": "Pembaruan terpasang, klik untuk memulai ulang",
   "updateDownloading": "Mengunduh pembaruan: {percent_loader}%",
   "updateError": "Pembeharuan Gagal",
+  "updateErrorDescription": "{app_name} gagal diperbarui. Silahkan pergi ke {session_download_url} dan instal versi terbaru secara manual, kemudian hubungi Pusat Bantuan kami untuk memberitahu terkait masalah ini.",
   "updateNewVersion": "Versi terbaru dari {app_name} telah tersedia, ketuk untuk memperbarui",
   "updateNewVersionDescription": "Versi baru {app_name} telah tersedia.",
   "updateReleaseNotes": "Lihat Catatan Rilis",
@@ -694,6 +750,7 @@
   "urlCopy": "Salin URL",
   "urlOpen": "Buka URL",
   "urlOpenBrowser": "Ini akan membuka di peramban Anda.",
+  "urlOpenDescription": "Apakah Anda yakin ingin membuka URL ini di browser?<br/><br/><b>{url}</b>",
   "useFastMode": "Gunakan Fast Mode",
   "video": "Video",
   "videoErrorPlay": "Tidak dapat memutar video.",
