--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -154,6 +154,7 @@
   "cameraGrantAccessDescription": "{app_name}で写真や動画を撮るには、またはQRコードをスキャンするにはカメラへのアクセスが必要です。",
   "cameraGrantAccessQr": "{app_name}でQRコードをスキャンするにはカメラへのアクセスが必要です。",
   "cancel": "キャンセル",
+  "changePasswordFail": "パスワードの変更に失敗しました",
   "clear": "消去",
   "clearAll": "すべて消去する",
   "clearDataAll": "すべてのデータを消去する",
@@ -184,7 +185,6 @@
   "communityInvitation": "Community Invitation",
   "communityJoin": "コミュニティに参加する",
   "communityJoinDescription": "本当に{community_name}に参加しますか？",
-  "communityJoinError": "{community_name} への参加に失敗しました",
   "communityJoinOfficial": "または、以下のグループに参加する…",
   "communityJoined": "コミュニティへの参加が完了しました",
   "communityJoinedAlready": "あなたは既にこのCommunityのメンバーです。",
@@ -210,6 +210,7 @@
   "conversationsAddedToHome": "ホーム画面に追加しました",
   "conversationsAudioMessages": "音声メッセージ",
   "conversationsAutoplayAudioMessage": "音声メッセージの自動再生",
+  "conversationsAutoplayAudioMessageDescription": "音声メッセージを連続して自動的に再生する",
   "conversationsBlockedContacts": "ブロック リスト",
   "conversationsCommunities": "Communities",
   "conversationsDelete": "会話を削除する",
@@ -253,6 +254,7 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Legacy",
   "deleteAfterLegacyDisappearingMessagesOriginal": "消滅メッセージの元のバージョン。",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b>は消えるメッセージの消去時間を<b>{time}</b>に設定しました",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "他のユーザーの投稿を削除する権限はありません",
   "deleteMessageConfirm": "本当にこのメッセージを削除しますか？",
   "deleteMessageDeletedGlobally": "このメッセージは削除されました",
   "deleteMessageDeletedLocally": "このメッセージはこのデバイス上で削除されました",
@@ -276,11 +278,14 @@
   "disappearingMessagesDeleteType": "削除の種類",
   "disappearingMessagesDescription": "この設定は、この会話の全員に適用されます。",
   "disappearingMessagesDescription1": "この設定は、この会話で送信するメッセージに適用されます。",
+  "disappearingMessagesDescriptionGroup": "この設定はこの会話の全員に適用されます。<br/>グループ管理者のみがこの設定を変更できます。",
   "disappearingMessagesDisappear": "{disappearing_messages_type} - {time} の後に消えます",
   "disappearingMessagesDisappearAfterRead": "既読後に消えます",
   "disappearingMessagesDisappearAfterReadDescription": "メッセージは読み込んだ後に削除されます。",
+  "disappearingMessagesDisappearAfterReadState": "既読後に消えます - {time}",
   "disappearingMessagesDisappearAfterSend": "送信後に消えます",
   "disappearingMessagesDisappearAfterSendDescription": "メッセージは送信後に削除されます。",
+  "disappearingMessagesDisappearAfterSendState": "送信後に消えます - {time}",
   "disappearingMessagesFollowSetting": "設定をフォロー",
   "disappearingMessagesFollowSettingOff": "送信したメッセージはもう消滅しません。消滅メッセージを<b>オフ</b>にしてもよろしいですか？",
   "disappearingMessagesFollowSettingOn": "あなたのメッセージを<b>{time}</b>後に<b>{disappearing_messages_type}</b>消えるように設定しますか？",
@@ -292,6 +297,7 @@
   "disappearingMessagesTimer": "タイマー",
   "disappearingMessagesTurnedOff": "<b>{name}</b> が消えるメッセージをオフにしました。送信されたメッセージは消えなくなります。",
   "disappearingMessagesTurnedOffYou": "<b>You</b> は<b>消えるメッセージ</b>をオフにしました。送信されたメッセージは消えなくなります。",
+  "disappearingMessagesTurnedOffYouGroup": "<b>あなた</b> は消えているメッセージを <b>オフ</b>にしました。",
   "disappearingMessagesTypeRead": "読むか",
   "disappearingMessagesTypeSent": "送信",
   "disappearingMessagesUpdated": "<b>{admin_name}</b>が消えるメッセージの設定を更新しました。",
@@ -359,15 +365,22 @@
   "groupInviteSending": "招待状を送信中",
   "groupInviteSent": "招待を送信しました",
   "groupInviteSuccessful": "グループの招待が成功しました",
-  "groupInviteVersion": "ユーザーはバージョン {version} 以上でなければ招待を受け取ることができません",
   "groupInviteYou": "<b>You</b> はグループに招待されました。",
+  "groupInviteYouAndMoreNew": "<b>あなた</b> と <b>{count}名</b> がグループに加わりました。",
+  "groupInviteYouAndOtherNew": "<b>あなた</b> と <b>{other_name}</b> がグループに加わりました。",
   "groupLeave": "グループを抜ける",
+  "groupLeaveDescription": "本当に{group_name}を退出しますか？",
   "groupLeaveErrorFailed": "{group_name} を退出できませんでした",
   "groupLegacyBanner": "グループがアップグレードされました。アップグレードするには新しいグループを作成してください。古いグループの機能は{date}以降低下します。",
   "groupMemberLeft": "<b>{name}</b> がグループを退会しました.",
   "groupMemberLeftMultiple": "<b>{name}</b> と <b>{count}名</b> がグループから退会しました。",
   "groupMemberLeftTwo": "<b>{name}</b> と <b>{other_name}</b> がグループから退会しました。",
   "groupMemberNew": "<b>{name}</b>がグループに加わりました",
+  "groupMemberNewHistory": "<b>{name}</b> がグループに招待されました。チャット履歴が共有されました。",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> と <b>{count}名</b> がグループに招待されました。チャット履歴が共有されました。",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> と <b>{other_name}</b> がグループに招待されました。チャット履歴が共有されました。",
+  "groupMemberNewMultiple": "<b>{name}</b> と <b>{count}名</b> がグループに招待されました。",
+  "groupMemberNewTwo": "<b>{name}</b> と <b>{other_name}</b> がグループに招待されました。",
   "groupMemberYouLeft": "<b>You</b> left the group.",
   "groupMembers": "グループメンバー",
   "groupMembersNone": "このグループには他のメンバーがいません。",
@@ -380,6 +393,8 @@
   "groupNoMessages": "<b>{group_name}</b>からのメッセージがありません。会話を開始するにはメッセージを送信してください。",
   "groupOnlyAdmin": "あなたは<b>{group_name}</b>で唯一の管理者です。<br/><br/>管理者がいないと、グループメンバーと設定は変更できません。",
   "groupPromotedYou": "<b>You</b> はAdminに昇格しました。",
+  "groupPromotedYouMultiple": "<b>あなた</b> と <b>{count}名</b> はAdminに昇格しました。",
+  "groupPromotedYouTwo": "<b>あなた</b> と <b>{name}</b> はAdminに昇格しました。",
   "groupRemoveDescription": "<b>{group_name}</b>から<b>{name}</b>を削除しますか？",
   "groupRemoveDescriptionMultiple": "<b>{group_name}</b>から<b>{name}</b>と<b>{count}人</b>を削除しますか？",
   "groupRemoveDescriptionTwo": "<b>{group_name}</b>から<b>{name}</b>と<b>{other_name}</b>を削除しますか？",
@@ -412,6 +427,7 @@
   "leave": "離脱",
   "leaving": "終了しています...",
   "legacyGroupMemberNewMultiple": "<b>{name}</b> と <b>{count}名</b> がグループに加わりました。",
+  "legacyGroupMemberNewYouMultiple": "<b>あなた</b> と <b>{count}名</b> がグループに加わりました。",
   "legacyGroupMemberTwoNew": "<b>{name}</b> と <b>{other_name}</b> がグループに加わりました。",
   "linkPreviews": "リンクプレビュー",
   "linkPreviewsDescription": "サポートされている URL のリンクプレビューを表示します。",
@@ -500,6 +516,8 @@
   "notificationsFastModeDescription": "Googleの通知サーバーを使用して、新しいメッセージが確実かつ即座に通知されます。",
   "notificationsFastModeDescriptionIos": "Appleの通知サーバーの利用で、すぐかつ確実に新しいメッセージの受信を通知されます。",
   "notificationsGoToDevice": "端末の通知設定に移動",
+  "notificationsHeaderAllMessages": "通知 - 全部",
+  "notificationsHeaderMentionsOnly": "通知設定 メンションのみ",
   "notificationsIosGroup": "{name}から {conversation_name} へ",
   "notificationsIosRestart": "{device}の再起動中にメッセージが届いたかもしれません",
   "notificationsLedColor": "LED色",
@@ -521,6 +539,7 @@
   "notificationsVibrate": "振動",
   "off": "オフ",
   "okay": "OK",
+  "on": "オン",
   "onboardingAccountCreate": "アカウントを作成",
   "onboardingAccountCreated": "アカウントが作成されました",
   "onboardingAccountExists": "アカウントをお持ちですか？",
@@ -560,9 +579,11 @@
   "passwordSet": "パスワードを設定",
   "passwordSetDescription": "パスワードが設定されました。安全に保管してください。",
   "paste": "貼り付け",
+  "permissionMusicAudioDenied": "{app_name} は、ファイル、音楽、およびオーディオを送信するために音楽およびオーディオアクセスが必要ですが、それが恒久的に拒否されています。設定に移動して、「権限」を選択し、「音楽およびオーディオ」を有効にしてください。",
   "permissionsAppleMusic": "{app_name}はメディア添付ファイルを再生するためにApple Musicを使用する必要があります。",
   "permissionsAutoUpdate": "自動更新",
   "permissionsAutoUpdateDescription": "起動時に自動的に更新の有無を確認する",
+  "permissionsCameraDenied": "{app_name}で写真や動画を撮るには、カメラへのアクセスを許可する必要がありますが、無効になっています。設定 -> アプリの権限 をタップして、「カメラ」へのアクセスをオンにしてください。",
   "permissionsFaceId": "{app_name} の画面ロック機能はFace IDを使用します。",
   "permissionsKeepInSystemTray": "システムトレイに常駐",
   "permissionsKeepInSystemTrayDescription": "{app_name}はウィンドウを閉じてもバックグラウンドで実行され続けます",
@@ -570,6 +591,7 @@
   "permissionsMicrophone": "マイク",
   "permissionsMicrophoneAccessRequiredDesktop": "マイクのアクセス権限は{app_name}のプライバシー設定で有効にできます。",
   "permissionsMicrophoneAccessRequiredIos": "{app_name}で通話をかけたり、音声メッセージを録音するにはマイクへのアクセスが必要です。",
+  "permissionsMusicAudio": "{app_name}はファイル、音楽およびオーディオを送信するために音楽とオーディオへのアクセス許可が必要です。",
   "permissionsRequired": "アクセス許可が必要です",
   "permissionsStorageSave": "{app_name}は添付ファイルやメディアを保存するためにストレージへのアクセスが必要です。",
   "permissionsStorageSaveDenied": "{app_name}が写真や動画を保存するには、ストレージへのアクセスを許可する必要がありますが、無効になっています。アプリ設定メニューから、「アプリの権限」を選び、「ストレージ」へのアクセス許可を有効にしてください。",
@@ -616,6 +638,7 @@
   "recoveryPasswordWarningSendDescription": "これはあなたのリカバリーパスワードです。誰かに送信すると、その人はあなたのアカウントにフルアクセスできます。",
   "redo": "やり直す",
   "remove": "削除",
+  "removePasswordFail": "パスワードを削除できませんでした",
   "reply": "返信",
   "resend": "再送",
   "resolving": "国名を読み込み中...",
@@ -676,6 +699,8 @@
   "updateDownloaded": "更新がインストールされました。再起動するにはクリックしてください。",
   "updateDownloading": "ダウンロード中のアップデート: {percent_loader}%",
   "updateError": "更新できませんでした",
+  "updateNewVersion": "{app_name} のバージョンアップが利用可能です。タップすると更新します。",
+  "updateNewVersionDescription": "新バージョンの {app_name} が利用可能です。 ",
   "updateReleaseNotes": "リリースノートを閲覧",
   "updateSession": "{app_name}アップデート",
   "updateVersion": "バージョン {version}",
