--- a/_locales/kmr/messages.json
+++ b/_locales/kmr/messages.json
@@ -49,7 +49,7 @@
   "appearanceThemesOceanDark": "Zulmatî",
   "appearanceThemesOceanLight": "Bambelû",
   "appearanceZoom": "Zoom Out",
-  "appearanceZoomIn": "+{count}",
+  "appearanceZoomIn": "Zoom In",
   "appearanceZoomOut": "Tesdîq kirin",
   "attachment": "هاوپێچ",
   "attachmentsAdd": "Add attachment",
@@ -185,7 +185,6 @@
   "communityInvitation": "Daweta Civatê",
   "communityJoin": "Tevlî Civatê Bibe",
   "communityJoinDescription": "Tu piştrast î ku tu dixwazî tevlî {community_name} bibî?",
-  "communityJoinError": "Bi ser neket ku têkeve {community_name}",
   "communityJoinOfficial": "An tevlî yek ji van bibe...",
   "communityJoined": "Di Civatê de tesîre",
   "communityJoinedAlready": "Tu jixwe girêdayî vê civatê yî.",
@@ -360,7 +359,6 @@
   "groupInviteSending": "Daxwaza Komê bi şandin",
   "groupInviteSent": "Daxwazê şande",
   "groupInviteSuccessful": "Dawetkirina Grûpa Serkeftî",
-  "groupInviteVersion": "Bikarhênerên divê versiyona {version} an jor be bikeve jiber ku bi vexandinek birra",
   "groupInviteYou": "<b>Te</b> jîhatiye xwe da te dawet li komê kirin.",
   "groupLeave": "Komê Biterikîne",
   "groupLeaveErrorFailed": "Têbînete cavaniyên {group_name}",
