--- a/_locales/lt/messages.json
+++ b/_locales/lt/messages.json
@@ -29,7 +29,11 @@
   "adminRemoveAsAdmin": "Pašalinti kaip administratorių",
   "adminRemoveCommunityNone": "Nėra adminų šioje Community.",
   "adminRemoveFailed": "Nepavyko pašalinti {name} kaip administratoriaus.",
+  "adminRemoveFailedMultiple": "Nepavyko pašalinti <b>{name}</b> ir <b>dar {count}</b> iš administratorių.",
+  "adminRemoveFailedOther": "Nepavyko pašalinti <b>{name}</b> ir <b>{other_name}</b> iš administratorių.",
   "adminRemovedUser": "<b>{name}</b> buvo pašalintas kaip adminas.",
+  "adminRemovedUserMultiple": "<b>{name}</b> ir <b>dar {count}</b> buvo pašalinti iš administratorių.",
+  "adminRemovedUserOther": "<b>{name}</b> ir <b>{other_name}</b> buvo pašalinti iš administratorių.",
   "adminSendingPromotion": "Siunčiama administratoriams",
   "adminSettings": "Administratoriaus nustatymai",
   "adminTwoPromotedToAdmin": "<b>{name}</b> ir <b>{other_name}</b> buvo paskirti adminais.",
@@ -66,6 +70,7 @@
   "attachmentsDownload": "Atsisiųsti priedą",
   "attachmentsDuration": "Trukmė:",
   "attachmentsErrorLoad": "Klaida pridedant failą",
+  "attachmentsErrorMediaSelection": "Nepavyko pasirinkti priedo",
   "attachmentsErrorNoApp": "Nerasta programėlė medijos pasirinkimui.",
   "attachmentsErrorNotSupported": "Šio failo formato nepalaikoma.",
   "attachmentsErrorNumber": "Nepavyksta išsiųsti daugiau nei 32 vaizdų ir vaizdo įrašų failų vienu metu.",
@@ -90,6 +95,7 @@
   "attachmentsMoveAndScale": "Perkelti ir mastelis",
   "attachmentsNa": "N/A",
   "attachmentsNotification": "{emoji} Priedas",
+  "attachmentsNotificationGroup": "{author}: {emoji} priedas",
   "attachmentsResolution": "Raiška:",
   "attachmentsSaveError": "Nepavyksta įrašyti failo.",
   "attachmentsSendTo": "Siųsti adresatui {name}",
@@ -142,6 +148,7 @@
   "callsPermissionsRequiredDescription": "Jūs galite įjungti leidimą \"Balso ir vaizdo skambučiai\" privatumo nustatymuose.",
   "callsReconnecting": "Atjungta...",
   "callsRinging": "Skambinama…",
+  "callsSessionCall": "{app_name} skambutis",
   "callsSettings": "Skambučiai (Beta)",
   "callsVoiceAndVideo": "Balso ir vaizdo skambučiai",
   "callsVoiceAndVideoBeta": "Balso ir vaizdo skambučiai (Beta)",
@@ -155,6 +162,7 @@
   "cameraGrantAccessDescription": "{app_name} reikia prieigos prie kameros, kad galėtumėte fotografuoti, filmuoti ar skenuoti QR kodus.",
   "cameraGrantAccessQr": "{app_name} reikia prieigos prie kameros, kad galėtumėte skenuoti QR kodus.",
   "cancel": "Atsisakyti",
+  "changePasswordFail": "Nepavyko pakeisti slaptažodžio",
   "clear": "Išvalyti",
   "clearAll": "Išvalyti viską",
   "clearDataAll": "Išvalyti visus duomenis",
@@ -185,7 +193,6 @@
   "communityInvitation": "Bendruomenės kvietimas",
   "communityJoin": "Prisijungti prie Community",
   "communityJoinDescription": "Ar tikrai norite prisijungti prie {community_name}?",
-  "communityJoinError": "Nepavyko prisijungti prie {community_name}",
   "communityJoinOfficial": "Arba prisijunkite prie vienos iš šių...",
   "communityJoined": "Prisijungė prie Community",
   "communityJoinedAlready": "Jūs jau esate šioje bendruomenėje.",
@@ -211,6 +218,7 @@
   "conversationsAddedToHome": "Pridėta į pradžios ekraną",
   "conversationsAudioMessages": "Garso įrašai",
   "conversationsAutoplayAudioMessage": "Automatiškai leisti garso žinutes",
+  "conversationsAutoplayAudioMessageDescription": "Automatiškai atkurti nuosekliai išsiųstas garso žinutes.",
   "conversationsBlockedContacts": "Užblokuoti adresatai",
   "conversationsCommunities": "Bendruomenės",
   "conversationsDelete": "Ištrinti pokalbį",
@@ -255,7 +263,12 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Senesnis",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Original version of disappearing messages.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> nustatė išnykstančių žinučių laikmatį į <b>{time}</b>",
+  "deleteAfterLegacyGroupsGroupCreation": "Palaukite, kol yra kuriama grupė...",
+  "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Nepavyko atnaujinti grupės",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Jūs neturite leidimo trinti kitų žmonių žinučių",
+  "deleteMessage": "{count, plural, one [Ištrinti žinutę] few [Ištrinti žinutes] many [Ištrinti žinutes] other [Ištrinti žinutes]}",
   "deleteMessageConfirm": "Ar tikrai norite ištrinti šią žinutę?",
+  "deleteMessageDeleted": "{count, plural, one [Žinutė ištrinta] few [Žinutės ištrintos] many [Žinutės ištrintos] other [Žinutės ištrintos]}",
   "deleteMessageDeletedGlobally": "Ši žinutė ištrinta",
   "deleteMessageDeletedLocally": "Ši žinutė ištrinta šiame įrenginyje",
   "deleteMessageDescriptionDevice": "Ar tikrai norite ištrinti šią žinutę tik iš šio įrenginio?",
@@ -293,7 +306,9 @@
   "disappearingMessagesSetYou": "<b>Jūs</b> nustatėte žinutes dingsiančias po {time} po to, kai jos buvo {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Laikmatis",
   "disappearingMessagesTurnedOff": "<b>{name}</b> išjungė žinučių dingimą. Žinutės, kurias jis siunčia, daugiau nedings.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> <b>išjungė</b> išnykstančias žinutes.",
   "disappearingMessagesTurnedOffYou": "<b>Jūs</b> išjungėte <b>dingstančias žinutes</b>. Žinutės, kurias siunčiate, daugiau nedings.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Jūs</b> <b>išjungėte</b> išnykstančias žinutes.",
   "disappearingMessagesTypeRead": "perskaityta",
   "disappearingMessagesTypeSent": "Išsiųsta",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> atnaujino išnykstančių žinučių nustatymus.",
@@ -361,9 +376,10 @@
   "groupInviteSending": "Siunčiamas kvietimas",
   "groupInviteSent": "Pakvietimas išsiųstas",
   "groupInviteSuccessful": "Grupės kvietimas sėkmingas",
-  "groupInviteVersion": "Norint gauti kvietimus, vartotojai turi turėti {version} ar naujesnę versiją",
   "groupInviteYou": "<b>Jūs</b> buvote pakviesti prisijungti prie grupės.",
+  "groupInviteYouAndMoreNew": "<b>Jūs</b> ir <b>dar {count}</b> buvote pakviesti prisijungti prie grupės.",
   "groupLeave": "Išeiti iš grupės",
+  "groupLeaveDescription": "Ar tikrai norite išeiti iš <b>{group_name}</b>?",
   "groupLeaveErrorFailed": "Nepavyko išeiti iš {group_name}",
   "groupLegacyBanner": "Grupės buvo atnaujintos, sukurkite naują grupę norėdami atnaujinti. Senų grupių funkcionalumas bus apribotas nuo {date}.",
   "groupMemberLeft": "<b>{name}</b> išėjo iš grupės.",
@@ -385,6 +401,8 @@
   "groupRemoveDescription": "Ar norėtumėte pašalinti <b>{name}</b> iš <b>{group_name}</b>?",
   "groupRemoveDescriptionMultiple": "Ar norėtumėte pašalinti <b>{name}</b> ir <b>{count} kitus</b> iš <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Ar norėtumėte pašalinti <b>{name}</b> ir <b>{other_name}</b> iš <b>{group_name}</b>?",
+  "groupRemoveMessages": "{count, plural, one [Šalinti naudotoją ir jo žinutes] few [Šalinti naudotojus ir jų žinutes] many [Šalinti naudotojus ir jų žinutes] other [Šalinti naudotojus ir jų žinutes]}",
+  "groupRemoveUserOnly": "{count, plural, one [Šalinti naudotoją ] few [Šalinti naudotojus] many [Šalinti naudotojus] other [Šalinti naudotojus]}",
   "groupRemoved": "<b>{name}</b> buvo pašalintas iš grupės.",
   "groupRemovedMultiple": "<b>{name}</b> ir <b>{count} kiti</b> buvo pašalinti iš grupės.",
   "groupRemovedTwo": "<b>{name}</b> ir <b>{other_name}</b> buvo pašalinti iš grupės.",
@@ -403,6 +421,7 @@
   "helpSupport": "Pagalba",
   "helpWedLoveYourFeedback": "Laukiame jūsų atsiliepimų",
   "hide": "Slėpti",
+  "hideMenuBarDescription": "Perjungti sistemos meniu juostos matomumą",
   "hideOthers": "Slėpti kitus",
   "image": "Paveikslas",
   "incognitoKeyboard": "Inkognito klaviatūra",
@@ -414,8 +433,11 @@
   "learnMore": "Sužinoti daugiau",
   "leave": "Išeiti",
   "leaving": "Išeinama...",
+  "legacyGroupMemberNew": "<b>{name}</b> prisijungė prie grupės.",
   "legacyGroupMemberNewMultiple": "<b>{name}</b> ir <b>{count} kiti</b> prisijungė prie grupės.",
+  "legacyGroupMemberNewYouOther": "<b>Jūs</b> ir <b>{other_name}</b> prisijungėte prie grupės.",
   "legacyGroupMemberTwoNew": "<b>{name}</b> ir <b>{other_name}</b> prisijungė prie grupės.",
+  "legacyGroupMemberYouNew": "<b>Jūs</b> prisijungėte prie grupės.",
   "linkPreviews": "Nuorodų peržiūros",
   "linkPreviewsDescription": "Rodyti nuorodų peržiūras, palaikomoms URL.",
   "linkPreviewsEnable": "Įjungti nuorodų peržiūras",
@@ -444,6 +466,7 @@
   "membersActive": "{count, plural, one [# aktyvus narys] few [# aktyvūs nariai] many [# aktyvūs nariai] other [# aktyvūs nariai]}",
   "membersAddAccountIdOrOns": "Pridėti paskyros ID arba ONS",
   "membersInvite": "Pakviesti draugus",
+  "membersInviteSend": "{count, plural, one [Siųsti pakvietimą] few [Siųsti pakvietimus] many [Siųsti pakvietimus] other [Siųsti pakvietimus]}",
   "membersInviteShareDescription": "Ar norėtumėte pasidalinti grupės žinučių istorija su <b>{name}</b>?",
   "membersInviteShareDescriptionMultiple": "Ar norėtumėte pasidalinti grupės žinučių istorija su <b>{name}</b> ir <b>{count} kitais</b>?",
   "membersInviteShareDescriptionTwo": "Ar norėtumėte pasidalinti grupės žinučių istorija su <b>{name}</b> ir <b>{other_name}</b>?",
@@ -459,6 +482,7 @@
   "messageInfo": "Žinutės informacija",
   "messageMarkRead": "Žymėti kaip skaitytą",
   "messageMarkUnread": "Žymėti kaip neskaitytą",
+  "messageNew": "{count, plural, one [Nauja žinutė] few [Naujos žinutės] many [Naujos žinutės] other [Naujos žinutės]}",
   "messageNewDescriptionDesktop": "Pradėkite naują pokalbį įvesdami savo draugo Account ID arba ONS.",
   "messageNewDescriptionMobile": "Pradėkite naują pokalbį įvesdami savo draugo Account ID, ONS arba nuskenuodami jų QR kodą.",
   "messageNewYouveGot": "{count, plural, one [Gavote naują žinutę.] few [Gavote # naujas žinutes.] many [Gavote # naujas žinutes.] other [Gavote # naujas žinutes.]}",
@@ -477,6 +501,7 @@
   "messageRequestsNonePending": "Nėra laukiantys žinučių užklausų",
   "messageRequestsTurnedOff": "<b>{name}</b> išjungė žinučių užklausas iš Community pokalbių, todėl negalite jam išsiųsti pranešimo.",
   "messageSelect": "Pasirinkti žinutę",
+  "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "Nepavyko išsiųsti",
   "messageStatusFailedToSync": "Nepavyko sinchronizuoti",
   "messageStatusSyncing": "Sinchronizuojama",
@@ -484,6 +509,8 @@
   "messageVoice": "Balso žinutė",
   "messageVoiceErrorShort": "Laikykite, kad įrašytumėte balso žinutę",
   "messageVoiceSlideToCancel": "Perbraukite, norėdami atsisakyti",
+  "messageVoiceSnippet": "{emoji} balso žinutė",
+  "messageVoiceSnippetGroup": "{author}: {emoji} balso žinutė",
   "messages": "Žinutės",
   "minimize": "Suskleisti",
   "next": "Kitas",
@@ -529,6 +556,7 @@
   "notificationsVibrate": "Vibruoti",
   "off": "Išjungta",
   "okay": "Okay",
+  "on": "Įjungta",
   "onboardingAccountCreate": "Sukurti paskyrą",
   "onboardingAccountCreated": "Paskyra sukurta",
   "onboardingAccountExists": "Aš turiu paskyrą",
@@ -558,6 +586,7 @@
   "passwordCurrentIncorrect": "Jūsų dabartinis slaptažodis yra neteisingas.",
   "passwordDescription": "Reikalingas slaptažodis, kad atrakintumėte {app_name}.",
   "passwordEnter": "Įveskite slaptažodį",
+  "passwordEnterCurrent": "Įveskite dabartinį slaptažodį",
   "passwordEnterNew": "Įveskite naują slaptažodį",
   "passwordError": "Password must only contain letters, numbers and symbols",
   "passwordErrorLength": "Password must be between 6 and 64 characters long",
@@ -580,6 +609,7 @@
   "permissionsMicrophone": "Mikrofonas",
   "permissionsMicrophoneAccessRequiredDesktop": "Jūs galite įjungti mikrofono prieigą {app_name} privatumo nustatymuose",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} reikia prieigos prie mikrofono, kad galėtumėte skambinti ir įrašinėti garso žinutes.",
+  "permissionsMicrophoneDescription": "Leisti prieigą prie mikrofono.",
   "permissionsRequired": "Reikalingas leidimas",
   "permissionsStorageSave": "{app_name} reikia prieigos prie saugyklos, kad galėtų įrašyti priedus ir mediją.",
   "permissionsStorageSaveDenied": "Norint įrašyti nuotraukas ir vaizdo įrašus, {app_name} reikia prieigos prie saugyklos, bet ji buvo visam laikui uždrausta. Prašome pereiti į programėlės nustatymus, pasirinkti \"Leidimai\" ir įjungti \"Saugyklą\".",
@@ -627,6 +657,7 @@
   "recoveryPasswordWarningSendDescription": "Tai yra jūsų atkūrimo slaptažodis. Jei jį išsiųsite kam nors, jie turės pilną prieigą prie jūsų paskyros.",
   "redo": "Grąžinti",
   "remove": "Šalinti",
+  "removePasswordFail": "Nepavyko pašalinti slaptažodžio",
   "reply": "Atsakyti",
   "resend": "Siųsti iš naujo",
   "resolving": "Įkeliama šalių informacija...",
@@ -676,6 +707,7 @@
   "showLess": "Rodyti mažiau",
   "stickers": "Paveiksliukai",
   "supportGoTo": "Pereiti į palaikymo puslapį",
+  "systemInformationDesktop": "Sistemos informacija: {information}",
   "theContinue": "Tęsti",
   "theDefault": "Numatytoji",
   "theError": "Klaida",
@@ -696,6 +728,7 @@
   "urlCopy": "Kopijuoti URL",
   "urlOpen": "Atverti URL nuorodą",
   "urlOpenBrowser": "Tai atidarys jūsų naršyklėje.",
+  "urlOpenDescription": "Ar tikrai norite atverti šią URL nuorodą naršyklėje?<br/><br/><b>{url}</b>",
   "useFastMode": "Naudoti greitą veikseną",
   "video": "Vaizdo įrašas",
   "videoErrorPlay": "Nepavyksta paleisti vaizdo įrašo.",
