--- a/_locales/mn/messages.json
+++ b/_locales/mn/messages.json
@@ -155,6 +155,7 @@
   "cameraGrantAccessDescription": "{app_name} нь гэрэл зураг болон видеог авах эсвэл QR кодыг скан хийхийн тулд камерт хандалт хэрэгтэй.",
   "cameraGrantAccessQr": "{app_name} о QR кодыг скан хийхийн тулд камерт хандалт хэрэгтэй.",
   "cancel": "Цуцлах",
+  "changePasswordFail": "Нууц үгийг өөрчлөхөд алдаа гарлаа",
   "clear": "Арилгах",
   "clearAll": "Бүгдийг арилгах",
   "clearDataAll": "Бүх өгөгдлийг арилгах",
@@ -185,7 +186,6 @@
   "communityInvitation": "Community Урилга",
   "communityJoin": "Community-д Нэгдэх",
   "communityJoinDescription": "Та {community_name}-д нэгдэхдээ итгэлтэй байна уу?",
-  "communityJoinError": "{community_name} руу нэгдэхэд алдаа гарлаа",
   "communityJoinOfficial": "Эсвэл эдгээрийн нэгийг ороорой...",
   "communityJoined": "Community-д Нэгдсэн",
   "communityJoinedAlready": "Та аль хэдийн энэ Community-н гишүүн байна.",
@@ -211,6 +211,7 @@
   "conversationsAddedToHome": "Эхлэх дэлгэцэнд нэмсэн",
   "conversationsAudioMessages": "Аудио зурвасууд",
   "conversationsAutoplayAudioMessage": "Аудио зурвасуудыг автоматаар тоглуулах",
+  "conversationsAutoplayAudioMessageDescription": "Дараалан илгээсэн аудио зурвасуудыг автоматаар тоглуулах",
   "conversationsBlockedContacts": "Хаагдсан холбоо барьсан хүмүүс",
   "conversationsCommunities": "Communities",
   "conversationsDelete": "Харилцан яриаг устгах",
@@ -253,6 +254,7 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Уламжлалт",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Устгагдах мессежийн эх хувилбар.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name} <\\/b> мессежийг арилгах таймерийг <b>{time} <\\/b> тохируулсан.",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Та бусдын зурвас устгах эрхгүй байна",
   "deleteMessageConfirm": "Та энэ зурвасыг устгахдаа итгэлтэй байна уу?",
   "deleteMessageDeletedGlobally": "Энэ мессеж устгагдсан",
   "deleteMessageDeletedLocally": "Энэ мессеж энэ төхөөрөмж дээр устгагдсан",
@@ -276,11 +278,14 @@
   "disappearingMessagesDeleteType": "Устгах төрөл",
   "disappearingMessagesDescription": "Энэ тохиргоо бүх гишүүдэд хамаарна.",
   "disappearingMessagesDescription1": "Энэ тохиргоо таны илгээсэн мессежүүдэд хамаарна.",
+  "disappearingMessagesDescriptionGroup": "Энэ тохиргоо нь энэ харилцлага дахь бүх хүнд хүчин төгөлдөр болно.<br/>Зөвхөн бүлгийн админ л энэ тохиргоог өөрчилж чадна.",
   "disappearingMessagesDisappear": "{disappearing_messages_type} - {time} дараа алга болно",
   "disappearingMessagesDisappearAfterRead": "Уншсаны дараа алга болно",
   "disappearingMessagesDisappearAfterReadDescription": "Мессежүүд уншсаныхаа дараа устгагдана.",
+  "disappearingMessagesDisappearAfterReadState": "Уншсаны дараа алга болно - {time}",
   "disappearingMessagesDisappearAfterSend": "Илгээсний дараа алга болно",
   "disappearingMessagesDisappearAfterSendDescription": "Мессежүүд илгээгдсэнийхээ дараа устгагдана.",
+  "disappearingMessagesDisappearAfterSendState": "Илгээсний дараа алга болно - {time}",
   "disappearingMessagesFollowSetting": "Тохиргоог дагах",
   "disappearingMessagesFollowSettingOff": "Илгээсэн мессежүүд дахиж устахгүй. Та Disappearing Messages тохиргоог унтрах эсэхийг дахин батлах уу?",
   "disappearingMessagesLegacy": "{name} хуучин үйлчлүүлэгчийг ашиглаж байна. Disappearing message зөв ажиллахгүй байж магадгүй.",
@@ -291,6 +296,7 @@
   "disappearingMessagesTimer": "Таймер",
   "disappearingMessagesTurnedOff": "<b>{name} <\\/b> мессежүүдийн арилгах тохиргоог унтраасан. Тэдний илгээсэн мессежүүд дахин арилахгүй.",
   "disappearingMessagesTurnedOffYou": "<b>Та <\\/b> мессежүүдийг <b>унтраасан <\\/b>. Таны илгээсэн мессежүүд дахин арилахгүй.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Та</b> <b>цуцаллаа</b> алдагдах мессежийг.",
   "disappearingMessagesTypeRead": "уншсан",
   "disappearingMessagesTypeSent": "илгээгдсэн",
   "disappearingMessagesUpdated": "<b>{admin_name} <\\/b> Disappearing message тохиргоонуудыг шинэчилсэн.",
@@ -358,15 +364,22 @@
   "groupInviteSending": "Урилга илгээж байна",
   "groupInviteSent": "Урилга илгээгдсэн",
   "groupInviteSuccessful": "Бүлгийн урилга амжилттай",
-  "groupInviteVersion": "Хэрэглэгчид хувилбар {version} эсвэл түүнээс дээш байх хэрэгтэй байгаа удаа дуудлага хүлээн авахын тулд",
   "groupInviteYou": "<b>Та <\\/b> бүлэгт нэгдэх урилга авсан байна.",
+  "groupInviteYouAndMoreNew": "<b>Та</b> болон <b>{count} бусад</b> бүлэгт нэгдсэн байна.",
+  "groupInviteYouAndOtherNew": "<b>Та</b> болон <b>{other_name}</b> бүлэгт нэгдсэн байна.",
   "groupLeave": "Бүлгээс гарах",
+  "groupLeaveDescription": "Та {group_name}-ээс гарахдаа итгэлтэй байна уу?",
   "groupLeaveErrorFailed": "{group_name} оос гарахад алдаа гарлаа",
   "groupLegacyBanner": "Бүлгүүд шинэчлэгдсэн, шинэ бүлэг үүсгэ. Хуучин бүлгийн үйл ажиллагаа {date}-аас муудна.",
   "groupMemberLeft": "<b>{name} <\\/b> бүлгээс гарлаа.",
   "groupMemberLeftMultiple": "<b>{name} <\\/b> болон <b>{count} бусад <\\/b> бүлгээс гарлаа.",
   "groupMemberLeftTwo": "<b>{name} <\\/b> болон <b>{other_name} <\\/b> бүлгээс гарлаа.",
   "groupMemberNew": "<b>{name} <\\/b> бүлэгт нэгдсэн байна.",
+  "groupMemberNewHistory": "<b>{name}</b> бүлэгт уригдлаа. Чатын түүх хуваалцагдсан.",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> болон <b>{count} бусад</b> бүлэгт уригдлаа. Чатын түүх хуваалцагдсан.",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> болон <b>{other_name}</b> бүлэгт уригдлаа. Чатын түүх хуваалцагдсан.",
+  "groupMemberNewMultiple": "<b>{name}</b> болон <b>{count} бусад</b> бүлэгт уригдлаа.",
+  "groupMemberNewTwo": "<b>{name}</b> болон <b>{other_name}</b> бүлэгт элсэхээр уригдсан байна.",
   "groupMemberYouLeft": "<b>Та <\\/b> бүлгээс гарлаа.",
   "groupMembers": "Бүлгийн гишүүд",
   "groupMembersNone": "Энэ бүлэгт өөр гишүүн байхгүй байна.",
@@ -379,6 +392,8 @@
   "groupNoMessages": "Танд <b>{group_name}<\\/b>ээс мессэж байхгүй байна. Яриагаа эхлүүлэхийн тулд илгээмжээ илгээнэ үү!",
   "groupOnlyAdmin": "Та <b>{group_name}</b>-ийн цорын ганц админ байна.<br/><br/>Бүлгийн гишүүд болон тохиргоог админгүй өөрчлөх боломжгүй.",
   "groupPromotedYou": "<b>Та <\\/b> Админ боллоо.",
+  "groupPromotedYouMultiple": "<b>Та</b> болон <b>{count} бусад</b> Админ боллоо.",
+  "groupPromotedYouTwo": "<b>Та</b> болон <b>{name}</b> Админ боллоо.",
   "groupRemoveDescription": "<b>{name}</b>-г <b>{group_name}</b> -аас устгахыг хүсэж байна уу?",
   "groupRemoveDescriptionMultiple": "<b>{name}</b>-г болон <b>{count} бусдыг</b> <b>{group_name}</b>-аас устгахыг хүсэж байна уу?",
   "groupRemoveDescriptionTwo": "<b>{name}</b>-г болон <b>{other_name}</b>-г <b>{group_name}</b>-аас устгахыг хүсэж байна уу?",
@@ -412,6 +427,7 @@
   "leave": "Гарах",
   "leaving": "Гарах...",
   "legacyGroupMemberNewMultiple": "<b>{name} <\\/b> болон <b>{count} бусад <\\/b> бүлэгт нэгдсэн байна.",
+  "legacyGroupMemberNewYouMultiple": "<b>Та</b> болон <b>{count} бусад</b> бүлэгт нэгдсэн байна.",
   "legacyGroupMemberTwoNew": "<b>{name} <\\/b> болон <b>{other_name} <\\/b> бүлэгт нэгдсэн байна.",
   "linkPreviews": "Линк урьдчилан үзэх",
   "linkPreviewsDescription": "Дэмжигдсэн URL хаягийн урьдчилан харагдацыг харуулах.",
@@ -504,6 +520,8 @@
   "notificationsFastModeDescription": "Google-ийн мэдэгдлийн серверээр дамжуулан та шинэ мессежүүдийг найдвартай, шууд мэдээлэл авна.",
   "notificationsFastModeDescriptionIos": "Apple-ийн мэдэгдлийн серверээр дамжуулан та шинэ мессежүүдийг найдвартай, шууд мэдээлэл авна.",
   "notificationsGoToDevice": "Төхөөрөмжийн мэдэгдлийн тохиргоонд очих",
+  "notificationsHeaderAllMessages": "Мэдэгдэл - Бүгд",
+  "notificationsHeaderMentionsOnly": "Зөвхөн дурсамжуудын талаар",
   "notificationsIosGroup": "{conversation_name} харилцан ярианд {name}",
   "notificationsIosRestart": "Таны {device} дахин эхлүүлэх үед танд мессэж ирсэн байж магадгүй.",
   "notificationsLedColor": "LED өнгө",
@@ -525,6 +543,7 @@
   "notificationsVibrate": "Чичиргээ",
   "off": "Унтраалттай",
   "okay": "Зүгээрээ",
+  "on": "Асаалттай",
   "onboardingAccountCreate": "Бүртгэл үүсгэх",
   "onboardingAccountCreated": "Бүртгэл үүсгэгдсэн",
   "onboardingAccountExists": "Надад бүртгэл байгаа",
@@ -566,15 +585,18 @@
   "passwordSet": "Нууц үгээ тохируулах",
   "passwordSetDescription": "Таны нууц үг томилогдсон байна. Нууц үгээ хамгаалж байгаарай.",
   "paste": "Буулгах",
+  "permissionMusicAudioDenied": "{app_name}-д файлууд, хөгжим, аудиог илгээхийн тулд хөгжмийн болон аудионы хандалт шаардлагатай байгаа боловч энэ нь байнга зөвшөөрөхөөс татгалзсан байна. Тохиргоо -> Зөвшөөрөл хэсэгрүү ороод, \"Хөгжим болон аудио\"-г асаана уу.",
   "permissionsAppleMusic": "{app_name} медиа хавсралтуудыг тоглуулахын тулд Apple Music-ийг ашиглах хэрэгтэй.",
   "permissionsAutoUpdate": "Автоматаар шинэчлэх",
   "permissionsAutoUpdateDescription": "Эхлүүлэх үед шинэчлэлтийг автоматаар шалгах",
+  "permissionsCameraDenied": "{app_name} нь гэрэл зураг болон видеог авахын тулд камерт хандалт хэрэгтэй байна, гэхдээ энэ нь байнга хориотой. Тохиргоо руу орж, \"Permissions\"-г сонгоод, \"Camera\"-г идэвхжүүлнэ үү.",
   "permissionsFaceId": "{app_name} дэлгэц түгжихэд Face ID ашиглана.",
   "permissionsKeepInSystemTray": "Системийн баарынд хадгалах",
   "permissionsKeepInSystemTrayDescription": "{app_name} нь та цонхыг хаахад арын горимд ажилласаар байна",
   "permissionsLibrary": "{app_name} үргэлжлүүлэхийн тулд зураг сангийн хандалт хэрэгтэй. Та iOS тохиргоонд хандах боломжтой.",
   "permissionsMicrophone": "Микрофон",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} дуудлага хийх болон аудио мессеж бичихийн тулд микрофоны хандалт хэрэгтэй.",
+  "permissionsMusicAudio": "{app_name} нь файлууд, дуу хөгжим болон аудио илгээхийн тулд дуу хөгжим болон аудио хандах эрхийг шаарддаг.",
   "permissionsRequired": "Зөвшөөрөл шаардлагатай",
   "permissionsStorageSave": "{app_name} нь хавсралт болон медиа хадгалахын тулд сангийн хандалт хэрэгтэй.",
   "permissionsStorageSaveDenied": "{app_name} нь гэрэл зураг болон видеонуудыг хадгалахын тулд сангийн хандалт хэрэгтэй гэвч энэ нь байнгын хоригдсон. Тохиргоо руу орж, \"Permissions\"-г сонгоод, \"Storage\"-г идэвхжүүлнэ үү.",
@@ -622,6 +644,7 @@
   "recoveryPasswordWarningSendDescription": "Энэ таны нууц үг юм. Хэрэв та үүнийг хүнд илгээвэл таны аккаунтанд бүрэн нэвтрэх боломжтой болно.",
   "redo": "Дахин хийх",
   "remove": "Устгах",
+  "removePasswordFail": "Нууц үгийг устгахад алдаа гарлаа",
   "reply": "Хариулах",
   "resend": "Дахин илгээх",
   "resolving": "Улсын мэдээллийг ачааллаж байна...",
