--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -155,6 +155,7 @@
   "cameraGrantAccessDescription": "{app_name} memerlukan akses kamera untuk mengambil gambar dan video, atau mengimbas kod QR.",
   "cameraGrantAccessQr": "{app_name} memerlukan akses kamera untuk mengimbas kod QR",
   "cancel": "Batal",
+  "changePasswordFail": "Gagal menukar kata laluan",
   "clear": "Kosongkan",
   "clearAll": "Kosongkan Semua",
   "clearDataAll": "Kosongkan Semua Data",
@@ -185,7 +186,6 @@
   "communityInvitation": "Jemputan Komuniti",
   "communityJoin": "Sertai Community",
   "communityJoinDescription": "Adakah anda yakin anda mahu menyertai {community_name}?",
-  "communityJoinError": "Gagal menyertai {community_name}",
   "communityJoinOfficial": "Atau sertai salah satu dari ini...",
   "communityJoined": "Telah menyertai Community",
   "communityJoinedAlready": "Anda sudah menjadi ahli komuniti ini.",
@@ -211,6 +211,7 @@
   "conversationsAddedToHome": "Ditambah ke skrin utama",
   "conversationsAudioMessages": "Mesej Audio",
   "conversationsAutoplayAudioMessage": "Main Auto Mesej Audio",
+  "conversationsAutoplayAudioMessageDescription": "Main auto mesej audio yang dihantar berturut-turut",
   "conversationsBlockedContacts": "Kenalan Disekat",
   "conversationsCommunities": "Komuniti",
   "conversationsDelete": "Padam Perbualan",
@@ -255,6 +256,7 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Warisan",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Versi asal mesej hilang.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name} <\\/b> menetapkan pemasa disappearing message kepada <b>{time} <\\/b>",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Anda tidak mempunyai kebenaran untuk memadam mesej orang lain",
   "deleteMessageConfirm": "Adakah anda yakin anda mahu memadamkan mesej ini?",
   "deleteMessageDeletedGlobally": "Mesej ini telah dipadam",
   "deleteMessageDeletedLocally": "Mesej ini telah dipadam pada peranti ini",
@@ -278,11 +280,14 @@
   "disappearingMessagesDeleteType": "Jenis Padam",
   "disappearingMessagesDescription": "Tetapan ini terpakai kepada semua orang dalam perbualan ini.",
   "disappearingMessagesDescription1": "Tetapan ini terpakai kepada mesej yang anda hantar dalam perbualan ini.",
+  "disappearingMessagesDescriptionGroup": "Tetapan ini terpakai kepada semua orang dalam perbualan ini.<br/>Hanya pentadbir kumpulan boleh mengubah tetapan ini.",
   "disappearingMessagesDisappear": "Hilang Selepas {disappearing_messages_type} - {time}",
   "disappearingMessagesDisappearAfterRead": "Hilang Selepas Diterima",
   "disappearingMessagesDisappearAfterReadDescription": "Mesej akan dipadam selepas dibaca.",
+  "disappearingMessagesDisappearAfterReadState": "Hilang Selepas Diterima - {time}",
   "disappearingMessagesDisappearAfterSend": "Hilang Selepas Dihantar",
   "disappearingMessagesDisappearAfterSendDescription": "Mesej akan dipadam selepas dihantar.",
+  "disappearingMessagesDisappearAfterSendState": "Hilang Selepas Dihantar - {time}",
   "disappearingMessagesFollowSetting": "Ikut Tetapan",
   "disappearingMessagesFollowSettingOff": "Mesej yang anda hantar tidak lagi akan hilang. Adakah anda pasti mahu mematikan mesej yang hilang?",
   "disappearingMessagesFollowSettingOn": "Tetapkan mesej anda untuk hilang <b>{time} selepas ia telah <b>{disappearing_messages_type}?</b>",
@@ -294,6 +299,7 @@
   "disappearingMessagesTimer": "Pemasa",
   "disappearingMessagesTurnedOff": "<b>{name} <\\/b> telah mematikan disappearing messages. Mesej yang mereka hantar tidak akan hilang lagi.",
   "disappearingMessagesTurnedOffYou": "<b>Anda <\\/b> mematikan <b>disappearing messages</b>. Mesej yang anda hantar tidak akan hilang lagi.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Anda</b> mematikan <b>mesej hilang</b>.",
   "disappearingMessagesTypeRead": "baca",
   "disappearingMessagesTypeSent": "dihantar",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> telah mengemaskini tetapan mesej menghilang.",
@@ -361,15 +367,22 @@
   "groupInviteSending": "Menghantar jemputan",
   "groupInviteSent": "Jemputan dihantar",
   "groupInviteSuccessful": "Jemputan kumpulan berjaya",
-  "groupInviteVersion": "Pengguna mesti mempunyai versi {version} atau lebih tinggi untuk menerima jemputan",
   "groupInviteYou": "<b>Anda <\\/b> dijemput untuk menyertai kumpulan.",
+  "groupInviteYouAndMoreNew": "<b>Anda</b> dan <b>{count} lainnya</b> menyertai kumpulan.",
+  "groupInviteYouAndOtherNew": "<b>Anda</b> dan <b>{other_name}</b> menyertai kumpulan.",
   "groupLeave": "Tinggalkan Kumpulan",
+  "groupLeaveDescription": "Adakah anda yakin anda mahu meninggalkan {group_name}?",
   "groupLeaveErrorFailed": "Gagal keluar dari {group_name}",
   "groupLegacyBanner": "Kumpulan telah dinaik taraf, buat kumpulan baru untuk naik taraf. Fungsi kumpulan lama akan semakin merosot dari {date}.",
   "groupMemberLeft": "<b>{name} <\\/b> meninggalkan kumpulan.",
   "groupMemberLeftMultiple": "<b>{name} <\\/b> dan <b>{count} lainnya <\\/b> meninggalkan kumpulan.",
   "groupMemberLeftTwo": "<b>{name} <\\/b> dan <b>{other_name} <\\/b> meninggalkan kumpulan.",
   "groupMemberNew": "<b>{name} <\\/b> menyertai kumpulan.",
+  "groupMemberNewHistory": "<b>{name}</b> dijemput untuk menyertai kumpulan. Sejarah sembang telah dikongsi.",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> dan <b>{count} lainnya</b> dijemput untuk menyertai kumpulan. Sejarah sembang telah dikongsi.",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> dan <b>{other_name}</b> dijemput untuk menyertai kumpulan. Sejarah sembang telah dikongsi.",
+  "groupMemberNewMultiple": "<b>{name}</b> dan <b>{count} lainnya</b> dijemput untuk menyertai kumpulan.",
+  "groupMemberNewTwo": "<b>{name}</b> dan <b>{other_name}</b> dijemput untuk menyertai kumpulan.",
   "groupMemberYouLeft": "<b>Anda <\\/b> meninggalkan kumpulan.",
   "groupMembers": "Ahli Kumpulan",
   "groupMembersNone": "Tiada ahli lain di dalam kumpulan ini.",
@@ -382,6 +395,8 @@
   "groupNoMessages": "Anda tidak mempunyai sebarang mesej daripada <b>{group_name}</b>. Hantar mesej untuk memulakan perbualan!",
   "groupOnlyAdmin": "Anda adalah satu-satunya pentadbir dalam <b>{group_name}</b>.<br/><br/>Ahli kumpulan dan tetapan tidak boleh diubah tanpa pentadbir.",
   "groupPromotedYou": "<b>Anda <\\/b> dinaikkan ke Admin.",
+  "groupPromotedYouMultiple": "<b>Anda</b> dan <b>{count} lainnya</b> dinaikkan ke Admin.",
+  "groupPromotedYouTwo": "<b>Anda</b> dan <b>{name}</b> dinaikkan ke Admin.",
   "groupRemoveDescription": "Adakah anda ingin mengeluarkan <b>{name}</b> dari <b>{group_name}</b>?",
   "groupRemoveDescriptionMultiple": "Adakah anda ingin mengeluarkan <b>{name}</b> dan <b>{count} yang lain</b> dari <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Adakah anda ingin mengeluarkan <b>{name}</b> dan <b>{other_name}</b> dari <b>{group_name}</b>?",
@@ -415,6 +430,7 @@
   "leave": "Tinggalkan",
   "leaving": "Meninggalkan...",
   "legacyGroupMemberNewMultiple": "<b>{name} <\\/b> dan <b>{count} lainnya <\\/b> menyertai kumpulan.",
+  "legacyGroupMemberNewYouMultiple": "<b>Anda</b> dan <b>{count} lainnya</b> menyertai kumpulan.",
   "legacyGroupMemberTwoNew": "<b>{name} <\\/b> dan <b>{other_name} <\\/b> menyertai kumpulan.",
   "linkPreviews": "Pratonton Pautan",
   "linkPreviewsDescription": "Tunjukkan pratonton pautan untuk URL yang disokong.",
@@ -508,6 +524,8 @@
   "notificationsFastModeDescription": "Anda akan diberitahu tentang mesej baru dengan segera menggunakan Pelayan pemberitahuan Google.",
   "notificationsFastModeDescriptionIos": "Anda akan diberitahu tentang mesej baru dengan segera menggunakan Pelayan pemberitahuan Apple.",
   "notificationsGoToDevice": "Pergi ke tetapan notifikasi peranti",
+  "notificationsHeaderAllMessages": "Pemberitahuan - Semua",
+  "notificationsHeaderMentionsOnly": "Pemberitahuan hanya untuk Sebutan",
   "notificationsIosGroup": "{name} kepada {conversation_name}",
   "notificationsLedColor": "Warna LED",
   "notificationsMentionsOnly": "Hanya sebutan",
@@ -528,6 +546,7 @@
   "notificationsVibrate": "Getaran",
   "off": "Mati",
   "okay": "Okay",
+  "on": "Aktif",
   "onboardingAccountCreate": "Buat akaun",
   "onboardingAccountCreated": "Akaun Dicipta",
   "onboardingAccountExists": "Saya ada akaun",
@@ -569,9 +588,11 @@
   "passwordSet": "Tetapkan Kata Laluan",
   "passwordSetDescription": "Kata laluan anda telah ditetapkan. Sila simpan dengan selamat.",
   "paste": "Tampal",
+  "permissionMusicAudioDenied": "{app_name} memerlukan akses muzik dan audio untuk menghantar fail, muzik dan audio, tetapi ia telah ditolak secara kekal. Ketik Tetapan -> Kebenaran, dan hidupkan \"Muzik dan audio\".",
   "permissionsAppleMusic": "{app_name} perlu menggunakan Apple Music untuk memainkan lampiran media.",
   "permissionsAutoUpdate": "Kemas Kini Auto",
   "permissionsAutoUpdateDescription": "Periksa kemas kini secara automatik semasa permulaan",
+  "permissionsCameraDenied": "{app_name} memerlukan akses kamera untuk mengambil gambar dan video, tetapi akses telah ditolak secara kekal. Ketik Tetapan -> Kebenaran, dan hidupkan \"Kamera\".",
   "permissionsFaceId": "Ciri kunci skrin pada {app_name} menggunakan Face ID.",
   "permissionsKeepInSystemTray": "Simpan dalam Sistem Tray",
   "permissionsKeepInSystemTrayDescription": "{app_name} terus berjalan di latar belakang apabila anda menutup tetingkap",
@@ -579,6 +600,7 @@
   "permissionsMicrophone": "Mikrofon",
   "permissionsMicrophoneAccessRequiredDesktop": "Anda boleh mengaktifkan akses mikrofon dalam tetapan privasi {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} memerlukan akses mikrofon untuk membuat panggilan dan merakam mesej audio.",
+  "permissionsMusicAudio": "{app_name} memerlukan akses kepada muzik dan audio untuk menghantar fail, muzik dan audio.",
   "permissionsRequired": "Kebenaran diperlukan",
   "permissionsStorageSave": "{app_name} memerlukan akses storan untuk menyimpan lampiran dan media.",
   "permissionsStorageSaveDenied": "{app_name} memerlukan akses storan untuk menyimpan foto dan video, tetapi akses telah ditolak secara kekal. Sila terus ke tetapan aplikasi, pilih \"Permissions\", dan membolehkan \"Storan\".",
@@ -626,6 +648,7 @@
   "recoveryPasswordWarningSendDescription": "Ini adalah kata laluan pemulihan anda. Jika anda menghantarnya kepada seseorang, mereka akan mempunyai akses penuh ke akaun anda.",
   "redo": "Buat Semula",
   "remove": "Alih Keluar",
+  "removePasswordFail": "Gagal untuk mengeluarkan kata laluan",
   "reply": "Balas",
   "resend": "Hantar semula",
   "resolving": "Memuatkan maklumat negara...",
