--- a/_locales/pt-BR/messages.json
+++ b/_locales/pt-BR/messages.json
@@ -66,6 +66,7 @@
   "attachmentsDownload": "Baixar anexo",
   "attachmentsDuration": "Duração:",
   "attachmentsErrorLoad": "Erro ao anexar arquivo",
+  "attachmentsErrorMediaSelection": "Falha ao selecionar anexo",
   "attachmentsErrorNoApp": "Não foi possível encontrar um app para selecionar mídia.",
   "attachmentsErrorNotSupported": "Este tipo de arquivo não é suportado.",
   "attachmentsErrorNumber": "Não é possível enviar mais de 32 arquivos de imagem e vídeo de uma vez.",
@@ -155,6 +156,7 @@
   "cameraGrantAccessDescription": "{app_name} precisa de acesso à câmera para tirar fotos e vídeos, ou escanear códigos QR.",
   "cameraGrantAccessQr": "{app_name} precisa de acesso à câmera para escanear códigos QR",
   "cancel": "Cancelar",
+  "changePasswordFail": "Falha ao alterar a senha",
   "clear": "Limpar",
   "clearAll": "Apagar Tudo",
   "clearDataAll": "Limpar Todos os Dados",
@@ -185,7 +187,6 @@
   "communityInvitation": "Convite da Comunidade",
   "communityJoin": "Entrar na Comunidade",
   "communityJoinDescription": "Você tem certeza que deseja se juntar à {community_name}?",
-  "communityJoinError": "Falha ao entrar na {community_name}",
   "communityJoinOfficial": "Ou junte-se a um desses...",
   "communityJoined": "Inserido na Comunidade",
   "communityJoinedAlready": "Você já é um membro deste Community.",
@@ -211,6 +212,7 @@
   "conversationsAddedToHome": "Adicionada à tela inicial",
   "conversationsAudioMessages": "Mensagens de áudio",
   "conversationsAutoplayAudioMessage": "Reproduzir mensagens de áudio automaticamente",
+  "conversationsAutoplayAudioMessageDescription": "Reproduzir automaticamente mensagens de áudio consecutivas",
   "conversationsBlockedContacts": "Contatos Bloqueados",
   "conversationsCommunities": "Comunidades",
   "conversationsDelete": "Excluir conversa",
@@ -255,6 +257,9 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Legado",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Versão original das mensagens desaparecendo.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> definiu o tempo de duração das mensagens efêmeras como <b>{time}</b>.",
+  "deleteAfterLegacyGroupsGroupCreation": "Por favor, aguarde enquanto o grupo é criado...",
+  "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Falha ao atualizar o grupo",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Você não tem permissão para excluir as mensagens de outros",
   "deleteMessageConfirm": "Você tem certeza que deseja excluir esta mensagem?",
   "deleteMessageDeletedGlobally": "Essa mensagem foi deletada",
   "deleteMessageDeletedLocally": "Esta mensagem foi deletada neste dispositivo",
@@ -278,11 +283,14 @@
   "disappearingMessagesDeleteType": "Tipo de Exclusão",
   "disappearingMessagesDescription": "Essa configuração se aplica a todos nesta conversa.",
   "disappearingMessagesDescription1": "Essa configuração se aplica às mensagens que você envia nesta conversa.",
+  "disappearingMessagesDescriptionGroup": "Esta configuração aplica-se a todos nesta conversa.<br/>Apenas os administradores de grupos podem alterar essa configuração.",
   "disappearingMessagesDisappear": "Desaparecer Após {disappearing_messages_type} - {time}",
   "disappearingMessagesDisappearAfterRead": "Desaparecer após ler",
   "disappearingMessagesDisappearAfterReadDescription": "Mensagens são excluídas depois que elas são lidas.",
+  "disappearingMessagesDisappearAfterReadState": "Desaparecer após ler - {time}",
   "disappearingMessagesDisappearAfterSend": "Desaparecer após o envio",
   "disappearingMessagesDisappearAfterSendDescription": "As mensagens são excluídas após serem enviadas.",
+  "disappearingMessagesDisappearAfterSendState": "Desaparecer após enviar - {time}",
   "disappearingMessagesFollowSetting": "Acompanhar configuração",
   "disappearingMessagesFollowSettingOff": "As mensagens que você enviar não irão mais desaparecer. Tem certeza de que deseja desativar desaparecer mensagens?",
   "disappearingMessagesFollowSettingOn": "Defina suas mensagens para desaparecer <b>{time}</b> depois que forem <b>{disappearing_messages_type}</b>?",
@@ -294,6 +302,7 @@
   "disappearingMessagesTimer": "Timer",
   "disappearingMessagesTurnedOff": "<b>{name}</b> desativou as mensagens efêmeras. As mensagens que eles enviarem não desaparecerão mais.",
   "disappearingMessagesTurnedOffYou": "<b>Você</b> desativou as <b>mensagens efêmeras</b>. Mensagens que você enviar não desaparecerão mais.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Você</b> desativou o <b>desaparecimento de mensagens</b>.",
   "disappearingMessagesTypeRead": "lido",
   "disappearingMessagesTypeSent": "enviada",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> atualizou as configurações das mensagens desaparecendo.",
@@ -361,15 +370,24 @@
   "groupInviteSending": "Enviando convite",
   "groupInviteSent": "Convite enviado",
   "groupInviteSuccessful": "Convite para grupo bem-sucedido",
-  "groupInviteVersion": "Usuários devem ter a versão {version} ou superior para receber convites",
   "groupInviteYou": "<b>Você</b> foi convidado a entrar no grupo.",
+  "groupInviteYouAndMoreNew": "<b>Você</b> e <b>{count} outros</b> entraram no grupo.",
+  "groupInviteYouAndOtherNew": "<b>Você</b> e <b>{other_name}</b> entraram no grupo.",
   "groupLeave": "Sair do Grupo",
+  "groupLeaveDescription": "Você tem certeza que deseja sair {group_name}?",
   "groupLeaveErrorFailed": "Falha ao sair do {group_name}",
   "groupLegacyBanner": "Os grupos foram atualizados, crie um novo grupo para atualizar. A funcionalidade antiga do grupo será desativada a partir de {date}.",
   "groupMemberLeft": "<b>{name}</b> saiu do grupo.",
   "groupMemberLeftMultiple": "<b>{name}</b> e <b>{count} outros</b> saíram do grupo.",
   "groupMemberLeftTwo": "<b>{name}</b> e <b>{other_name}</b> saíram do grupo.",
   "groupMemberNew": "<b>{name}</b> entrou no grupo.",
+  "groupMemberNewHistory": "<b>{name}</b> foi convidado a se juntar-se ao grupo. O histórico de conversas será compartilhado.",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> e <b>{count} outros</b> foram convidados a participarem do grupo. O histórico de conversas será compartilhado.",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> e <b>{other_name}</b> foram convidados para se juntar-se ao grupo. O histórico de conversas será compartilhado.",
+  "groupMemberNewMultiple": "<b>{name}</b> e <b>{count} outros</b> foram convidados a juntar-se ao grupo.",
+  "groupMemberNewTwo": "<b>{name}</b> e <b>{other_name}</b> foram convidados a juntar-se ao grupo.",
+  "groupMemberNewYouHistoryMultiple": "<b>Você</b> e <b>{count} outros</b> foram convidados a participar do grupo. O histórico de conversas foi compartilhado.",
+  "groupMemberNewYouHistoryTwo": "<b>Você</b> e <b>{name}</b> foram convidados a participar do grupo. O histórico de conversas foi compartilhado.",
   "groupMemberYouLeft": "<b>Você</b> saiu do grupo.",
   "groupMembers": "Participantes do Grupo",
   "groupMembersNone": "Não há outros membros neste grupo.",
@@ -382,6 +400,8 @@
   "groupNoMessages": "Você não possui mensagens de <b>{group_name}.</b> Envie uma mensagem para começar a conversa!",
   "groupOnlyAdmin": "Você é o único administrador em <b>{group_name}</b>.<br/><br/>Os membros do grupo e as configurações não podem ser alterados sem um administrador.",
   "groupPromotedYou": "<b>Você</b> foi promovido a Administrador.",
+  "groupPromotedYouMultiple": "<b>Você</b> e <b>{count} outros</b> foram promovidos a Administrador.",
+  "groupPromotedYouTwo": "<b>Você</b> e <b>{name}</b> foram promovidos a Administrador.",
   "groupRemoveDescription": "Gostaria de remover <b>{name}</b> de <b>{group_name}</b>?",
   "groupRemoveDescriptionMultiple": "Gostaria de remover <b>{name}</b> e <b>{count} outros</b> de <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Gostaria de remover <b>{name}</b> e <b>{other_name}</b> de <b>{group_name}</b>?",
@@ -389,10 +409,13 @@
   "groupRemovedMultiple": "<b>{name}</b> e <b>{count} outros</b> foram removidos do grupo.",
   "groupRemovedTwo": "<b>{name}</b> e <b>{other_name}</b> foram removidos do grupo.",
   "groupRemovedYou": "Você foi removido do <b>{group_name}.</b>",
+  "groupRemovedYouMultiple": "<b>Você</b> e <b>{count} outros</b> foram removidos do grupo.",
+  "groupRemovedYouTwo": "<b>Você</b> e <b>{other_name}</b> foram removidos do grupo.",
   "groupSetDisplayPicture": "Definir Imagem do Grupo",
   "groupUnknown": "Grupo Desconhecido",
   "groupUpdated": "Grupo atualizado",
   "helpFAQ": "Perguntas Frequentes",
+  "helpHelpUsTranslateSession": "Ajude-nos a traduzir {app_name}",
   "helpReportABug": "Reportar um erro",
   "helpReportABugDescription": "Compartilhe alguns detalhes para nos ajudar a resolver seu problema. Exporte seus logs e faça o upload do arquivo através do Help Desk da {app_name}.",
   "helpReportABugExportLogs": "Exportar Logs",
@@ -414,6 +437,7 @@
   "leave": "Sair",
   "leaving": "Saindo...",
   "legacyGroupMemberNewMultiple": "<b>{name}</b> e <b>{count} outros</b> entraram no grupo.",
+  "legacyGroupMemberNewYouMultiple": "<b>Você</b> e <b>{count} outros</b> entraram no grupo.",
   "legacyGroupMemberTwoNew": "<b>{name}</b> e <b>{other_name}</b> entraram no grupo.",
   "linkPreviews": "Pré-visualizações de links",
   "linkPreviewsDescription": "Mostrar pré-visualização de links para URLs suportadas.",
@@ -507,6 +531,8 @@
   "notificationsFastModeDescription": "Você será notificado de forma confiável e imediata sobre novas mensagens usando os servidores de notificação da Google.",
   "notificationsFastModeDescriptionIos": "Você será notificado de forma confiável e imediata sobre novas mensagens usando os servidores de notificação da Apple.",
   "notificationsGoToDevice": "Ir para configurações de notificação do dispositivo",
+  "notificationsHeaderAllMessages": "Notificações - Todas",
+  "notificationsHeaderMentionsOnly": "Notificações - Somente menções",
   "notificationsIosGroup": "{name} para {conversation_name}",
   "notificationsIosRestart": "Pode ser que você tenha recebido mensagens enquanto seu {device} reiniciava.",
   "notificationsLedColor": "Cor do LED",
@@ -528,6 +554,7 @@
   "notificationsVibrate": "Vibrar",
   "off": "Desligado",
   "okay": "Okay",
+  "on": "Ligado",
   "onboardingAccountCreate": "Criar Conta",
   "onboardingAccountCreated": "Conta Criada",
   "onboardingAccountExists": "Eu tenho uma conta",
@@ -569,9 +596,11 @@
   "passwordSet": "Definir Senha",
   "passwordSetDescription": "Sua senha foi definida. Por favor, mantenha-a segura.",
   "paste": "Colar",
+  "permissionMusicAudioDenied": "{app_name} precisa de acesso a música e áudio para enviar arquivos, músicas e áudio, mas o acesso foi permanentemente negado. Toque em Configurações -> Permissões e ative \"Música e áudio\".",
   "permissionsAppleMusic": "{app_name} precisa usar a Apple Music para reproduzir anexos de mídia.",
   "permissionsAutoUpdate": "Atualização Automática",
   "permissionsAutoUpdateDescription": "Verificar atualizações automaticamente ao iniciar",
+  "permissionsCameraDenied": "{app_name} precisa de acesso à câmera para tirar fotos e vídeos, mas ele foi permanentemente negado. Toque em Configurações -> Permissões, e ligue \"Câmera\".",
   "permissionsFaceId": "A funcionalidade de bloqueio de tela no {app_name} usa reconhecimento facial.",
   "permissionsKeepInSystemTray": "Manter na Bandeja do Sistema",
   "permissionsKeepInSystemTrayDescription": "{app_name} continua sendo executado em segundo plano quando você fecha a janela",
@@ -579,6 +608,7 @@
   "permissionsMicrophone": "Microfone",
   "permissionsMicrophoneAccessRequiredDesktop": "Você pode habilitar o acesso ao microfone nas configurações de privacidade do {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} precisa de acesso ao microfone para fazer chamadas e gravar mensagens de áudio.",
+  "permissionsMusicAudio": "{app_name} precisa de acesso a música e áudio para enviar arquivos, músicas e áudios.",
   "permissionsRequired": "Permissão requerida",
   "permissionsStorageSave": "{app_name} precisa de acesso ao armazenamento para salvar anexos e mídias.",
   "permissionsStorageSaveDenied": "{app_name} precisa de acesso ao armazenamento para salvar fotos e vídeos, mas foi permanentemente negado. Por favor continue para configurações do app, selecione \"Permissões\", e habilite \"Armazenamento\".",
@@ -612,6 +642,7 @@
   "recoveryPasswordBannerTitle": "Salve sua senha de recuperação",
   "recoveryPasswordDescription": "Use sua senha de recuperação para carregar sua conta em novos dispositivos.<br/><br/>Sua conta não pode ser recuperada sem sua senha de recuperação. Certifique-se de armazená-la em um lugar seguro e não a compartilhe com ninguém.",
   "recoveryPasswordEnter": "Digite sua senha de recuperação",
+  "recoveryPasswordErrorLoad": "Um erro ocorreu ao tentar carregar a sua senha de recuperação. U<br/><br/>Por favor, exporte seus logs e, em seguida, envie o arquivo no Suporte de Sessão para ajudar a resolver esse problema.",
   "recoveryPasswordErrorMessageGeneric": "Por favor, verifique sua senha de recuperação e tente novamente.",
   "recoveryPasswordErrorMessageIncorrect": "Algumas das palavras em sua senha de recuperação estão incorretas. Por favor, verifique e tente novamente.",
   "recoveryPasswordErrorMessageShort": "A Recovery Password que você inseriu não é longa o suficiente. Por favor, verifique e tente novamente.",
@@ -626,6 +657,7 @@
   "recoveryPasswordWarningSendDescription": "Essa é sua senha de recuperação. Se você mandá-la para alguem, essa pessoa terá acesso completo a sua conta.",
   "redo": "Refazer",
   "remove": "Remover",
+  "removePasswordFail": "Falha ao remover senha",
   "reply": "Responder",
   "resend": "Reenviar",
   "resolving": "Carregando informações do país...",
