--- a/_locales/sq/messages.json
+++ b/_locales/sq/messages.json
@@ -8,6 +8,7 @@
   "accountIdErrorInvalid": "Ky ID i Llogarisë është i pavlefshëm. Ju lutem kontrolloni dhe provoni përsëri.",
   "accountIdOrOnsEnter": "Jepni ID-në e llogarisë ose ONS",
   "accountIdOrOnsInvite": "Fto Account ID ose ONS",
+  "accountIdShare": "Hej, unë kam përdorur {app_name} për të biseduar me plotësisht privatësi dhe siguri. Bëhu pjesë! ID-ja ime e llogarisë është<br/><br/>{account_id}<br/><br/>Shkarkoje atë në {session_download_url}",
   "accountIdYours": "ID-ja juaj e Llogarisë",
   "accountIdYoursDescription": "Ky është ID i Llogarisë tuaj. Përdoruesit e tjerë mund ta skanojnë atë për të filluar një bisedë me ju.",
   "actualSize": "Madhësi Faktike",
@@ -29,7 +30,11 @@
   "adminRemoveAsAdmin": "Hiqe nga Admini",
   "adminRemoveCommunityNone": "Nuk ka Admina në këtë Community.",
   "adminRemoveFailed": "Dështoi heqja e {name} si Admin.",
+  "adminRemoveFailedMultiple": "Dështoi largimi i <b>{name}</b> dhe <b>{count} të tjerë</b> si Admin.",
+  "adminRemoveFailedOther": "Dështoi largimi i <b>{name}</b> dhe <b>{other_name}</b> si Admin.",
   "adminRemovedUser": "<b>{name}</b> u largua si Administrator.",
+  "adminRemovedUserMultiple": "<b>{name}</b> dhe <b>{count} të tjerë</b> u larguan nga roli i Admin.",
+  "adminRemovedUserOther": "<b>{name}</b> dhe <b>{other_name}</b> u larguan nga roli i Admin.",
   "adminSendingPromotion": "Dërgimi i promovimit të administratorit",
   "adminSettings": "Rregullimet e Administratorit",
   "adminTwoPromotedToAdmin": "<b>{name}</b> dhe <b>{other_name}</b> u promovuan në Administratorë.",
@@ -90,6 +95,7 @@
   "attachmentsMoveAndScale": "Lëviz dhe Zmadhimi",
   "attachmentsNa": "N/A",
   "attachmentsNotification": "{emoji} Attachment",
+  "attachmentsNotificationGroup": "{author}: {emoji} Attachment",
   "attachmentsResolution": "Rezolucioni:",
   "attachmentsSaveError": "S’arrin të ruhet kartela.",
   "attachmentsSendTo": "Dërgoje te {name}",
@@ -177,6 +183,7 @@
   "clearMessagesNoteToSelfDescription": "A jeni të sigurt që doni t'i fshini të gjitha mesazhet e Shënim për Veten nga pajisja juaj?",
   "close": "Mbylle",
   "closeWindow": "Mbylle Dritaren",
+  "commitHashDesktop": "Commit Hash: {hash}",
   "communityEnterUrl": "Jepni URL-në e Community",
   "communityEnterUrlErrorInvalid": "URL e pavlefshme",
   "communityEnterUrlErrorInvalidDescription": "Ju lutemi kontrolloni URL-në e Community dhe provoni përsëri.",
@@ -185,7 +192,6 @@
   "communityInvitation": "Ftesë për bashkësi",
   "communityJoin": "Bashkohu me Community",
   "communityJoinDescription": "A jeni të sigurt që doni t'i bashkoheni {community_name}?",
-  "communityJoinError": "Dështoi bashkimi me {community_name}",
   "communityJoinOfficial": "Ose bashkohuni me njërën nga këto...",
   "communityJoined": "U bashkua në Community",
   "communityJoinedAlready": "Ju jeni tashmë anëtar i kësaj komuniteti.",
@@ -211,6 +217,7 @@
   "conversationsAddedToHome": "U shtua te skena e kreut",
   "conversationsAudioMessages": "Mesazhe audio",
   "conversationsAutoplayAudioMessage": "Riprodho automatikisht mesazhet audio",
+  "conversationsAutoplayAudioMessageDescription": "Riprodho automatikisht mesazhet audio të dërguara njëri pas tjetrit",
   "conversationsBlockedContacts": "Kontakte të bllokuara",
   "conversationsCommunities": "Komunitetet",
   "conversationsDelete": "Heshtoje bisedën",
@@ -256,6 +263,7 @@
   "deleteAfterLegacyDisappearingMessagesOriginal": "Versioni origjinal i mesazheve që zhduken.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> caktoi kohëmatësin e zhdukjes së mesazheve në <b>{time}</b>",
   "deleteMessageConfirm": "A jeni të sigurt që doni ta fshini këtë mesazh?",
+  "deleteMessageDeleted": "{count, plural, one [Mesazhi u fshi]}",
   "deleteMessageDeletedGlobally": "Ky mesazh u fshi",
   "deleteMessageDeletedLocally": "Ky mesazh u fshi në këtë pajisje",
   "deleteMessageDescriptionDevice": "A jeni të sigurt që doni ta fshini këtë mesazh vetëm nga kjo pajisje?",
@@ -293,7 +301,9 @@
   "disappearingMessagesSetYou": "<b>Ju</b> caktoni që mesazhet të zhduken {time} pasi të jenë {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Kohëmatës",
   "disappearingMessagesTurnedOff": "<b>{name}</b> ka fikur mesazhet që zhduken. Mesazhet që ata dërgojnë nuk do të zhduken më.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> e ka çaktivizuar mesazhet që zhduken.",
   "disappearingMessagesTurnedOffYou": "<b>J </b> fikët <b>mesazhet për zhdukje</b>. Mesazhet që dërgoni nuk do të zhduken më.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Ju</b> e keni çaktivizuar mesazhet që zhduken.",
   "disappearingMessagesTypeRead": "lexo",
   "disappearingMessagesTypeSent": "dërguar më",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> përditësoi rregullimet e mesazheve zhdukëse.",
@@ -361,9 +371,9 @@
   "groupInviteSending": "Dërgimi i ftesës",
   "groupInviteSent": "Ftesa dërguar",
   "groupInviteSuccessful": "Ftesa për grupin ishte e suksesshme",
-  "groupInviteVersion": "Përdoruesit duhet të kenë versionin {version} ose më të lartë për të marrë ftesa",
   "groupInviteYou": "<b>Ju</b> u ftuat të bashkoheni me grupin.",
   "groupLeave": "Braktise Grupin",
+  "groupLeaveDescription": "A jeni të sigurt që doni ta lini {group_name}?",
   "groupLeaveErrorFailed": "Dështoi dalja nga {group_name}",
   "groupLegacyBanner": "Grupet janë përmirësuar, krijoni një grup të ri për të përditësuar. Funksionaliteti i grupit të vjetër do të degradohet nga {date}.",
   "groupMemberLeft": "<b>{name}</b> e la grupin.",
@@ -403,6 +413,7 @@
   "helpSupport": "Mbështetje",
   "helpWedLoveYourFeedback": "Ne do të mirëprisnim reagimet tuaja",
   "hide": "Fshihe",
+  "hideMenuBarDescription": "Ndryshoni dukshmërinë e shiritit të menusë së sistemit",
   "hideOthers": "Fshihi të Tjerat",
   "image": "Figurë",
   "incognitoKeyboard": "Tastatur e fshehtë",
@@ -508,6 +519,7 @@
   "notificationsFastModeDescription": "Do të njoftoheni për mesazhe të reja menjëherë dhe me besueshmëri duke përdorur Serverët e njoftimeve të Google.",
   "notificationsFastModeDescriptionIos": "Do të njoftoheni për mesazhe të reja menjëherë dhe me besueshmëri duke përdorur Serverët e njoftimeve të Apple.",
   "notificationsGoToDevice": "Shko te cilësimet e njoftimeve për pajisje",
+  "notificationsHeaderMentionsOnly": "Njoftime - Vetëm përmendjet",
   "notificationsIosGroup": "{name} te {conversation_name}",
   "notificationsIosRestart": "Ju mund të keni marrë mesazhe ndërsa pajisja juaj {device} po rifillohej.",
   "notificationsLedColor": "Ngjyrë LED-i",
@@ -570,9 +582,11 @@
   "passwordSet": "Vendos Fjalëkalimin",
   "passwordSetDescription": "Fjalëkalimi juaj është vendosur. Ju lutemi ta mbani të sigurt.",
   "paste": "Ngjite",
+  "permissionMusicAudioDenied": "{app_name} ka nevojë për qasje në muzikë dhe audio për të dërguar skedarë, muzikë dhe audio, por kjo i është mohuar. Shtypni Settings -> Permissions dhe aktivizoni \"Music and audio\".",
   "permissionsAppleMusic": "{app_name} ka nevojë të përdorë Apple Music për të luajtur attachment-e mediaje.",
   "permissionsAutoUpdate": "Përditëso Automatikisht",
   "permissionsAutoUpdateDescription": "Kontrolloni automatikisht për përditësime gjatë nisjes së programit",
+  "permissionsCameraDenied": "{app_name} ka nevojë për leje përdorimi të kamerës për të bërë foto dhe video, por kjo i është mohuar. Shtypni Settings -> Permissions dhe aktivizoni \"Camera\".",
   "permissionsFaceId": "Veçoria e mbylljes së ekranit në {app_name} përdor Face ID.",
   "permissionsKeepInSystemTray": "Mbaje në System Tray",
   "permissionsKeepInSystemTrayDescription": "{app_name} vazhdon të funksionojë në sfond kur mbyllni dritaren",
@@ -580,7 +594,10 @@
   "permissionsMicrophone": "Mikrofoni",
   "permissionsMicrophoneAccessRequiredDesktop": "Ju mund të aktivizoni aksesin e mikrofonit në cilësimet e privatësisë së {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} ka nevojë për leje përdorimi të mikrofonit për të bërë thirrje dhe për të regjistruar mesazhe audio.",
+  "permissionsMusicAudio": "{app_name} ka nevojë për akses në muzikë dhe audio për të dërguar skedarë, muzikë dhe audio.",
   "permissionsRequired": "Lyp leje",
+  "permissionsStorageDenied": "{app_name} ka nevojë për qasje në bibliotekën e fotove që të mund të dërgoni foto dhe video, por kjo është bllokuar përherë. Shtypni Settings -> Permissions dhe aktivizoni \"Photos and videos\".",
+  "permissionsStorageDeniedLegacy": "{app_name} ka nevojë për qasje të hapësirës ruajtëse që të mund të dërgoni dhe ruani bashkëngjitjet. Shtypni Settings -> Permissions dhe aktivizoni \"Storage\".",
   "permissionsStorageSave": "{app_name} ka nevojë për leje të hapësirës ruajtëse për të ruajtur attachment-et dhe median.",
   "permissionsStorageSaveDenied": "{app_name} ka nevojë për leje të hapësirës ruajtëse për të ruajtur fotot dhe videot, por kjo i është mohuar. Ju lutemi, kaloni te rregullimet e aplikacionit, përzgjidhni \"Leje\", dhe aktivizoni \"Depozitim\".",
   "permissionsStorageSend": "{app_name} ka nevojë për leje të hapësirës ruajtëse për të dërguar foto dhe video.",
@@ -613,6 +630,7 @@
   "recoveryPasswordBannerTitle": "Ruaje fjalëkalimin e rikuperimit",
   "recoveryPasswordDescription": "Përdorni fjalëkalimin e rikuperimit për të ngarkuar llogarinë tuaj në pajisje të reja.<br/><br/>Llogaria juaj nuk mund të rikuperohet pa fjalëkalimin tuaj të rikuperimit. Sigurohuni që ta keni ruajtur në një vend të sigurt dhe mos e ndani me askënd.",
   "recoveryPasswordEnter": "Jepni fjalëkalimin e rikthimit tuaj",
+  "recoveryPasswordErrorLoad": "Ndodhi një gabim gjatë ngarkimit të fjalëkalimit tuaj të rimëkëmbjes.<br/><br/>Ju lutemi eksportoni logjet tuaja, pastaj ngarkoni skedarin përmes Zyrës së Ndihmës të Session për të ndihmuar në zgjidhjen e kësaj çështje.",
   "recoveryPasswordErrorMessageGeneric": "Ju lutemi kontrolloni fjalëkalimin tuaj të rikuperimit dhe provoni përsëri.",
   "recoveryPasswordErrorMessageIncorrect": "Disa fjalë në fjalëkalimin tuaj për rikuperim janë të pasakta. Ju lutem kontrolloni dhe provoni përsëri.",
   "recoveryPasswordErrorMessageShort": "Fjalëkalimi i Rimëkëmbjes që keni futur nuk është mjaftueshëm i gjatë. Ju lutem kontrolloni dhe provoni përsëri.",
@@ -646,6 +664,7 @@
   "searchContacts": "Kërko Kontaktet",
   "searchConversation": "Kërkoni bisedën",
   "searchEnter": "Ju lutemi futni kërkimin tuaj.",
+  "searchMatches": "{count, plural, one [{found_count} nga # ndeshje] other [{found_count} of # match]}",
   "searchMatchesNone": "S’ka përfundime për.",
   "searchMatchesNoneSpecific": "S’kemi gjetur rezultate për {query}",
   "searchMembers": "Kërko Anëtarët",
@@ -669,6 +688,7 @@
   "set": "Vendos",
   "settingsRestartDescription": "Duhet të rifilloni {app_name} për të zbatuar cilësimet e reja.",
   "share": "Shpërndaje",
+  "shareAccountIdDescription": "Ftoni shokët tuaj të bisedojnë me ju në {app_name} duke ndarë Account ID tuaj me ta.",
   "shareAccountIdDescriptionCopied": "Shpërndani me miqtë tuaj kudo që flisni zakonisht me ta — pastaj zhvendosni bisedën këtu.",
   "shareExtensionDatabaseError": "Ka një problem në hapjen e bazës së të dhënave. Ju lutem rindizni aplikacionin dhe provoni përsëri.",
   "show": "Shfaqe",
@@ -687,6 +707,7 @@
   "updateDownloaded": "Përditësimi është instaluar, kliko për të rifilluar",
   "updateDownloading": "Po shkarkohet përditësimi: {percent_loader}%",
   "updateError": "Nuk mund të përditësohet",
+  "updateErrorDescription": "{app_name} nuk arriti të përditësohej. Ju lutemi shkoni te {session_download_url} dhe instaloni versionin e ri manualisht, pastaj kontaktoni qendrën tonë të ndihmës për të na informuar për këtë problem.",
   "updateNewVersion": "Është gati një version i ri i {app_name}, prekeni që të përditësohet",
   "updateNewVersionDescription": "Është gati një version i ri i {app_name}.",
   "updateReleaseNotes": "Kalo te Shënime Versioni",
