--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -66,6 +66,7 @@
   "attachmentsDownload": "Hämta bifogad fil",
   "attachmentsDuration": "Varaktighet:",
   "attachmentsErrorLoad": "Fel vid bifogning av fil",
+  "attachmentsErrorMediaSelection": "Kunde inte välja bilaga",
   "attachmentsErrorNoApp": "Kan inte hitta app för att välja media.",
   "attachmentsErrorNotSupported": "Denna filtyp stöds inte.",
   "attachmentsErrorNumber": "Kan inte skicka mer än 32 bild- och videofiler åt gången.",
@@ -142,6 +143,7 @@
   "callsPermissionsRequiredDescription": "Du kan aktivera behörigheten \"Röst- och videosamtal\" i sekretessinställningarna.",
   "callsReconnecting": "Återansluter…",
   "callsRinging": "Ringer...",
+  "callsSessionCall": "{app_name} Samtal",
   "callsSettings": "Samtal (Beta)",
   "callsVoiceAndVideo": "Röst- och videosamtal",
   "callsVoiceAndVideoBeta": "Röst- och videosamtal (Beta)",
@@ -155,6 +157,7 @@
   "cameraGrantAccessDescription": "{app_name} behöver åtkomst till kameran för att kunna fotografera och filma eller skanna QR-koder.",
   "cameraGrantAccessQr": "{app_name} behöver kameraåtkomst för att skanna QR-koder",
   "cancel": "Avbryt",
+  "changePasswordFail": "Misslyckades att ändra lösenordet",
   "clear": "Rensa",
   "clearAll": "Rensa alla",
   "clearDataAll": "Rensa all data",
@@ -177,6 +180,7 @@
   "clearMessagesNoteToSelfDescription": "Är du säker på att du vill rensa alla meddelanden i Note to Self från din enhet?",
   "close": "Stäng",
   "closeWindow": "Stäng fönster",
+  "commitHashDesktop": "Commit Hash: {hash}",
   "communityEnterUrl": "Ange Community URL",
   "communityEnterUrlErrorInvalid": "Ogiltig URL",
   "communityEnterUrlErrorInvalidDescription": "Vänligen kontrollera Community-URL:en och försök igen.",
@@ -185,7 +189,6 @@
   "communityInvitation": "Community Invitation",
   "communityJoin": "Gå med i Community",
   "communityJoinDescription": "Är du säker på att du vill gå med i {community_name}?",
-  "communityJoinError": "Misslyckades med att gå med i {community_name}",
   "communityJoinOfficial": "Eller gå med i en av dessa...",
   "communityJoined": "Gått med i Community",
   "communityJoinedAlready": "Du är redan medlem i denna gemenskap.",
@@ -211,6 +214,7 @@
   "conversationsAddedToHome": "Tillagd på Hemskärmen",
   "conversationsAudioMessages": "Ljudmeddelanden",
   "conversationsAutoplayAudioMessage": "Spela automatiskt upp ljudmeddelanden",
+  "conversationsAutoplayAudioMessageDescription": "Spela automatiskt upp ljudmeddelanden i följd",
   "conversationsBlockedContacts": "Spärrade kontakter",
   "conversationsCommunities": "Kommuner",
   "conversationsDelete": "Radera konversation",
@@ -255,6 +259,10 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Legacy",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Ursprunglig version av försvinnande meddelanden.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> satt försvinnande meddelanden timern till <b>{time}</b>",
+  "deleteAfterLegacyGroupsGroupCreation": "Vänligen vänta medans gruppen skapas...",
+  "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Misslyckades att uppdatera grupp",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Du har inte behörighet att ta bort andras meddelanden",
+  "deleteMessage": "{count, plural, one [Radera meddelande] other [Radera meddelanden]}",
   "deleteMessageConfirm": "Är du säker på att du vill radera detta meddelande?",
   "deleteMessageDeletedGlobally": "Detta meddelande har raderats",
   "deleteMessageDeletedLocally": "Detta meddelande har tagits bort på denna enhet",
@@ -278,11 +286,14 @@
   "disappearingMessagesDeleteType": "Raderingstyp",
   "disappearingMessagesDescription": "Denna inställning gäller för alla i denna konversation.",
   "disappearingMessagesDescription1": "Denna inställning gäller för meddelanden som du skickar i denna konversation.",
+  "disappearingMessagesDescriptionGroup": "Denna inställning gäller för alla i denna konversation.<br/>Endast gruppadministratörer kan ändra denna inställning.",
   "disappearingMessagesDisappear": "Försvinna efter {disappearing_messages_type} - {time}",
   "disappearingMessagesDisappearAfterRead": "Försvinna efter läsning",
   "disappearingMessagesDisappearAfterReadDescription": "Meddelanden raderas efter att de har blivit lästa.",
+  "disappearingMessagesDisappearAfterReadState": "Försvinna efter läsning - {time}",
   "disappearingMessagesDisappearAfterSend": "Försvinna efter sändning",
   "disappearingMessagesDisappearAfterSendDescription": "Meddelanden raderas efter att de har skickats.",
+  "disappearingMessagesDisappearAfterSendState": "Försvinna efter sändning - {time}",
   "disappearingMessagesFollowSetting": "Följ inställning",
   "disappearingMessagesFollowSettingOff": "Meddelanden du skickar kommer inte längre att försvinna. Är du säker att du vill stänga av försvinnande meddelanden?",
   "disappearingMessagesFollowSettingOn": "Ange att dina meddelanden ska försvinna <b>{time}</b> efter att de har <b>{disappearing_messages_type}</b>?",
@@ -294,6 +305,7 @@
   "disappearingMessagesTimer": "Timer",
   "disappearingMessagesTurnedOff": "<b>{name}</b> har stängt av försvinnande meddelanden. Meddelanden de sänder kommer inte längre att försvinna.",
   "disappearingMessagesTurnedOffYou": "<b>Du</b> stängde av <b>försvinnande</b> meddelanden. Meddelanden du sänder kommer inte längre att försvinna.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Du</b> stängde <b>av</b> försvinnande meddelanden.",
   "disappearingMessagesTypeRead": "läst",
   "disappearingMessagesTypeSent": "skickat",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> uppdaterade försvinnande meddelandeinställningar.",
@@ -361,15 +373,22 @@
   "groupInviteSending": "Skickar inbjudan",
   "groupInviteSent": "Inbjudan skickad",
   "groupInviteSuccessful": "Grupinbjudan lyckades",
-  "groupInviteVersion": "Användare måste ha version {version} eller högre för att ta emot inbjudningar",
   "groupInviteYou": "<b>Du</b> blev inbjuden att gå med i gruppen.",
+  "groupInviteYouAndMoreNew": "<b>Du</b> och <b>{count} andra</b> gick med i gruppen.",
+  "groupInviteYouAndOtherNew": "<b>Du</b> och <b>{other_name}</b> gick med i gruppen.",
   "groupLeave": "Lämna grupp",
+  "groupLeaveDescription": "Är du säker på att du vill lämna {group_name}?",
   "groupLeaveErrorFailed": "Misslyckades med att lämna {group_name}",
   "groupLegacyBanner": "Grupper har uppgraderats, skapa en ny grupp för att uppgradera. Gamla gruppfunktioner kommer att försämras från och med {date}.",
   "groupMemberLeft": "<b>{name}</b> lämnade gruppen.",
   "groupMemberLeftMultiple": "<b>{name}</b> och <b>{count} andra</b> lämnade gruppen.",
   "groupMemberLeftTwo": "<b>{name}</b> och <b>{other_name}</b> lämnade gruppen.",
   "groupMemberNew": "<b>{name}</b> gick med i gruppen.",
+  "groupMemberNewHistory": "<b>{name}</b> blev inbjuden att gå med i gruppen. Chatt historik delades.",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> och <b>{count} andra</b> blev inbjudna att gå med i gruppen. Chatt historik delades.",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> och <b>{other_name}</b> blev inbjudna att gå med i gruppen. Chatt historik delades.",
+  "groupMemberNewMultiple": "<b>{name}</b> och <b>{count} andra</b> bjöds in till gruppen.",
+  "groupMemberNewTwo": "<b>{name}</b> och <b>{other_name}</b> bjöds in att gå med i gruppen.",
   "groupMemberYouLeft": "<b>Du</b> lämnade gruppen.",
   "groupMembers": "Gruppmedlemmar",
   "groupMembersNone": "Det finns inga andra medlemmar i denna grupp.",
@@ -382,6 +401,8 @@
   "groupNoMessages": "Du har inga meddelanden från <b>{group_name}</b>. Skicka ett meddelande för att starta konversationen!",
   "groupOnlyAdmin": "Du är den enda administratören i <b>{group_name}</b>.<br/><br/>Gruppmedlemmar och inställningar kan inte ändras utan en administratör.",
   "groupPromotedYou": "<b>Du</b> blev befordrad till Admin.",
+  "groupPromotedYouMultiple": "<b>Du</b> och <b>{count} andra</b> blev befordrade till Admin.",
+  "groupPromotedYouTwo": "<b>Du</b> och <b>{name}</b> blev befordrade till Admin.",
   "groupRemoveDescription": "Vill du ta bort <b>{name}</b> från <b>{group_name}</b>?",
   "groupRemoveDescriptionMultiple": "Vill du ta bort <b>{name}</b> och <b>{count} andra</b> från <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Vill du ta bort <b>{name}</b> och <b>{other_name}</b> från <b>{group_name}</b>?",
@@ -393,11 +414,13 @@
   "groupUnknown": "Okänd grupp",
   "groupUpdated": "Grupp uppdaterad",
   "helpFAQ": "FAQ",
+  "helpHelpUsTranslateSession": "Hjälp oss översätta {app_name}",
   "helpReportABug": "Rapportera en bugg",
   "helpReportABugDescription": "Dela några detaljer för att hjälpa oss att lösa ditt problem. Exportera dina loggar och ladda sedan upp filen genom {app_name}'s Help Desk.",
   "helpReportABugExportLogs": "Exportera loggar",
   "helpReportABugExportLogsDescription": "Exportera dina loggar, ladda sedan upp filen via {app_name}:s hjälpdisk.",
   "helpReportABugExportLogsSaveToDesktop": "Spara på skrivbordet",
+  "helpReportABugExportLogsSaveToDesktopDescription": "Spara denna fil till ditt skrivbord och dela den sedan med {app_name} utvecklarna.",
   "helpSupport": "Support",
   "helpWedLoveYourFeedback": "Vi älskar din feedback",
   "hide": "Dölj",
@@ -413,6 +436,7 @@
   "leave": "Lämna",
   "leaving": "Lämnar...",
   "legacyGroupMemberNewMultiple": "<b>{name} </b> och <b> {count} andra</b> gick med i gruppen.",
+  "legacyGroupMemberNewYouMultiple": "<b>Du</b> och <b>{count} andra</b> gick med i gruppen.",
   "legacyGroupMemberTwoNew": "<b>{name}</b> och <b>{other_name}</b> gick med i gruppen.",
   "linkPreviews": "Förhandsgranskning av länkar",
   "linkPreviewsDescription": "Visa länkförhandsvisningar för stödda URL:er.",
@@ -457,6 +481,7 @@
   "messageInfo": "Meddelande info",
   "messageMarkRead": "Markera som läst",
   "messageMarkUnread": "Markera som oläst",
+  "messageNew": "{count, plural, one [Nytt meddelande] other [Nya meddelanden]}",
   "messageNewDescriptionDesktop": "Starta en ny konversation genom att ange din väns Account ID eller ONS.",
   "messageNewDescriptionMobile": "Starta en ny konversation genom att ange din väns Account ID, ONS eller skanna deras QR-kod.",
   "messageNewYouveGot": "{count, plural, one [Du har ett nytt meddelande.] other [Du har # nya meddelanden.]}",
@@ -482,6 +507,7 @@
   "messageVoice": "Röstmeddelande",
   "messageVoiceErrorShort": "Tryck och håll ned för att spela in ett röstmeddelande",
   "messageVoiceSlideToCancel": "Svep för att avbryta",
+  "messageVoiceSnippet": "{emoji} Röstmeddelande",
   "messages": "Meddelanden",
   "minimize": "Minimera",
   "next": "Nästa",
@@ -506,6 +532,8 @@
   "notificationsFastModeDescription": "Du kommer att meddelas om nya meddelanden på ett tillförlitligt sätt och omedelbart genom att använda Googles aviseringsservrar.",
   "notificationsFastModeDescriptionIos": "Du kommer att meddelas om nya meddelanden på ett tillförlitligt sätt och omedelbart använda Apples meddelandeservrar.",
   "notificationsGoToDevice": "Gå till enhetens aviseringsinställningar",
+  "notificationsHeaderAllMessages": "Notifieringar – Alla",
+  "notificationsHeaderMentionsOnly": "Notifierings - endast omnämnanden",
   "notificationsIosGroup": "{name} till {conversation_name}",
   "notificationsIosRestart": "Du kan ha fått meddelanden medan din {device} startades om.",
   "notificationsLedColor": "Färg på ljusindikator",
@@ -527,12 +555,16 @@
   "notificationsVibrate": "Vibrera",
   "off": "Av",
   "okay": "Okej",
+  "on": "På",
   "onboardingAccountCreate": "Skapa konto",
   "onboardingAccountCreated": "Konto Skapat",
   "onboardingAccountExists": "Jag har ett konto",
+  "onboardingBackAccountCreation": "Du kan inte gå tillbaka längre. För att avbryta din kontoskapning måste {app_name} avslutas.",
+  "onboardingBackLoadAccount": "Du kan inte gå tillbaka längre. För att sluta ladda ditt konto måste {app_name} avslutas.",
   "onboardingBubbleNoPhoneNumber": "Du behöver inte ens ett telefonnummer för att registrera dig.",
   "onboardingBubblePrivacyInYourPocket": "Integritet i din ficka.",
   "onboardingBubbleSessionIsEngineered": "{app_name} är utvecklad för att skydda din integritet.",
+  "onboardingBubbleWelcomeToSession": "Välkommen till {app_name} {emoji}",
   "onboardingHitThePlusButton": "Tryck på plusknappen för att starta en chatt, skapa en grupp eller gå med i en officiell community!",
   "onboardingMessageNotificationExplanation": "Det finns två sätt som {app_name} kan meddela dig om nya meddelanden på.",
   "onboardingPrivacy": "Sekretesspolicy",
@@ -568,9 +600,11 @@
   "passwordSet": "Ange lösenord",
   "passwordSetDescription": "Ditt lösenord har angetts. Håll det säkert.",
   "paste": "Klistra in",
+  "permissionMusicAudioDenied": "{app_name} behöver åtkomst till musik och ljud för att skicka filer, musik och ljud, men åtkomsten har nekats permanent. Tryck på Inställningar -> Behörigheter, och slå på 'Musik och ljud'.",
   "permissionsAppleMusic": "{app_name} behöver åtkomst till Apple Music för att spela upp bifogade mediafiler.",
   "permissionsAutoUpdate": "Uppdatera automatiskt",
   "permissionsAutoUpdateDescription": "Sök efter uppdateringar automatiskt vid uppstart",
+  "permissionsCameraDenied": "{app_name} behöver åtkomst till kameran för att kunna fotografera och filma, men har nekats permanent. Tryck på Inställningar -> Behörigheter, och slå på \"Kamera\".",
   "permissionsFaceId": "Skärmlåsfunktionen på {app_name} använder Face ID.",
   "permissionsKeepInSystemTray": "Behåll i systemfältet",
   "permissionsKeepInSystemTrayDescription": "{app_name} fortsätter att köras i bakgrunden när du stänger fönstret",
@@ -578,6 +612,7 @@
   "permissionsMicrophone": "Mikrofon",
   "permissionsMicrophoneAccessRequiredDesktop": "Du kan aktivera mikrofontillgång i {app_name}s sekretessinställningar",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} behöver mikrofonåtkomst för att ringa och spela in ljudmeddelanden.",
+  "permissionsMusicAudio": "{app_name} behöver åtkomst till musik och ljud för att kunna skicka filer, musik och ljud.",
   "permissionsRequired": "Behörighet saknas",
   "permissionsStorageSave": "{app_name} behöver åtkomst till lagringsutrymmet för att kunna spara bifogade filer och media.",
   "permissionsStorageSaveDenied": "{app_name} behöver åtkomst till lagringsutrymmet för att kunna spara foton och filmer, men har nekats permanent. Fortsätt till inställningsmenyn, välj \"Behörigheter\" och aktivera \"Lagring\".",
@@ -625,6 +660,7 @@
   "recoveryPasswordWarningSendDescription": "Detta är ditt återställningslösenord. Om du skickar det till någon kommer de att ha full tillgång till ditt konto.",
   "redo": "Gör om",
   "remove": "Ta bort",
+  "removePasswordFail": "Misslyckades med att ta bort lösenord",
   "reply": "Svara",
   "resend": "Skicka på nytt",
   "resolving": "Läser in landinformation ...",
@@ -667,6 +703,7 @@
   "set": "Ange",
   "settingsRestartDescription": "Du måste starta om {app_name} för att tillämpa dina nya inställningar.",
   "share": "Dela",
+  "shareAccountIdDescription": "Bjud in din vän att chatta med dig på {app_name} genom att dela ditt Account ID med dem.",
   "shareAccountIdDescriptionCopied": "Dela med dina vänner var du än brukar prata med dem — flytta sedan konversationen hit.",
   "shareExtensionDatabaseError": "Det finns ett problem med att öppna databasen. Starta om appen och försök igen.",
   "show": "Visa",
@@ -674,6 +711,7 @@
   "showLess": "Visa färre",
   "stickers": "Klistermärken",
   "supportGoTo": "Gå till supportsidan",
+  "systemInformationDesktop": "Systeminformation: {information}",
   "theContinue": "Fortsätt",
   "theDefault": "Standard",
   "theError": "Fel",
