--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -8,6 +8,7 @@
   "accountIdErrorInvalid": "Bu Hesap Kimliği geçersiz. Lütfen kontrol edip tekrar deneyin.",
   "accountIdOrOnsEnter": "Hesap Kimliğini veya ONS'yi Girin",
   "accountIdOrOnsInvite": "Hesap ID veya ONS Davet Et",
+  "accountIdShare": "Hey, {app_name} uygulamasını tam gizlilik ve güvenlik ile sohbet etmek için kullanıyorum. Bana katıl! Hesap ID'm<br/><br/>{account_id}<br/><br/>{session_download_url} bağlantısını ziyaret ederek indir",
   "accountIdYours": "Hesap Kimliğiniz",
   "accountIdYoursDescription": "Bu sizin Hesap Kimliğiniz. Diğer kullanıcılar, sizinle bir oturum başlatmak için tarayabilir.",
   "actualSize": "Normal Boyut",
@@ -29,7 +30,10 @@
   "adminRemoveAsAdmin": "Yönetici olarak kaldır",
   "adminRemoveCommunityNone": "Bu Toplulukta hiçbir Yönetici yok.",
   "adminRemoveFailed": "{name} yönetici olarak kaldırılamadı.",
+  "adminRemoveFailedMultiple": "{name} ve {count} üye Yönetici seviyesinden düşürülemedi.",
   "adminRemovedUser": "<b>{name}</b> yönetici olarak kaldırıldı.",
+  "adminRemovedUserMultiple": "<b>{name}</b> ve <b>{count} üye</b> Yönetici seviyesinden düşürüldü.",
+  "adminRemovedUserOther": "<b>{name}</b> ve <b>{other_name}</b> Yönetici seviyesinden düşürüldü.",
   "adminSendingPromotion": "Yönetici terfisi gönderiliyor",
   "adminSettings": "Yönetici Ayarları",
   "adminTwoPromotedToAdmin": "<b>{name}</b> ve <b>{other_name}</b> yönetici olarak terfi etti.",
@@ -66,6 +70,7 @@
   "attachmentsDownload": "Eklentiyi İndir",
   "attachmentsDuration": "Süre:",
   "attachmentsErrorLoad": "Dosya eklenirken hata",
+  "attachmentsErrorMediaSelection": "Ek seçilemedi",
   "attachmentsErrorNoApp": "Medya seçebilecek uygulama bulunamıyor.",
   "attachmentsErrorNotSupported": "Bu dosya türü desteklenmiyor.",
   "attachmentsErrorNumber": "Aynı anda 32'den fazla resim ve video dosyası gönderilemiyor.",
@@ -155,6 +160,7 @@
   "cameraGrantAccessDescription": "{app_name}, fotoğraf ve video çekmek veya QR kodları taramak için kamera erişimine ihtiyaç duyar.",
   "cameraGrantAccessQr": "{app_name}, QR kodlarını taramak için kamera erişimine ihtiyaç duyar.",
   "cancel": "İptal",
+  "changePasswordFail": "Parola değiştirilemedi",
   "clear": "Temizle",
   "clearAll": "Hepsini Temizle",
   "clearDataAll": "Tüm Veriyi Temizle",
@@ -185,7 +191,6 @@
   "communityInvitation": "Topluluk Daveti",
   "communityJoin": "Topluluğa Katıl",
   "communityJoinDescription": "{community_name} topluluğuna katılmak istediğinizden emin misiniz?",
-  "communityJoinError": "{community_name} katılınamadı",
   "communityJoinOfficial": "Veya bunlardan birine katılın...",
   "communityJoined": "Topluluğa Katıldınız",
   "communityJoinedAlready": "Bu topluluğun zaten üyesisiniz.",
@@ -211,6 +216,7 @@
   "conversationsAddedToHome": "Ana ekrana eklendi",
   "conversationsAudioMessages": "Sesli Mesajlar",
   "conversationsAutoplayAudioMessage": "Sesli Mesajları Otomatik Oynat",
+  "conversationsAutoplayAudioMessageDescription": "Ardışık olarak gönderilen sesli mesajları otomatik olarak çal",
   "conversationsBlockedContacts": "Engellenen Kişiler",
   "conversationsCommunities": "Topluluklar",
   "conversationsDelete": "Sohbeti Sil",
@@ -255,7 +261,12 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Legacy",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Kaybolan iletilerin orijinal sürümü.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> kaybolan mesaj zamanlayıcısını <b>{time}</b> olarak ayarladı.",
+  "deleteAfterLegacyGroupsGroupCreation": "Grup oluşturulurken lütfen bekleyin",
+  "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Grup güncellenemedi",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Başkalarının mesajlarını silmek için yetkiniz bulunmamaktadır",
+  "deleteMessage": "{count, plural, one [Mesajı Sil] other [Mesajları Sil]}",
   "deleteMessageConfirm": "Bu mesajı silmek istediğinizden emin misiniz?",
+  "deleteMessageDeleted": "{count, plural, one [Mesaj silindi] other [Mesajlar silindi]}",
   "deleteMessageDeletedGlobally": "Bu mesaj silindi",
   "deleteMessageDeletedLocally": "Bu mesaj bu cihazda silinmiş",
   "deleteMessageDescriptionDevice": "Bu mesajı sadece bu cihazdan silmek istediğinizden emin misiniz?",
@@ -278,11 +289,14 @@
   "disappearingMessagesDeleteType": "Silme Türü",
   "disappearingMessagesDescription": "Bu ayar bu konuşmadaki herkesi kapsar.",
   "disappearingMessagesDescription1": "Bu ayar bu konuşmada gönderdiğiniz iletileri kapsar.",
+  "disappearingMessagesDescriptionGroup": "Bu ayar, bu sohbetteki herkes için geçerlidir.<br/>Bu ayarı yalnızca grup yöneticileri değiştirebilir.",
   "disappearingMessagesDisappear": "Okunduktan sonra kaybolur {disappearing_messages_type} - {time}",
   "disappearingMessagesDisappearAfterRead": "Okunduktan Sonra Kaybolur",
   "disappearingMessagesDisappearAfterReadDescription": "İletiler okunduktan sonra silinir.",
+  "disappearingMessagesDisappearAfterReadState": "Okunduktan Sonra Kaybolur - {time}",
   "disappearingMessagesDisappearAfterSend": "Gönderildikten Sonra Kaybolur",
   "disappearingMessagesDisappearAfterSendDescription": "İletiler gönderildikten sonra silinir.",
+  "disappearingMessagesDisappearAfterSendState": "Gönderildikten Sonra Kaybolur - {time}",
   "disappearingMessagesFollowSetting": "Ayarı Takip Et",
   "disappearingMessagesFollowSettingOff": "Gönderdiğiniz iletiler artık kaybolmayacak. Kaybolan iletileri <b>kapalı</b> hale getirmek istediğinizden emin misiniz?",
   "disappearingMessagesFollowSettingOn": "Mesajlarınızın <b>{time}</b> sonra <b>{disappearing_messages_type}</b> olmasını ister misiniz?",
@@ -294,6 +308,7 @@
   "disappearingMessagesTimer": "Sayaç",
   "disappearingMessagesTurnedOff": "<b>{name}</b>, kaybolan mesajları kapattı. Bu kullanıcının gönderdiği mesajlar artık kaybolmayacak.",
   "disappearingMessagesTurnedOffYou": "<b>Sen</b> kaybolan mesajları <b>kapattın</b>. Gönderdiğin mesajlar artık kaybolmayacak.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Sen</b> kaybolan mesajları <b>kapattın</b>.",
   "disappearingMessagesTypeRead": "okundu",
   "disappearingMessagesTypeSent": "gönderildi",
   "disappearingMessagesUpdated": "<b>{admin_name}</b>, kaybolan mesaj ayarlarını güncelledi.",
@@ -361,15 +376,24 @@
   "groupInviteSending": "Davet gönderiliyor",
   "groupInviteSent": "Davet gönderildi",
   "groupInviteSuccessful": "Grup daveti başarılı",
-  "groupInviteVersion": "Davetiyeleri almak için kullanıcıların sürümü {version} veya üstü olmalıdır",
   "groupInviteYou": "<b>Sen</b> gruba katılmaya davet edildin.",
+  "groupInviteYouAndMoreNew": "<b>Siz</b> ve <b>{count} diğer</b> gruba katıldınız.",
+  "groupInviteYouAndOtherNew": "<b>Siz</b> ve <b>{other_name}</b> gruba katıldınız.",
   "groupLeave": "Gruptan Ayrıl",
+  "groupLeaveDescription": "{group_name} grubundan ayrılmak istediğinizden emin misiniz?",
   "groupLeaveErrorFailed": "{group_name} çıkış yapılamadı",
   "groupLegacyBanner": "Gruplar güncellendi, yükseltmek için yeni bir grup oluşturun. Eski grup işlevselliği {date} tarihinden itibaren azaltılacaktır.",
   "groupMemberLeft": "<b>{name}</b> gruptan ayrıldı.",
   "groupMemberLeftMultiple": "<b>{name}</b> ve <b>{count} diğer</b> gruptan ayrıldı.",
   "groupMemberLeftTwo": "<b>{name}</b> ve <b>{other_name}</b> gruptan ayrıldı.",
   "groupMemberNew": "<b>{name}</b> gruba katıldı.",
+  "groupMemberNewHistory": "<b>{name}</b> gruba katılmak üzere davet edildi. Sohbet geçmişi paylaşıldı.",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> ve <b>{count} diğerleri</b> gruba katılmak üzere davet edildi. Sohbet geçmişi paylaşıldı.",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> ve <b>{other_name}</b> gruba katılmak üzere davet edildi. Sohbet geçmişi paylaşıldı.",
+  "groupMemberNewMultiple": "<b>{name}</b> ve <b>{count} diğer</b> gruba katılmaları için davet edildi.",
+  "groupMemberNewTwo": "<b>{name}</b> ve <b>{other_name}</b> gruba katılmak üzere davet edildi.",
+  "groupMemberNewYouHistoryMultiple": "<b>Sen</b> ve <b>{count} diğerleri</b> gruba katılmaya davet edildiniz. Sohbet geçmişi paylaşıldı.",
+  "groupMemberNewYouHistoryTwo": "<b>Sen</b> ve <b>{name}</b> gruba katılmaya davet edildiniz. Sohbet geçmişi paylaşıldı.",
   "groupMemberYouLeft": "<b>Sen</b> gruptan ayrıldın.",
   "groupMembers": "Grup Üyeleri",
   "groupMembersNone": "Bu grupta başka üye yok.",
@@ -382,13 +406,18 @@
   "groupNoMessages": "<b>{group_name}</b> kullanıcısından herhangi bir mesajınız yok. Sohbeti başlatmak için bir mesaj gönderin!",
   "groupOnlyAdmin": "<b>{group_name}</b> grubunda tek adminsiniz.<br/><br/>Admin olmadan grup üyeleri ve ayarları değiştirilemez.",
   "groupPromotedYou": "<b>Sen</b> yönetici olarak terfi ettin.",
+  "groupPromotedYouMultiple": "<b>Sen</b> ve <b>{count} diğer</b> yönetici olarak terfi ettiniz.",
+  "groupPromotedYouTwo": "<b>Sen</b> ve <b>{name}</b> yönetici olarak terfi ettiniz.",
   "groupRemoveDescription": "<b>{group_name}</b> grubundan <b>{name}</b> kişisini kaldırmak ister misiniz?",
   "groupRemoveDescriptionMultiple": "<b>{group_name}</b> grubundan <b>{name}</b> ve <b>{count} diğerlerini</b> kaldırmak ister misiniz?",
   "groupRemoveDescriptionTwo": "<b>{group_name}</b> grubundan <b>{name}</b> ve <b>{other_name}</b> kişilerini kaldırmak ister misiniz?",
+  "groupRemoveMessages": "{count, plural, one [Kullanıcıyı ve mesajlarını sil] other [Kullanıcıları ve mesajlarını sil]}",
+  "groupRemoveUserOnly": "{count, plural, one [Kullanıcıyı sil ] other [Kullanıcıları sil]}",
   "groupRemoved": "<b>{name}</b> gruptan çıkarıldı.",
   "groupRemovedMultiple": "<b>{name}</b> ve <b>{count} diğer</b> gruptan çıkarıldı.",
   "groupRemovedTwo": "<b>{name}</b> ve <b>{other_name}</b> gruptan çıkarıldı.",
   "groupRemovedYou": "<b>{group_name}</b> grubundan çıkarıldınız.",
+  "groupRemovedYouTwo": "<b>Sen</b> ve <b>{other_name}</b> gruptan çıkarıldınız.",
   "groupSetDisplayPicture": "Grup Profil Resmini Seçin",
   "groupUnknown": "Bilinmeyen Grup",
   "groupUpdated": "Grup güncellendi",
@@ -415,6 +444,7 @@
   "leave": "Ayrıl",
   "leaving": "Çıkılıyor...",
   "legacyGroupMemberNewMultiple": "<b>{name}</b> ve <b>{count} diğer</b> grup katıldı.",
+  "legacyGroupMemberNewYouMultiple": "<b>Sen</b> ve <b>{count} diğerleri</b> gruba katılmaya davet edildiniz.",
   "legacyGroupMemberTwoNew": "<b>{name}</b> ve <b>{other_name}</b> gruba katıldı.",
   "linkPreviews": "Bağlantı Önizlemeleri",
   "linkPreviewsDescription": "Desteklenen URL'ler için bağlantı önizlemeleri göster.",
@@ -444,6 +474,7 @@
   "membersActive": "{count, plural, one [# aktif üye] other [# aktif üyeler]}",
   "membersAddAccountIdOrOns": "Account ID veya ONS Ekle",
   "membersInvite": "Kişileri Davet Et",
+  "membersInviteSend": "{count, plural, one [Davet Et] other [Davet Et]}",
   "membersInviteShareDescription": "<b>{name}</b> ile grup mesaj geçmişini paylaşmak ister misiniz?",
   "membersInviteShareDescriptionMultiple": "<b>{name}</b> ve <b>{count} diğerleri</b> ile grup mesaj geçmişini paylaşmak ister misiniz?",
   "membersInviteShareDescriptionTwo": "<b>{name}</b> ve <b>{other_name}</b> ile grup mesaj geçmişini paylaşmak ister misiniz?",
@@ -459,6 +490,7 @@
   "messageInfo": "İleti Bilgisi",
   "messageMarkRead": "Okundu işaretle",
   "messageMarkUnread": "Okunmadı Olarak İşaretle",
+  "messageNew": "{count, plural, one [Yeni Mesaj] other [Yeni Mesajlar]}",
   "messageNewDescriptionDesktop": "Yeni bir sohbet başlatmak için arkadaşınızın Hesap Kimliğini veya ONS'yi girin.",
   "messageNewDescriptionMobile": "Yeni bir sohbet başlatmak için arkadaşınızın Hesap Kimliğini, ONS'yi girin veya onların QR kodunu tarayın.",
   "messageNewYouveGot": "{count, plural, one [Yeni bir mesajın var.] other [# Adet Yeni Mesajınız Var.]}",
@@ -508,6 +540,8 @@
   "notificationsFastModeDescription": "Google'ın bildirim sunucularını kullanarak yeni iletilerden güvenilir ve anında haberdar olacaksınız.",
   "notificationsFastModeDescriptionIos": "Apple'ın bildirim sunucularını kullanarak yeni iletilerden güvenilir ve anında haberdar olacaksınız.",
   "notificationsGoToDevice": "Cihaz bildirim ayarlarına git",
+  "notificationsHeaderAllMessages": "Bildirimler - Tümü",
+  "notificationsHeaderMentionsOnly": "Bildirimler - Yalnızca Bahsedildiğinde",
   "notificationsIosGroup": "{name} tarafından {conversation_name}'ya",
   "notificationsIosRestart": "{device} yeniden başlatılırken mesajlar almış olabilirsiniz.",
   "notificationsLedColor": "LED rengi",
@@ -529,6 +563,7 @@
   "notificationsVibrate": "Titreşim",
   "off": "Kapalı",
   "okay": "Tamam",
+  "on": "Açık",
   "onboardingAccountCreate": "Hesap oluştur",
   "onboardingAccountCreated": "Hesap Oluşturuldu",
   "onboardingAccountExists": "Hesabım var",
@@ -570,9 +605,11 @@
   "passwordSet": "Şifre Belirle",
   "passwordSetDescription": "Şifreniz ayarlandı. Lütfen güvende tutunuz.",
   "paste": "Yapıştır",
+  "permissionMusicAudioDenied": "{app_name} dosya, müzik ve ses gönderimi için müzik ve ses erişimine ihtiyaç duyuyor, ancak bu erişim kalıcı olarak reddedildi. Ayarlar -> İzinler üzerine dokunun ve \"Müzik ve ses\" seçeneğini açın.",
   "permissionsAppleMusic": "{app_name}, medya eklerini çalmak için Apple Music'i kullanmak zorunda.",
   "permissionsAutoUpdate": "Otomatik Güncelleme",
   "permissionsAutoUpdateDescription": "Başlangıçta güncellemeleri otomatik olarak denetle",
+  "permissionsCameraDenied": "{app_name}, fotoğraf ve video çekmek için kamera erişimine ihtiyaç duyar, fakat bu izin kalıcı olarak reddedilmiş. Ayarlar -> İzinler üzerine dokunun ve \"Kamera\" seçeneğini açın.",
   "permissionsFaceId": "{app_name} ekran kilidi özelliği Face ID kullanır.",
   "permissionsKeepInSystemTray": "Sistem Tepsisinde Sakla",
   "permissionsKeepInSystemTrayDescription": "{app_name} pencereyi kapattığınızda arka planda çalışmaya devam eder",
@@ -580,6 +617,7 @@
   "permissionsMicrophone": "Mikrofon",
   "permissionsMicrophoneAccessRequiredDesktop": "{app_name} gizlilik ayarlarından mikrofon erişimini etkinleştirebilirsiniz",
   "permissionsMicrophoneAccessRequiredIos": "{app_name}, arama yapmak ve sesli mesaj kaydetmek için mikrofon erişimine ihtiyaç duyar.",
+  "permissionsMusicAudio": "{app_name} dosya, müzik ve ses gönderebilmek için müzik ve ses erişimine ihtiyaç duyar.",
   "permissionsRequired": "İzin gerekli",
   "permissionsStorageSave": "{app_name}, ekleri ve medyayı kaydetmek için depolama erişimine ihtiyaç duyar.",
   "permissionsStorageSaveDenied": "{app_name}, fotoğraf ve video kaydedebilmek için depolama erişimine ihtiyaç duyar, fakat bu izin kalıcı olarak reddedilmiş. Lütfen uygulama ayarlarına girin, \"İzinler\"i seçin ve \"Depolama\"yı etkinleştirin.",
@@ -613,6 +651,7 @@
   "recoveryPasswordBannerTitle": "Kurtarma şifrenizi kaydedin",
   "recoveryPasswordDescription": "Hesabınızı yeni cihazlarda yüklemek için kurtarma şifrenizi kullanın.<br/><br/>Kurtarma şifreniz olmadan hesabınız geri yüklenemez. Güvende olduğundan emin olun ve kimseyle paylaşmayın.",
   "recoveryPasswordEnter": "Kurtarma parolanızı girin",
+  "recoveryPasswordErrorLoad": "Kurtarma şifreni yüklemeye çalışırken bir sorun meydana geldi.<br/><br/>Lütfen kayıtları (logları) dışa aktarın, ardından Session'un Yardım Merkezi üzerinden dışa aktarılmış dosyayı yükleyerek sorunun çözümlenmesine yardımcı olun.",
   "recoveryPasswordErrorMessageGeneric": "Lütfen kurtarma parolanızı kontrol edin ve tekrar deneyin.",
   "recoveryPasswordErrorMessageIncorrect": "Kurtarma Şifrenizdeki bazı kelimeler yanlış. Lütfen kontrol edip tekrar deneyin.",
   "recoveryPasswordErrorMessageShort": "Girdiğiniz Kurtarma Şifresi yeterince uzun değil. Lütfen kontrol edin ve tekrar deneyin.",
@@ -627,6 +666,7 @@
   "recoveryPasswordWarningSendDescription": "Bu sizin kurtarma ifadenizdir. Birine gönderirseniz, hesabınızda tam erişime sahip olurlar.",
   "redo": "Yinele",
   "remove": "Kaldır",
+  "removePasswordFail": "Parola kaldırma başarısız oldu",
   "reply": "Yanıtla",
   "resend": "Tekrar gönder",
   "resolving": "Ülke bilgileri yükleniyor...",
@@ -646,6 +686,7 @@
   "searchContacts": "Kişileri Bul",
   "searchConversation": "Sohbet Ara",
   "searchEnter": "Lütfen aramanızı girin.",
+  "searchMatches": "{count, plural, one [# eşleşmeden {found_count} sonuç] other [# eşleşmeden {found_count} sonuç]}",
   "searchMatchesNone": "Hiçbir sonuç bulunamadı.",
   "searchMatchesNoneSpecific": "{query} için arama sonucu yok",
   "searchMembers": "Üyeleri Ara",
@@ -669,6 +710,7 @@
   "set": "Set",
   "settingsRestartDescription": "Yeni ayarların uygulanması için {app_name}'i yeniden başlatmanız gerekiyor.",
   "share": "Paylaş",
+  "shareAccountIdDescription": "Arkadaşını {app_name} üzerinde seninle konuşmaya davet etmek için onunla Hesap ID'ni paylaşabilirsin.",
   "shareAccountIdDescriptionCopied": "Arkadaşlarınızla genellikle nerede konuştuğunuzu paylaşın ve ardından sohbeti buraya taşıyın.",
   "shareExtensionDatabaseError": "Veritabanını açarken bir sorun oluştu. Lütfen uygulamayı yeniden başlatıp tekrar deneyin.",
   "show": "Göster",
@@ -676,6 +718,7 @@
   "showLess": "Daha az göster",
   "stickers": "Çıkartmalar",
   "supportGoTo": "Destek Sayfasına Git",
+  "systemInformationDesktop": "Sistem Bilgisi: {information}",
   "theContinue": "Devam et",
   "theDefault": "Varsayılan",
   "theError": "Hata",
@@ -687,6 +730,7 @@
   "updateDownloaded": "Güncelleme yüklendi, yeniden başlatmak için tıklayın",
   "updateDownloading": "Güncelleme indiriliyor: {percent_loader}%",
   "updateError": "Güncellenemiyor",
+  "updateErrorDescription": "{app_name} güncellenirken bir sorun meydana geldi. Lütfen {session_download_url} bağlantısını ziyaret edip yeni sürümü manuel olarak yükleyin, ve Yardım Merkezi üzerinden bu sorunu bize bildirin.",
   "updateNewVersion": "{app_name} yeni bir sürümü mevcut, güncellemek için dokunun",
   "updateNewVersionDescription": "{app_name} yeni bir sürümü mevcut.",
   "updateReleaseNotes": "Sürüm Notlarına Git",
