--- a/_locales/ur/messages.json
+++ b/_locales/ur/messages.json
@@ -155,6 +155,7 @@
   "cameraGrantAccessDescription": "{app_name} کو تصاویر اور ویڈیوز لینے یا QR کوڈز اسکین کرنے کے لیے کیمرے کی اجازت درکار ہے۔",
   "cameraGrantAccessQr": "QR کوڈ اسکین کرنے کے لیے {app_name} کو کیمرہ تک رسائی درکار ہے",
   "cancel": "منسوخ کریں",
+  "changePasswordFail": "پاس ورڈ تبدیل کرنے میں ناکامی",
   "clear": "صاف کریں",
   "clearAll": "سب صاف کریں",
   "clearDataAll": "تمام ڈیٹا صاف کریں",
@@ -185,7 +186,6 @@
   "communityInvitation": "Community Invitation",
   "communityJoin": "Community میں شامل ہوں",
   "communityJoinDescription": "کیا آپ واقعی {community_name} میں شامل ہونا چاہتے ہیں؟",
-  "communityJoinError": "{community_name} میں شامل ہونے میں ناکام",
   "communityJoinOfficial": "یا ان میں سے کسی میں شامل ہوں...",
   "communityJoined": "Community میں شامل ہوا",
   "communityJoinedAlready": "آپ پہلے سے ہی اس community کے رکن ہیں۔",
@@ -211,6 +211,7 @@
   "conversationsAddedToHome": "ہوم اسکرین میں شامل کر دیا گیا۔",
   "conversationsAudioMessages": "Audio Messages",
   "conversationsAutoplayAudioMessage": "آڈیو پیغامات آٹوپلے",
+  "conversationsAutoplayAudioMessageDescription": "مسلسل بھیجے گئے آڈیو پیغامات کو آٹوپلے کریں",
   "conversationsBlockedContacts": "بلاک شدہ روابط",
   "conversationsCommunities": "Communities",
   "conversationsDelete": "گفتگو حذف کریں",
@@ -255,6 +256,7 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "پرانا",
   "deleteAfterLegacyDisappearingMessagesOriginal": "غائب ہونے والے پیغامات کا اصل ورژن۔",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> نے غائب ہونے والے پیغامات کا ٹائمر <b>{time}</b> پر سیٹ کیا ہے",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "آپ کو دوسروں کے پیغامات حذف کرنے کی اجازت نہیں ہے",
   "deleteMessageConfirm": "کیا آپ واقعی اس پیغام کو حذف کرنا چاہتے ہیں؟",
   "deleteMessageDeletedGlobally": "یہ پیغام حذف کردیا گیا",
   "deleteMessageDeletedLocally": "یہ پیغام اس ڈیوائس پر حذف کیا گیا",
@@ -278,11 +280,14 @@
   "disappearingMessagesDeleteType": "حذف کی قسم",
   "disappearingMessagesDescription": "یہ سیٹنگ اس بات چیت میں بھیجے گئے ہر شخص کے پیغامات پر لاگو ہوتی ہے۔",
   "disappearingMessagesDescription1": "یہ سیٹنگ اس بات چیت میں آپ کے بھیجے گئے پیغامات پر لاگو ہوتی ہے۔",
+  "disappearingMessagesDescriptionGroup": "یہ سیٹنگ اس گفتگو میں سب پر لاگو ہوتی ہے۔<br/>صرف گروپ ایڈمنز اس سیٹنگ کو تبدیل کر سکتے ہیں۔",
   "disappearingMessagesDisappear": "{disappearing_messages_type} کے بعد غائب - {time}",
   "disappearingMessagesDisappearAfterRead": "پڑھنے کے بعد غائب ہو",
   "disappearingMessagesDisappearAfterReadDescription": "پیغامات پڑھنے کے بعد حذف ہو جاتے ہیں۔",
+  "disappearingMessagesDisappearAfterReadState": "پڑھنے کے بعد غائب ہو - {time}",
   "disappearingMessagesDisappearAfterSend": "بھیجنے کے بعد غائب ہو",
   "disappearingMessagesDisappearAfterSendDescription": "پیغامات بھیجنے کے بعد حذف ہو جاتے ہیں۔",
+  "disappearingMessagesDisappearAfterSendState": "بھیجنے کے بعد غائب ہو - {time}",
   "disappearingMessagesFollowSetting": "سیٹنگ کو فالو کریں",
   "disappearingMessagesFollowSettingOff": "آپ کے بھیجے گئے پیغامات اب مزید غائب نہیں ہوں گے۔ کیا آپ واقعی <b> بند </b>غائب ہونے والے پیغامات بند کرنا چاہتے ہیں؟",
   "disappearingMessagesFollowSettingOn": "اپنے پیغامات سیٹ کریں کہ انہیں <b>{disappearing_messages_type}</b> کے بعد <b>{time}</b> میں غائب ہو جانا چاہئے؟",
@@ -294,6 +299,7 @@
   "disappearingMessagesTimer": "ٹائمر",
   "disappearingMessagesTurnedOff": "<b>{name}</b> نے غائب ہونے والے پیغامات کو بند کر دیا ہے۔ جو پیغامات وہ بھیجیں گے وہ اب غائب نہیں ہوں گے۔",
   "disappearingMessagesTurnedOffYou": "<b>آپ</b> نے <b>غائب ہونے والے پیغامات</b> کو بند کر دیا۔ آپ کے بھیجے گئے پیغامات اب غائب نہیں ہوں گے۔",
+  "disappearingMessagesTurnedOffYouGroup": "<b>آپ</b> نے <b>پیغامات غائب ہونا بند</b> کر دیا ہے۔",
   "disappearingMessagesTypeRead": "پڑھا",
   "disappearingMessagesTypeSent": "بھیجا گیا",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> نے غائب ہونے والے پیغامات کی ترتیبات کو اپ ڈیٹ کیا۔",
@@ -361,15 +367,22 @@
   "groupInviteSending": "دعوت نامہ بھیجا جا رہا ہے",
   "groupInviteSent": "دعوت بھیج دی گئی",
   "groupInviteSuccessful": "گروپ کی دعوت کامیاب رہی",
-  "groupInviteVersion": "صارفین کو دعوت نامے وصول کرنے کے لیے ورژن {version} یا اس سے اوپر کا ہونا چاہیے",
   "groupInviteYou": "<b>آپ</b> کو گروپ میں شامل ہونے کی دعوت دی گئی۔",
+  "groupInviteYouAndMoreNew": "<b>آپ</b> اور <b>{count} دیگر</b> نے گروپ میں شمولیت اختیار کی۔",
+  "groupInviteYouAndOtherNew": "<b>آپ</b> اور <b>{other_name}</b> نے گروپ میں شمولیت اختیار کی۔",
   "groupLeave": "گروپ چھوڑیں",
+  "groupLeaveDescription": "کیا آپ واقعی {group_name} چھوڑنا چاہتے ہیں؟",
   "groupLeaveErrorFailed": "{group_name} چھوڑنے میں ناکام",
   "groupLegacyBanner": "گروپس کو اپ گریڈ کر دیا گیا ہے، اپ گریڈ کرنے کے لیے ایک نیا گروپ بنائیں۔ پرانے گروپ کی فعالیت کو {date} سے کم کر دیا جائے گا۔",
   "groupMemberLeft": "<b>{name}</b> نے گروپ چھوڑ دیا۔",
   "groupMemberLeftMultiple": "<b>{name}</b> اور <b>{count} دیگر</b> نے گروپ چھوڑ دیا۔",
   "groupMemberLeftTwo": "<b>{name}</b> اور <b>{other_name}</b> نے گروپ چھوڑ دیا۔",
   "groupMemberNew": "<b>{name}</b> نے گروپ میں شمولیت اختیار کی۔",
+  "groupMemberNewHistory": "<b>{name}</b> کو گروپ میں شامل ہونے کی دعوت دی گئی۔ چیٹ تاریخ شیئر کی گئی۔",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> اور <b>{count} دیگر</b> کو گروپ میں شامل ہونے کی دعوت دی گئی۔ چیٹ تاریخ شیئر کی گئی۔",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> اور <b>{other_name}</b> کو گروپ میں شامل ہونے کی دعوت دی گئی۔ چیٹ تاریخ شیئر کی گئی۔",
+  "groupMemberNewMultiple": "<b>{name}</b> اور <b>{count} دیگر</b> گروپ میں مدعو کیا گیا۔",
+  "groupMemberNewTwo": "<b>{name}</b> اور <b>{other_name}</b> کو گروپ میں شامل ہونے کی دعوت دی گئی۔",
   "groupMemberYouLeft": "<b>آپ</b> نے گروپ چھوڑ دیا۔",
   "groupMembers": "گروپ کے اراکین",
   "groupMembersNone": "اس گروپ میں کوئی دیگر رکن نہیں ہیں۔",
@@ -382,6 +395,8 @@
   "groupNoMessages": "آپ کے پاس <b>{group_name}</b> سے کوئی پیغام نہیں ہے۔ گفتگو شروع کرنے کے لئے پیغام بھیجیں!",
   "groupOnlyAdmin": "آپ <b>{group_name}</b> میں واحد منتظم ہیں۔<br/><br/>گروپ اراکین اور سیٹنگز ایک منتظم کے بغیر تبدیل نہیں کی جا سکتیں۔",
   "groupPromotedYou": "<b>آپ</b> کو ایڈمن مقرر کیا گیا۔",
+  "groupPromotedYouMultiple": "<b>آپ</b> اور <b>{count} دیگر</b> کو ایڈمن مقرر کیا گیا۔",
+  "groupPromotedYouTwo": "<b>آپ</b> اور <b>{name}</b> کو ایڈمن مقرر کیا گیا۔",
   "groupRemoveDescription": "کیا آپ <b>{group_name}</b> سے <b>{name}</b> کو ہٹانا چاہتے ہیں؟",
   "groupRemoveDescriptionMultiple": "کیا آپ<b>{group_name}</b>سے <b>{name}</b> اور <b>{count} دیگر</b> کو ہٹانا چاہتے ہیں؟",
   "groupRemoveDescriptionTwo": "کیا آپ <b>{group_name}</b> سے <b>{name}</b> اور <b>{other_name}</b> کو ہٹانا چاہتے ہیں؟",
@@ -415,6 +430,7 @@
   "leave": "چھوڑ دیں",
   "leaving": "چھوڑ رہے ہیں...",
   "legacyGroupMemberNewMultiple": "<b>{name}</b> اور <b>{count} دیگر</b> نے گروپ میں شمولیت اختیار کی۔",
+  "legacyGroupMemberNewYouMultiple": "<b>آپ</b> اور <b>{count} دیگر</b> نے گروپ میں شمولیت اختیار کی۔",
   "legacyGroupMemberTwoNew": "<b>{name}</b> اور <b>{other_name}</b> نے گروپ میں شمولیت اختیار کی۔",
   "linkPreviews": "لنک پریویوز",
   "linkPreviewsDescription": "مستند URLs کے لیے لنک پریویوز دکھائیں۔",
@@ -508,6 +524,8 @@
   "notificationsFastModeDescription": "آپ کو نئے پیغامات کی Google کے نوٹیفیکیشن سرورز کے ذریعے بلا تاخیر اور مستند طریقے سے اطلاع ہو گی۔",
   "notificationsFastModeDescriptionIos": "آپ کو نئے پیغامات کی Apple کے نوٹیفیکیشن سرورز کے ذریعے بلا تاخیر اور مستند طریقے سے اطلاع ہو گی۔",
   "notificationsGoToDevice": "ڈیوائس نوٹیفکیشن سیٹنگز پر جائیں",
+  "notificationsHeaderAllMessages": "اطلاعات - سب",
+  "notificationsHeaderMentionsOnly": "صرف تذکرات کے لئے اطلاعات",
   "notificationsIosGroup": "{name} نے {conversation_name} کو",
   "notificationsIosRestart": "جب آپ کا {device} دوبارہ شروع ہو رہا تھا تو آپ کو پیغامات موصول ہو سکتے ہیں۔",
   "notificationsLedColor": "ایل ای ڈی رنگ",
@@ -529,6 +547,7 @@
   "notificationsVibrate": "وائبریٹ",
   "off": "بند",
   "okay": "ٹھیک ہے",
+  "on": "چالو",
   "onboardingAccountCreate": "اکاؤنٹ بنائیں",
   "onboardingAccountCreated": "اکاؤنٹ بنایا گیا",
   "onboardingAccountExists": "میرے پاس ایک اکاؤنٹ ہے",
@@ -570,9 +589,11 @@
   "passwordSet": "پاس ورڈ سیٹ کریں",
   "passwordSetDescription": "آپ کا پاس ورڈ مقرر ہو گیا ہے۔ براہ کرم اسے محفوظ رکھیں۔",
   "paste": "چسپاں کریں",
+  "permissionMusicAudioDenied": "{app_name} کو فائلز، میوزک، اور آڈیو بھیجنے کے لیے میوزک اور آڈیو کی رسائی کی ضرورت ہے، مگر اسے مستقل طور پر انکار کر دیا گیا ہے۔ سیٹنگز پر ٹیپ کریں -> اجازتیں، اور \"موسیقی اور آڈیو\" کو آن کریں۔",
   "permissionsAppleMusic": "{app_name} کو میڈیا اٹیچمنٹ چلانے کے لیے ایپل میوزک کا استعمال کرنا ہوگا۔",
   "permissionsAutoUpdate": "آٹو اپڈیٹ",
   "permissionsAutoUpdateDescription": "شروع میں آٹو اپڈیٹس کے لیے خودکار چیک کریں",
+  "permissionsCameraDenied": "{app_name} کو تصاویر اور ویڈیوز لینے کے لیے کیمرے تک رسائی درکار ہے، لیکن اسے مستقل طور پر مسترد کر دیا گیا ہے۔ براہ کرم ترتیبات -> اجازتیں ٹیپ کریں، اور \"کیمرہ\" کو آن کریں۔",
   "permissionsFaceId": "{app_name} پر سکرین لاک خصوصیت Face ID کا استعمال کرتی ہے۔",
   "permissionsKeepInSystemTray": "سسٹم ٹرے میں رکھیں",
   "permissionsKeepInSystemTrayDescription": "{app_name} پس منظر میں چلتا رہتا ہے جب آپ ونڈو بند کرتے ہیں",
@@ -580,6 +601,7 @@
   "permissionsMicrophone": "مائکروفون",
   "permissionsMicrophoneAccessRequiredDesktop": "آپ {app_name} کی رازداری کی ترتیبات میں مائیکروفون تک رسائی فعال کر سکتے ہیں۔",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} کو کال کرنے اور آڈیو پیغامات ریکارڈ کرنے کے لیے مائیکروفون تک رسائی درکار ہے۔",
+  "permissionsMusicAudio": "{app_name} کو فائلز، موسیقی اور آڈیو بھیجنے کے لیے موسیقی اور آڈیو کی اجازت درکار ہے۔",
   "permissionsRequired": "اجازت درکار ہے",
   "permissionsStorageSave": "{app_name} کو منسلکات اور میڈیا محفوظ کرنے کے لیے اسٹوریج کی اجازت درکار ہے۔",
   "permissionsStorageSaveDenied": "تصاویر اور ویڈیوز کو محفوظ کرنے کے لیے {app_name} کو اسٹوریج تک رسائی درکار ہے، لیکن اسے مستقل طور پر مسترد کر دیا گیا ہے۔ براہ کرم ایپ کی ترتیبات کو جاری رکھیں، \"اجازتیں\" کو منتخب کریں، اور \"اسٹوریج\" کو فعال کریں۔",
@@ -627,6 +649,7 @@
   "recoveryPasswordWarningSendDescription": "یہ آپ کا بازیابی پاس ورڈ ہے۔ اگر آپ اسے کسی کو بھیجتے ہیں تو ان کے پاس آپ کے اکاؤنٹ تک مکمل رسائی ہوگی۔",
   "redo": "دوبارہ کریں",
   "remove": "حذف کریں",
+  "removePasswordFail": "پاس ورڈ ہٹانے میں ناکامی",
   "reply": "جواب",
   "resend": "دوبارہ بھیجیں",
   "resolving": "ملک کی معلومات لوڈ ہو رہی ہے...",
