--- a/_locales/xh/messages.json
+++ b/_locales/xh/messages.json
@@ -92,8 +92,10 @@
   "attachmentsNotification": "{emoji} Isiphumo",
   "attachmentsResolution": "Isisombululo:",
   "attachmentsSaveError": "Akukho kubanakho ukugcinwa kwefayile.",
+  "attachmentsSendTo": "Thumela ku {name}",
   "attachmentsTapToDownload": "Tap to download {file_type}",
   "attachmentsThisMonth": "Eli Nyanga",
+  "attachmentsThisWeek": "Esi Veki",
   "attachmentsWarning": "Izihombiso ogcina zona zinokufikelelwa ngezinye iinkqubo kwi sixhobo sakho.",
   "audio": "Udiyo",
   "audioNoInput": "Akukho kufakwa kweaudiyo okufunyenweyo",
@@ -183,7 +185,6 @@
   "communityInvitation": "Isimemo Soluntu",
   "communityJoin": "Joyina iCommunity",
   "communityJoinDescription": "Uqinisekile ukuba ufuna ukujoyina i {community_name}?",
-  "communityJoinError": "Koyekile ukujoyina {community_name}",
   "communityJoinOfficial": "Okanye joyina elinye lala...",
   "communityJoined": "Ujoyine i Community",
   "communityJoinedAlready": "Uvele ube lilungu lale Community.",
@@ -209,6 +210,7 @@
   "conversationsAddedToHome": "Ikongeze kwiscreen sasekhaya",
   "conversationsAudioMessages": "Imiyalezo ye-Audio",
   "conversationsAutoplayAudioMessage": "Dlala ngokuzenzekelayo imiyalezo eseAudiyo",
+  "conversationsAutoplayAudioMessageDescription": "Dlala ngokuzenzekelayo imiyalezo eseAudiyo ethunyelwe ngokulandelelanayo",
   "conversationsBlockedContacts": "Imiyalezo eVimbileyo",
   "conversationsCommunities": "Uluntu",
   "conversationsDelete": "Sangula Inkqubo",
@@ -359,9 +361,9 @@
   "groupInviteSending": "Ukuthumela isimemo",
   "groupInviteSent": "Umemi uthunyelwe",
   "groupInviteSuccessful": "Isimemo seqela siphumelele",
-  "groupInviteVersion": "Abasebenzisi kufuneka babe ne-version {version} okanye ephezulu ukufumana izimemo",
   "groupInviteYou": "<b>Mna <\\/b> ndimele ukujoyina iqela.",
   "groupLeave": "Shiya iQela",
+  "groupLeaveDescription": "Uqinisekile ukuba ufuna ukufumana <b>{group_name}</b>?",
   "groupLeaveErrorFailed": "Koyekile ukuphuma ku {group_name}",
   "groupLegacyBanner": "Amaqela aphuculwe, yenza iqela elitsha ukuphucula. Umsebenzi weqela elidala uya kunciphisa ukusukela ngomhla we {date}.",
   "groupMemberLeft": "<b>{name} <\\/b> bashiye iqela.",
