--- a/_locales/zh-CN/messages.json
+++ b/_locales/zh-CN/messages.json
@@ -8,6 +8,7 @@
   "accountIdErrorInvalid": "此账号 ID 无效。请检查后重试。",
   "accountIdOrOnsEnter": "输入账户 ID 或 ONS",
   "accountIdOrOnsInvite": "邀请帐号ID或ONS",
+  "accountIdShare": "嗨，我在使用 {app_name} 进行完全隐私和安全的聊天。快来加入我吧！我的帐户 ID 是<br/><br/>{account_id}<br/><br/>，在{session_download_url} 下载这个应用",
   "accountIdYours": "您的账户 ID",
   "accountIdYoursDescription": "这是您的账户 ID。其他用户可以扫描它来与您开始对话。",
   "actualSize": "实际大小",
@@ -29,7 +30,11 @@
   "adminRemoveAsAdmin": "作为管理员移除",
   "adminRemoveCommunityNone": "此社区没有管理员。",
   "adminRemoveFailed": "移除{name}管理员身份失败。",
+  "adminRemoveFailedMultiple": "移除 <b>{name}</b> 和 <b>{count} 余人</b> 管理员身份失败。",
+  "adminRemoveFailedOther": "移除 <b>{name}</b> 和 <b>{other_name}</b> 管理员身份失败。",
   "adminRemovedUser": "<b>{name}</b>被移除了管理员身份。",
+  "adminRemovedUserMultiple": "<b>{name}</b> 和 <b>{count} 余人</b> 被管理员移除。",
+  "adminRemovedUserOther": "<b>{name}</b> 和 <b>{other_name}</b> 的管理身份被移除。",
   "adminSendingPromotion": "管理员权限发送中",
   "adminSettings": "管理员设置",
   "adminTwoPromotedToAdmin": "<b>{name}</b>和<b>{other_name}</b>被设置为管理员。",
@@ -66,6 +71,7 @@
   "attachmentsDownload": "下载附件",
   "attachmentsDuration": "持续时间：",
   "attachmentsErrorLoad": "附加文件错误",
+  "attachmentsErrorMediaSelection": "无法选择附件",
   "attachmentsErrorNoApp": "找不到用于选择媒体的应用。",
   "attachmentsErrorNotSupported": "此文件类型不受支持。",
   "attachmentsErrorNumber": "无法一次发送超过 32 个图片和视频文件。",
@@ -90,6 +96,7 @@
   "attachmentsMoveAndScale": "移动与缩放",
   "attachmentsNa": "N/A",
   "attachmentsNotification": "{emoji}附件",
+  "attachmentsNotificationGroup": "{author}: {emoji} 附件",
   "attachmentsResolution": "分辨率：",
   "attachmentsSaveError": "无法保存文件。",
   "attachmentsSendTo": "发送给 {name}",
@@ -142,10 +149,12 @@
   "callsPermissionsRequiredDescription": "你可以在隐私设置中启用 \"语音和视频通话\" 权限。",
   "callsReconnecting": "重连中...",
   "callsRinging": "响铃中...",
+  "callsSessionCall": "{app_name} 通话",
   "callsSettings": "呼叫 (Beta)",
   "callsVoiceAndVideo": "语音和视频通话",
   "callsVoiceAndVideoBeta": "语音和视频通话(Beta)",
   "callsVoiceAndVideoModalDescription": "在使用Beta通话时，您的 IP 会被您的通话伙伴和 Oxen Foundation 服务器看到。",
+  "callsVoiceAndVideoToggleDescription": "允许来自其它用户的语音和视频通话。",
   "callsYouCalled": "您呼叫了 {name}",
   "callsYouMissedCallPermissions": "您未在隐私设置中启用<b>语音和视频通话</b>，因此错过了来自<b>{name}</b>的通话。",
   "cameraErrorNotFound": "找不到摄像头",
@@ -155,6 +164,7 @@
   "cameraGrantAccessDescription": "{app_name}需要相机权限来拍摄照片和视频，或扫描二维码。",
   "cameraGrantAccessQr": "{app_name}需要摄像头访问权限才能扫描二维码",
   "cancel": "取消",
+  "changePasswordFail": "更改密码失败",
   "clear": "清除",
   "clearAll": "清除所有",
   "clearDataAll": "清除所有数据",
@@ -177,6 +187,9 @@
   "clearMessagesNoteToSelfDescription": "您确定要清除设备备忘录上的所有信息吗？",
   "close": "关闭",
   "closeWindow": "关闭窗口",
+  "commitHashDesktop": "提交哈希值: {hash}",
+  "communityBanDeleteDescription": "这会将选定的用户从此兴趣圈中封禁并删除他们的对话。您确定要继续吗？",
+  "communityBanDescription": "这会将选定的用户从此兴趣圈中封禁。您确定要继续吗？",
   "communityEnterUrl": "输入社区 URL",
   "communityEnterUrlErrorInvalid": "无效链接",
   "communityEnterUrlErrorInvalidDescription": "请检查你输入的链接是否正确，然后重试。",
@@ -185,7 +198,6 @@
   "communityInvitation": "社区邀请",
   "communityJoin": "加入社区",
   "communityJoinDescription": "您确定要加入{community_name}吗？",
-  "communityJoinError": "加入{community_name}失败",
   "communityJoinOfficial": "或加入下列群组…...",
   "communityJoined": "已加入社区",
   "communityJoinedAlready": "您已是这个社区的成员。",
@@ -211,6 +223,7 @@
   "conversationsAddedToHome": "已添加到主屏幕",
   "conversationsAudioMessages": "音频消息",
   "conversationsAutoplayAudioMessage": "自动播放音频消息",
+  "conversationsAutoplayAudioMessageDescription": "自动播放连续音频消息",
   "conversationsBlockedContacts": "已屏蔽的联系人",
   "conversationsCommunities": "社区",
   "conversationsDelete": "删除会话",
@@ -231,6 +244,7 @@
   "conversationsSendWithEnterKeyDescription": "以Enter键发送而非换行",
   "conversationsSettingsAllMedia": "所有媒体",
   "conversationsSpellCheck": "拼写检查",
+  "conversationsSpellCheckDescription": "在输入消息时启用拼写检查。",
   "conversationsStart": "开始对话",
   "copied": "已复制",
   "copy": "复制",
@@ -255,7 +269,12 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Legacy",
   "deleteAfterLegacyDisappearingMessagesOriginal": "原始版本的阅后即焚消息。",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b>将阅后即焚时间设置为<b>{time}</b>",
+  "deleteAfterLegacyGroupsGroupCreation": "正在创建群组，请稍候...",
+  "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "更新群组失败",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "您无权删除他人的对话消息",
+  "deleteMessage": "{count, plural, other [删除消息]}",
   "deleteMessageConfirm": "您确定要删除此消息吗？",
+  "deleteMessageDeleted": "{count, plural, other [消息已删除]}",
   "deleteMessageDeletedGlobally": "此消息已被删除",
   "deleteMessageDeletedLocally": "此消息在此设备上已被删除",
   "deleteMessageDescriptionDevice": "您确定只从此设备删除此消息吗？",
@@ -278,11 +297,14 @@
   "disappearingMessagesDeleteType": "删除类别",
   "disappearingMessagesDescription": "此设置适用于此对话中的所有人。",
   "disappearingMessagesDescription1": "此设置适用于您在此对话中发送的消息。",
+  "disappearingMessagesDescriptionGroup": "此设置适用于此对话中的所有人。<br/>只有群组管理员可以更改此设置。",
   "disappearingMessagesDisappear": "在 {disappearing_messages_type} - {time} 后消失。",
   "disappearingMessagesDisappearAfterRead": "阅读后消失",
   "disappearingMessagesDisappearAfterReadDescription": "被读取后消息将被删除",
+  "disappearingMessagesDisappearAfterReadState": "阅读后消失 - {time}",
   "disappearingMessagesDisappearAfterSend": "发送后消失。",
   "disappearingMessagesDisappearAfterSendDescription": "消息发送后删除消息",
+  "disappearingMessagesDisappearAfterSendState": "发送后消失 - {time}",
   "disappearingMessagesFollowSetting": "跟随设置",
   "disappearingMessagesFollowSettingOff": "您发送的消息将不再消失。您确定要关闭阅后即焚消息吗？",
   "disappearingMessagesFollowSettingOn": "已设置<b>{time}</b>消息在被<b>{disappearing_messages_type}</b>后消失?",
@@ -293,7 +315,9 @@
   "disappearingMessagesSetYou": "已设置{time}消息在被{disappearing_messages_type}后消失",
   "disappearingMessagesTimer": "定时器",
   "disappearingMessagesTurnedOff": "<b>{name}</b> 已关闭阅后即焚功能。它们发送的消息将不会再消失。",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> 已将自动消失信息 <b>关闭</b>.",
   "disappearingMessagesTurnedOffYou": "<b>你</b>关闭了<b>阅后即焚</b>功能。你发送的消息将不再消失。",
+  "disappearingMessagesTurnedOffYouGroup": "<b>你</b> 关闭了 <b>阅后即焚消息</b>。",
   "disappearingMessagesTypeRead": "读",
   "disappearingMessagesTypeSent": "已发送",
   "disappearingMessagesUpdated": "<b>{admin_name}</b>更新了阅后即焚信息设置。",
@@ -326,6 +350,12 @@
   "emojiReactsClearAll": "您确定要清除所有 {emoji} 吗？",
   "emojiReactsCoolDown": "慢点！您已经发送了太多的表情回应。请稍后再试。",
   "emojiReactsCountOthers": "{count, plural, other [还有 # 个其他人对此消息作出了 {emoji} 表态。]}",
+  "emojiReactsHoverNameDesktop": "{name} 使用 {emoji_name} 回应了",
+  "emojiReactsHoverNameTwoDesktop": "{name} 使用 {emoji_name} 回应了 {other_name}",
+  "emojiReactsHoverTwoNameMultipleDesktop": "{name} 和 <span>{count} 余人</span> 使用 {emoji_name} 回应了",
+  "emojiReactsHoverYouNameDesktop": "你使用 {emoji_name} 回应了",
+  "emojiReactsHoverYouNameMultipleDesktop": "你和 <span>{count} 余人</span> 使用 {emoji_name} 回应了",
+  "emojiReactsHoverYouNameTwoDesktop": "你使用 {emoji_name} 回应了 {name}",
   "emojiReactsNotification": "对您的消息作出反应 {emoji}",
   "enable": "启用",
   "errorConnection": "请检查您的网络连接，然后重试。",
@@ -361,15 +391,25 @@
   "groupInviteSending": "发送邀请",
   "groupInviteSent": "邀请已发送",
   "groupInviteSuccessful": "群邀请成功",
-  "groupInviteVersion": "用户必须具备 {version} 版本或更高版本才能接收邀请",
   "groupInviteYou": "<b>你</b>被邀请加入群组。",
+  "groupInviteYouAndMoreNew": "<b>你</b>和<b>{count}名其他成员</b>加入了群组。",
+  "groupInviteYouAndOtherNew": "<b>你</b>和<b>{other_name}</b>加入了群组。",
   "groupLeave": "离开群组",
+  "groupLeaveDescription": "确定要退出<b>{group_name}</b>吗？",
+  "groupLeaveDescriptionAdmin": "您确定要离开 <b>{group_name}</b> 吗？<br/><br/>这将移除所有成员并删除所有组内容。",
   "groupLeaveErrorFailed": "离开{group_name}失败",
   "groupLegacyBanner": "群组已升级，请创建新群组以进行升级。旧群组功能将在 {date} 后降级。",
   "groupMemberLeft": "<b>{name}</b>离开了群组。",
   "groupMemberLeftMultiple": "<b>{name}</b>和<b>{count}其他成员</b>离开了群组。",
   "groupMemberLeftTwo": "<b>{name}</b>和<b>{other_name}</b>离开了群组。",
   "groupMemberNew": "<b>{name}</b>加入了群组。",
+  "groupMemberNewHistory": "<b>{name}</b> 被邀请加入群组。聊天记录已共享。",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b>和<b>{count}其他成员</b> 被邀请加入群组。聊天记录已共享。",
+  "groupMemberNewHistoryTwo": "<b>{name}</b>和<b>{other_name}</b> 被邀请加入群组。聊天记录已共享。",
+  "groupMemberNewMultiple": "<b>{name}</b>和<b>{count}名其他成员</b>被邀请加入群组。",
+  "groupMemberNewTwo": "<b>{name}</b>和<b>{other_name}</b>被邀请加入群组。",
+  "groupMemberNewYouHistoryMultiple": "<b>你</b> 和 <b>{count} 余人</b> 被邀请加入群组。聊天历史会被分享。",
+  "groupMemberNewYouHistoryTwo": "<b>你</b> 和 <b>{name}</b> 被邀请加入群组。 聊天历史会被分享。",
   "groupMemberYouLeft": "<b>你</b>离开了群组。",
   "groupMembers": "群成员",
   "groupMembersNone": "此群组没有其他成员。",
@@ -382,13 +422,19 @@
   "groupNoMessages": "您没有来自 <b>{group_name}</b>的消息。发送一条消息开始对话！",
   "groupOnlyAdmin": "你是 <b>{group_name}</b> 中唯一的管理员。<br/><br/>没有管理员，群组成员和设置不能被更改。",
   "groupPromotedYou": "<b>你</b>被设置为管理员。",
+  "groupPromotedYouMultiple": "<b>你</b>和<b>{count}名其他成员</b>被设置为管理员。",
+  "groupPromotedYouTwo": "<b>你</b>和<b>{name}</b>被设置为管理员。",
   "groupRemoveDescription": "你想将 <b>{name}</b> 从 <b>{group_name}</b> 中移除吗？",
   "groupRemoveDescriptionMultiple": "你想将 <b>{name}</b> 和另外 <b>{count} 人</b> 从 <b>{group_name}</b> 中移除吗？",
   "groupRemoveDescriptionTwo": "你想将 <b>{name}</b> 和 <b>{other_name}</b> 从 <b>{group_name}</b> 中移除吗？",
+  "groupRemoveMessages": "{count, plural, other [移除用户及其消息]}",
+  "groupRemoveUserOnly": "{count, plural, other [移除用户]}",
   "groupRemoved": "<b>{name}</b>已被移出群组。",
   "groupRemovedMultiple": "<b>{name}</b>和<b>{count}其他成员</b>被移出了群组。",
   "groupRemovedTwo": "<b>{name}</b>和<b>{other_name}</b>被移出了群组。",
   "groupRemovedYou": "您被<b>{group_name}</b>移除。",
+  "groupRemovedYouMultiple": "<b>你</b> 和 <b>{count} 余人</b> 被移除群组。",
+  "groupRemovedYouTwo": "<b>你</b> 和 <b>{other_name}</b> 被移除群组。",
   "groupSetDisplayPicture": "设置组群照片",
   "groupUnknown": "未知群组",
   "groupUpdated": "群组已更新",
@@ -403,6 +449,7 @@
   "helpSupport": "支持",
   "helpWedLoveYourFeedback": "感谢您的反馈。",
   "hide": "隐藏",
+  "hideMenuBarDescription": "切换系统菜单栏可见性",
   "hideOthers": "隐藏其它",
   "image": "图片",
   "incognitoKeyboard": "隐身键盘",
@@ -414,8 +461,12 @@
   "learnMore": "了解更多",
   "leave": "离开",
   "leaving": "退出中...",
+  "legacyGroupMemberNew": "<b>{name}</b> 加入了群组",
   "legacyGroupMemberNewMultiple": "<b>{name}</b>和<b>{count}其他成员</b>加入了群组。",
+  "legacyGroupMemberNewYouMultiple": "<b>你</b>和<b>{count} 位其他成员</b>加入了群组。",
+  "legacyGroupMemberNewYouOther": "<b>你</b>和<b>{other_name}</b>加入了群组。",
   "legacyGroupMemberTwoNew": "<b>{name}</b>和<b>{other_name}</b>加入了群组。",
+  "legacyGroupMemberYouNew": "<b>你</b>加入了群组。",
   "linkPreviews": "链接预览",
   "linkPreviewsDescription": "为支持的链接生成预览。",
   "linkPreviewsEnable": "是否启用链接预览",
@@ -444,6 +495,7 @@
   "membersActive": "{count, plural, other [# 名活跃成员]}",
   "membersAddAccountIdOrOns": "添加 Account ID 或 ONS",
   "membersInvite": "邀请好友",
+  "membersInviteSend": "{count, plural, other [发送邀请]}",
   "membersInviteShareDescription": "您想与 <b>{name}</b> 分享群组消息记录吗？",
   "membersInviteShareDescriptionMultiple": "您想与 <b>{name}</b> 和 <b>{count} 人</b> 分享群组消息记录吗？",
   "membersInviteShareDescriptionTwo": "您想与 <b>{name}</b> 和 <b>{other_name}</b> 分享群组消息记录吗？",
@@ -459,6 +511,7 @@
   "messageInfo": "会话信息",
   "messageMarkRead": "标记为已读",
   "messageMarkUnread": "标记为未读",
+  "messageNew": "{count, plural, other [新消息]}",
   "messageNewDescriptionDesktop": "通过输入朋友的账户ID或ONS来开始新的对话。",
   "messageNewDescriptionMobile": "通过输入朋友的账户ID、ONS或扫描他们的二维码来开始新的对话。",
   "messageNewYouveGot": "{count, plural, other [你有 # 条新消息。]}",
@@ -477,6 +530,7 @@
   "messageRequestsNonePending": "没有待处理的消息请求",
   "messageRequestsTurnedOff": "<b>{name}</b> 已关闭来自社区的对话请求，消息发送失败。",
   "messageSelect": "选择消息",
+  "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "发送失败",
   "messageStatusFailedToSync": "同步失败",
   "messageStatusSyncing": "正在同步",
@@ -484,9 +538,12 @@
   "messageVoice": "语音消息",
   "messageVoiceErrorShort": "长按来录制语音消息。",
   "messageVoiceSlideToCancel": "滑动以取消",
+  "messageVoiceSnippet": "{emoji} 语音消息",
+  "messageVoiceSnippetGroup": "{author}: {emoji} 语音消息",
   "messages": "信息",
   "minimize": "最小化",
   "next": "下一步",
+  "nicknameDescription": "为 <b>{name}</b> 选择一个昵称。这将在您的一对一和群组对话中显示。",
   "nicknameEnter": "输入昵称",
   "nicknameRemove": "移除昵称",
   "nicknameSet": "设置昵称",
@@ -508,6 +565,9 @@
   "notificationsFastModeDescription": "新消息将通过 Google 通知服务器即时可靠地发送。",
   "notificationsFastModeDescriptionIos": "您将会收到通过Apple 的通知服务器发出的可靠即时的新消息通知。",
   "notificationsGoToDevice": "转到设备通知设置",
+  "notificationsHeaderAllMessages": "通知 - 所有",
+  "notificationsHeaderMentionsOnly": "Notifications - Mentions Only",
+  "notificationsHeaderMute": "通知 - 已静音",
   "notificationsIosGroup": "{name} 向 {conversation_name} 发送消息",
   "notificationsIosRestart": "您可能在{device}重启时收到了新消息。",
   "notificationsLedColor": "LED颜色",
@@ -529,12 +589,17 @@
   "notificationsVibrate": "振动",
   "off": "关",
   "okay": "确定",
+  "on": "开启",
   "onboardingAccountCreate": "创建账号",
   "onboardingAccountCreated": "账户已创建",
   "onboardingAccountExists": "我已有账号",
+  "onboardingBackAccountCreation": "你无法再返回上一级了。为了取消账号的创建，需要退出 {app_name} 。",
+  "onboardingBackLoadAccount": "你无法再返回上一级了。为了停止加载你的账号，需要退出 {app_name} 。",
+  "onboardingBubbleCreatingAnAccountIsEasy": "创建账户是即时、免费和匿名的 {emoji}",
   "onboardingBubbleNoPhoneNumber": "你甚至不需要电话号码就能注册。",
   "onboardingBubblePrivacyInYourPocket": "隐私在您的口袋中。",
   "onboardingBubbleSessionIsEngineered": "{app_name}旨在保护您的隐私。",
+  "onboardingBubbleWelcomeToSession": "欢迎使用 {app_name} {emoji}",
   "onboardingHitThePlusButton": "点击 \"加号 \"按钮，开始聊天，创建一个群组，或加入一个官方社区!",
   "onboardingMessageNotificationExplanation": "有两种方法 {app_name} 可以通知您新消息。",
   "onboardingPrivacy": "隐私政策",
@@ -558,6 +623,7 @@
   "passwordCurrentIncorrect": "您当前的密码不正确。",
   "passwordDescription": "解锁 {app_name} 需要密码。",
   "passwordEnter": "请输入密码",
+  "passwordEnterCurrent": "请输入您当前的密码",
   "passwordEnterNew": "请输入您的新密码",
   "passwordError": "密码必须只包含字母、数字和符号",
   "passwordErrorLength": "密码长度必须在6到64个字符之间",
@@ -570,9 +636,11 @@
   "passwordSet": "设置密码",
   "passwordSetDescription": "您的密码已经设定。请保管好它。",
   "paste": "粘帖",
+  "permissionMusicAudioDenied": "{app_name}需要音乐和音频权限才能发送文件、音乐和音频，但该权限已被永久拒绝。请进入应用程序设置->权限，打开“音乐和音频”权限。",
   "permissionsAppleMusic": "{app_name}需要使用Apple Music来播放媒体附件。",
   "permissionsAutoUpdate": "自动更新",
   "permissionsAutoUpdateDescription": "启动时自动检查更新",
+  "permissionsCameraDenied": "{app_name}需要相机权限来拍摄照片和视频，但是该权限已被永久拒绝。请点击设置 -> 权限，并启用\"相机\"。",
   "permissionsFaceId": "{app_name} 的屏幕锁功能使用 Face ID。",
   "permissionsKeepInSystemTray": "保留在系统托盘",
   "permissionsKeepInSystemTrayDescription": "{app_name}会在您关闭窗口后继续在后台运行",
@@ -580,7 +648,10 @@
   "permissionsMicrophone": "麦克风",
   "permissionsMicrophoneAccessRequiredDesktop": "你可以在 {app_name} 的隐私设置中启用麦克风访问权限。",
   "permissionsMicrophoneAccessRequiredIos": "{app_name}需要麦克风访问权限来拨打电话和录制语音信息。",
+  "permissionsMicrophoneDescription": "允许访问麦克风。",
+  "permissionsMusicAudio": "{app_name} 需要音乐和音频访问才能发送文件、音乐和音频。",
   "permissionsRequired": "需要相应权限",
+  "permissionsStorageDeniedLegacy": "{app_name} 需要存储权限，以便您可以发送和保存附件。请点击设置 -> 权限，并打开“存储”权限。",
   "permissionsStorageSave": "{app_name}需要存储权限来保存附件和媒体。",
   "permissionsStorageSaveDenied": "{app_name}需要存储权限来保存照片和视频，但是该权限已经被永久拒绝。请进入应用程序设置，点击\"权限\"，并启用\"存储\"。",
   "permissionsStorageSend": "{app_name}需要存储权限以取用及发送照片或视频。",
@@ -613,6 +684,7 @@
   "recoveryPasswordBannerTitle": "保存您的恢复密码",
   "recoveryPasswordDescription": "使用您的恢复密码在新设备上加载您的帐户。<br/><br/>没有您的恢复密码，您的帐户无法恢复。请确保将它存储在安全的地方，并且不要与任何人分享。",
   "recoveryPasswordEnter": "输入你的恢复密码",
+  "recoveryPasswordErrorLoad": "加载恢复密码时出错。<br/><br/>请导出您的日志，然后通过Session服务台上传文件来帮助解决这个问题。",
   "recoveryPasswordErrorMessageGeneric": "请检查您的恢复密码，然后重试。",
   "recoveryPasswordErrorMessageIncorrect": "你的恢复密码中的一些单词不正确。请检查后重试。",
   "recoveryPasswordErrorMessageShort": "您输入的恢复密码长度不够。请检查后重试。",
@@ -622,11 +694,13 @@
   "recoveryPasswordHidePermanentlyDescription1": "没有你的恢复密码，你不能在新设备上加载你的账户。<br/><br/>我们强烈建议你在继续之前将恢复密码保存在一个安全的地方。",
   "recoveryPasswordHidePermanentlyDescription2": "您确定要在此设备上永久隐藏您的恢复密码吗？此操作无法撤消。",
   "recoveryPasswordHideRecoveryPassword": "隐藏恢复密码",
+  "recoveryPasswordHideRecoveryPasswordDescription": "在此设备上永久隐藏您的恢复密码。",
   "recoveryPasswordRestoreDescription": "输入你的恢复密码以加载你的账户。如果你没有保存它，你可以在应用设置中找到。",
   "recoveryPasswordView": "查看密码",
   "recoveryPasswordWarningSendDescription": "这是您的恢复密码。如果您发送给某人，他们将能够完全访问您的账户。",
   "redo": "重做",
   "remove": "移除",
+  "removePasswordFail": "移除密码失败",
   "reply": "回复",
   "resend": "重新发送",
   "resolving": "正在读取国家列表...",
@@ -646,6 +720,7 @@
   "searchContacts": "搜索联系人",
   "searchConversation": "搜索对话",
   "searchEnter": "请输入您的搜索词。",
+  "searchMatches": "{count, plural, other [{found_count} 个匹配项，共# 个结果]}",
   "searchMatchesNone": "找不到结果.",
   "searchMatchesNoneSpecific": "没有找到“{query}”的相关结果。",
   "searchMembers": "搜索成员",
@@ -669,24 +744,29 @@
   "set": "会话设置",
   "settingsRestartDescription": "您必须重新启动{app_name}以应用您的新设置。",
   "share": "分享",
+  "shareAccountIdDescription": "通过与好友共享你的账号ID来邀请他们与你在{app_name} 上聊天",
   "shareAccountIdDescriptionCopied": "与您的朋友分享您通常与他们交谈的地方——然后将对话移动到这里。",
   "shareExtensionDatabaseError": "打开数据库时出现问题。请重新启动应用程序并重试。",
+  "shareToSession": "分享到 {app_name}",
   "show": "显示",
   "showAll": "全部显示",
   "showLess": "展示更少",
   "stickers": "表情",
   "supportGoTo": "前往支持页面",
+  "systemInformationDesktop": "系统信息：{information}",
   "theContinue": "继续",
   "theDefault": "默认",
   "theError": "错误",
   "tryAgain": "重试",
   "typingIndicators": "“正在输入”提示",
+  "typingIndicatorsDescription": "查看并分享“正在输入”提示.",
   "undo": "撤销",
   "unknown": "未知",
   "updateApp": "应用更新",
   "updateDownloaded": "更新已安装，请点击重启",
   "updateDownloading": "正在下载更新：{percent_loader}%",
   "updateError": "无法更新",
+  "updateErrorDescription": "{app_name} 更新失败。请返回{session_download_url} 并手动安装新版本，然后联系帮助中心反馈此问题",
   "updateNewVersion": "有新版本的{app_name}可用，点击更新",
   "updateNewVersionDescription": "有新版本的{app_name}可用。",
   "updateReleaseNotes": "前往发布说明",
@@ -696,6 +776,7 @@
   "urlCopy": "复制链接",
   "urlOpen": "打开链接",
   "urlOpenBrowser": "这将在您的浏览器中打开。",
+  "urlOpenDescription": "您确定要在您的浏览器中打开此 URL 吗？<br/><br/><b>{url}</b>",
   "useFastMode": "使用快速模式",
   "video": "视频",
   "videoErrorPlay": "无法播放视频。",
