--- a/_locales/zh-TW/messages.json
+++ b/_locales/zh-TW/messages.json
@@ -155,6 +155,7 @@
   "cameraGrantAccessDescription": "{app_name} 需要使用相機來拍攝照片和影片，或掃描 QR 圖碼。",
   "cameraGrantAccessQr": "{app_name} 需要相機存取權來掃描 QR 圖碼",
   "cancel": "取消",
+  "changePasswordFail": "更改密碼失敗",
   "clear": "清除",
   "clearAll": "清除全部",
   "clearDataAll": "清除所有資料",
@@ -185,7 +186,6 @@
   "communityInvitation": "社群邀請",
   "communityJoin": "加入社群",
   "communityJoinDescription": "您確定要加入 {community_name} 嗎？",
-  "communityJoinError": "未能加入 {community_name}",
   "communityJoinOfficial": "或加入這些...",
   "communityJoined": "已加入社群",
   "communityJoinedAlready": "您已經是此 Community 的成員。",
@@ -211,6 +211,7 @@
   "conversationsAddedToHome": "已新增至主畫面",
   "conversationsAudioMessages": "語音訊息",
   "conversationsAutoplayAudioMessage": "自動播放語音訊息",
+  "conversationsAutoplayAudioMessageDescription": "自動播放連續發送的音訊訊息",
   "conversationsBlockedContacts": "已封鎖的聯絡人",
   "conversationsCommunities": "社群",
   "conversationsDelete": "刪除對話",
@@ -255,6 +256,7 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Legacy",
   "deleteAfterLegacyDisappearingMessagesOriginal": "原始版本的自動銷毀訊息。",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name} <\\/b> 已將訊息銷毀時間設為 <b>{time} <\\/b>",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "您無權刪除他人訊息",
   "deleteMessageConfirm": "您確定要刪除此消息嗎？",
   "deleteMessageDeletedGlobally": "這則訊息已經刪除",
   "deleteMessageDeletedLocally": "此段訊息經已刪除",
@@ -278,10 +280,13 @@
   "disappearingMessagesDeleteType": "刪除類型",
   "disappearingMessagesDescription": "這個設置適用於對話中的所有人。",
   "disappearingMessagesDescription1": "這個設置適用於你在對話中發送的訊息。",
+  "disappearingMessagesDescriptionGroup": "此設定適用於此對話中的所有人。<br/>僅小組管理員可更改此設定。",
   "disappearingMessagesDisappearAfterRead": "閱後銷毀",
   "disappearingMessagesDisappearAfterReadDescription": "訊息讀後即焚。",
+  "disappearingMessagesDisappearAfterReadState": "閱後銷毀 - {time}",
   "disappearingMessagesDisappearAfterSend": "發送後銷毀",
   "disappearingMessagesDisappearAfterSendDescription": "訊息在發送後將被刪除。",
+  "disappearingMessagesDisappearAfterSendState": "發送後銷毀 - {time}",
   "disappearingMessagesFollowSetting": "跟隨設置",
   "disappearingMessagesFollowSettingOff": "您發送的訊息將不再消失。確定要<b>關閉</b> 消失訊息嗎？",
   "disappearingMessagesFollowSettingOn": "要將訊息設定為 <b>{time}</b>消失, <b>{disappearing_messages_type}</b>？",
@@ -291,6 +296,7 @@
   "disappearingMessagesTimer": "計時器",
   "disappearingMessagesTurnedOff": "<b>{name} <\\/b> 已關閉訊息讀後焚毀功能。 他们发送的讯息将不再消失。",
   "disappearingMessagesTurnedOffYou": "<b>你 <\\/b> 關閉訊息讀後焚毀功能。 你发送的訊息将不再消失。",
+  "disappearingMessagesTurnedOffYouGroup": "<b>你</b> 已關閉<b>閱後即焚</b>信息。",
   "disappearingMessagesTypeRead": "已讀",
   "disappearingMessagesTypeSent": "已傳送",
   "disappearingMessagesUpdated": "<b>{admin_name} <\\/b> 更新了消失訊息的設定。",
@@ -358,15 +364,19 @@
   "groupInviteSending": "傳送邀請",
   "groupInviteSent": "邀請已發送",
   "groupInviteSuccessful": "群組邀請成功",
-  "groupInviteVersion": "用戶必須版本 {version} 或更高版本才能接收邀請",
   "groupInviteYou": "<b>你 <\\/b> 被邀請加入群組。",
+  "groupInviteYouAndMoreNew": "<b>您</b> 和 <b>{count} 位其他成員</b> 加入了群組。",
+  "groupInviteYouAndOtherNew": "<b>您</b> 和 <b>{other_name}</b> 加入了群組。",
   "groupLeave": "離開群組",
+  "groupLeaveDescription": "您確定要離開 {group_name} 嗎？",
   "groupLeaveErrorFailed": "未能退出 {group_name}",
   "groupLegacyBanner": "群組已升級，創建一個新群組以進行升級。舊群組的功能將從 {date} 開始降級。",
   "groupMemberLeft": "<b>{name} <\\/b> 離開此群組。",
   "groupMemberLeftMultiple": "<b>{name}<\\/b> 和 <b>{count} 位其他成員<\\/b> 離開了群組。",
   "groupMemberLeftTwo": "<b>{name} <\\/b> 和 <b>{other_name} <\\/b> 離開此群組。",
   "groupMemberNew": "<b>{name} <\\/b> 加入了群組。",
+  "groupMemberNewMultiple": "<b>{name} <\\/b> 和 <b>{count} 位其他成員 <\\/b> 已被邀請加入群組。",
+  "groupMemberNewTwo": "<b>{name}</b> 和 <b>{other_name}</b> 被邀請加入群組。",
   "groupMemberYouLeft": "<b>你</b>離開了此群組。",
   "groupMembers": "群組成員",
   "groupMembersNone": "這個群組沒有其他成員。",
@@ -379,6 +389,8 @@
   "groupNoMessages": "您沒有來自 <b>{group_name}</b> 的訊息。發送訊息以開始對話！",
   "groupOnlyAdmin": "您是 <b>{group_name}</b> 中唯一的 admin。<br/><br/>沒有 admin，無法更改群組成員和設定。",
   "groupPromotedYou": "<b>你 <\\/b> 被提拔為管理員。",
+  "groupPromotedYouMultiple": "<b>您</b> 和 <b>{count} 位其他成員</b> 被升為管理員。",
+  "groupPromotedYouTwo": "<b>您</b> 和 <b>{name}</b> 被提拔為管理員。",
   "groupRemoveDescription": "您是否想要從 <b>{group_name}</b> 中移除 <b>{name}</b>？",
   "groupRemoveDescriptionMultiple": "您是否想要從 <b>{group_name}</b> 中移除 <b>{name}</b> 和 <b>{count} 名其他成員</b>？",
   "groupRemoveDescriptionTwo": "您是否想要從 <b>{group_name}</b> 中移除 <b>{name}</b> 和 <b>{other_name}</b>？",
@@ -412,6 +424,7 @@
   "leave": "離開",
   "leaving": "離開中…",
   "legacyGroupMemberNewMultiple": "<b>{name}<\\/b> 和 <b>{count} 位其他成員<\\/b> 加入了群組。",
+  "legacyGroupMemberNewYouMultiple": "<b>您</b> 和 <b>{count} 位其他成員</b> 加入了群組。",
   "legacyGroupMemberTwoNew": "<b>{name} <\\/b> 和 <b>{other_name} <\\/b> 加入了群組。",
   "linkPreviews": "連結預覽",
   "linkPreviewsDescription": "為支援的網址顯示連結預覽。",
@@ -504,6 +517,8 @@
   "notificationsFastModeDescription": "您將會透過 Google 的通知服務可靠且迅速的收到通知。",
   "notificationsFastModeDescriptionIos": "您將會透過 Apple 的通知服務可靠且迅速的收到通知。",
   "notificationsGoToDevice": "打開設備通知設定",
+  "notificationsHeaderAllMessages": "通知 - 全部",
+  "notificationsHeaderMentionsOnly": "通知 - 僅提及",
   "notificationsIosGroup": "{name} 至 {conversation_name}",
   "notificationsIosRestart": "在您的設備 {device} 重新啟動時接收到了訊息。",
   "notificationsLedColor": "LED 顏色",
@@ -525,6 +540,7 @@
   "notificationsVibrate": "震動",
   "off": "關閉",
   "okay": "好的",
+  "on": "開",
   "onboardingAccountCreate": "建立帳號",
   "onboardingAccountCreated": "帳號已建立",
   "onboardingAccountExists": "我已有帳戶",
@@ -566,9 +582,11 @@
   "passwordSet": "設定密碼",
   "passwordSetDescription": "您的密碼設定完成。請保持安全。",
   "paste": "貼上",
+  "permissionMusicAudioDenied": "{app_name} 需要音樂和音頻存取權限才能傳送檔案、音樂和音頻，但已被永久拒絕。點擊設置 -> 權限，並打開「音樂和音頻」。",
   "permissionsAppleMusic": "{app_name} 需要使用 Apple Music 來播放媒體附件。",
   "permissionsAutoUpdate": "自動更新",
   "permissionsAutoUpdateDescription": "啟動時自動檢查更新",
+  "permissionsCameraDenied": "{app_name} 需要相機的權限來拍攝照片或是影片，但它已被永久拒絕。請到設定 -> 權限中，開啟「相機」權限。",
   "permissionsFaceId": "{app_name} 上的螢幕鎖功能使用 Face ID。",
   "permissionsKeepInSystemTray": "保持在系統的通知區域",
   "permissionsKeepInSystemTrayDescription": "當您關閉視窗之後，{app_name} 會繼續在系統背景執行",
@@ -576,6 +594,7 @@
   "permissionsMicrophone": "麥克風",
   "permissionsMicrophoneAccessRequiredDesktop": "您可以在 {app_name} 的隱私權設定中啟用麥克風存取權。",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} 需要麥克風存取權來撥打電話和錄製語音訊息。",
+  "permissionsMusicAudio": "{app_name} 需要音樂和音訊訪問權限，才能夠發送檔案、音樂和音訊。",
   "permissionsRequired": "需要權限",
   "permissionsStorageSave": "{app_name} 需要存儲空間存取權以保存附件和媒體。",
   "permissionsStorageSaveDenied": "{app_name} 需要存儲空間存取權來保存照片和視頻，但它已被永久拒絕。請到應用程式設定中，選取「權限」，並啟用「存儲」。",
@@ -623,6 +642,7 @@
   "recoveryPasswordWarningSendDescription": "這是你的復原片語。獲得這段復原片語的任何人都可以全權存取你的帳戶。",
   "redo": "重做",
   "remove": "移除",
+  "removePasswordFail": "無法移除密碼",
   "reply": "回覆",
   "resend": "重新傳送",
   "resolving": "Loading country information...",
