--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -155,6 +155,7 @@
   "cameraGrantAccessDescription": "Το {app_name} χρειάζεται πρόσβαση στην κάμερα για λήψη φωτογραφιών και βίντεο ή για σάρωση κωδικών QR.",
   "cameraGrantAccessQr": "Το {app_name} χρειάζεται πρόσβαση στην κάμερα για σάρωση κωδικών QR",
   "cancel": "Ακύρωση",
+  "changePasswordFail": "Αποτυχία αλλαγής κωδικού πρόσβασης",
   "clear": "Διαγραφή",
   "clearAll": "Διαγραφή Όλων",
   "clearDataAll": "Διαγραφή Όλων των Δεδομένων",
@@ -184,7 +185,6 @@
   "communityInvitation": "Πρόσκληση σε κοινότητα",
   "communityJoin": "Γίνετε μέλος της Κοινότητας",
   "communityJoinDescription": "Σίγουρα θέλετε να γίνετε μέλος στην κοινότητα {community_name};",
-  "communityJoinError": "Αποτυχία συμμετοχής στο {community_name}",
   "communityJoinOfficial": "Ή γίνετε μέλος σε ένα από αυτά...",
   "communityJoined": "Έγγραφα Κοινότητας",
   "communityJoinedAlready": "Είστε ήδη μέλος αυτής της community.",
@@ -210,6 +210,7 @@
   "conversationsAddedToHome": "Προστέθηκε στην αρχική οθόνη",
   "conversationsAudioMessages": "Ηχητικά Μηνύματα",
   "conversationsAutoplayAudioMessage": "Αυτόματη Αναπαραγωγή Ηχητικών Μηνυμάτων",
+  "conversationsAutoplayAudioMessageDescription": "Αυτόματη αναπαραγωγή διαδοχικών ηχητικών μηνυμάτων",
   "conversationsBlockedContacts": "Επαφές σε Φραγή",
   "conversationsCommunities": "Communities",
   "conversationsDelete": "Διαγραφή Συνομιλίας",
@@ -254,6 +255,7 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "Legacy",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Αρχική έκδοση των μηνυμάτων που εξαφανίζονται.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> όρισε το χρονοδιακόπτη των εξαφανιζόμενων μηνυμάτων σε <b>{time}</b>",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Δεν έχετε άδεια να διαγράψετε τα μηνύματα άλλων",
   "deleteMessageConfirm": "Σίγουρα θέλετε να διαγράψετε αυτό το μήνυμα;",
   "deleteMessageDeletedGlobally": "Αυτό το μήνυμα έχει διαγραφεί",
   "deleteMessageDeletedLocally": "Αυτό το μήνυμα έχει διαγραφεί σε αυτή τη συσκευή",
@@ -262,7 +264,6 @@
   "deleteMessageDeviceOnly": "Διαγραφή μόνο σε αυτή τη συσκευή",
   "deleteMessageDevicesAll": "Διαγραφή από όλες τις συσκευές μου",
   "deleteMessageEveryone": "Διαγραφή για όλους",
-  "deleteMessageFailed": "{count, plural, one [Τα δεδομένα δε διαγράφηκαν από # Service Node. ID Service Node: {service_node_id}.] other [Τα δεδομένα δε διαγράφηκαν από # Service Nodes. ID Service Nodes: {service_node_id}.]}",
   "deleteMessagesConfirm": "Σίγουρα θέλετε να διαγράψετε αυτά τα μηνύματα;",
   "deleteMessagesDescriptionDevice": "Σίγουρα θέλετε να διαγράψετε αυτά τα μηνύματα μόνο από αυτή τη συσκευή;",
   "deleteMessagesDescriptionEveryone": "Σίγουρα θέλετε να διαγράψετε αυτά τα μηνύματα για όλους;",
@@ -277,11 +278,14 @@
   "disappearingMessagesDeleteType": "Τύπος Διαγραφής",
   "disappearingMessagesDescription": "Αυτή η ρύθμιση ισχύει για όλους σε αυτή τη συνομιλία.",
   "disappearingMessagesDescription1": "Αυτή η ρύθμιση ισχύει για τα μηνύματα που στέλνετε σε αυτή τη συνομιλία.",
+  "disappearingMessagesDescriptionGroup": "Αυτή η ρύθμιση ισχύει για όλους σε αυτή τη συνομιλία.<br/>Μόνο οι διαχειριστές της ομάδας μπορούν να αλλάξουν αυτή τη ρύθμιση.",
   "disappearingMessagesDisappear": "Εξαφάνιση Μετά Από {disappearing_messages_type} - {time}",
   "disappearingMessagesDisappearAfterRead": "Εξαφάνιση Μετά από Ανάγνωση",
   "disappearingMessagesDisappearAfterReadDescription": "Τα μηνύματα διαγράφονται αφού έχουν αναγνωσθεί.",
+  "disappearingMessagesDisappearAfterReadState": "Εξαφάνιση Μετά από Ανάγνωση - {time}",
   "disappearingMessagesDisappearAfterSend": "Εξαφάνιση Μετά από Αποστολή",
   "disappearingMessagesDisappearAfterSendDescription": "Τα μηνύματα διαγράφονται αφού έχουν αποσταλεί.",
+  "disappearingMessagesDisappearAfterSendState": "Εξαφάνιση Μετά από Αποστολή - {time}",
   "disappearingMessagesFollowSetting": "Ακολούθηση Ρύθμισης",
   "disappearingMessagesFollowSettingOff": "Τα μηνύματα που στέλνετε δεν θα εξαφανίζονται πλέον. Είστε βέβαιοι ότι θέλετε να απενεργοποιήσετε τα εξαφανιζόμενα μηνύματα;",
   "disappearingMessagesFollowSettingOn": "Ορίστε τα μηνύματά σας να εξαφανίζονται <b>{time}‌</b> αφότου έχουν <b>{disappearing_messages_type}‌</b>;",
@@ -293,6 +297,7 @@
   "disappearingMessagesTimer": "Χρονόμετρο",
   "disappearingMessagesTurnedOff": "<b>{name}</b> απενεργοποίησε τα εξαφανιζόμενα μηνύματα. Τα μηνύματα που θα στείλει δε θα εξαφανίζονται πλέον.",
   "disappearingMessagesTurnedOffYou": "<b>Εσείς</b> απενεργοποιήσατε τα εξαφανιζόμενα μηνύματα. Τα μηνύματα που θα στείλετε δε θα εξαφανίζονται πλέον.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Εσείς</b> απενεργοποιήσατε τα <b>εξαφανιζόμενα μηνύματα</b>.",
   "disappearingMessagesTypeRead": "ανάγνωση",
   "disappearingMessagesTypeSent": "στάλθηκε",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> ενημέρωσε τις ρυθμίσεις των εξαφανιζόμενων μηνυμάτων.",
@@ -359,15 +364,24 @@
   "groupInviteSending": "Γίνεται αποστολή πρόσκλησης",
   "groupInviteSent": "Η πρόσκληση στάλθηκε",
   "groupInviteSuccessful": "Η πρόσκληση στην ομάδα ήταν επιτυχής",
-  "groupInviteVersion": "Οι χρήστες πρέπει να έχουν την έκδοση {version} ή νεότερη για να λάβουν προσκλήσεις",
   "groupInviteYou": "<b>Εσείς</b> προσκληθήκατε να συμμετάσχετε στην ομάδα.",
+  "groupInviteYouAndMoreNew": "<b>Εσύ</b> και <b>{count} ακόμη</b> συμμετείχατε στην ομάδα.",
+  "groupInviteYouAndOtherNew": "<b>Εσύ</b> και <b>{other_name}</b> συμμετείχατε στην ομάδα.",
   "groupLeave": "Αποχώρηση από την ομάδα",
+  "groupLeaveDescription": "Σίγουρα θέλετε να αποχωρήσετε από την ομάδα {group_name};",
   "groupLeaveErrorFailed": "Αποτυχία αποχώρησης από το {group_name}",
   "groupLegacyBanner": "Οι ομάδες έχουν αναβαθμιστεί, δημιουργήστε μια νέα ομάδα για αναβάθμιση. Η παλαιά λειτουργία ομάδας θα υποβαθμιστεί από {date}.",
   "groupMemberLeft": "<b>{name}</b> αποχώρησε από την ομάδα.",
   "groupMemberLeftMultiple": "<b>{name} και άλλοι {count}</b> αποχώρησαν από την ομάδα.",
   "groupMemberLeftTwo": "<b>{name} και {other_name}</b> αποχώρησαν από την ομάδα.",
   "groupMemberNew": "<b>{name}</b> συμμετείχε στην ομάδα.",
+  "groupMemberNewHistory": "<b>{name}</b> προσκλήθηκε να συμμετάσχει στην ομάδα. Το ιστορικό συνομιλιών κοινοποιήθηκε.",
+  "groupMemberNewHistoryMultiple": "<b>{name} και άλλοι {count}</b> προσκλήθηκαν να συμμετάσχουν στην ομάδα. Το ιστορικό συνομιλιών κοινοποιήθηκε.",
+  "groupMemberNewHistoryTwo": "<b>{name} και {other_name}</b> προσκλήθηκαν να συμμετάσχουν στην ομάδα. Το ιστορικό συνομιλιών κοινοποιήθηκε.",
+  "groupMemberNewMultiple": "<b>{name}</b> και <b>{count} άλλοι</b> προσκλήθηκαν να εγγραφούν στην ομάδα.",
+  "groupMemberNewTwo": "<b>{name}</b> και <b>{other_name}</b> προσκλήθηκαν να συμμετάσχουν στην ομάδα.",
+  "groupMemberNewYouHistoryMultiple": "<b>Εσείς</b> και <b>{count} άλλοι</b> προσκληθήκατε να συμμετάσχετε στην ομάδα. Το ιστορικό συνομιλίας κοινοποιήθηκε.",
+  "groupMemberNewYouHistoryTwo": "<b>Εσείς</b> και <b>{name}</b> προσκληθήκατε να συμμετάσχετε στην ομάδα. Το ιστορικό συνομιλίας κοινοποιήθηκε.",
   "groupMemberYouLeft": "<b>Εσείς</b> αποχωρήσατε από την ομάδα.",
   "groupMembers": "Μέλη Ομάδας",
   "groupMembersNone": "Δεν υπάρχουν άλλα μέλη σε αυτήν την ομάδα.",
@@ -380,6 +394,8 @@
   "groupNoMessages": "Δεν έχετε μηνύματα από <b>{group_name}</b>. Στείλτε ένα μήνυμα για να ξεκινήσετε τη συζήτηση!",
   "groupOnlyAdmin": "Είστε ο μόνος διαχειριστής στην <b>{group_name}</b>.<br/><br/>Τα μέλη και οι ρυθμίσεις της ομάδας δεν μπορούν να αλλάξουν χωρίς διαχειριστή.",
   "groupPromotedYou": "<b>Εσείς</b> γίνατε Διαχειριστές.",
+  "groupPromotedYouMultiple": "<b>Εσείς</b> και <b>{count} άλλοι</b> γίνατε Διαχειριστές.",
+  "groupPromotedYouTwo": "<b>Εσείς</b> και <b>{name}</b> γίνατε Διαχειριστές.",
   "groupRemoveDescription": "Θα θέλατε να αφαιρέσετε τον/την <b>{name}</b> από την <b>{group_name}</b>;",
   "groupRemoveDescriptionMultiple": "Θα θέλατε να αφαιρέσετε τον/την <b>{name}</b> και άλλους <b>{count}</b> από την <b>{group_name}</b>;",
   "groupRemoveDescriptionTwo": "Θα θέλατε να αφαιρέσετε τον/την <b>{name}</b> και τον/την <b>{other_name}</b> από την <b>{group_name}</b>;",
@@ -387,6 +403,7 @@
   "groupRemovedMultiple": "<b>{name} και άλλοι {count}</b> αφαιρέθηκαν από την ομάδα.",
   "groupRemovedTwo": "<b>{name} και {other_name}</b> αφαιρέθηκαν από την ομάδα.",
   "groupRemovedYou": "Έχετε αφαιρεθεί από <b>{group_name}</b>.",
+  "groupRemovedYouTwo": "<b>Εσείς</b> και <b>{other_name}</b> αφαιρέθηκαν από την ομάδα.",
   "groupSetDisplayPicture": "Ορισμός Εικόνας Ομάδας",
   "groupUnknown": "Άγνωστη Ομάδα",
   "groupUpdated": "Η ομάδα ενημερώθηκε",
@@ -413,6 +430,7 @@
   "leave": "Αποχώρηση",
   "leaving": "Αποχώρηση...",
   "legacyGroupMemberNewMultiple": "<b>{name} και άλλοι {count}</b> συμμετείχαν στην ομάδα.",
+  "legacyGroupMemberNewYouMultiple": "<b>Εσείς</b> και <b>{count} άλλοι</b> προσκληθήκατε να συμμετάσχετε στην ομάδα.",
   "legacyGroupMemberTwoNew": "<b>{name} και {other_name}</b> συμμετείχαν στην ομάδα.",
   "linkPreviews": "Προεπισκοπήσεις Συνδέσμου",
   "linkPreviewsDescription": "Δημιουργία προεπισκοπήσεων συνδέσμου για υποστηριζόμενα URL.",
@@ -504,6 +522,8 @@
   "notificationsFastModeDescription": "Θα ειδοποιηθείτε για νέα μηνύματα αξιόπιστα και άμεσα χρησιμοποιώντας τους διακομιστές ειδοποιήσεων της Google.",
   "notificationsFastModeDescriptionIos": "Θα ειδοποιηθείτε για νέα μηνύματα αξιόπιστα και άμεσα χρησιμοποιώντας τους διακομιστές ειδοποιήσεων της Apple.",
   "notificationsGoToDevice": "Μεταβείτε στις ρυθμίσεις ειδοποιήσεων της συσκευής",
+  "notificationsHeaderAllMessages": "Ειδοποιήσεις - Όλα",
+  "notificationsHeaderMentionsOnly": "Ειδοποιήσεις - Μόνο για Αναφορές",
   "notificationsIosGroup": "{name} σε {conversation_name}",
   "notificationsIosRestart": "Μπορεί να έχετε λάβει μηνύματα κατά την επανεκκίνηση του {device}.",
   "notificationsLedColor": "Χρώμα του LED",
@@ -525,6 +545,7 @@
   "notificationsVibrate": "Δόνηση",
   "off": "Απενεργοποιημένο",
   "okay": "Εντάξει",
+  "on": "Ενεργοποιημένο",
   "onboardingAccountCreate": "Δημιουργία λογαριασμού",
   "onboardingAccountCreated": "Ο Λογαριασμός Δημιουργήθηκε",
   "onboardingAccountExists": "Έχω λογαριασμό",
@@ -566,9 +587,11 @@
   "passwordSet": "Ορισμός Κωδικού Πρόσβασης",
   "passwordSetDescription": "Ο κωδικός πρόσβασής σας έχει οριστεί. Παρακαλώ κρατήστε τον ασφαλή.",
   "paste": "Επικόλληση",
+  "permissionMusicAudioDenied": "{app_name} χρειάζεται πρόσβαση στη μουσική και τον ήχο για να στείλει αρχεία, μουσική και ήχο, αλλά η πρόσβαση έχει απορριφθεί μόνιμα. Πατήστε Ρυθμίσεις −> Δικαιώματα, και ενεργοποιήστε το \"Μουσική και ήχος\".",
   "permissionsAppleMusic": "Το {app_name} χρειάζεται πρόσβαση στο Apple Music για αναπαραγωγή συνημμένων πολυμέσων.",
   "permissionsAutoUpdate": "Αυτόματη Ενημέρωση",
   "permissionsAutoUpdateDescription": "Αυτόματος έλεγχος για ενημερώσεις κατά την εκκίνηση",
+  "permissionsCameraDenied": "Το {app_name} χρειάζεται πρόσβαση στην κάμερα για τη λήψη φωτογραφιών και βίντεο, αλλά έχει απορριφθεί μόνιμα. Πατήστε Ρυθμίσεις -> Άδειες, και ενεργοποιήστε την \"Κάμερα\".",
   "permissionsFaceId": "Η λειτουργία κλειδώματος οθόνης στο {app_name} χρησιμοποιεί το Face ID.",
   "permissionsKeepInSystemTray": "Διατήρηση στην Περιοχή Ειδοποιήσεων",
   "permissionsKeepInSystemTrayDescription": "Το {app_name} συνεχίζει να εκτελείται στο παρασκήνιο όταν κλείνετε το παράθυρο",
@@ -576,6 +599,7 @@
   "permissionsMicrophone": "Μικρόφωνο",
   "permissionsMicrophoneAccessRequiredDesktop": "Μπορείτε να ενεργοποιήσετε την πρόσβαση στο μικρόφωνο στις ρυθμίσεις απορρήτου του {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "Το {app_name} χρειάζεται πρόσβαση στο μικρόφωνο για την αποστολή ηχητικών μηνυμάτων.",
+  "permissionsMusicAudio": "{app_name} χρειάζεται πρόσβαση στη μουσική και τον ήχο για να στείλει αρχεία, μουσική και ήχο.",
   "permissionsRequired": "Απαιτείται Άδεια",
   "permissionsStorageSave": "Το {app_name} χρειάζεται πρόσβαση στον αποθηκευτικό χώρο για να αποθηκεύσει συνημμένα και πολυμέσα.",
   "permissionsStorageSaveDenied": "Το {app_name} χρειάζεται πρόσβαση στον αποθηκευτικό χώρο για την αποθήκευση φωτογραφιών και βίντεο, αλλά έχει απορριφθεί μόνιμα. Παρακαλώ μεταβείτε στις ρυθμίσεις της εφαρμογής, επιλέξτε «Άδειες», και ενεργοποιήστε το «Αποθηκευτικός χώρος».",
@@ -623,6 +647,7 @@
   "recoveryPasswordWarningSendDescription": "Αυτός είναι ο κωδικός ανάκτησής σας. Αν τον στείλετε σε κάποιον, θα έχει πλήρη πρόσβαση στον λογαριασμό σας.",
   "redo": "Επανάληψη",
   "remove": "Αφαίρεση",
+  "removePasswordFail": "Αποτυχία κατάργησης κωδικού πρόσβασης",
   "reply": "Απάντηση",
   "resend": "Επαναποστολή",
   "resolving": "Γίνεται φόρτωση χωρών...",
