--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -29,7 +29,10 @@
   "adminRemoveAsAdmin": "관리자에서 제거",
   "adminRemoveCommunityNone": "이 커뮤니티에 관리자가 없습니다.",
   "adminRemoveFailed": "{name}님을 관리자로 제거하지 못했습니다.",
+  "adminRemoveFailedMultiple": "{name} 님과 {count} 명의 사람들의 관리자 직책을 제거하지 못했습니다.",
   "adminRemovedUser": "<b>{name}님</b>이 관리자에서 제거되었습니다.",
+  "adminRemovedUserMultiple": "<b>{name}</b>님과 <b>{count} 명의 사람들</b>의 관리자 직책이 제거되었습니다",
+  "adminRemovedUserOther": "<b>{name}</b>님과 <b>{other_name}</b>님의 관리자 직책이 제거되었습니다.",
   "adminSendingPromotion": "관리자 권한 전송 중",
   "adminSettings": "Admin Settings",
   "adminTwoPromotedToAdmin": "<b>{name}님</b>과 <b>{other_name}님</b>이 관리자(Admin)로 승격되었습니다.",
@@ -66,6 +69,7 @@
   "attachmentsDownload": "첨부파일 다운로드 하기",
   "attachmentsDuration": "길이:",
   "attachmentsErrorLoad": "파일 첨부 중 오류 발생",
+  "attachmentsErrorMediaSelection": "파일 선택 실패",
   "attachmentsErrorNoApp": "미디어를 선택할 수 있는 앱이 없음",
   "attachmentsErrorNotSupported": "이 파일 형식은 지원되지 않습니다.",
   "attachmentsErrorNumber": "한 번에 32개의 이미지 및 동영상 파일을 보낼 수 없습니다.",
@@ -155,6 +159,7 @@
   "cameraGrantAccessDescription": "{app_name}은 사진과 동영상을 찍거나 QR 코드를 스캔하기 위해 카메라 접근이 필요합니다.",
   "cameraGrantAccessQr": "{app_name}에서 QR 코드를 스캔하려면 카메라 액세스 권한이 필요합니다.",
   "cancel": "취소",
+  "changePasswordFail": "비밀번호 변경 실패",
   "clear": "지우기",
   "clearAll": "모두 삭제",
   "clearDataAll": "모든 데이터 삭제",
@@ -177,6 +182,7 @@
   "clearMessagesNoteToSelfDescription": "Are you sure you want to clear all Note to Self messages from your device?",
   "close": "닫기",
   "closeWindow": "닫기",
+  "commitHashDesktop": "커밋 해시: {hash}",
   "communityEnterUrl": "커뮤니티 URL 입력하기",
   "communityEnterUrlErrorInvalid": "유효하지 않은 URL",
   "communityEnterUrlErrorInvalidDescription": "Community URL을 확인하시고 다시 시도해주세요.",
@@ -185,7 +191,6 @@
   "communityInvitation": "커뮤니티 초대",
   "communityJoin": "커뮤니티 가입",
   "communityJoinDescription": "정말 {community_name}에 가입하시겠습니까?",
-  "communityJoinError": "{community_name}에 가입하지 못했습니다.",
   "communityJoinOfficial": "또는 이 중에서 참여...",
   "communityJoined": "커뮤니티에 가입했습니다",
   "communityJoinedAlready": "이미 이 그룹에 연결되어 있습니다!",
@@ -211,6 +216,7 @@
   "conversationsAddedToHome": "홈 화면에 추가됨",
   "conversationsAudioMessages": "음성 메시지",
   "conversationsAutoplayAudioMessage": "음성 메시지 자동재생",
+  "conversationsAutoplayAudioMessageDescription": "연속된 음성 메시지 자동재생",
   "conversationsBlockedContacts": "차단된 연락처",
   "conversationsCommunities": "커뮤니티",
   "conversationsDelete": "대화 삭제",
@@ -237,6 +243,7 @@
   "create": "만들기",
   "cut": "잘라내기",
   "databaseErrorGeneric": "데이터베이스 오류가 발생했습니다.<br/><br/>문제 해결을 위해 애플리케이션 로그를 내보내서 공유하십시오. 실패할 경우, {app_name}을 다시 설치하고 계정을 복원하십시오.<br/><br/>경고: 이 작업은 2주 이상 지난 모든 메시지, 첨부 파일 및 계정 데이터의 손실을 초래할 수 있습니다.",
+  "databaseErrorTimeout": "{app_name} 이 오랜 시간동안 응답하지 않은 것으로 보입니다. <br/><br/>계속 기다리거나, 기기의 로그를 내보내 도움을 요청하거나, {app_name} 을 재시작 해보세요.",
   "databaseErrorUpdate": "{app_name}의 이 버전은 앱 데이터베이스와 호환되지 않습니다. 앱을 재설치하고 계정을 복원하여 새 데이터베이스를 생성하고 {app_name}을 계속 사용하십시오.<br/><br/>경고: 이렇게 하면 2주 이상 된 모든 메시지와 첨부 파일이 손실됩니다.",
   "databaseOptimizing": "데이터베이스 최적화",
   "debugLog": "디버그 로그",
@@ -254,6 +261,9 @@
   "deleteAfterLegacyDisappearingMessagesLegacy": "레거시",
   "deleteAfterLegacyDisappearingMessagesOriginal": "메시지 자동 삭제 원본 버전.",
   "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}님</b>이 <b>{time}</b>로 메시지 삭제 타이머를 설정했습니다.",
+  "deleteAfterLegacyGroupsGroupCreation": "그룹 생성 중...",
+  "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "그룹 업데이트 실패",
+  "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "다른 사람의 메시지를 삭제할 수 있는 권한이 없습니다",
   "deleteMessageConfirm": "정말 이 메시지를 삭제하시겠습니까?",
   "deleteMessageDeletedGlobally": "이 메시지는 삭제되었습니다.",
   "deleteMessageDeletedLocally": "이 장치에서 이 메시지가 삭제되었습니다.",
@@ -277,11 +287,14 @@
   "disappearingMessagesDeleteType": "삭제 유형",
   "disappearingMessagesDescription": "이 설정은 이 대화의 모든 사람에게 적용됩니다.",
   "disappearingMessagesDescription1": "이 설정은 이 대화에서 당신이 보낸 메시지에 적용됩니다.",
+  "disappearingMessagesDescriptionGroup": "이 설정은 이 대화의 모든 사람에게 적용됩니다.<br/>이 설정은 그룹 관리자인 경우에만 변경할 수 있습니다.",
   "disappearingMessagesDisappear": "{disappearing_messages_type} 후 - {time}에 사라집니다",
   "disappearingMessagesDisappearAfterRead": "읽은 후 사라짐",
   "disappearingMessagesDisappearAfterReadDescription": "메시지는 읽은 후 삭제됩니다.",
+  "disappearingMessagesDisappearAfterReadState": "읽은 후 사라짐 - {time}",
   "disappearingMessagesDisappearAfterSend": "보낸 후 사라짐",
   "disappearingMessagesDisappearAfterSendDescription": "메시지는 전송된 후 삭제됩니다.",
+  "disappearingMessagesDisappearAfterSendState": "보낸 후 사라짐 - {time}",
   "disappearingMessagesFollowSetting": "설정 따라가기",
   "disappearingMessagesFollowSettingOff": "보내는 메시지가 더 이상 사라지지 않습니다. 소멸 메시지를 <b>끄시겠습니까?</b>",
   "disappearingMessagesFollowSettingOn": "메시지를 <b>{disappearing_messages_type}</b> 후 <b>{time}</b> 후에 사라지도록 설정하시겠습니까?",
@@ -293,6 +306,7 @@
   "disappearingMessagesTimer": "타이머",
   "disappearingMessagesTurnedOff": "<b>{name}님</b>이 사라지는 메시지 기능을 끄셨습니다. 이제 보낸 메시지는 사라지지 않습니다.",
   "disappearingMessagesTurnedOffYou": "<b>당신</b>이 사라지는 메시지 기능을 <b>끄셨습니다</b>. 이제 보낸 메시지는 사라지지 않습니다.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>당신이</b> <b>자동 삭제</b> 메시지를 비활성화 했습니다.",
   "disappearingMessagesTypeRead": "읽음",
   "disappearingMessagesTypeSent": "보냄",
   "disappearingMessagesUpdated": "<b>{admin_name}</b>이(가) 사라지는 메시지 설정을 업데이트했습니다.",
@@ -360,15 +374,24 @@
   "groupInviteSending": "초대 전송 중",
   "groupInviteSent": "초대 전송됨",
   "groupInviteSuccessful": "그룹 초대 성공",
-  "groupInviteVersion": "사용자는 버전 {version} 이상이어야 초대를 받을 수 있습니다",
   "groupInviteYou": "<b>당신</b>이 그룹 참여 초대를 받았습니다.",
+  "groupInviteYouAndMoreNew": "<b>당신</b>과 <b>{count}명</b>이 그룹에 참여했습니다.",
+  "groupInviteYouAndOtherNew": "<b>당신</b>과 <b>{other_name}님</b>이 그룹에 참여했습니다.",
   "groupLeave": "그룹 나가기",
+  "groupLeaveDescription": "{group_name}에서 나가시겠습니까?",
   "groupLeaveErrorFailed": "{group_name}을(를) 떠날 수 없습니다.",
   "groupLegacyBanner": "그룹이 업그레이드되었습니다. 새 그룹을 생성하여 업그레이드하세요. 오래된 그룹 기능은 {date} 이후로 저하될 것입니다.",
   "groupMemberLeft": "<b>{name}님</b>이 그룹을 나갔습니다.",
   "groupMemberLeftMultiple": "<b>{name}님</b>과 <b>{count}명</b>이 그룹을 나갔습니다.",
   "groupMemberLeftTwo": "<b>{name}님</b>과 <b>{other_name}님</b>이 그룹을 나갔습니다.",
   "groupMemberNew": "<b>{name}님</b>이 그룹에 참여했습니다.",
+  "groupMemberNewHistory": "<b>{name}</b>님이 그룹에 초대되었습니다. 채팅 기록이 공유되었습니다.",
+  "groupMemberNewHistoryMultiple": "<b>{name}님</b>과 <b>{count}명</b>이 그룹에 초대되었습니다. 채팅 기록이 공유되었습니다.",
+  "groupMemberNewHistoryTwo": "<b>{name}님</b>과 <b>{other_name}님</b>이 그룹에 초대되었습니다. 채팅 기록이 공유되었습니다.",
+  "groupMemberNewMultiple": "<b>{name}님</b>과 <b>{count}명</b>이 그룹에 초대되었습니다.",
+  "groupMemberNewTwo": "<b>{name}님</b>과 <b>{other_name}</b>님이 그룹 초대를 받았습니다.",
+  "groupMemberNewYouHistoryMultiple": "<b>당신</b>과 <b>{count} 명의 사람들이</b> 그룹으로 초대받았습니다. 대화 내역이 공개됩니다.",
+  "groupMemberNewYouHistoryTwo": "<b>당신</b>과 <b>{name}</b>이 그룹에 초대받았습니다. 대화 내역이 공개됩니다.",
   "groupMemberYouLeft": "<b>당신</b>이 그룹을 나갔습니다.",
   "groupMembers": "그룹 멤버",
   "groupMembersNone": "이 그룹에 다른 멤버가 없습니다.",
@@ -381,6 +404,8 @@
   "groupNoMessages": "<b>{group_name}</b>님으로부터 받은 메시지가 없습니다.대화를 시작하려면 메시지를 보내세요!",
   "groupOnlyAdmin": "당신은 <b>{group_name}</b>의 유일한 관리자입니다.<br/><br/>관리자가 없으면 그룹 구성원 및 설정을 변경할 수 없습니다.",
   "groupPromotedYou": "<b>당신</b>이 관리자(Admin)로 승격되었습니다.",
+  "groupPromotedYouMultiple": "<b>당신</b>과 <b>{count}명</b>이 관리자(Admin)로 승격되었습니다.",
+  "groupPromotedYouTwo": "<b>당신</b>과 <b>{name}</b>님이 관리자(Admin)로 승격되었습니다.",
   "groupRemoveDescription": "<b>{group_name}</b>에서 <b>{name}</b>님을 제거하시겠습니까?",
   "groupRemoveDescriptionMultiple": "<b>{group_name}</b>에서 <b>{name}</b>님과 <b>{count}명</b>을 제거하시겠습니까?",
   "groupRemoveDescriptionTwo": "<b>{group_name}</b>에서 <b>{name}</b>님과 <b>{other_name}</b>님을 제거하시겠습니까?",
@@ -388,10 +413,13 @@
   "groupRemovedMultiple": "<b>{name}님</b>과 <b>{count}명</b>이 그룹에서 제거되었습니다.",
   "groupRemovedTwo": "<b>{name}님</b>과 <b>{other_name}님</b>이 그룹에서 제거되었습니다.",
   "groupRemovedYou": "<b>{group_name}</b>에서 제거되었습니다.",
+  "groupRemovedYouMultiple": "<b>당신</b>과 <b>{count} 명의 사람들</b>이 그룹에서 제거되었습니다.",
+  "groupRemovedYouTwo": "<b>당신</b>과 <b>{other_name}</b>님이 그룹에서 제거되었습니다.",
   "groupSetDisplayPicture": "그룹 프로필 사진 설정",
   "groupUnknown": "알 수 없는 그룹",
   "groupUpdated": "그룹 정보가 업데이트되었습니다.",
   "helpFAQ": "자주 묻는 질문",
+  "helpHelpUsTranslateSession": "{app_name} 번역 돕기",
   "helpReportABug": "버그 제보",
   "helpReportABugDescription": "문제를 해결하는 데 도움이 될 수 있도록 몇 가지 세부 정보를 공유해 주세요. 로그를 내보낸 다음 {app_name}의 도움말 센터에 파일을 업로드하세요.",
   "helpReportABugExportLogs": "로그 내보내기",
@@ -401,6 +429,7 @@
   "helpSupport": "지원",
   "helpWedLoveYourFeedback": "여러분의 의견을 기다리고 있습니다",
   "hide": "숨기기",
+  "hideMenuBarDescription": "시스템 메뉴 바를 끄거나 켜기",
   "hideOthers": "나머지 숨기기",
   "image": "이미지",
   "incognitoKeyboard": "사생활 키보드",
@@ -413,7 +442,10 @@
   "leave": "나가기",
   "leaving": "떠나는 중...",
   "legacyGroupMemberNewMultiple": "<b>{name}님</b>님과 <b>{count}명</b>이 그룹에 참여했습니다.",
+  "legacyGroupMemberNewYouMultiple": "<b>당신</b>님과 <b>{count}명</b>이 그룹에 참여했습니다.",
+  "legacyGroupMemberNewYouOther": "<b>당신</b>과 <b>{other_name}</b>님이 그룹에 참여했습니다.",
   "legacyGroupMemberTwoNew": "<b>{name}님</b>과 <b>{other_name}님</b>이 그룹에 참여했습니다.",
+  "legacyGroupMemberYouNew": "<b>당신</b>이 그룹에 참여했습니다.",
   "linkPreviews": "링크 미리보기",
   "linkPreviewsDescription": "지원되는 URL에 대한 링크 미리보기를 표시합니다.",
   "linkPreviewsEnable": "링크 미리보기를 사용하시겠습니까",
@@ -428,9 +460,11 @@
   "loadAccountProgressMessage": "계정 불러오는 중",
   "loading": "불러오는 중...",
   "lockApp": "앱 잠금",
+  "lockAppDescription": "{app_name} 을 열때마다 지문, PIN, 패턴 또는 비밀번호를 요구합니다",
   "lockAppDescriptionIos": "{app_name} 잠금 해제를 위해 Touch ID, Face ID 또는 비밀번호가 필요합니다.",
   "lockAppEnablePasscode": "화면 잠금을 사용하기 위해 iOS 설정에서 암호를 활성화해야 합니다.",
   "lockAppLocked": "{app_name}가 잠겼습니다",
+  "lockAppQuickResponse": "{app_name} 이 잠겨 있어 빠른 답변을 사용할 수 없습니다",
   "lockAppStatus": "잠금 상태",
   "lockAppUnlock": "탭하여 잠금 해제",
   "lockAppUnlocked": "{app_name}의 잠금을 해제했습니다",
@@ -450,6 +484,7 @@
   "messageEmpty": "이 메시지는 비어 있습니다.",
   "messageErrorDelivery": "메시지 전송 실패",
   "messageErrorLimit": "글자 수 제한을 초과했습니다.",
+  "messageErrorOld": "지원하지 않는 {app_name} 버전의 암호화된 메시지를 받았습니다. 상대방에게 최신 버전으로 업데이트 하고 다시 보내기를 요청해 주세요.",
   "messageErrorOriginal": "원본 메시지를 찾을 수 없음",
   "messageInfo": "메시지 정보",
   "messageMarkRead": "읽음으로 표시",
@@ -503,6 +538,8 @@
   "notificationsFastModeDescription": "Google의 알림 서버를 사용하여 새 메시지를 확실하고 즉각적으로 알려드립니다.",
   "notificationsFastModeDescriptionIos": "Apple의 알림 서버를 사용하여 새 메시지를 확실하고 즉각적으로 알려드립니다.",
   "notificationsGoToDevice": "기기 알림 설정으로 이동",
+  "notificationsHeaderAllMessages": "알림 - 전체",
+  "notificationsHeaderMentionsOnly": "알림 - 멘션만",
   "notificationsIosGroup": "{name}이(가) {conversation_name}에 보냈습니다",
   "notificationsIosRestart": "{device}가 재시동되는 동안 메시지를 수신했을 수 있습니다.",
   "notificationsLedColor": "알림등 색상",
@@ -524,9 +561,12 @@
   "notificationsVibrate": "진동",
   "off": "사용 안함",
   "okay": "확인",
+  "on": "사용",
   "onboardingAccountCreate": "계정 생성",
   "onboardingAccountCreated": "계정 생성됨",
   "onboardingAccountExists": "계정이 있습니다",
+  "onboardingBackAccountCreation": "더 이상 돌아갈 수 없습니다. 계정 생성을 취소하려면 {app_name} 을 종료해야 합니다.",
+  "onboardingBackLoadAccount": "더 이상 돌아갈 수 없습니다. 계정을 불러오기를 중단하려면 {app_name} 을 종료해야 합니다.",
   "onboardingBubbleNoPhoneNumber": "가입할 때 전화번호가 필요하지 않습니다.",
   "onboardingBubblePrivacyInYourPocket": "당신의 주머니 속 개인정보 보호.",
   "onboardingBubbleSessionIsEngineered": "{app_name}는 개인 정보를 보호하기 위해 설계되었습니다.",
@@ -562,9 +602,11 @@
   "passwordSet": "비밀번호 설정",
   "passwordSetDescription": "비밀번호 설정이 완료되었습니다. 안전히 관리하시기 바랍니다.",
   "paste": "붙여넣기",
+  "permissionMusicAudioDenied": "{app_name}은(는) 파일, 음악 및 오디오를 전송하기 위해 음악 및 오디오 접근이 필요하지만, 접근이 영구적으로 거부되었습니다. 설정 -> 권한으로 이동하여 \"음악 및 오디오\"를 켜십시오.",
   "permissionsAppleMusic": "{app_name}은 미디어 첨부 파일을 재생하기 위해 Apple Music을 사용해야 합니다.",
   "permissionsAutoUpdate": "자동 업데이트",
   "permissionsAutoUpdateDescription": "시작 시 자동으로 업데이트를 확인",
+  "permissionsCameraDenied": "{app_name}은 사진과 동영상을 찍기 위해 카메라 접근이 필요하지만 영구적으로 거부되었습니다. 설정 - 권한을 누르고 '카메라'를 켜십시오.",
   "permissionsFaceId": "{app_name}의 화면 잠금 기능은 Face ID를 사용합니다.",
   "permissionsKeepInSystemTray": "트레이 아이콘 유지",
   "permissionsKeepInSystemTrayDescription": "{app_name} 창을 닫아도 백그라운드에서 실행됩니다.",
@@ -572,6 +614,7 @@
   "permissionsMicrophone": "마이크",
   "permissionsMicrophoneAccessRequiredDesktop": "{app_name}의 프라이버시 설정에서 마이크 접근을 허용할 수 있습니다",
   "permissionsMicrophoneAccessRequiredIos": "{app_name}은 통화를 하고 음성 메시지를 녹음하기 위해 마이크 접근이 필요합니다.",
+  "permissionsMusicAudio": "{app_name}는 파일, 음악 및 오디오를 전송하려면 음악 및 오디오 접근이 필요합니다.",
   "permissionsRequired": "권한 필요",
   "permissionsStorageSave": "{app_name}은 첨부 파일과 미디어를 저장하기 위해 저장 공간 접근이 필요합니다.",
   "permissionsStorageSaveDenied": "{app_name}은 사진과 동영상을 저장하기 위해 저장 공간 접근이 필요하지만 영구적으로 거부되었습니다. 앱 설정에서 \"권한\"을 선택하고, \"저장 공간\" 권한을 활성화하세요.",
@@ -605,6 +648,7 @@
   "recoveryPasswordBannerTitle": "회복 비밀번호 저장",
   "recoveryPasswordDescription": "새 장치에서 계정을 로드하려면 복구 비밀번호를 사용하십시오.<br/><br/>복구 비밀번호 없이는 계정을 복구할 수 없습니다. 안전하게 보관하고 타인과 공유하지 않도록 주의하세요.",
   "recoveryPasswordEnter": "복구 비밀번호 입력",
+  "recoveryPasswordErrorLoad": "2차 비밀번호을 불러오는 도중 오류가 발생했습니다.<br/><br/>이 문제를 해결하려면 Session의 헬프 데스크로 로그 파일을 보내주시기 바랍니다.",
   "recoveryPasswordErrorMessageGeneric": "복구 비밀번호를 확인하시고 다시 시도해주세요.",
   "recoveryPasswordErrorMessageIncorrect": "복구 암호의 일부 단어가 잘못되었습니다. 확인하고 다시 시도해 주세요.",
   "recoveryPasswordErrorMessageShort": "입력한 복구 비밀번호가 충분하지 않습니다. 확인 후 다시 시도해주세요.",
@@ -619,6 +663,7 @@
   "recoveryPasswordWarningSendDescription": "이것은 당신의 복구 비밀번호입니다. 다른 사람에게 보내면 그들이 당신의 계정에 완전히 접근할 수 있게 됩니다.",
   "redo": "다시 실행",
   "remove": "삭제",
+  "removePasswordFail": "비밀번호를 제거하지 못했습니다",
   "reply": "답장",
   "resend": "재전송",
   "resolving": "국가 로드 중...",
@@ -638,6 +683,7 @@
   "searchContacts": "연락처 검색",
   "searchConversation": "대화 검색",
   "searchEnter": "검색할 내용을 입력하십시오.",
+  "searchMatches": "{count, plural, other [#개 중 {found_count}개 결과]}",
   "searchMatchesNone": "검색 결과가 없습니다.",
   "searchMatchesNoneSpecific": "'{query}'에 대한 검색결과가 없음",
   "searchMembers": "멤버 검색",
@@ -661,6 +707,7 @@
   "set": "설정",
   "settingsRestartDescription": "새 설정을 적용하려면 {app_name}을 재시작해야 합니다.",
   "share": "공유",
+  "shareAccountIdDescription": "친구에게 계정 ID를 공유하고 {app_name} 에서 친구들과 대화하세요.",
   "shareAccountIdDescriptionCopied": "친구들이 자주 사용하는 곳에서 공유해 주세요 — 그러면 여기로 대화를 이동하십시오.",
   "shareExtensionDatabaseError": "데이터베이스를 열 때 문제가 발생했습니다. 앱을 재시작하고 다시 시도해주세요.",
   "show": "보기",
@@ -668,6 +715,7 @@
   "showLess": "간략히 보기",
   "stickers": "스티커",
   "supportGoTo": "지원 페이지로 이동",
+  "systemInformationDesktop": "시스템 정보: {information}",
   "theContinue": "계속",
   "theDefault": "기본값",
   "theError": "에러",
